all - not unused - message tags have been renamed. Another harmonisation run is still required.
GeoHash: http://maps.google.com/maps?q=MyCodingMap@51.91084,4.478968

--- a/portal/src/main/resources/i18n/messages_bg.properties
+++ b/portal/src/main/resources/i18n/messages_bg.properties
@@ -1,88 +1,3 @@
-All_t=Всички
-AltHome_t=Щракни тук, за да се върнеш на началната страница на Europeana
-AltLogoEuropeana_t=лого Europeana "С мисъл за културата"
-CheckTheFaqs_t=Провери често задаваните въпроси - може те да съдържат това, за което се отнася обратната връзка
-ChooseLanguage_t=Избери език
-Communities_t=Общности
-Contacts_t=Контакти
-ContributorExplain_t=Това са организациите, които са допринесли със съдържание - дигитализирани картини, книги, предавания и т.н. Някои от тези организации са "събирачи" (агрегатори), като най-голяма сред тях е Culture.fr, която предоставя данни за дигитални обекти от 480 организации във Франция, вкл. Лувъра и Музея д'Орсе. Броят на организациите, чиито обекти са обединени от агрегатора, са показани в скоби след името му, напр. Videoactive (10).
-Contributor_t=Доставчик
-Contributors_t=Доставчици
-Country_t=Страна
-CreateAccount_t=Създай свой потребителски адрес
-Description_t=Описание
-EmailAlreadyRegistered_t=Този e-mail е регистриран вече
-EmailClickToConfirm_t=Моля щракнете върху връзката, за да потвърдите регистрацията си
-EmailEuropeanaTeam_t=Екипът на Europeana
-EmailFormatError_t=Увери се, че е-mail-ът е правилно записан и опитай наново
-EmailSendFailed_t=Е-mail-ът не може да бъде изпратен
-EmailSent_t=Е-mail-ът е изпратен
-EmailUse_t=Ще използвате e-mail-а си и паролата си за влизане
-EmailWelcome_t=Добре дошли в My Personal Page
-EnewsOptin_t=Информирайте ме за развитието на Europeana.
-EnterValidEmail_t=Моля въведете валиден е-mail адрес
-EnterYourEmail_t=Въведете e-mail-а си
-ErrorDetails_t=Подробности за грешката
-Error_t=Грешка
-FYROM_t=Република Македония
-FeatureDisabled_t=Тази възможност в момента не може да се използва
-FeedbackResponse_t=Благодарим ви за обратната връзка. Ако тя изисква отговор, ще го получите възможно най-скоро от специалист от екипа на Europeana. Ако използвате английски език, ще получите отговор по-бързо.
-FindOutMore_t=Разбери повече
-FinishRegistration_t=Приключване на регистрацията
-FirstName_t=Лично име
-ForgotPassword_t=Забравих паролата си
-FromOurParnters_t=От нашите партниращи музеи, архиви, библиотеки и аудиовизуални колекции
-FundedBy_t=съфинансирана от Европейския Съюз
-HideAdvancedSearch_t=Скрий разширеното търсене
-IAgree_t=Съгласен съм
-Image_t=Изображение
-Images_t=Изображения
-InvalidQuery_t=Невалидна заявка
-ItemDetails_t=Детайли за обектите
-ItemSaveFailed_t=Обектът не можа да бъде запазен
-ItemSaved_t=Обектът е запазен
-Items_t=Обекти
-LanguagePolicy_t=Езикова политика
-Less_t=По-малко
-LinkExpired_t=Връзката, която сте ползвали за завършване на регистрацията е невалидна или е изтекла.
-LogIn_t=Влизане
-LogOut_t=Излизане
-LoggedInAs_t=Влезнал като
-MatchesFor_t=Съвпадения за
-More_t=Повече
-MyCodeOfConductRequired_t=Трябва да се съгласите с нашите правила, за да се регистрирате в My Personal Page.
-MyCodeOfConduct_t=Разбирам, че My Personal Page ми позволява да създавам тагове за всеки обект, за който пожелая. Съгласен съм да не създавам тагове, които могат да се възприемат като обидни, заплашителни, незаконни, унизителни, зловредни, с елементи на насилие, подбудителни, враждебни, порнографски, отблъскващи, измамнически, нарушаващи личните или обществените права, изпълнени с омраза или такива, които предизвикват възражение на расова, етническа или друга основа. Като щраквам върху тази кутийка се съгласявам да спазвам това споразумение и разбирам, че ако не го спазвам, моето членство в My Personal Page ще бъде прекратено.
-NewContent_t=Ново съдържание
-Next_t=Следващо
-NoItemsFound_t=Няма намерени обекти
-NoSavedItems_t=Няма запазени обекти
-NoSavedSearches_t=Няма запазени търсения
-NoSavedTags_t=Няма запазени тагове
-NoScript_t=За да използвате този уебсайт по оптимален начин, трябва да e активиран JavaScript
-Of_t=от
-OpensInNewWindow_t=Отваря се в нов прозорец
-Page_t=Страница
-PartnerExplain_t=Това е мрежа от партньори, които си сътрудничат, за да се създаде Europeana и които представляват Europeana в своите страни и професионални сдружения.
-Partner_t=Партньор
-Partners_t=Партньори
-Password_t=Парола
-PeopleAreCurrentlyThinkingAbout_t=В този момент хората мислят за...
-RegisterAgain_t=Регистрирай се наново
-RequiredField_t=Това е задължително поле
-Reset_t=Рестартиране
-Results_t=Резултати
-Sector_t=Сектор
-Sounds_t=Звукови файлове
-StrorylineCredits_t=История и кредити
-Texts_t=Текстове
-ThisIsEuropeana_t=Това е Europeana
-ThoughtLab_t=Лаборатория на премисленото
-TimelineNavigator_t=Навигатор на времевата линия
-Timeline_t=Времева линия
-UserConductAgree_t=Разбирам, че My Personal Page ми дава възможност да създавам тагове за всеки обект, за който пожелая. Съгласен съм да не създавам тагове, които могат да се възприемат като обидни, заплашителни, незаконни, унизителни, зловредни, с елементи на насилие, подбудителни, враждебни, порнографски, отблъскващи, измамнически, нарушаващи личните или обществените права, изпълнени с омраза или такива, които предизвикват възражение на расова, етническа или друга основа. Като щраквам върху тази кутийка се съгласявам да спазвам това споразумение и разбирам, че ако не го спазвам, моето членство в My Personal Page ще бъде прекратено. ЩРАКНИ ЗА СЪГЛАСИЕ
-UserConduct_t=Ръководство за потребителя
-Video_t=Видео
-ViewingRelatedItems_t=Виждате подобни обекти
 _action.add.annotation=null
 _action.add.tag=Добави таг
 _action.advanced.search=Разширено търсене
@@ -103,9 +18,7 @@ _action.send=Изпрати
 _action.share.with.friend=Сподели с приятел
 _action.videos=Видео
 _action.view.in.original.context=Виж в оригиналния контекст
-_boolean.and=и
-_boolean.not=не
-_boolean.or=или
+_actionOpenInNewWindow=Отваря се в нов прозорец
 _facet.by.collection=null
 _facet.by.country=По страна
 _facet.by.date=По дата
@@ -117,6 +30,7 @@ _facet.by.year=null
 _failure.search.saved=Търсенето не можа да се запише
 _header.actions=Действия
 _header.relatedcontent=Подобно съдържание
+_inc_result_table_full.description=Описание
 _language_select.italian=Италиански
 _locale.AL=Албания
 _locale.AM=Армения
@@ -186,6 +100,10 @@ _locale.sk=Словашки
 _locale.sl=Словенски
 _locale.sr=Сръбски
 _locale.sv=Шведски
+_menu.i18n.chooselanguage=Избери език
+_messages.error.emailformaterror=Увери се, че е-mail-ът е правилно записан и опитай наново
+_messages.error.emailsendfailed=Е-mail-ът не може да бъде изпратен
+_messages.notification.emailsent=Е-mail-ът е изпратен
 _metadata.dc.contributor=Участник
 _metadata.dc.coverage=Обсег
 _metadata.dc.creator=Автор
@@ -215,18 +133,61 @@ _metadata.dcterms.replaces=Замести
 _metadata.dcterms.requires=Изисква
 _metadata.dcterms.spatial=Пространствен обхват
 _metadata.dcterms.temporal=Преходен обхват
+_metadata.searchfield.contributor=Доставчик
+_metadata.type.all=Всички
+_metadata.type.images=Изображения
+_metadata.type.sounds=Звукови файлове
+_metadata.type.texts=Текстове
+_metadata.type.video=Видео
 _mine.date.saved=Датата е запазена
 _mine.delete=Изтрий
+_mine.email.address=Е-mail адрес
+_mine.firstname=Лично име
+_mine.forgotpassword=Забравих паролата си
+_mine.itemsaved=Обектът е запазен
+_mine.itemsavefailed=Обектът не можа да бъде запазен
 _mine.last.name=Фамилия
+_mine.loggedinas=Влезнал като
+_mine.login=Влизане
+_mine.logout=Излизане
+_mine.nosaveditems=Няма запазени обекти
+_mine.nosavedsearches=Няма запазени търсения
+_mine.nosavedtags=Няма запазени тагове
 _mine.saved.items=Запазени обекти
 _mine.saved.searches=Запазени търсения
 _mine.saved.tags=Запазени тагове
 _mine.user.information=Данни за потребителя
+_mine.user.registration.notification.succeed=Регистрирахте се успешно
 _mine.username=Потребителско име
-_option.any.field=което и да е
-_prompt.email.address=Е-mail адрес
-_prompt.provider=Провайдер
+_portal.menu.languagedropdownlist=Език
+_portal.ui.message.less=По-малко
+_portal.ui.message.more=Повече
+_portal.ui.message.noscript=За да използвате този уебсайт по оптимален начин, трябва да e активиран JavaScript
+_portal.ui.message.success.search.saved=Търсенето е запазено
+_portal.ui.message.usertags=Потребителски тагове
+_portal.ui.messages.items=Обекти
+_portal.ui.navigation.matchesfor=Съвпадения за
+_portal.ui.navigation.next=Следващо
+_portal.ui.navigation.of=от
+_portal.ui.navigation.page=Страница
+_portal.ui.notification.error=Грешка
+_portal.ui.notification.noitemsfound=Няма намерени обекти
+_portal.ui.reset.searchbox=Рестартиране
+_portal.ui.results=Резултати
+_portal.ui.viewingrelateditems=Виждате подобни обекти
+_register-request.emailalreadyregistered=Този e-mail е регистриран вече
 _register.email.has.been.sent=Изпратен е e-mail на следния адрес
+_register.emailclicktoconfirm=Моля щракнете върху връзката, за да потвърдите регистрацията си
+_register.emailuse=Ще използвате e-mail-а си и паролата си за влизане
+_register.entervalidemail=Моля въведете валиден е-mail адрес
+_register.enteryouremail=Въведете e-mail-а си
+_register.errordetails=Подробности за грешката
+_register.finishregistration=Приключване на регистрацията
+_register.iagree=Съгласен съм
+_register.linkexpired=Връзката, която сте ползвали за завършване на регистрацията е невалидна или е изтекла.
+_register.mycodeofconduct=Разбирам, че My Personal Page ми позволява да създавам тагове за всеки обект, за който пожелая. Съгласен съм да не създавам тагове, които могат да се възприемат като обидни, заплашителни, незаконни, унизителни, зловредни, с елементи на насилие, подбудителни, враждебни, порнографски, отблъскващи, измамнически, нарушаващи личните или обществените права, изпълнени с омраза или такива, които предизвикват възражение на расова, етническа или друга основа. Като щраквам върху тази кутийка се съгласявам да спазвам това споразумение и разбирам, че ако не го спазвам, моето членство в My Personal Page ще бъде прекратено.
+_register.mycodeofconductrequired=Трябва да се съгласите с нашите правила, за да се регистрирате в My Personal Page.
+_register.password=Парола
 _register.password.choose=Изберете парола
 _register.password.explain=Паролата трябва е между 6 и 30 символа дълга
 _register.pick.user.name=Когато сте влезнали, се вижда потребителското ви име
@@ -234,13 +195,25 @@ _register.please.follow.link=Моля щракни на връзката, дад
 _register.register=Регистрирай се
 _register.registration.failed=Възникнала е грешка в процеса на регистрация. Моля опитайте отново
 _register.repeat.password=Повторете паролата
+_register.requiredfield=Това е задължително поле
 _register.username.choose=Изберете потребителско име
 _register.username.explain=Когато сте влезнали, се вижда потребителското ви име
+_search.boolean.and=и
+_search.boolean.not=не
+_search.boolean.or=или
+_search.field.any.field=което и да е
 _search.field.creator=Създател
 _search.field.date=Дата
-_search.option.subject=Тема
-_search.option.title=Заглавие
-_success.search.saved=Търсенето е запазено
+_search.field.provider=Провайдер
+_search.field.subject=Тема
+_search.field.title=Заглавие
+_toberemoved.althome=Щракни тук, за да се върнеш на началната страница на Europeana
+_toberemoved.altlogoeuropeana=лого Europeana "С мисъл за културата"
+_toberemoved.checkthefaqs=Провери често задаваните въпроси - може те да съдържат това, за което се отнася обратната връзка
+_toberemoved.communities=Общности
+_toberemoved.contributorexplain=Това са организациите, които са допринесли със съдържание - дигитализирани картини, книги, предавания и т.н. Някои от тези организации са "събирачи" (агрегатори), като най-голяма сред тях е Culture.fr, която предоставя данни за дигитални обекти от 480 организации във Франция, вкл. Лувъра и Музея д'Орсе. Броят на организациите, чиито обекти са обединени от агрегатора, са показани в скоби след името му, напр. Videoactive (10).
+_toberemoved.emaileuropeanateam=Екипът на Europeana
+_toberemoved.using.europeana=Използване на Europeana
 _unused.about.us=За нас
 _unused.accessibility=Достъпност
 _unused.add=Добави
@@ -249,10 +222,34 @@ _unused.altprint=Отпечатай страницата
 _unused.aplacetoshareideas=място за вдъхновение и идеи. Търси в културните сбирки на Европа, свързвай се с други потребителски пътечки и споделяй своите открития.
 _unused.bosnia.and.herzegovina=Босна и Херцеговина
 _unused.browse.through.time=Търси във времето
+_unused.contacts=Контакти
+_unused.contributors=Доставчици
+_unused.country=Страна
+_unused.createaccount=Създай свой потребителски адрес
+_unused.emailwelcome=Добре дошли в My Personal Page
+_unused.enewsoptin=Информирайте ме за развитието на Europeana.
+_unused.featuredisabled=Тази възможност в момента не може да се използва
+_unused.feedbackresponse=Благодарим ви за обратната връзка. Ако тя изисква отговор, ще го получите възможно най-скоро от специалист от екипа на Europeana. Ако използвате английски език, ще получите отговор по-бързо.
+_unused.findoutmore=Разбери повече
+_unused.fromourparnters=От нашите партниращи музеи, архиви, библиотеки и аудиовизуални колекции
+_unused.fundedby=съфинансирана от Европейския Съюз
+_unused.fyrom=Република Македония
+_unused.hideadvancedsearch=Скрий разширеното търсене
+_unused.image=Изображение
+_unused.invalidquery=Невалидна заявка
+_unused.itemdetails=Детайли за обектите
+_unused.languagepolicy=Езикова политика
+_unused.newcontent=Ново съдържание
 _unused.other=Друг
+_unused.partner=Партньор
+_unused.partnerexplain=Това е мрежа от партньори, които си сътрудничат, за да се създаде Europeana и които представляват Europeana в своите страни и професионални сдружения.
+_unused.partners=Партньори
+_unused.peoplearecurrentlythinkingabout=В този момент хората мислят за...
 _unused.privacy=Защита на личното пространство
+_unused.registeragain=Регистрирай се наново
 _unused.remember.me=Запомни ме на този компютър
 _unused.remove=Изтрий
+_unused.sector=Сектор
 _unused.send.feedback=Изпрати ни обратна връзка
 _unused.share.your.ideas=Сподели идеите си
 _unused.show.all=Покажи всички
@@ -260,17 +257,20 @@ _unused.sign.in=Впиши се
 _unused.site.map=Карта на сайта
 _unused.slovenia=Словения
 _unused.sound=Звуков файл
+_unused.strorylinecredits=История и кредити
 _unused.tag.added=Тагът е добавен
 _unused.tag.addition.failed=Добавянето на тага пропадна
 _unused.tagging=Тагиране
 _unused.terms.and.conditions=Условия за ползване
 _unused.text=Текстове
-_unused.username.in.use=е в употреба. Моля изберете друго потребителско име
-_unused.usertags=Потребителски тагове
-_unused.using.europeana=Използване на Europeana
-_unused.view.as.xml=Виж във вид на XML
-_unused.view.with.labels=Виж с етикетите
-_unused.view.without.labels=Виж без етикетите
-_unused.you.have.search.for=Вие търсехте...
-languageDropDownList_t=Език
-registrationSucceed_t=Регистрирахте се успешно
+_unused.thisiseuropeana=Това е Europeana
+_unused.thoughtlab=Лаборатория на премисленото
+_unused.timeline=Времева линия
+_unused.timelinenavigator=Навигатор на времевата линия
+_unused.userconduct=Ръководство за потребителя
+_unused.userconductagree=Разбирам, че My Personal Page ми дава възможност да създавам тагове за всеки обект, за който пожелая. Съгласен съм да не създавам тагове, които могат да се възприемат като обидни, заплашителни, незаконни, унизителни, зловредни, с елементи на насилие, подбудителни, враждебни, порнографски, отблъскващи, измамнически, нарушаващи личните или обществените права, изпълнени с омраза или такива, които предизвикват възражение на расова, етническа или друга основа. Като щраквам върху тази кутийка се съгласявам да спазвам това споразумение и разбирам, че ако не го спазвам, моето членство в My Personal Page ще бъде прекратено. ЩРАКНИ ЗА СЪГЛАСИЕ
+_unused_portal.ui.message.view.as.xml=Виж във вид на XML
+_unused_portal.ui.message.view.with.labels=Виж с етикетите
+_unused_portal.ui.message.view.without.labels=Виж без етикетите
+_unused_portal.ui.message.you.have.search.for=Вие търсехте...
+_unused_validation.username.in.use=е в употреба. Моля изберете друго потребителско име
