--- a/portal/src/main/resources/i18n/messages_cs.properties
+++ b/portal/src/main/resources/i18n/messages_cs.properties
@@ -1,88 +1,3 @@
-All_t=Vše
-AltHome_t=Vrať se na domovskou stránku
-AltLogoEuropeana_t=logo Euroepana think culture
-CheckTheFaqs_t=Prohlédněte si Nejčastější dotazy, možná najdete odpověď na vaši otázku
-ChooseLanguage_t=Zvol jazyk
-Communities_t=Komunity
-Contacts_t=Kontakty
-ContributorExplain_t=Organizace dodávající obsah - digitalizované malby, knihy, audio, video atd. Někteří z těchto přispěvatelů jsou agregátoři, největšícm z nich je Culture.fr, který poskytuje obsah cca 480 organizací ve Francii včetně Louvru a Musée d´Orsay. Počet organizací přispívajících jednotlivému agregátoru je udán v závorkách za jménem agregátora, např. Videoactive (10)
-Contributor_t=Přispěvatel
-Contributors_t=Přispěvatelé
-Country_t=Země
-CreateAccount_t=Vytvoř účet
-Description_t=Popis
-EmailAlreadyRegistered_t=Tato e-mailová adresa je již zaregistrována
-EmailClickToConfirm_t=Kliknutím na následující link potvrďte svou registraci
-EmailEuropeanaTeam_t=Tým European
-EmailFormatError_t=Ujisti se, že je tvůj e-mail správně zformátován a zkus to znovu
-EmailSendFailed_t=E-mail nemohl být odeslán
-EmailSent_t=E-mail byl odeslán
-EmailUse_t=K přihlášení na tuto stránku použij svou e-mailovou adresu a heslo
-EmailWelcome_t=Vítej v Mých Europeanech
-EnewsOptin_t=Informujte mě o novinkách týkajících se Euroepan
-EnterValidEmail_t=Vložte platnou e-mailovou adresu, prosím
-EnterYourEmail_t=Vlož svou e-mailovou adresu
-ErrorDetails_t=Údaje o chybě
-Error_t=Chyba
-FYROM_t=Bývalá jugoslávská republika Makedonie
-FeatureDisabled_t=Operace není nyní možná
-FeedbackResponse_t=Děkujeme za váš ohlas. Jestliže jde o otázku, kterou může zodpovědět člen týmu European, obrátí se na vás co nejdříve. Aby odpověď byla rychlejší, posílejte sdělení anglicky, prosím.
-FindOutMore_t=Najdi více
-FinishRegistration_t=Dokonči registraci
-FirstName_t=Jméno
-ForgotPassword_t=Zapomněl jsem své heslo
-FromOurParnters_t=Z muzeí, archivů, knihoven a audiovizuálních sbírek našich partnerů
-FundedBy_t=spolufinancováno Evropskou unií
-HideAdvancedSearch_t=Skryj Pokročilé vyhledávání
-IAgree_t=Souhlasím
-Image_t=Obraz
-Images_t=Obrazy
-InvalidQuery_t=Neplatný dotaz
-ItemDetails_t=Údaje o položce
-ItemSaveFailed_t=Chyba při ukládání položky
-ItemSaved_t=Položka byla uložena
-Items_t=Položky
-LanguagePolicy_t=Jazyková politika
-Less_t=Méně
-LinkExpired_t=Odkaz, který jsi použil/a k dokončení registrace je neplatný nebo mu vypršela platnost
-LogIn_t=Přihlaš se
-LogOut_t=Odhlaš se
-LoggedInAs_t=Přihlášený jako
-MatchesFor_t=Matches for
-More_t=Více
-MyCodeOfConductRequired_t=You must agree to our code of conduct to register for portal membership
-MyCodeOfConduct_t=I understand that the Delving portal gives me the opportunity to create tags for any item I wish. I agree that I will not create any tags that could be considered libelous, harmful, threatening, unlawful, defamatory, infringing, abusive, inflammatory, harassing, pornographic, obscene, fraudulent, invasive of privacy or publicity rights, hateful, or racially, ethnically or otherwise objectionable. By clicking this box I agree to abide by this agreement, and understand that if I don't my login on the portal will be terminated.
-NewContent_t=Nový obsah
-Next_t=Následující
-NoItemsFound_t=Nic nenalezeno
-NoSavedItems_t=Žádné uložené položky
-NoSavedSearches_t=Žádná uložená vyhledávání
-NoSavedTags_t=Žádné uložené tagy
-NoScript_t=Pro optimální práci s touto webovou stránkou musíte aktivovat JavaScript
-Of_t=Z
-OpensInNewWindow_t=Otevře se v novém okně
-Page_t=Strana
-PartnerExplain_t=Síť partnerů spolupracujících na Europeanách a reprezentujícíh Euroepana ve svých zemích a profesionálních sdruženích
-Partner_t=Partner
-Partners_t=Partneři
-Password_t=Heslo
-PeopleAreCurrentlyThinkingAbout_t=Právě se přemýšlí o
-RegisterAgain_t=Znovu se zaregistrovat
-RequiredField_t=Povinné pole
-Reset_t=Vymaž
-Results_t=Výsledky
-Sector_t=Sector
-Sounds_t=Zvukový materiál
-StrorylineCredits_t=Storyline and credits
-Texts_t=Texty
-ThisIsEuropeana_t=Europeana
-ThoughtLab_t=Experimentální dílny
-TimelineNavigator_t=Navigátor po časové ose
-Timeline_t=Časová osa
-UserConductAgree_t=Jsem srozuměn s tím, že Moje Europeany mi dávají možnost vytvořit označení pro kteroukoli položku. Souhlasím, že nevytvořím žádné označení, které by mohlo být považováno za nactiutrhačné, škodlivé, výhružné, nezákonné, hanlivé,
-UserConduct_t=Podmínky použití
-Video_t=Video
-ViewingRelatedItems_t=Příbuzný materiál
 _action.add.annotation=null
 _action.add.tag=Přidej tag
 _action.advanced.search=Pokročilé vyhledávání
@@ -103,9 +18,7 @@ _action.send=Pošli
 _action.share.with.friend=Sdílej s přáteli
 _action.videos=Videa
 _action.view.in.original.context=Zobraz v původním kontextu
-_boolean.and=A
-_boolean.not=NE
-_boolean.or=NEBO
+_actionOpenInNewWindow=Otevře se v novém okně
 _facet.by.collection=null
 _facet.by.country=Podle země
 _facet.by.date=Podle data
@@ -117,6 +30,7 @@ _facet.by.year=null
 _failure.search.saved=Chyba ukládání výsledků vyhledávání
 _header.actions=Výběr akcí
 _header.relatedcontent=Příbuzný obsah
+_inc_result_table_full.description=Popis
 _language_select.italian=Italština (ita)
 _locale.AL=Albánie
 _locale.AM=Arménie
@@ -186,6 +100,10 @@ _locale.sk=Slovenština (slo)
 _locale.sl=Slovinština (slv)
 _locale.sr=Srbština (scc)
 _locale.sv=Švédština (sve/swe)
+_menu.i18n.chooselanguage=Zvol jazyk
+_messages.error.emailformaterror=Ujisti se, že je tvůj e-mail správně zformátován a zkus to znovu
+_messages.error.emailsendfailed=E-mail nemohl být odeslán
+_messages.notification.emailsent=E-mail byl odeslán
 _metadata.dc.contributor=Přispěvatel
 _metadata.dc.coverage=Pokrytí
 _metadata.dc.creator=Autor
@@ -215,18 +133,61 @@ _metadata.dcterms.replaces=Nahrazuje
 _metadata.dcterms.requires=Vyžaduje
 _metadata.dcterms.spatial=Prostorové pokrytí
 _metadata.dcterms.temporal=Časové pokrytí
+_metadata.searchfield.contributor=Přispěvatel
+_metadata.type.all=Vše
+_metadata.type.images=Obrazy
+_metadata.type.sounds=Zvukový materiál
+_metadata.type.texts=Texty
+_metadata.type.video=Video
 _mine.date.saved=Uložené datum
 _mine.delete=Vymaž
+_mine.email.address=E-mail
+_mine.firstname=Jméno
+_mine.forgotpassword=Zapomněl jsem své heslo
+_mine.itemsaved=Položka byla uložena
+_mine.itemsavefailed=Chyba při ukládání položky
 _mine.last.name=Příjmení
+_mine.loggedinas=Přihlášený jako
+_mine.login=Přihlaš se
+_mine.logout=Odhlaš se
+_mine.nosaveditems=Žádné uložené položky
+_mine.nosavedsearches=Žádná uložená vyhledávání
+_mine.nosavedtags=Žádné uložené tagy
 _mine.saved.items=Uložené položky
 _mine.saved.searches=Uložená vyhledávání
 _mine.saved.tags=Uložená pole
 _mine.user.information=Informace pro uživatele
+_mine.user.registration.notification.succeed=Registrace proběhla úspěšně
 _mine.username=Uživatelské jméno
-_option.any.field=Jakékoli pole
-_prompt.email.address=E-mail
-_prompt.provider=Poskytovatel
+_portal.menu.languagedropdownlist=Jazyk
+_portal.ui.message.less=Méně
+_portal.ui.message.more=Více
+_portal.ui.message.noscript=Pro optimální práci s touto webovou stránkou musíte aktivovat JavaScript
+_portal.ui.message.success.search.saved=Výsledky vyhledávání uloženy
+_portal.ui.message.usertags=Uživatelské tagy
+_portal.ui.messages.items=Položky
+_portal.ui.navigation.matchesfor=Matches for
+_portal.ui.navigation.next=Následující
+_portal.ui.navigation.of=Z
+_portal.ui.navigation.page=Strana
+_portal.ui.notification.error=Chyba
+_portal.ui.notification.noitemsfound=Nic nenalezeno
+_portal.ui.reset.searchbox=Vymaž
+_portal.ui.results=Výsledky
+_portal.ui.viewingrelateditems=Příbuzný materiál
+_register-request.emailalreadyregistered=Tato e-mailová adresa je již zaregistrována
 _register.email.has.been.sent=E-mail byl zaslán na následující adresu
+_register.emailclicktoconfirm=Kliknutím na následující link potvrďte svou registraci
+_register.emailuse=K přihlášení na tuto stránku použij svou e-mailovou adresu a heslo
+_register.entervalidemail=Vložte platnou e-mailovou adresu, prosím
+_register.enteryouremail=Vlož svou e-mailovou adresu
+_register.errordetails=Údaje o chybě
+_register.finishregistration=Dokonči registraci
+_register.iagree=Souhlasím
+_register.linkexpired=Odkaz, který jsi použil/a k dokončení registrace je neplatný nebo mu vypršela platnost
+_register.mycodeofconduct=I understand that the Delving portal gives me the opportunity to create tags for any item I wish. I agree that I will not create any tags that could be considered libelous, harmful, threatening, unlawful, defamatory, infringing, abusive, inflammatory, harassing, pornographic, obscene, fraudulent, invasive of privacy or publicity rights, hateful, or racially, ethnically or otherwise objectionable. By clicking this box I agree to abide by this agreement, and understand that if I don't my login on the portal will be terminated.
+_register.mycodeofconductrequired=You must agree to our code of conduct to register for portal membership
+_register.password=Heslo
 _register.password.choose=Zvol si heslo
 _register.password.explain=Heslo musí obsahovat od 6 do 30 znaků
 _register.pick.user.name=Tvoje uživatelské jméno bude zobrazeno po přihlášení
@@ -234,13 +195,25 @@ _register.please.follow.link=Otevři odkaz zaslaný tímto e-mailem a dokonči r
 _register.register=Zaregistrovat se
 _register.registration.failed=Při zpracování Vašeho požadavku na registraci se objevila chyba. Zkuste registraci znovu.
 _register.repeat.password=Zadej heslo znovu
+_register.requiredfield=Povinné pole
 _register.username.choose=Zvol si uživatelské jméno
 _register.username.explain=Tvoje uživatelské jméno bude zobrazeno po přihlášení
+_search.boolean.and=A
+_search.boolean.not=NE
+_search.boolean.or=NEBO
+_search.field.any.field=Jakékoli pole
 _search.field.creator=Tvůrce
 _search.field.date=Datum
-_search.option.subject=Předmět
-_search.option.title=Název
-_success.search.saved=Výsledky vyhledávání uloženy
+_search.field.provider=Poskytovatel
+_search.field.subject=Předmět
+_search.field.title=Název
+_toberemoved.althome=Vrať se na domovskou stránku
+_toberemoved.altlogoeuropeana=logo Euroepana think culture
+_toberemoved.checkthefaqs=Prohlédněte si Nejčastější dotazy, možná najdete odpověď na vaši otázku
+_toberemoved.communities=Komunity
+_toberemoved.contributorexplain=Organizace dodávající obsah - digitalizované malby, knihy, audio, video atd. Někteří z těchto přispěvatelů jsou agregátoři, největšícm z nich je Culture.fr, který poskytuje obsah cca 480 organizací ve Francii včetně Louvru a Musée d´Orsay. Počet organizací přispívajících jednotlivému agregátoru je udán v závorkách za jménem agregátora, např. Videoactive (10)
+_toberemoved.emaileuropeanateam=Tým European
+_toberemoved.using.europeana=O užití Euroepan
 _unused.about.us=O nás
 _unused.accessibility=Možnosti přístupu
 _unused.add=Přidat
@@ -249,10 +222,34 @@ _unused.altprint=Vytiskni tuto stránku
 _unused.aplacetoshareideas=Místo pro inspiraci a náměty. Prohledávaj kulturní sbírky Evropy, sleduj další užvatele a sdílejte svoje objevy
 _unused.bosnia.and.herzegovina=Bosna a Hercegovina
 _unused.browse.through.time=Procházej časem
+_unused.contacts=Kontakty
+_unused.contributors=Přispěvatelé
+_unused.country=Země
+_unused.createaccount=Vytvoř účet
+_unused.emailwelcome=Vítej v Mých Europeanech
+_unused.enewsoptin=Informujte mě o novinkách týkajících se Euroepan
+_unused.featuredisabled=Operace není nyní možná
+_unused.feedbackresponse=Děkujeme za váš ohlas. Jestliže jde o otázku, kterou může zodpovědět člen týmu European, obrátí se na vás co nejdříve. Aby odpověď byla rychlejší, posílejte sdělení anglicky, prosím.
+_unused.findoutmore=Najdi více
+_unused.fromourparnters=Z muzeí, archivů, knihoven a audiovizuálních sbírek našich partnerů
+_unused.fundedby=spolufinancováno Evropskou unií
+_unused.fyrom=Bývalá jugoslávská republika Makedonie
+_unused.hideadvancedsearch=Skryj Pokročilé vyhledávání
+_unused.image=Obraz
+_unused.invalidquery=Neplatný dotaz
+_unused.itemdetails=Údaje o položce
+_unused.languagepolicy=Jazyková politika
+_unused.newcontent=Nový obsah
 _unused.other=Jiné
+_unused.partner=Partner
+_unused.partnerexplain=Síť partnerů spolupracujících na Europeanách a reprezentujícíh Euroepana ve svých zemích a profesionálních sdruženích
+_unused.partners=Partneři
+_unused.peoplearecurrentlythinkingabout=Právě se přemýšlí o
 _unused.privacy=Ochrana osobních dat
+_unused.registeragain=Znovu se zaregistrovat
 _unused.remember.me=Zapamatovat pro tento počítač
 _unused.remove=Přesuň
+_unused.sector=Sector
 _unused.send.feedback=Pošli nám ohlas
 _unused.share.your.ideas=Sdílejte svoje nápady
 _unused.show.all=Zobraz vše
@@ -260,17 +257,20 @@ _unused.sign.in=Přihlásit se
 _unused.site.map=Mapa stránek
 _unused.slovenia=Slovinsko
 _unused.sound=Zvukový materiál
+_unused.strorylinecredits=Storyline and credits
 _unused.tag.added=Přidaný tag
 _unused.tag.addition.failed=Chyba při přidávání tagu
 _unused.tagging=Tagování
 _unused.terms.and.conditions=Podmínky užití
 _unused.text=Text
-_unused.username.in.use=Toto uživatelské jméno je již obsazeno. Vyber si jiné
-_unused.usertags=Uživatelské tagy
-_unused.using.europeana=O užití Euroepan
-_unused.view.as.xml=Zobraz jako XML
-_unused.view.with.labels=Zobraz s popisky
-_unused.view.without.labels=Zobraz bez popisků
-_unused.you.have.search.for=Hledal/a jsi
-languageDropDownList_t=Jazyk
-registrationSucceed_t=Registrace proběhla úspěšně
+_unused.thisiseuropeana=Europeana
+_unused.thoughtlab=Experimentální dílny
+_unused.timeline=Časová osa
+_unused.timelinenavigator=Navigátor po časové ose
+_unused.userconduct=Podmínky použití
+_unused.userconductagree=Jsem srozuměn s tím, že Moje Europeany mi dávají možnost vytvořit označení pro kteroukoli položku. Souhlasím, že nevytvořím žádné označení, které by mohlo být považováno za nactiutrhačné, škodlivé, výhružné, nezákonné, hanlivé,
+_unused_portal.ui.message.view.as.xml=Zobraz jako XML
+_unused_portal.ui.message.view.with.labels=Zobraz s popisky
+_unused_portal.ui.message.view.without.labels=Zobraz bez popisků
+_unused_portal.ui.message.you.have.search.for=Hledal/a jsi
+_unused_validation.username.in.use=Toto uživatelské jméno je již obsazeno. Vyber si jiné
