--- a/portal/src/main/resources/i18n/messages_da.properties
+++ b/portal/src/main/resources/i18n/messages_da.properties
@@ -1,88 +1,3 @@
-All_t=Alle
-AltHome_t=Klik her for at vende tilbage til Europeanas hjemmeside
-AltLogoEuropeana_t=logo Europeana indtænk kulturarv
-CheckTheFaqs_t=Se i FAQ'en for svar på dine spørgsmål
-ChooseLanguage_t=Vælg et sprog
-Communities_t=Fællesskaber
-Contacts_t=Kontakt
-ContributorExplain_t=Organisationer, som bidrager med indhold: digitaliserede malerier, bøger, tv-udsendelser m.m. Nogle af disse leverandører er aggregatorer*, Culture.fr er den største og sørger for indhold fra ca. 480 organisationer i Frankrig bl.a. Louvre og Musée d'Orsay. Antallet af organisationer, som bidrager til en aggregator vises i parentes efter aggrgatorens navn, f.eks. Videoactive (10)
-Contributor_t=Bidragyder
-Contributors_t=Bidragydere
-Country_t=Land
-CreateAccount_t=Opret en konto
-Description_t=Beskrivelse
-EmailAlreadyRegistered_t=Denne e-mail er allerede registreret
-EmailClickToConfirm_t=Klik på linket for at bekræfte din registrering
-EmailEuropeanaTeam_t=The Europeana Team
-EmailFormatError_t=Kontroller venligst at e-mailen er korrekt
-EmailSendFailed_t=E-mail kunne ikke sendes
-EmailSent_t=E-mail afsendt
-EmailUse_t=Du skal bruge din e-mail sammen med dit password for at logge ind på sitet
-EmailWelcome_t=Velkommen til MitEuropeana
-EnewsOptin_t=Hold mig orienteret om nye tiltag i Europeana
-EnterValidEmail_t=Indtast venligst en gyldig e-mailadresse
-EnterYourEmail_t=Indtast din e-mail
-ErrorDetails_t=Detaljer om fejlmelding
-Error_t=Fejl
-FYROM_t=Makedonien, den tidligere jugoslaviske republik
-FeatureDisabled_t=Den funktion er pt ude af drift
-FeedbackResponse_t=Tak for din feedback. Hvis den kræver en respons vil et medlem af Europeana-teamet vende til bage til dig så snart som muligt. For den hurtigste respons skal din feedback formuleres på engelsk
-FindOutMore_t=Flere informationer
-FinishRegistration_t=Afslut registrering
-FirstName_t=Fornavn
-ForgotPassword_t=Jeg har glemt mit password
-FromOurParnters_t=Fra vores partnere i museer, arkiver, biblioteker og lyd-og filmsamlinger
-FundedBy_t=medfinansieret af Den Europæiske Union
-HideAdvancedSearch_t=Skjul avanceret søgning
-IAgree_t=Jeg er indforstået med
-Image_t=Billede
-Images_t=Billeder
-InvalidQuery_t=Ugyldig forespørgsel
-ItemDetails_t=Detaljer om genstanden
-ItemSaveFailed_t=Gem reference mislykkedes
-ItemSaved_t=Reference gemt
-Items_t=Genstande
-LanguagePolicy_t=Sprogpolitik
-Less_t=Mindre
-LinkExpired_t=Det link du brugte til at afslutte din registrering er ugyldigt eller er udløbet
-LogIn_t=Login
-LogOut_t=Logout
-LoggedInAs_t=Logget på som
-MatchesFor_t=Følgende passede til
-More_t=Mere
-MyCodeOfConductRequired_t=For at tilmelde dig Mit Europeana skal du erklære dig enig i vore etiske regler
-MyCodeOfConduct_t=Jeg har forstået at My Personal Page giver mig mulighed for at tilføje tags (mine egne beskrivelser)til de værker jeg ønsker. Jeg er indforstået med at jeg ikke vil benytte tags, som kan betragtes som injurierende eller ærekrænkende, skadelige, truende, ulovlige, som krænkende ophavsrettigheder, fornærmende, provokerende, chikanerende, pornografiske, sjofle, svigagtige,krænkende private eller offentlige rettigheder, hadefulde eller diskriminerende mht race eller etnicitet eller på anden måde stødende. Ved at klikke i denne boks, bekræfter jeg at ville efterleve denne aftale og er indforstået med at brud på aftalen medfører at jeg udelukkes fra Mit Europeana.
-NewContent_t=Nyt indhold
-Next_t=Næste
-NoItemsFound_t=Der blev ikke fundet nogen referencer
-NoSavedItems_t=Ingen gemte referencer
-NoSavedSearches_t=Ingen gemte søgninger
-NoSavedTags_t=Ingen gemte nøgleord
-NoScript_t=FOr optimal brug af dette website skal du have installeret JavaScript
-Of_t=af
-OpensInNewWindow_t=Åbn i nyt vindue
-Page_t=Side
-PartnerExplain_t=Netværket af partnere, som samarbejdede om Europeanas tilblivelse og som repræsenterer Europeana i deres lande og faglige sammenhænge
-Partner_t=Partner
-Partners_t=Partnere
-Password_t=Password
-PeopleAreCurrentlyThinkingAbout_t=For øjeblikket søges der på
-RegisterAgain_t=Registrer dig igen
-RequiredField_t=Feltet skal udfyldes
-Reset_t=Nulstil
-Results_t=Resultater
-Sector_t=Sektor
-Sounds_t=Lyd
-StrorylineCredits_t=Handling og fortekster
-Texts_t=Tekster
-ThisIsEuropeana_t=Velkommen til Europeana
-ThoughtLab_t=Idé-rum
-TimelineNavigator_t=Tidslinje
-Timeline_t=Tidslinje
-UserConductAgree_t=Jeg har forstået at Europeana giver mig mulighed for at tagge de genstande jeg ønsker. Jer erklærer mig indforstået med at jeg ikke vil tilføje tags, der på nogen måde er eller kan opfattes ærekrænkende, skadelige,truende,ulovlige, injurierende, rettighedskrænkende, fornærmende,provokerende,chikanerende,pornografisk,uanstændig,svigagtig,overtræder private eller offentlige rettigheder,hadefuld,diskriminerende,umoralsk eller på anden måde stødende eller forkastelig. Ved at hakke af her, lover jeg at rette mig efter denne erklæring og forstår at, hvis jeg ikke gør det, vil jeg blive udelukket fra Mit Europeana. KLIK HER FOR AT BEKRÆFTE
-UserConduct_t=Brugeradfærd
-Video_t=Video
-ViewingRelatedItems_t=Se lignende referencer
 _action.add.annotation=null
 _action.add.tag=Tilføj et nøgleord
 _action.advanced.search=Avanceret søgning
@@ -103,9 +18,7 @@ _action.send=Send
 _action.share.with.friend=Del med en ven
 _action.videos=Videoer
 _action.view.in.original.context=Se i den oprindelige sammenhæng
-_boolean.and=og
-_boolean.not=ikke
-_boolean.or=eller
+_actionOpenInNewWindow=Åbn i nyt vindue
 _facet.by.collection=null
 _facet.by.country=Efter land
 _facet.by.date=Efter årstal
@@ -117,6 +30,7 @@ _facet.by.year=null
 _failure.search.saved=Gem søgning mislykkedes
 _header.actions=Handlinger
 _header.relatedcontent=Lignende indhold
+_inc_result_table_full.description=Beskrivelse
 _language_select.italian=Italiensk
 _locale.AL=Albanien
 _locale.AM=Armenien
@@ -186,6 +100,10 @@ _locale.sk=Slovakisk
 _locale.sl=Slovensk
 _locale.sr=Serbisk
 _locale.sv=Svensk
+_menu.i18n.chooselanguage=Vælg et sprog
+_messages.error.emailformaterror=Kontroller venligst at e-mailen er korrekt
+_messages.error.emailsendfailed=E-mail kunne ikke sendes
+_messages.notification.emailsent=E-mail afsendt
 _metadata.dc.contributor=Bidragsyder
 _metadata.dc.coverage=Dækker
 _metadata.dc.creator=Forfatter
@@ -215,18 +133,61 @@ _metadata.dcterms.replaces=Replaces
 _metadata.dcterms.requires=Requires
 _metadata.dcterms.spatial=Sted
 _metadata.dcterms.temporal=Tid
+_metadata.searchfield.contributor=Bidragyder
+_metadata.type.all=Alle
+_metadata.type.images=Billeder
+_metadata.type.sounds=Lyd
+_metadata.type.texts=Tekster
+_metadata.type.video=Video
 _mine.date.saved=Årstal gemt
 _mine.delete=Slet
+_mine.email.address=E-mail-adresse
+_mine.firstname=Fornavn
+_mine.forgotpassword=Jeg har glemt mit password
+_mine.itemsaved=Reference gemt
+_mine.itemsavefailed=Gem reference mislykkedes
 _mine.last.name=Efternavn
+_mine.loggedinas=Logget på som
+_mine.login=Login
+_mine.logout=Logout
+_mine.nosaveditems=Ingen gemte referencer
+_mine.nosavedsearches=Ingen gemte søgninger
+_mine.nosavedtags=Ingen gemte nøgleord
 _mine.saved.items=Gemte referencer
 _mine.saved.searches=Gemte søgninger
 _mine.saved.tags=Gemte nøgleord
 _mine.user.information=Brugerinformation
+_mine.user.registration.notification.succeed=Du er nu registreret
 _mine.username=Brugernavn
-_option.any.field=Alle felter
-_prompt.email.address=E-mail-adresse
-_prompt.provider=Leverandør
+_portal.menu.languagedropdownlist=Sprog
+_portal.ui.message.less=Mindre
+_portal.ui.message.more=Mere
+_portal.ui.message.noscript=FOr optimal brug af dette website skal du have installeret JavaScript
+_portal.ui.message.success.search.saved=Søgning gemt
+_portal.ui.message.usertags=Nøgleord tilføjet af brugere
+_portal.ui.messages.items=Genstande
+_portal.ui.navigation.matchesfor=Følgende passede til
+_portal.ui.navigation.next=Næste
+_portal.ui.navigation.of=af
+_portal.ui.navigation.page=Side
+_portal.ui.notification.error=Fejl
+_portal.ui.notification.noitemsfound=Der blev ikke fundet nogen referencer
+_portal.ui.reset.searchbox=Nulstil
+_portal.ui.results=Resultater
+_portal.ui.viewingrelateditems=Se lignende referencer
+_register-request.emailalreadyregistered=Denne e-mail er allerede registreret
 _register.email.has.been.sent=Der er afsendt en e-mail til adressen
+_register.emailclicktoconfirm=Klik på linket for at bekræfte din registrering
+_register.emailuse=Du skal bruge din e-mail sammen med dit password for at logge ind på sitet
+_register.entervalidemail=Indtast venligst en gyldig e-mailadresse
+_register.enteryouremail=Indtast din e-mail
+_register.errordetails=Detaljer om fejlmelding
+_register.finishregistration=Afslut registrering
+_register.iagree=Jeg er indforstået med
+_register.linkexpired=Det link du brugte til at afslutte din registrering er ugyldigt eller er udløbet
+_register.mycodeofconduct=Jeg har forstået at My Personal Page giver mig mulighed for at tilføje tags (mine egne beskrivelser)til de værker jeg ønsker. Jeg er indforstået med at jeg ikke vil benytte tags, som kan betragtes som injurierende eller ærekrænkende, skadelige, truende, ulovlige, som krænkende ophavsrettigheder, fornærmende, provokerende, chikanerende, pornografiske, sjofle, svigagtige,krænkende private eller offentlige rettigheder, hadefulde eller diskriminerende mht race eller etnicitet eller på anden måde stødende. Ved at klikke i denne boks, bekræfter jeg at ville efterleve denne aftale og er indforstået med at brud på aftalen medfører at jeg udelukkes fra Mit Europeana.
+_register.mycodeofconductrequired=For at tilmelde dig Mit Europeana skal du erklære dig enig i vore etiske regler
+_register.password=Password
 _register.password.choose=Vælg et password
 _register.password.explain=Passwords skal være på mindst 6 og max. 30 bogstaver
 _register.pick.user.name=Dit brugernavn bliver vist når du har logget på
@@ -234,13 +195,25 @@ _register.please.follow.link=Følg venligst linket i e-mailen og afslut registre
 _register.register=Registrer
 _register.registration.failed=En fejl opstod i forbindelse med din registrering. Prøv igen.
 _register.repeat.password=Gentag password
+_register.requiredfield=Feltet skal udfyldes
 _register.username.choose=Vælg et brugernavn
 _register.username.explain=Dit brugernavn vil blive vist når du er logget på
+_search.boolean.and=og
+_search.boolean.not=ikke
+_search.boolean.or=eller
+_search.field.any.field=Alle felter
 _search.field.creator=Kunstner
 _search.field.date=Årstal
-_search.option.subject=Emne
-_search.option.title=Titel
-_success.search.saved=Søgning gemt
+_search.field.provider=Leverandør
+_search.field.subject=Emne
+_search.field.title=Titel
+_toberemoved.althome=Klik her for at vende tilbage til Europeanas hjemmeside
+_toberemoved.altlogoeuropeana=logo Europeana indtænk kulturarv
+_toberemoved.checkthefaqs=Se i FAQ'en for svar på dine spørgsmål
+_toberemoved.communities=Fællesskaber
+_toberemoved.contributorexplain=Organisationer, som bidrager med indhold: digitaliserede malerier, bøger, tv-udsendelser m.m. Nogle af disse leverandører er aggregatorer*, Culture.fr er den største og sørger for indhold fra ca. 480 organisationer i Frankrig bl.a. Louvre og Musée d'Orsay. Antallet af organisationer, som bidrager til en aggregator vises i parentes efter aggrgatorens navn, f.eks. Videoactive (10)
+_toberemoved.emaileuropeanateam=The Europeana Team
+_toberemoved.using.europeana=Om brugen af Europeana
 _unused.about.us=Om os
 _unused.accessibility=Tilgængelighed
 _unused.add=Tilføj
@@ -249,10 +222,34 @@ _unused.altprint=Print denne side
 _unused.aplacetoshareideas=et sted at hente inspiration og idéer. Søg i Europas kultursamlinger, se hvad andre har fundet og del dine egne opdagelser
 _unused.bosnia.and.herzegovina=Bosnien og Herzegovina
 _unused.browse.through.time=Vælg et årstal
+_unused.contacts=Kontakt
+_unused.contributors=Bidragydere
+_unused.country=Land
+_unused.createaccount=Opret en konto
+_unused.emailwelcome=Velkommen til MitEuropeana
+_unused.enewsoptin=Hold mig orienteret om nye tiltag i Europeana
+_unused.featuredisabled=Den funktion er pt ude af drift
+_unused.feedbackresponse=Tak for din feedback. Hvis den kræver en respons vil et medlem af Europeana-teamet vende til bage til dig så snart som muligt. For den hurtigste respons skal din feedback formuleres på engelsk
+_unused.findoutmore=Flere informationer
+_unused.fromourparnters=Fra vores partnere i museer, arkiver, biblioteker og lyd-og filmsamlinger
+_unused.fundedby=medfinansieret af Den Europæiske Union
+_unused.fyrom=Makedonien, den tidligere jugoslaviske republik
+_unused.hideadvancedsearch=Skjul avanceret søgning
+_unused.image=Billede
+_unused.invalidquery=Ugyldig forespørgsel
+_unused.itemdetails=Detaljer om genstanden
+_unused.languagepolicy=Sprogpolitik
+_unused.newcontent=Nyt indhold
 _unused.other=Andre
+_unused.partner=Partner
+_unused.partnerexplain=Netværket af partnere, som samarbejdede om Europeanas tilblivelse og som repræsenterer Europeana i deres lande og faglige sammenhænge
+_unused.partners=Partnere
+_unused.peoplearecurrentlythinkingabout=For øjeblikket søges der på
 _unused.privacy=Beskyttelse af persondata
+_unused.registeragain=Registrer dig igen
 _unused.remember.me=Husk mig på denne pc
 _unused.remove=Fjern
+_unused.sector=Sektor
 _unused.send.feedback=Send feedback
 _unused.share.your.ideas=Del dine idéer
 _unused.show.all=Vis alle
@@ -260,17 +257,20 @@ _unused.sign.in=Indskriv dig
 _unused.site.map=Oversigt over sitet
 _unused.slovenia=Slovenien
 _unused.sound=Lyd
+_unused.strorylinecredits=Handling og fortekster
 _unused.tag.added=Nøgleord tilføjet
 _unused.tag.addition.failed=Tilføjelse af nøgleord mislykkedes
 _unused.tagging=Giv nøgleord
 _unused.terms.and.conditions=Vilkår og betingelser
 _unused.text=Tekst
-_unused.username.in.use=Vælg et andet brugernavn
-_unused.usertags=Nøgleord tilføjet af brugere
-_unused.using.europeana=Om brugen af Europeana
-_unused.view.as.xml=Vis som XML
-_unused.view.with.labels=Vis med feltnavne
-_unused.view.without.labels=Vis uden feltnavne
-_unused.you.have.search.for=Du søgte efter
-languageDropDownList_t=Sprog
-registrationSucceed_t=Du er nu registreret
+_unused.thisiseuropeana=Velkommen til Europeana
+_unused.thoughtlab=Idé-rum
+_unused.timeline=Tidslinje
+_unused.timelinenavigator=Tidslinje
+_unused.userconduct=Brugeradfærd
+_unused.userconductagree=Jeg har forstået at Europeana giver mig mulighed for at tagge de genstande jeg ønsker. Jer erklærer mig indforstået med at jeg ikke vil tilføje tags, der på nogen måde er eller kan opfattes ærekrænkende, skadelige,truende,ulovlige, injurierende, rettighedskrænkende, fornærmende,provokerende,chikanerende,pornografisk,uanstændig,svigagtig,overtræder private eller offentlige rettigheder,hadefuld,diskriminerende,umoralsk eller på anden måde stødende eller forkastelig. Ved at hakke af her, lover jeg at rette mig efter denne erklæring og forstår at, hvis jeg ikke gør det, vil jeg blive udelukket fra Mit Europeana. KLIK HER FOR AT BEKRÆFTE
+_unused_portal.ui.message.view.as.xml=Vis som XML
+_unused_portal.ui.message.view.with.labels=Vis med feltnavne
+_unused_portal.ui.message.view.without.labels=Vis uden feltnavne
+_unused_portal.ui.message.you.have.search.for=Du søgte efter
+_unused_validation.username.in.use=Vælg et andet brugernavn
