--- a/portal/src/main/resources/i18n/messages_es.properties
+++ b/portal/src/main/resources/i18n/messages_es.properties
@@ -1,88 +1,3 @@
-All_t=Todo
-AltHome_t=Pinche aquí para volver a la página de Europeana
-AltLogoEuropeana_t=Logo Europeana Pensar la Cultura
-CheckTheFaqs_t=Consulte el apartado de Preguntas Frecuentes (FAQs) si tiene alguna duda.
-ChooseLanguage_t=Seleccione un idioma
-Communities_t=Comunidades
-Contacts_t=Contactos
-ContributorExplain_t=Estas son las organizaciones que aportan contenido - pinturas digitalizadas, libros, emisiones de televisión, etc. Algunas son proveedoras, Culture.fr es la más grande aportando contenido de unas 480 organizaciones de Francia, incluidos el Louvre y el Museo de ORsay. El número de organizaciones que aportan contenido a un proveedor se muestra entre corchetes después del nombre del proveedor. Por ejemplo, Videoactive (10).
-Contributor_t=colaborador
-Contributors_t=colaboradores
-Country_t=País
-CreateAccount_t=Crear una cuenta
-Description_t=Descripción
-EmailAlreadyRegistered_t=Esta dirección de correo ya está registrada
-EmailClickToConfirm_t=Por favor, pinche en el siguiente enlace para confirmar su registro
-EmailEuropeanaTeam_t=El equipo de Europeana
-EmailFormatError_t=Por favor, asegúrese que su dirección de correo es correcta y vuélvalo a intentar
-EmailSendFailed_t=El correo no pudo ser enviado
-EmailSent_t=Correo enviado
-EmailUse_t=Necesitará su dirección de correo electrónico y su contraseña para entrar en el sitio
-EmailWelcome_t=Bienvenido/a a MiEuropeana
-EnewsOptin_t=Manténganme informado/a de todas las novedades de Europeana.
-EnterValidEmail_t=Por favor introduzca una dirección de email válida
-EnterYourEmail_t=Introduzca su dirección de correo electrónico
-ErrorDetails_t=Detalles de error
-Error_t=Error
-FYROM_t=Ex República Yugoslava de Macedonia
-FeatureDisabled_t=Esta opción está temporalmente desactivada.
-FeedbackResponse_t=Muchas gracias por su comunicación con nosotros. Un miembro de Europeana se pondrá en contacto con usted tan pronto como podamos, si alguna de sus aportaciones necesita respuesta. Para agilizar el tiempo de respuesta, las aportaciones deben estar escritas en inglés.
-FindOutMore_t=Más información
-FinishRegistration_t=Finalizar registro
-FirstName_t=Nombre
-ForgotPassword_t=He olvidado mi contraseña
-FromOurParnters_t=De miembros de museos, archivos, bibliotecas y colecciones audiovisuales
-FundedBy_t=cofinanciado por la Unión Europea
-HideAdvancedSearch_t=Ocultar búsqueda avanzada
-IAgree_t=Acepto
-Image_t=Imagen
-Images_t=Imágenes
-InvalidQuery_t=Interrogación no válida
-ItemDetails_t=Detalles del ejemplar
-ItemSaveFailed_t=Fallo al guardar ejemplar
-ItemSaved_t=Ejemplar guardado
-Items_t=Ejemplares
-LanguagePolicy_t=Política lingüística
-Less_t=Menos
-LinkExpired_t=El enlace que utilizó para completar el registro no es válido o ha caducado
-LogIn_t=Conexión
-LogOut_t=Desconexión
-LoggedInAs_t=Registrado como
-MatchesFor_t=Concuerda con
-More_t=Más
-MyCodeOfConductRequired_t=Debe aceptar nuestro código de conducta para registrarse en Mi Europeana
-MyCodeOfConduct_t=Entiendo que Mi Europeana me ofrece la oportunidad de crear etiquetas para cualquier elemento. Me comprometo a no crear ninguna etiqueta que pueda considerarse calumniosa, perjudicial, amenazante, ilícita, difamatoria, infractora, abusiva, incendiaria, molesta, pornográfica, obscena, fraudulenta, invasiva de la privacidad o los derechos publicitarios, odiosa o cuestionable desde un punto de vista racial u étnico. Seleccionando esta casilla acepto cumplir con este acuerdo y entiendo que si no lo hago mi pertenencia a Mi Europeana se considerará finalizada.
-NewContent_t=Nuevo contenido
-Next_t=Siguiente
-NoItemsFound_t=No se encuentran resultados
-NoSavedItems_t=No hay documentos guardados
-NoSavedSearches_t=No hay busquedas guardadas
-NoSavedTags_t=Etiquetas no guardadas
-NoScript_t=Para disfrutrar de un óptimo acceso a esta web, necesita tener activado el JavaScript
-Of_t=de
-OpensInNewWindow_t=Abrir en una nueva ventana
-Page_t=Página
-PartnerExplain_t=Ésta es la red de miembros que ayudaron a crear Europeana, y que representan a Europeana en sus países y asociaciones profesionales
-Partner_t=Socio
-Partners_t=Miembros
-Password_t=Contraseña
-PeopleAreCurrentlyThinkingAbout_t=Otros usuarios han propuesto lo siguiente
-RegisterAgain_t=Registrarse de nuevo
-RequiredField_t=Este es un campo obligatorio
-Reset_t=reiniciar
-Results_t=Resultados
-Sector_t=Sector
-Sounds_t=Sonidos
-StrorylineCredits_t=Guión y créditos.
-Texts_t=Textos
-ThisIsEuropeana_t=Esto es Europeana
-ThoughtLab_t=Laboratorio de ideas
-TimelineNavigator_t=Navegador de la cronología
-Timeline_t=Cronología
-UserConductAgree_t=Entiendo que Mi Europeana ofrece la oportunidad de realizar comentarios sobre los objetos de consulta. Acepto que no realizaré comentarios que puedan ser considerados una difamación, puedan herir, ser ilegales, amenazadores, constitutivos de abuso, acoso, pornográficos, obscenos, fraudulentos, que invadan el derecho a la intimidad, viertan odio a personas por razón de raza, etnia u otro motivo que pudiese alegarse. Acepto las condiciones de este acuerdo y entiendo que si lo incumplo, mi registro en Mi Europeana quedará anulado. PINCHE AQUÍ PARA ACEPTAR
-UserConduct_t=Conducta de los/as usuarios/as
-Video_t=Vídeo
-ViewingRelatedItems_t=Se muestran los elementos relacionados
 _action.add.annotation=null
 _action.add.tag=Añadir etiqueta
 _action.advanced.search=Búsqueda avanzada
@@ -103,9 +18,7 @@ _action.send=Enviado
 _action.share.with.friend=Compartir con un amigo
 _action.videos=Vídeos
 _action.view.in.original.context=Visualizar en el contexto original
-_boolean.and=Y
-_boolean.not=No
-_boolean.or=O
+_actionOpenInNewWindow=Abrir en una nueva ventana
 _facet.by.collection=null
 _facet.by.country=Por país
 _facet.by.date=Por fecha
@@ -117,6 +30,7 @@ _facet.by.year=null
 _failure.search.saved=Fallo en la grabación de la búsqueda
 _header.actions=Acciones
 _header.relatedcontent=Contenido relacionado
+_inc_result_table_full.description=Descripción
 _language_select.italian=Italiano (ita)
 _locale.AL=Albania
 _locale.AM=Armenia
@@ -186,6 +100,10 @@ _locale.sk=Eslovaco (slo)
 _locale.sl=Esloveno (slv)
 _locale.sr=Serbio (scc)
 _locale.sv=Sueco (sve/swe)
+_menu.i18n.chooselanguage=Seleccione un idioma
+_messages.error.emailformaterror=Por favor, asegúrese que su dirección de correo es correcta y vuélvalo a intentar
+_messages.error.emailsendfailed=El correo no pudo ser enviado
+_messages.notification.emailsent=Correo enviado
 _metadata.dc.contributor=Colaborador
 _metadata.dc.coverage=Cobertura
 _metadata.dc.creator=Autor
@@ -215,18 +133,61 @@ _metadata.dcterms.replaces=Sustituye
 _metadata.dcterms.requires=Requiere
 _metadata.dcterms.spatial=Cobertura espacial
 _metadata.dcterms.temporal=Cobertura temporal
+_metadata.searchfield.contributor=colaborador
+_metadata.type.all=Todo
+_metadata.type.images=Imágenes
+_metadata.type.sounds=Sonidos
+_metadata.type.texts=Textos
+_metadata.type.video=Vídeo
 _mine.date.saved=Fecha guardada
 _mine.delete=Borrar
+_mine.email.address=Dirección de correo electrónico
+_mine.firstname=Nombre
+_mine.forgotpassword=He olvidado mi contraseña
+_mine.itemsaved=Ejemplar guardado
+_mine.itemsavefailed=Fallo al guardar ejemplar
 _mine.last.name=Apellidos
+_mine.loggedinas=Registrado como
+_mine.login=Conexión
+_mine.logout=Desconexión
+_mine.nosaveditems=No hay documentos guardados
+_mine.nosavedsearches=No hay busquedas guardadas
+_mine.nosavedtags=Etiquetas no guardadas
 _mine.saved.items=Elementos guardados
 _mine.saved.searches=Búsquedas guardadas
 _mine.saved.tags=Etiquetas guardadas
 _mine.user.information=Información de usuario
+_mine.user.registration.notification.succeed=Se ha registrado corecctamente
 _mine.username=Nombre de usuario
-_option.any.field=Cualquier campo
-_prompt.email.address=Dirección de correo electrónico
-_prompt.provider=Proveedor
+_portal.menu.languagedropdownlist=Lengua
+_portal.ui.message.less=Menos
+_portal.ui.message.more=Más
+_portal.ui.message.noscript=Para disfrutrar de un óptimo acceso a esta web, necesita tener activado el JavaScript
+_portal.ui.message.success.search.saved=Búsqueda guardada
+_portal.ui.message.usertags=Etiquetas de usuario
+_portal.ui.messages.items=Ejemplares
+_portal.ui.navigation.matchesfor=Concuerda con
+_portal.ui.navigation.next=Siguiente
+_portal.ui.navigation.of=de
+_portal.ui.navigation.page=Página
+_portal.ui.notification.error=Error
+_portal.ui.notification.noitemsfound=No se encuentran resultados
+_portal.ui.reset.searchbox=reiniciar
+_portal.ui.results=Resultados
+_portal.ui.viewingrelateditems=Se muestran los elementos relacionados
+_register-request.emailalreadyregistered=Esta dirección de correo ya está registrada
 _register.email.has.been.sent=Se ha enviado un correo electrónico a la siguiente dirección
+_register.emailclicktoconfirm=Por favor, pinche en el siguiente enlace para confirmar su registro
+_register.emailuse=Necesitará su dirección de correo electrónico y su contraseña para entrar en el sitio
+_register.entervalidemail=Por favor introduzca una dirección de email válida
+_register.enteryouremail=Introduzca su dirección de correo electrónico
+_register.errordetails=Detalles de error
+_register.finishregistration=Finalizar registro
+_register.iagree=Acepto
+_register.linkexpired=El enlace que utilizó para completar el registro no es válido o ha caducado
+_register.mycodeofconduct=Entiendo que Mi Europeana me ofrece la oportunidad de crear etiquetas para cualquier elemento. Me comprometo a no crear ninguna etiqueta que pueda considerarse calumniosa, perjudicial, amenazante, ilícita, difamatoria, infractora, abusiva, incendiaria, molesta, pornográfica, obscena, fraudulenta, invasiva de la privacidad o los derechos publicitarios, odiosa o cuestionable desde un punto de vista racial u étnico. Seleccionando esta casilla acepto cumplir con este acuerdo y entiendo que si no lo hago mi pertenencia a Mi Europeana se considerará finalizada.
+_register.mycodeofconductrequired=Debe aceptar nuestro código de conducta para registrarse en Mi Europeana
+_register.password=Contraseña
 _register.password.choose=Elija una contraseña
 _register.password.explain=La contraseña debe tener entre 6 y 30 caracteres
 _register.pick.user.name=Su nombre de usuario aparecerá cuando
@@ -234,13 +195,25 @@ _register.please.follow.link=Por favor, pinche en el enlace enviado a su correo 
 _register.register=Registrarse
 _register.registration.failed=Ha ocurrido un error durante el proceso de registro. Por favor, inténtelo de nuevo
 _register.repeat.password=Repita la contraseña
+_register.requiredfield=Este es un campo obligatorio
 _register.username.choose=Elija un nombre de usuario
 _register.username.explain=Su nombre de usuario se mostrará cuando esté conectado
+_search.boolean.and=Y
+_search.boolean.not=No
+_search.boolean.or=O
+_search.field.any.field=Cualquier campo
 _search.field.creator=Creador
 _search.field.date=Fecha
-_search.option.subject=Materia
-_search.option.title=Título
-_success.search.saved=Búsqueda guardada
+_search.field.provider=Proveedor
+_search.field.subject=Materia
+_search.field.title=Título
+_toberemoved.althome=Pinche aquí para volver a la página de Europeana
+_toberemoved.altlogoeuropeana=Logo Europeana Pensar la Cultura
+_toberemoved.checkthefaqs=Consulte el apartado de Preguntas Frecuentes (FAQs) si tiene alguna duda.
+_toberemoved.communities=Comunidades
+_toberemoved.contributorexplain=Estas son las organizaciones que aportan contenido - pinturas digitalizadas, libros, emisiones de televisión, etc. Algunas son proveedoras, Culture.fr es la más grande aportando contenido de unas 480 organizaciones de Francia, incluidos el Louvre y el Museo de ORsay. El número de organizaciones que aportan contenido a un proveedor se muestra entre corchetes después del nombre del proveedor. Por ejemplo, Videoactive (10).
+_toberemoved.emaileuropeanateam=El equipo de Europeana
+_toberemoved.using.europeana=Cómo utilizar Europeana
 _unused.about.us=Quiénes somos
 _unused.accessibility=Accesibilidad
 _unused.add=Añadir
@@ -249,10 +222,34 @@ _unused.altprint=Imprimir esta página
 _unused.aplacetoshareideas=un lugar para la inspiración y las ideas. Realice su búsqueda por las colecciones de Europa, únase al recorrido de otros usuarios y comparta sus descubrimientos.
 _unused.bosnia.and.herzegovina=Bosnia Herzegovina
 _unused.browse.through.time=Navegue a través del tiempo
+_unused.contacts=Contactos
+_unused.contributors=colaboradores
+_unused.country=País
+_unused.createaccount=Crear una cuenta
+_unused.emailwelcome=Bienvenido/a a MiEuropeana
+_unused.enewsoptin=Manténganme informado/a de todas las novedades de Europeana.
+_unused.featuredisabled=Esta opción está temporalmente desactivada.
+_unused.feedbackresponse=Muchas gracias por su comunicación con nosotros. Un miembro de Europeana se pondrá en contacto con usted tan pronto como podamos, si alguna de sus aportaciones necesita respuesta. Para agilizar el tiempo de respuesta, las aportaciones deben estar escritas en inglés.
+_unused.findoutmore=Más información
+_unused.fromourparnters=De miembros de museos, archivos, bibliotecas y colecciones audiovisuales
+_unused.fundedby=cofinanciado por la Unión Europea
+_unused.fyrom=Ex República Yugoslava de Macedonia
+_unused.hideadvancedsearch=Ocultar búsqueda avanzada
+_unused.image=Imagen
+_unused.invalidquery=Interrogación no válida
+_unused.itemdetails=Detalles del ejemplar
+_unused.languagepolicy=Política lingüística
+_unused.newcontent=Nuevo contenido
 _unused.other=Otros
+_unused.partner=Socio
+_unused.partnerexplain=Ésta es la red de miembros que ayudaron a crear Europeana, y que representan a Europeana en sus países y asociaciones profesionales
+_unused.partners=Miembros
+_unused.peoplearecurrentlythinkingabout=Otros usuarios han propuesto lo siguiente
 _unused.privacy=Privacidad
+_unused.registeragain=Registrarse de nuevo
 _unused.remember.me=Recordarme en este equipo
 _unused.remove=Quitar
+_unused.sector=Sector
 _unused.send.feedback=Envíenos sus sugerencias
 _unused.share.your.ideas=Comparta sus ideas
 _unused.show.all=Mostrar todos
@@ -260,17 +257,20 @@ _unused.sign.in=Iniciar sesión
 _unused.site.map=Mapa del sitio
 _unused.slovenia=Eslovenia
 _unused.sound=Sonido
+_unused.strorylinecredits=Guión y créditos.
 _unused.tag.added=Etiqueta añadida
 _unused.tag.addition.failed=Fallo al añadir etiqueta
 _unused.tagging=Etiquetado
 _unused.terms.and.conditions=Términos y Condiciones
 _unused.text=Texto
-_unused.username.in.use=ya está en uso. Por favor, elija otro nombre de usuario
-_unused.usertags=Etiquetas de usuario
-_unused.using.europeana=Cómo utilizar Europeana
-_unused.view.as.xml=Vista en XML
-_unused.view.with.labels=Vista con etiqueta
-_unused.view.without.labels=Vista sin etiquetas
-_unused.you.have.search.for=Usted ha buscado por
-languageDropDownList_t=Lengua
-registrationSucceed_t=Se ha registrado corecctamente
+_unused.thisiseuropeana=Esto es Europeana
+_unused.thoughtlab=Laboratorio de ideas
+_unused.timeline=Cronología
+_unused.timelinenavigator=Navegador de la cronología
+_unused.userconduct=Conducta de los/as usuarios/as
+_unused.userconductagree=Entiendo que Mi Europeana ofrece la oportunidad de realizar comentarios sobre los objetos de consulta. Acepto que no realizaré comentarios que puedan ser considerados una difamación, puedan herir, ser ilegales, amenazadores, constitutivos de abuso, acoso, pornográficos, obscenos, fraudulentos, que invadan el derecho a la intimidad, viertan odio a personas por razón de raza, etnia u otro motivo que pudiese alegarse. Acepto las condiciones de este acuerdo y entiendo que si lo incumplo, mi registro en Mi Europeana quedará anulado. PINCHE AQUÍ PARA ACEPTAR
+_unused_portal.ui.message.view.as.xml=Vista en XML
+_unused_portal.ui.message.view.with.labels=Vista con etiqueta
+_unused_portal.ui.message.view.without.labels=Vista sin etiquetas
+_unused_portal.ui.message.you.have.search.for=Usted ha buscado por
+_unused_validation.username.in.use=ya está en uso. Por favor, elija otro nombre de usuario
