--- a/portal/src/main/resources/i18n/messages_et.properties
+++ b/portal/src/main/resources/i18n/messages_et.properties
@@ -1,88 +1,3 @@
-All_t=Kõik
-AltHome_t=Tagasi Europeana avalehele
-AltLogoEuropeana_t=logo Europeana tunne kultuuri
-CheckTheFaqs_t=Vaadake korduma kippuvaid küsimusi - võib-olla on sobiv vastus seal juba olemas
-ChooseLanguage_t=Vali keel
-Communities_t=Kogukonnad
-Contacts_t=Kontaktandmed
-ContributorExplain_t=Need on organisatsioonid, kes lisavad Europeanasse materjali - digiteeritud maale, raamatuid, raadiosaateid jms. Mõned neist on vahendajad* - näiteks Culture.fr on neist suurim, vahendades andmeid 480 Prantsusmaa organisatsioonilt, teiste seas Louvre ja Musée d'Orsay. Vahendaja kaudu andmeid edastavate organisatsioonide arv on näidatud sulgudes vahendaja nime järel, nt Videoactive (10)
-Contributor_t=Vahendaja
-Contributors_t=Vahendajad
-Country_t=Riik
-CreateAccount_t=Kasutajakonto loomine
-Description_t=Kirjeldus
-EmailAlreadyRegistered_t=See e-posti aadress on juba registreeritud
-EmailClickToConfirm_t=Registreerimise kinnitamiseks klõpsa järgmisele lingile
-EmailEuropeanaTeam_t=Europeana meeskond
-EmailFormatError_t=Palun kontrolli e-posti aadressi õigsust ja proovi uuesti
-EmailSendFailed_t=E-kirja saatmine ebaõnnestus
-EmailSent_t=E-kiri saadetud
-EmailUse_t=E-posti aadress ja salasõna on vajalikud sellele veebilehele sisselogimiseks
-EmailWelcome_t=Tere tulemast Minu Europeanasse
-EnewsOptin_t=Palun mind teavitada Europeana edasiarendustest
-EnterValidEmail_t=Palun sisestage korrektne e-posti aadrss
-EnterYourEmail_t=Sisesta e-posti aadress
-ErrorDetails_t=Veaandmed
-Error_t=Viga
-FYROM_t=Endine Jugoslaavia Vabariik Makedoonia
-FeatureDisabled_t=See teenus hetkel ei toimi.
-FeedbackResponse_t=Täname väga tagasiside eest Kui Teie tagasiside eeldab vastust, siis võtab keegi Europeana meeskonna liikmetest Teiega esimesel võimalusel ühendust. Kiirema vastuse kindlustab inglise keeles jäetud kommentaarid.
-FindOutMore_t=Rohkem teavet
-FinishRegistration_t=Registreerumise lõpetamine
-FirstName_t=Eesnimi
-ForgotPassword_t=Ma unustasin oma salasõna
-FromOurParnters_t=Meie partneritelt - muuseumitelt, raamatukogudelt, dokumendi-, heli ja filmiarhiividelt
-FundedBy_t=Euroopa Liidu kaasrahastamisel
-HideAdvancedSearch_t=Peida kompleksotsing
-IAgree_t=Nõustun
-Image_t=Pilt
-Images_t=Pildid
-InvalidQuery_t=Vigane päring
-ItemDetails_t=Objekti andmed
-ItemSaveFailed_t=Objekti salvestamine ebaõnnestus
-ItemSaved_t=Objekt salvestatud
-Items_t=Objektid
-LanguagePolicy_t=Keelepoliitika
-Less_t=Vähem
-LinkExpired_t=Registreerumise lõpuleviimiseks kasutatud link on vigane või aegunud
-LogIn_t=Logi sisse
-LogOut_t=Logi välja
-LoggedInAs_t=Sisse logitud kui
-MatchesFor_t=Päring:
-More_t=Rohkem
-MyCodeOfConductRequired_t=Minu Europeanaga liitumiseks peate nõustuma meie sisekorra eeskirjadega
-MyCodeOfConduct_t=Ma olen teadlik, et Minu Europeana annab mulle võimalusi lisada kõigile objektidele märksõnu. Ma luban käesolevaga, et ei lisa märksõnu, mida võib tõlgendada laimavate, kahjulike, ähvardavate, ebaseaduslike, solvavate, ahistavate, pornograafiliste, labaste, rahvuslikku või rassivaenu õhutavate, kellegi privaatsust ja muid õigusi rikkuvate või muul viisil ebakohastena. Sellele nupule klõpsates kinnitan ma oma nõustumist eelnevalt öelduga. Nende reeglite eiramine toob kaasa Minu Europeana kasutajatunnuse kustutamise.
-NewContent_t=Uus sisu
-Next_t=Järgmine
-NoItemsFound_t=Tulemusi ei leitud
-NoSavedItems_t=Salvestatud objekte ei ole
-NoSavedSearches_t=Salvestatud päringuid ei ole
-NoSavedTags_t=Salvestatud märksõnu ei ole
-NoScript_t=Selle veebilehe optimaalseks kasutamiseks on vaja aktiveerida JavaScript
-Of_t=of
-OpensInNewWindow_t=Avaneb uues aknas
-Page_t=Lehekülg
-PartnerExplain_t=Need on partnerid, kelle koostöös Europeana sündis, ja kes esindavad Europeanat oma riikides ning erialaorganisatsioonides
-Partner_t=Partner
-Partners_t=Partnerid
-Password_t=Salasõna
-PeopleAreCurrentlyThinkingAbout_t=Hetkel kasutajate mõtetes
-RegisterAgain_t=Taasregistreerumine
-RequiredField_t=Selle välja täitmine on kohustuslik
-Reset_t=Alusta uuesti
-Results_t=Tulemused
-Sector_t=Valdkond
-Sounds_t=Helifailid
-StrorylineCredits_t=Süžee ja lõputiitrid
-Texts_t=Tekstid
-ThisIsEuropeana_t=See on Europeana
-ThoughtLab_t=Mõttelabor
-TimelineNavigator_t=Ajateljel liikumine
-Timeline_t=Ajatelg
-UserConductAgree_t=Ma olen teadlik, et Minu Europeana annab mulle võimalusi lisada kõigile objektidele märksõnu. Ma luban käesolevaga, et ei lisa märksõnu, mida võib tõlgendada laimavate, kahjulike, ähvardavate, ebaseaduslike, solvavate, ahistavate, pornograafiliste, labaste, rahvuslikku või rassivaenu õhutavate, kellegi privaatsust ja muid õigusi rikkuvate või muul viisil ebakohastena. Sellele nupule klõpsates kinnitan ma oma nõustumist eelnevalt öelduga. Nende reeglite eiramine toob kaasa Minu Europeana kasutajatunnuse kustutamise. OLEN NÕUS
-UserConduct_t=Sisekorra eeskiri
-Video_t=Video
-ViewingRelatedItems_t=Seotud objektide vaatamine
 _action.add.annotation=null
 _action.add.tag=Märksõna lisamine
 _action.advanced.search=Kompleksotsing
@@ -103,9 +18,7 @@ _action.send=Saada
 _action.share.with.friend=Jagamine sõbraga
 _action.videos=Videod
 _action.view.in.original.context=Objekti vaatamine tema algses asukohas
-_boolean.and=ja
-_boolean.not=mitte
-_boolean.or=või
+_actionOpenInNewWindow=Avaneb uues aknas
 _facet.by.collection=null
 _facet.by.country=Riikide järgi
 _facet.by.date=Ajaliselt
@@ -117,6 +30,7 @@ _facet.by.year=null
 _failure.search.saved=Päringu salvestamine ebaõnnestus
 _header.actions=Tegevused
 _header.relatedcontent=Sarnased objektid
+_inc_result_table_full.description=Kirjeldus
 _language_select.italian=itaalia (ita)
 _locale.AL=Albaania
 _locale.AM=Armeenia
@@ -186,6 +100,10 @@ _locale.sk=slovaki (slo)
 _locale.sl=sloveeni (slv)
 _locale.sr=serbia (scc)
 _locale.sv=rootsi (sve/swe)
+_menu.i18n.chooselanguage=Vali keel
+_messages.error.emailformaterror=Palun kontrolli e-posti aadressi õigsust ja proovi uuesti
+_messages.error.emailsendfailed=E-kirja saatmine ebaõnnestus
+_messages.notification.emailsent=E-kiri saadetud
 _metadata.dc.contributor=Kaasautor
 _metadata.dc.coverage=Hõlme
 _metadata.dc.creator=Autor
@@ -215,18 +133,61 @@ _metadata.dcterms.replaces=Asendab
 _metadata.dcterms.requires=Vajalik ka
 _metadata.dcterms.spatial=Ruumiline hõlme
 _metadata.dcterms.temporal=Ajaline hõlme
+_metadata.searchfield.contributor=Vahendaja
+_metadata.type.all=Kõik
+_metadata.type.images=Pildid
+_metadata.type.sounds=Helifailid
+_metadata.type.texts=Tekstid
+_metadata.type.video=Video
 _mine.date.saved=Kuupäev salvestatud
 _mine.delete=Kustuta
+_mine.email.address=E-posti aadress
+_mine.firstname=Eesnimi
+_mine.forgotpassword=Ma unustasin oma salasõna
+_mine.itemsaved=Objekt salvestatud
+_mine.itemsavefailed=Objekti salvestamine ebaõnnestus
 _mine.last.name=Perekonnanimi
+_mine.loggedinas=Sisse logitud kui
+_mine.login=Logi sisse
+_mine.logout=Logi välja
+_mine.nosaveditems=Salvestatud objekte ei ole
+_mine.nosavedsearches=Salvestatud päringuid ei ole
+_mine.nosavedtags=Salvestatud märksõnu ei ole
 _mine.saved.items=Salvestatud objektid
 _mine.saved.searches=Salvestatud päringud
 _mine.saved.tags=Salvestatud märksõnad
 _mine.user.information=Kasutajaandmed
+_mine.user.registration.notification.succeed=Registreerumine õnnestus
 _mine.username=Kasutajanimi
-_option.any.field=Mistahes väli
-_prompt.email.address=E-posti aadress
-_prompt.provider=Objekti valdaja
+_portal.menu.languagedropdownlist=Keel
+_portal.ui.message.less=Vähem
+_portal.ui.message.more=Rohkem
+_portal.ui.message.noscript=Selle veebilehe optimaalseks kasutamiseks on vaja aktiveerida JavaScript
+_portal.ui.message.success.search.saved=Päring on salvestatud
+_portal.ui.message.usertags=Kasutajate märksõnad
+_portal.ui.messages.items=Objektid
+_portal.ui.navigation.matchesfor=Päring:
+_portal.ui.navigation.next=Järgmine
+_portal.ui.navigation.of=of
+_portal.ui.navigation.page=Lehekülg
+_portal.ui.notification.error=Viga
+_portal.ui.notification.noitemsfound=Tulemusi ei leitud
+_portal.ui.reset.searchbox=Alusta uuesti
+_portal.ui.results=Tulemused
+_portal.ui.viewingrelateditems=Seotud objektide vaatamine
+_register-request.emailalreadyregistered=See e-posti aadress on juba registreeritud
 _register.email.has.been.sent=E-kiri on saadetud järgmisele aadressile
+_register.emailclicktoconfirm=Registreerimise kinnitamiseks klõpsa järgmisele lingile
+_register.emailuse=E-posti aadress ja salasõna on vajalikud sellele veebilehele sisselogimiseks
+_register.entervalidemail=Palun sisestage korrektne e-posti aadrss
+_register.enteryouremail=Sisesta e-posti aadress
+_register.errordetails=Veaandmed
+_register.finishregistration=Registreerumise lõpetamine
+_register.iagree=Nõustun
+_register.linkexpired=Registreerumise lõpuleviimiseks kasutatud link on vigane või aegunud
+_register.mycodeofconduct=Ma olen teadlik, et Minu Europeana annab mulle võimalusi lisada kõigile objektidele märksõnu. Ma luban käesolevaga, et ei lisa märksõnu, mida võib tõlgendada laimavate, kahjulike, ähvardavate, ebaseaduslike, solvavate, ahistavate, pornograafiliste, labaste, rahvuslikku või rassivaenu õhutavate, kellegi privaatsust ja muid õigusi rikkuvate või muul viisil ebakohastena. Sellele nupule klõpsates kinnitan ma oma nõustumist eelnevalt öelduga. Nende reeglite eiramine toob kaasa Minu Europeana kasutajatunnuse kustutamise.
+_register.mycodeofconductrequired=Minu Europeanaga liitumiseks peate nõustuma meie sisekorra eeskirjadega
+_register.password=Salasõna
 _register.password.choose=Valige salasõna
 _register.password.explain=Salasõna pikkus peab olema 6-30 tähemärki
 _register.pick.user.name=Kasutajanime näidatakse pärast sisselogimist
@@ -234,13 +195,25 @@ _register.please.follow.link=Palun klõpsa e-kirjas antud lingile ja vii registr
 _register.register=Registreeru
 _register.registration.failed=Sinu registreeringu töötlemisel tekkis viga. Palun proovi uuesti
 _register.repeat.password=Korrake salasõna
+_register.requiredfield=Selle välja täitmine on kohustuslik
 _register.username.choose=Vali kasutajanimi
 _register.username.explain=Kui olete sisse loginud, näidatakse Teie kasutajanime
+_search.boolean.and=ja
+_search.boolean.not=mitte
+_search.boolean.or=või
+_search.field.any.field=Mistahes väli
 _search.field.creator=Autor
 _search.field.date=Kuupäev
-_search.option.subject=Teema
-_search.option.title=Pealkiri
-_success.search.saved=Päring on salvestatud
+_search.field.provider=Objekti valdaja
+_search.field.subject=Teema
+_search.field.title=Pealkiri
+_toberemoved.althome=Tagasi Europeana avalehele
+_toberemoved.altlogoeuropeana=logo Europeana tunne kultuuri
+_toberemoved.checkthefaqs=Vaadake korduma kippuvaid küsimusi - võib-olla on sobiv vastus seal juba olemas
+_toberemoved.communities=Kogukonnad
+_toberemoved.contributorexplain=Need on organisatsioonid, kes lisavad Europeanasse materjali - digiteeritud maale, raamatuid, raadiosaateid jms. Mõned neist on vahendajad* - näiteks Culture.fr on neist suurim, vahendades andmeid 480 Prantsusmaa organisatsioonilt, teiste seas Louvre ja Musée d'Orsay. Vahendaja kaudu andmeid edastavate organisatsioonide arv on näidatud sulgudes vahendaja nime järel, nt Videoactive (10)
+_toberemoved.emaileuropeanateam=Europeana meeskond
+_toberemoved.using.europeana=Europeana kasutamine
 _unused.about.us=Meist
 _unused.accessibility=Juurdepääs
 _unused.add=Lisa
@@ -249,10 +222,34 @@ _unused.altprint=Lehekülje trükkimine
 _unused.aplacetoshareideas=koht ideede ja inspiratsiooni saamiseks. Otsige Europeana kogudest, järgige teiste kasutajate käidud radu ja jagage oma avastusi.
 _unused.bosnia.and.herzegovina=Bosnia ja Hertsegoviina
 _unused.browse.through.time=Sirvimine läbi aja
+_unused.contacts=Kontaktandmed
+_unused.contributors=Vahendajad
+_unused.country=Riik
+_unused.createaccount=Kasutajakonto loomine
+_unused.emailwelcome=Tere tulemast Minu Europeanasse
+_unused.enewsoptin=Palun mind teavitada Europeana edasiarendustest
+_unused.featuredisabled=See teenus hetkel ei toimi.
+_unused.feedbackresponse=Täname väga tagasiside eest Kui Teie tagasiside eeldab vastust, siis võtab keegi Europeana meeskonna liikmetest Teiega esimesel võimalusel ühendust. Kiirema vastuse kindlustab inglise keeles jäetud kommentaarid.
+_unused.findoutmore=Rohkem teavet
+_unused.fromourparnters=Meie partneritelt - muuseumitelt, raamatukogudelt, dokumendi-, heli ja filmiarhiividelt
+_unused.fundedby=Euroopa Liidu kaasrahastamisel
+_unused.fyrom=Endine Jugoslaavia Vabariik Makedoonia
+_unused.hideadvancedsearch=Peida kompleksotsing
+_unused.image=Pilt
+_unused.invalidquery=Vigane päring
+_unused.itemdetails=Objekti andmed
+_unused.languagepolicy=Keelepoliitika
+_unused.newcontent=Uus sisu
 _unused.other=muu
+_unused.partner=Partner
+_unused.partnerexplain=Need on partnerid, kelle koostöös Europeana sündis, ja kes esindavad Europeanat oma riikides ning erialaorganisatsioonides
+_unused.partners=Partnerid
+_unused.peoplearecurrentlythinkingabout=Hetkel kasutajate mõtetes
 _unused.privacy=Privaatsus
+_unused.registeragain=Taasregistreerumine
 _unused.remember.me=Mäleta mind selles arvutis
 _unused.remove=Eemalda
+_unused.sector=Valdkond
 _unused.send.feedback=Andke meile tagasisidet
 _unused.share.your.ideas=Jagage oma mõtteid
 _unused.show.all=Näita kõiki
@@ -260,17 +257,20 @@ _unused.sign.in=Sisselogimine
 _unused.site.map=Veebilehe kaart
 _unused.slovenia=Sloveenia
 _unused.sound=Heli
+_unused.strorylinecredits=Süžee ja lõputiitrid
 _unused.tag.added=Märksõna lisatud
 _unused.tag.addition.failed=Märksõna lisamine ebaõnnestus
 _unused.tagging=Märksõnastamine
 _unused.terms.and.conditions=Kasutustingimused
 _unused.text=Tekst
-_unused.username.in.use=on juba kasutusel. Palun valige teistsugune kasutajanimi
-_unused.usertags=Kasutajate märksõnad
-_unused.using.europeana=Europeana kasutamine
-_unused.view.as.xml=Vaata XML-vormingus
-_unused.view.with.labels=Vaata koos siltidega
-_unused.view.without.labels=Vaata ilma siltideta
-_unused.you.have.search.for=Otsiti
-languageDropDownList_t=Keel
-registrationSucceed_t=Registreerumine õnnestus
+_unused.thisiseuropeana=See on Europeana
+_unused.thoughtlab=Mõttelabor
+_unused.timeline=Ajatelg
+_unused.timelinenavigator=Ajateljel liikumine
+_unused.userconduct=Sisekorra eeskiri
+_unused.userconductagree=Ma olen teadlik, et Minu Europeana annab mulle võimalusi lisada kõigile objektidele märksõnu. Ma luban käesolevaga, et ei lisa märksõnu, mida võib tõlgendada laimavate, kahjulike, ähvardavate, ebaseaduslike, solvavate, ahistavate, pornograafiliste, labaste, rahvuslikku või rassivaenu õhutavate, kellegi privaatsust ja muid õigusi rikkuvate või muul viisil ebakohastena. Sellele nupule klõpsates kinnitan ma oma nõustumist eelnevalt öelduga. Nende reeglite eiramine toob kaasa Minu Europeana kasutajatunnuse kustutamise. OLEN NÕUS
+_unused_portal.ui.message.view.as.xml=Vaata XML-vormingus
+_unused_portal.ui.message.view.with.labels=Vaata koos siltidega
+_unused_portal.ui.message.view.without.labels=Vaata ilma siltideta
+_unused_portal.ui.message.you.have.search.for=Otsiti
+_unused_validation.username.in.use=on juba kasutusel. Palun valige teistsugune kasutajanimi
