--- a/portal/src/main/resources/i18n/messages_fi.properties
+++ b/portal/src/main/resources/i18n/messages_fi.properties
@@ -1,88 +1,3 @@
-All_t=Kaikki
-AltHome_t=Europeanan etusivulle - klikkaa tästä
-AltLogoEuropeana_t=logo Europeana ajattele kulttuuria
-CheckTheFaqs_t=Käy läpi usein kysytyt kysymykset – ne saattavat kattaa palautteesi aihealueen
-ChooseLanguage_t=Valitse kieli
-Communities_t=Toimijat
-Contacts_t=Yhteystiedot
-ContributorExplain_t=Nämä organisaatiot osallistuvat sisällön – digitoitujen maalausten, kirjojen, lähetysten jne. – toimittamiseen. Osa organisaatioista on aggregaattoreita*, Culture.fr on aggregaattoreista suurin toimittaessaan sisältöä noin 480 organisaatiosta Ranskassa, näiden joukossa Louvre ja Musée d’Orsay. Aggregaattorille sisältöä toimittavien organisaatioiden määrä on merkitty sulkuihin aggregaattorin nimen jälkeen esim. Videoactive (10)
-Contributor_t=Osallistuja
-Contributors_t=Osallistujat
-Country_t=Maa
-CreateAccount_t=Luo tili
-Description_t=Kuvaus
-EmailAlreadyRegistered_t=Tämä sähköposti on jo rekisteröity
-EmailClickToConfirm_t=Vahvista rekisteröitymisesi klikkaamalla linkkiä
-EmailEuropeanaTeam_t=Europeana-tiimi
-EmailFormatError_t=Tarkista että sähköpostisi tiedot ovat oikein ja yritä uudelleen
-EmailSendFailed_t=Sähköpostin lähettäminen epäonnistui
-EmailSent_t=Sähköposti on lähetetty
-EmailUse_t=Kirjaudu käyttämällä sähköpostiosoitetta ja salasanaa
-EmailWelcome_t=Tervetuloa minun Europeanaani
-EnewsOptin_t=Pidä minut ajan tasalla Europeanan kehityksestä
-EnterValidEmail_t=Lisää tähän voimassa oleva sähköpostiosoite
-EnterYourEmail_t=Syötä sähköpostiosoitteesi
-ErrorDetails_t=Virheen tiedot
-Error_t=Virhe
-FYROM_t=Entinen Jugoslavian tasavalta Makedonia
-FeatureDisabled_t=Ominaisuus ei tällä hetkellä toimi.
-FeedbackResponse_t=Kiitokset palautteestasi. Jos palautteesi edellyttää vastausta, Europeana-tiimin jäsen ottaa sinuun yhteyttä mahdollisimman pian. Saadaksesi vastauksen nopeammin jätä palautteesi englanniksi.
-FindOutMore_t=Lisää tietoa
-FinishRegistration_t=Hyväksy rekisteröityminen
-FirstName_t=Etunimi
-ForgotPassword_t=Unohtunut salasana
-FromOurParnters_t=Kumppaneiltamme - museoista, arkistoista, kirjastoista ja audiovisuaalisista kokoelmista
-FundedBy_t=rahoittajana Euroopan unioni
-HideAdvancedSearch_t=Piilota tarkennettu haku
-IAgree_t=Hyväksyn
-Image_t=Kuva
-Images_t=Kuvat
-InvalidQuery_t=Virheellinen kysely
-ItemDetails_t=Kohteen tiedot
-ItemSaveFailed_t=Kohteen tallentaminen epäonnistui
-ItemSaved_t=Kohde tallennettu
-Items_t=Kohteet
-LanguagePolicy_t=Kielipolitiikka
-Less_t=Vähemmän
-LinkExpired_t=Rekisteröitymiseen käyttämäsi linkki on virheellinen tai vanhentunut.
-LogIn_t=Kirjaudu sisään
-LogOut_t=Kirjaudu ulos
-LoggedInAs_t=Olet kirjautunut käyttäjänä
-MatchesFor_t=Osumia
-More_t=Enemmän
-MyCodeOfConductRequired_t=Sinun on hyväksyttävä menettelyohjeemme rekisteröityäksesi ”Minun Europeanaani”
-MyCodeOfConduct_t=Ymmärrän, että "Minun Europeanani" antaa mahdollisuuden luoda tageja mistä tahansa aiheesta. Sitoudun siihen, että en luo tageja, joita voi pitää herjaavina, vahingollisina, uhkaavina, lainvastaisina, loukkaavina, kajoavina, solvaavina, yllyttävinä, häiritsevinä, pornografisina, rivoina, valheellisina, yksityisiä tai julkisia oikeuksia loukkaavina, vastenmielisinä tai rotuun tai etniseen alkuperään liittyvistä syistä ei-toivottuina. Klikkaamalla tätä laatikkoa sitoudun tähän sopimukseen ja ymmärrän, että jos en niin tee, niin jäsenyyteni "Minun Europeanaani" lakkautetaan.
-NewContent_t=Uusi sisältö
-Next_t=Seuraava
-NoItemsFound_t=Kohteita ei löytynyt
-NoSavedItems_t=Ei tallennettuja kohteita
-NoSavedSearches_t=Ei tallennettuja hakuja
-NoSavedTags_t=Ei tallennetuja tageja
-NoScript_t=Saadaksesi tästä sivustosta parhaan mahdollisen hyödyn sinulla täytyy olla käytössä JavaScript
-Of_t=mistä:
-OpensInNewWindow_t=Avaa uudessa ikkunassa
-Page_t=Sivu
-PartnerExplain_t=Tämä on Europeanan aikaansaamiseksi yhteistyötä tehneiden ja maissaan sekä ammattilaisten järjestöissä Europeanaa edustavien kumppanien verkosto.
-Partner_t=Kumppani
-Partners_t=Kumppanit
-Password_t=Salasana
-PeopleAreCurrentlyThinkingAbout_t=Juuri nyt käyttäjiä kiinnostaa
-RegisterAgain_t=Rekisteröidy uudestaan
-RequiredField_t=Tämä on pakollinen kenttä
-Reset_t=Päivitä
-Results_t=Tulokset
-Sector_t=Sektori
-Sounds_t=Äänitteet
-StrorylineCredits_t=Juoni ja meriitit
-Texts_t=Tekstit
-ThisIsEuropeana_t=Mikä Europeana on
-ThoughtLab_t=Ideahautomo
-TimelineNavigator_t=Aikajananavigaattori
-Timeline_t=Aikajana
-UserConductAgree_t=Ymmärrän, että "Minun Europeanani" antaa mahdollisuuden luoda tageja mistä tahansa aiheesta. Sitoudun siihen, että en luo tageja, joita voi pitää herjaavina, vahingollisina, uhkaavina, lainvastaisina, loukkaavina, kajoavina, solvaavina, yllyttävinä, häiritsevinä, pornografisina, rivoina, valheellisina, yksityisiä tai julkisia oikeuksia loukkaavina, vastenmielisinä tai rotuun tai etniseen alkuperään liittyvistä syistä ei-toivottuina. Klikkaamalla tätä laatikkoa sitoudun tähän sopimukseen ja ymmärrän, että jos en niin tee, niin jäsenyyteni "Minun Europeanaani" lakkautetaan. HYVÄKSY KLIKKAAMALLA
-UserConduct_t=Käyttäjämenettely
-Video_t=Video
-ViewingRelatedItems_t=Muita tähän liittyviä kohteita
 _action.add.annotation=null
 _action.add.tag=Lisää tagi
 _action.advanced.search=Tarkennettu haku
@@ -103,9 +18,7 @@ _action.send=Lähetä
 _action.share.with.friend=Jaa ystävälle
 _action.videos=Videot
 _action.view.in.original.context=Tarkastele alkuperäisessä yhteydessä
-_boolean.and=ja
-_boolean.not=ei
-_boolean.or=tai
+_actionOpenInNewWindow=Avaa uudessa ikkunassa
 _facet.by.collection=null
 _facet.by.country=Maan mukaan
 _facet.by.date=Aikamääreen mukaan
@@ -117,6 +30,7 @@ _facet.by.year=null
 _failure.search.saved=Haun tallentaminen epäonnistui
 _header.actions=Tapahtumat
 _header.relatedcontent=Tähän liittyvä sisältö
+_inc_result_table_full.description=Kuvaus
 _language_select.italian=italia (ita)
 _locale.AL=Albania
 _locale.AM=Armenia
@@ -186,6 +100,10 @@ _locale.sk=slovakia (slo)
 _locale.sl=slovenia (slv)
 _locale.sr=serbia (scc)
 _locale.sv=ruotsi (sve/swe)
+_menu.i18n.chooselanguage=Valitse kieli
+_messages.error.emailformaterror=Tarkista että sähköpostisi tiedot ovat oikein ja yritä uudelleen
+_messages.error.emailsendfailed=Sähköpostin lähettäminen epäonnistui
+_messages.notification.emailsent=Sähköposti on lähetetty
 _metadata.dc.contributor=Muu tekijä
 _metadata.dc.coverage=Kattavuus
 _metadata.dc.creator=Tekijä
@@ -215,18 +133,61 @@ _metadata.dcterms.replaces=Korvaa
 _metadata.dcterms.requires=Vaatii
 _metadata.dcterms.spatial=Alueellinen kattavuus
 _metadata.dcterms.temporal=Ajallinen kattavuus
+_metadata.searchfield.contributor=Osallistuja
+_metadata.type.all=Kaikki
+_metadata.type.images=Kuvat
+_metadata.type.sounds=Äänitteet
+_metadata.type.texts=Tekstit
+_metadata.type.video=Video
 _mine.date.saved=Ajankohta tallennettu
 _mine.delete=Hylkää
+_mine.email.address=Sähköpostiosoite
+_mine.firstname=Etunimi
+_mine.forgotpassword=Unohtunut salasana
+_mine.itemsaved=Kohde tallennettu
+_mine.itemsavefailed=Kohteen tallentaminen epäonnistui
 _mine.last.name=Sukunimi
+_mine.loggedinas=Olet kirjautunut käyttäjänä
+_mine.login=Kirjaudu sisään
+_mine.logout=Kirjaudu ulos
+_mine.nosaveditems=Ei tallennettuja kohteita
+_mine.nosavedsearches=Ei tallennettuja hakuja
+_mine.nosavedtags=Ei tallennetuja tageja
 _mine.saved.items=Tallennetut kohteet
 _mine.saved.searches=Tallennetut haut
 _mine.saved.tags=Tallennetut tagit
 _mine.user.information=Tiedot käyttäjästä
+_mine.user.registration.notification.succeed=Rekisteröitymisesi onnistui
 _mine.username=Käyttäjätunnus
-_option.any.field=Kaikki kentät
-_prompt.email.address=Sähköpostiosoite
-_prompt.provider=Julkaisija
+_portal.menu.languagedropdownlist=Kieli
+_portal.ui.message.less=Vähemmän
+_portal.ui.message.more=Enemmän
+_portal.ui.message.noscript=Saadaksesi tästä sivustosta parhaan mahdollisen hyödyn sinulla täytyy olla käytössä JavaScript
+_portal.ui.message.success.search.saved=Haku tallennettu
+_portal.ui.message.usertags=Käyttäjätagit (vapaasti määritellyt avainsanat)
+_portal.ui.messages.items=Kohteet
+_portal.ui.navigation.matchesfor=Osumia
+_portal.ui.navigation.next=Seuraava
+_portal.ui.navigation.of=mistä:
+_portal.ui.navigation.page=Sivu
+_portal.ui.notification.error=Virhe
+_portal.ui.notification.noitemsfound=Kohteita ei löytynyt
+_portal.ui.reset.searchbox=Päivitä
+_portal.ui.results=Tulokset
+_portal.ui.viewingrelateditems=Muita tähän liittyviä kohteita
+_register-request.emailalreadyregistered=Tämä sähköposti on jo rekisteröity
 _register.email.has.been.sent=Sähköposti on lähetetty osoitteeseen
+_register.emailclicktoconfirm=Vahvista rekisteröitymisesi klikkaamalla linkkiä
+_register.emailuse=Kirjaudu käyttämällä sähköpostiosoitetta ja salasanaa
+_register.entervalidemail=Lisää tähän voimassa oleva sähköpostiosoite
+_register.enteryouremail=Syötä sähköpostiosoitteesi
+_register.errordetails=Virheen tiedot
+_register.finishregistration=Hyväksy rekisteröityminen
+_register.iagree=Hyväksyn
+_register.linkexpired=Rekisteröitymiseen käyttämäsi linkki on virheellinen tai vanhentunut.
+_register.mycodeofconduct=Ymmärrän, että "Minun Europeanani" antaa mahdollisuuden luoda tageja mistä tahansa aiheesta. Sitoudun siihen, että en luo tageja, joita voi pitää herjaavina, vahingollisina, uhkaavina, lainvastaisina, loukkaavina, kajoavina, solvaavina, yllyttävinä, häiritsevinä, pornografisina, rivoina, valheellisina, yksityisiä tai julkisia oikeuksia loukkaavina, vastenmielisinä tai rotuun tai etniseen alkuperään liittyvistä syistä ei-toivottuina. Klikkaamalla tätä laatikkoa sitoudun tähän sopimukseen ja ymmärrän, että jos en niin tee, niin jäsenyyteni "Minun Europeanaani" lakkautetaan.
+_register.mycodeofconductrequired=Sinun on hyväksyttävä menettelyohjeemme rekisteröityäksesi ”Minun Europeanaani”
+_register.password=Salasana
 _register.password.choose=Valitse salasana
 _register.password.explain=Salasanan tulee olla 6 - 30 merkkiä pitkä
 _register.pick.user.name=Käyttäjätunnus tulee näkyviin kun olet kirjautunut sisään
@@ -234,13 +195,25 @@ _register.please.follow.link=Rekisteröidy sähköpostissa olevan linkin kautta
 _register.register=Rekisteröityminen
 _register.registration.failed=Rekisteröitymisesi käsittelyssä on tapahtunut virhe. Yritä uudelleen
 _register.repeat.password=Toista salasana
+_register.requiredfield=Tämä on pakollinen kenttä
 _register.username.choose=Valitse käyttäjätunnus
 _register.username.explain=Käyttäjätunnus tulee näkyviin kun olet kirjautunut sisään
+_search.boolean.and=ja
+_search.boolean.not=ei
+_search.boolean.or=tai
+_search.field.any.field=Kaikki kentät
 _search.field.creator=Tekijä
 _search.field.date=Aika
-_search.option.subject=Aihe
-_search.option.title=Nimi
-_success.search.saved=Haku tallennettu
+_search.field.provider=Julkaisija
+_search.field.subject=Aihe
+_search.field.title=Nimi
+_toberemoved.althome=Europeanan etusivulle - klikkaa tästä
+_toberemoved.altlogoeuropeana=logo Europeana ajattele kulttuuria
+_toberemoved.checkthefaqs=Käy läpi usein kysytyt kysymykset – ne saattavat kattaa palautteesi aihealueen
+_toberemoved.communities=Toimijat
+_toberemoved.contributorexplain=Nämä organisaatiot osallistuvat sisällön – digitoitujen maalausten, kirjojen, lähetysten jne. – toimittamiseen. Osa organisaatioista on aggregaattoreita*, Culture.fr on aggregaattoreista suurin toimittaessaan sisältöä noin 480 organisaatiosta Ranskassa, näiden joukossa Louvre ja Musée d’Orsay. Aggregaattorille sisältöä toimittavien organisaatioiden määrä on merkitty sulkuihin aggregaattorin nimen jälkeen esim. Videoactive (10)
+_toberemoved.emaileuropeanateam=Europeana-tiimi
+_toberemoved.using.europeana=Näin käytät Europeanaa
 _unused.about.us=Tietoa meistä
 _unused.accessibility=Saavutettavuus
 _unused.add=Lisää
@@ -249,10 +222,34 @@ _unused.altprint=Tulosta tämä sivu
 _unused.aplacetoshareideas=paikka elämyksille ja ideoille. Hae Euroopan kulttuuriaarteiden kokoelmista, liity käyttäjien yhteisöön ja jaa kokemuksesi muiden kanssa.
 _unused.bosnia.and.herzegovina=Bosnia-Herzegovina
 _unused.browse.through.time=Selaa aikakausittain
+_unused.contacts=Yhteystiedot
+_unused.contributors=Osallistujat
+_unused.country=Maa
+_unused.createaccount=Luo tili
+_unused.emailwelcome=Tervetuloa minun Europeanaani
+_unused.enewsoptin=Pidä minut ajan tasalla Europeanan kehityksestä
+_unused.featuredisabled=Ominaisuus ei tällä hetkellä toimi.
+_unused.feedbackresponse=Kiitokset palautteestasi. Jos palautteesi edellyttää vastausta, Europeana-tiimin jäsen ottaa sinuun yhteyttä mahdollisimman pian. Saadaksesi vastauksen nopeammin jätä palautteesi englanniksi.
+_unused.findoutmore=Lisää tietoa
+_unused.fromourparnters=Kumppaneiltamme - museoista, arkistoista, kirjastoista ja audiovisuaalisista kokoelmista
+_unused.fundedby=rahoittajana Euroopan unioni
+_unused.fyrom=Entinen Jugoslavian tasavalta Makedonia
+_unused.hideadvancedsearch=Piilota tarkennettu haku
+_unused.image=Kuva
+_unused.invalidquery=Virheellinen kysely
+_unused.itemdetails=Kohteen tiedot
+_unused.languagepolicy=Kielipolitiikka
+_unused.newcontent=Uusi sisältö
 _unused.other=muu
+_unused.partner=Kumppani
+_unused.partnerexplain=Tämä on Europeanan aikaansaamiseksi yhteistyötä tehneiden ja maissaan sekä ammattilaisten järjestöissä Europeanaa edustavien kumppanien verkosto.
+_unused.partners=Kumppanit
+_unused.peoplearecurrentlythinkingabout=Juuri nyt käyttäjiä kiinnostaa
 _unused.privacy=Tietosuoja
+_unused.registeragain=Rekisteröidy uudestaan
 _unused.remember.me=Muista tunnukset
 _unused.remove=Poista
+_unused.sector=Sektori
 _unused.send.feedback=Lähetä meille palautetta
 _unused.share.your.ideas=Jaa ideoitasi
 _unused.show.all=Näytä kaikki
@@ -260,17 +257,20 @@ _unused.sign.in=Kirjaudu sisään
 _unused.site.map=Sivukartta
 _unused.slovenia=Slovenia
 _unused.sound=Äänite
+_unused.strorylinecredits=Juoni ja meriitit
 _unused.tag.added=Tagi lisätty
 _unused.tag.addition.failed=Tagin lisääminen epäonnistui
 _unused.tagging=tagging (avainsanojen vapaa määrittely)
 _unused.terms.and.conditions=Käyttöehdot
 _unused.text=Teksti
-_unused.username.in.use=on käytössä. Valitse toinen käyttäjätunnus
-_unused.usertags=Käyttäjätagit (vapaasti määritellyt avainsanat)
-_unused.using.europeana=Näin käytät Europeanaa
-_unused.view.as.xml=Tarkastele XML-muodossa
-_unused.view.with.labels=Otsikkonäyttö
-_unused.view.without.labels=Näyttö ilman otsikkoja
-_unused.you.have.search.for=Olet tehnyt haun:
-languageDropDownList_t=Kieli
-registrationSucceed_t=Rekisteröitymisesi onnistui
+_unused.thisiseuropeana=Mikä Europeana on
+_unused.thoughtlab=Ideahautomo
+_unused.timeline=Aikajana
+_unused.timelinenavigator=Aikajananavigaattori
+_unused.userconduct=Käyttäjämenettely
+_unused.userconductagree=Ymmärrän, että "Minun Europeanani" antaa mahdollisuuden luoda tageja mistä tahansa aiheesta. Sitoudun siihen, että en luo tageja, joita voi pitää herjaavina, vahingollisina, uhkaavina, lainvastaisina, loukkaavina, kajoavina, solvaavina, yllyttävinä, häiritsevinä, pornografisina, rivoina, valheellisina, yksityisiä tai julkisia oikeuksia loukkaavina, vastenmielisinä tai rotuun tai etniseen alkuperään liittyvistä syistä ei-toivottuina. Klikkaamalla tätä laatikkoa sitoudun tähän sopimukseen ja ymmärrän, että jos en niin tee, niin jäsenyyteni "Minun Europeanaani" lakkautetaan. HYVÄKSY KLIKKAAMALLA
+_unused_portal.ui.message.view.as.xml=Tarkastele XML-muodossa
+_unused_portal.ui.message.view.with.labels=Otsikkonäyttö
+_unused_portal.ui.message.view.without.labels=Näyttö ilman otsikkoja
+_unused_portal.ui.message.you.have.search.for=Olet tehnyt haun:
+_unused_validation.username.in.use=on käytössä. Valitse toinen käyttäjätunnus
