--- a/portal/src/main/resources/i18n/messages_fr.properties
+++ b/portal/src/main/resources/i18n/messages_fr.properties
@@ -1,88 +1,3 @@
-All_t=Tout
-AltHome_t=Cliquer ici pour retourner à la page d'accueil
-AltLogoEuropeana_t=logo Europeana pensez culture
-CheckTheFaqs_t=Vérifier les FAQ- ils peuvent contenir une réponse
-ChooseLanguage_t=Choisir une langue
-Communities_t=Communautés
-Contacts_t=Contacts
-ContributorExplain_t=Ce sont les organisations qui ont versé les objets numérisés - tableaux, livres, émissions etc... Certains des contributeurs sont des agrégateurs*, Culture.fr en est le plus important, fournissant le contenu de plus de 480 organisations en France, incluant le Louvre et le Musée d'Orsay. Le nombre d'organisations appartenant à un agrégateur figure entre parenthèses après celui-ci, comme par exemple Videoactive (10)
-Contributor_t=Contributeur
-Contributors_t=Contributeurs
-Country_t=Pays
-CreateAccount_t=Créer un compte
-Description_t=Description
-EmailAlreadyRegistered_t=Cette adresse mél est déjà enregistrée
-EmailClickToConfirm_t=Veuillez cliquer sur le lien pour confirmer votre inscription
-EmailEuropeanaTeam_t=L'équipe Europeana
-EmailFormatError_t=Veuillez vous assurer de la validité de votre adresse mél et réessayer
-EmailSendFailed_t=le mél. n'a pas pu être envoyé
-EmailSent_t=Mél. envoyé
-EmailUse_t=Vous devez entrer votre adresse mél et votre mot de passe pour vous ouvrir une session
-EmailWelcome_t=Bienvenue sur Mon Europeana
-EnewsOptin_t=Rester en contact avec les nouveaux développements d'Europeana
-EnterValidEmail_t=Veuillez entrer une adresse mél. valide
-EnterYourEmail_t=Entrer votre adresse mél.
-ErrorDetails_t=Détails de l'erreur
-Error_t=Erreur
-FYROM_t=Ancienne République yougoslave de Macédoine
-FeatureDisabled_t=Cette fonction est actuellement désactivée
-FeedbackResponse_t=Recevez nos remerciements pour votre remarque. Si votre remarque nécessite une réponse un membre de l'équipe d'Europeana vous contactera dès que possible. Pour une réponse plus rapide, veuillez soumettre votre remarque en anglais.
-FindOutMore_t=Plus de résultats sur
-FinishRegistration_t=Finir l'enregistrement
-FirstName_t=Prénom
-ForgotPassword_t=J'ai oublié mon mot de passe
-FromOurParnters_t=de nos partenaires des musées, des centres d'archives, des bibliothèques et des collections audiovisuelles
-FundedBy_t=co-financé par l'Union européenne
-HideAdvancedSearch_t=Masquer la recherche avancée
-IAgree_t=J'accepte
-Image_t=Image
-Images_t=Images
-InvalidQuery_t=Requête invalide
-ItemDetails_t=Détails de l'objet
-ItemSaveFailed_t=Sauvegarde échouée
-ItemSaved_t=Objet sauvegardé
-Items_t=Objets
-LanguagePolicy_t=Politique en matière de langues
-Less_t=Moins
-LinkExpired_t=Le lien que vous utilisez pour terminer votre inscription est invalide ou a expiré
-LogIn_t=Se connecter
-LogOut_t=Se déconnecter
-LoggedInAs_t=Ouvrir une session sous
-MatchesFor_t=Réponses pour
-More_t=Plus
-MyCodeOfConductRequired_t=Vous acceptez notre code de conduite pour vous inscrire sur Mon Europeana
-MyCodeOfConduct_t=J’accepte les conditions sous lesquelles je crée les étiquettes pour les objets que j’aurai choisis. J'accepte de ne pas créer d'étiquette qui pourrait être considérée comme diffamatoire, dommageable, préjudiciable, illégale, calomnieuse, incorrecte, injurieuse, provocatrice, gênante, pornographique, obscène, malhonnête, haineuse ou raciale d'un point de vue ethnique ou de toute autre manière qui pourrait être considérée comme choquante. J’accepte de ne pas créer d’étiquette qui serait susceptible de porter atteinte au respect de la vie privée ou qui ne pourrait être diffusé. En cliquant sur cette case, j'accepte de respecter les termes de l'accord. Dans le cas contraire, mon inscription à Europeana sera interrompue.
-NewContent_t=Nouveau contenu
-Next_t=Suivant
-NoItemsFound_t=Pas d'objets trouvés
-NoSavedItems_t=Pas d'objet sauvegardé
-NoSavedSearches_t=Pas de recherche sauvegardée
-NoSavedTags_t=Pas d'étiquette sauvegardée
-NoScript_t=Pour avoir une utilisation optimale du site web, vous avez besoin d'activer Javascript
-Of_t=de
-OpensInNewWindow_t=Ouvrir dans une nouvelle fenêtre
-Page_t=Page
-PartnerExplain_t=C'est le réseau des partenaires qui ont collaboré à créer Europeana et qui représentent Europeana dans leur pays et dans les associations professionnelles.
-Partner_t=Partenaire
-Partners_t=Partenaires
-Password_t=Mot de passe
-PeopleAreCurrentlyThinkingAbout_t=On pense actuellement à
-RegisterAgain_t=S'enregister à nouveau
-RequiredField_t=C'est un champ requis
-Reset_t=Réinitialiser
-Results_t=Résultats
-Sector_t=Secteur
-Sounds_t=Sons
-StrorylineCredits_t=Plan et crédits
-Texts_t=Textes
-ThisIsEuropeana_t=Europeana
-ThoughtLab_t=Laboratoire d'idées
-TimelineNavigator_t=Barre de navigation de la frise chronologique
-Timeline_t=Frise chronologique
-UserConductAgree_t=J’accepte les conditions sous lesquelles je crée les étiquettes pour les objets que j’aurai choisis. J'accepte de ne pas créer d'étiquette qui pourrait être considérée comme diffamatoire, dommageable, préjudiciable, illégale, calomnieuse, incorrecte, injurieuse, provocatrice, gênante, pornographique, obscène, malhonnête, haineuse ou raciale d'un point de vue ethnique ou de toute autre manière qui pourrait être considérée comme choquante. J’accepte de ne pas créer d’étiquette qui serait susceptible de porter atteinte au respect de la vie privée ou qui ne pourrait être diffusé. En cliquant sur cette case, j'accepte de respecter les termes de l'accord. Dans le cas contraire, mon inscription à Europeana sera interrompue. CLIQUER POUR ACCEPTER
-UserConduct_t=Code d'utilisation
-Video_t=Video
-ViewingRelatedItems_t=Visualiser les objets en relation
 _action.add.annotation=null
 _action.add.tag=Ajouter une étiquette
 _action.advanced.search=Recherche avancée
@@ -103,9 +18,7 @@ _action.send=Envoyer
 _action.share.with.friend=Partager avec un ami
 _action.videos=Videos
 _action.view.in.original.context=Voir dans le contexte d'origine
-_boolean.and=et
-_boolean.not=sauf
-_boolean.or=ou
+_actionOpenInNewWindow=Ouvrir dans une nouvelle fenêtre
 _facet.by.collection=null
 _facet.by.country=Par pays
 _facet.by.date=Par date
@@ -117,6 +30,7 @@ _facet.by.year=null
 _failure.search.saved=Sauvegarde de la recherche échouée
 _header.actions=Actions
 _header.relatedcontent=Contenu en relation
+_inc_result_table_full.description=Description
 _language_select.italian=Italien (ita)
 _locale.AL=Albanie
 _locale.AM=Arménie
@@ -186,6 +100,10 @@ _locale.sk=Slovaque (slo)
 _locale.sl=Slovène (slv)
 _locale.sr=Serbe (scc)
 _locale.sv=Suédois (sve/swe)
+_menu.i18n.chooselanguage=Choisir une langue
+_messages.error.emailformaterror=Veuillez vous assurer de la validité de votre adresse mél et réessayer
+_messages.error.emailsendfailed=le mél. n'a pas pu être envoyé
+_messages.notification.emailsent=Mél. envoyé
 _metadata.dc.contributor=Contributeur
 _metadata.dc.coverage=Couverture
 _metadata.dc.creator=Auteur
@@ -215,18 +133,61 @@ _metadata.dcterms.replaces=Remplace
 _metadata.dcterms.requires=Nécessite
 _metadata.dcterms.spatial=Couverture spatiale
 _metadata.dcterms.temporal=Couverture temporelle
+_metadata.searchfield.contributor=Contributeur
+_metadata.type.all=Tout
+_metadata.type.images=Images
+_metadata.type.sounds=Sons
+_metadata.type.texts=Textes
+_metadata.type.video=Video
 _mine.date.saved=Date sauvegardée
 _mine.delete=Détruire
+_mine.email.address=Adresse mél.
+_mine.firstname=Prénom
+_mine.forgotpassword=J'ai oublié mon mot de passe
+_mine.itemsaved=Objet sauvegardé
+_mine.itemsavefailed=Sauvegarde échouée
 _mine.last.name=Nom
+_mine.loggedinas=Ouvrir une session sous
+_mine.login=Se connecter
+_mine.logout=Se déconnecter
+_mine.nosaveditems=Pas d'objet sauvegardé
+_mine.nosavedsearches=Pas de recherche sauvegardée
+_mine.nosavedtags=Pas d'étiquette sauvegardée
 _mine.saved.items=Objets sauvegardés
 _mine.saved.searches=Recherches sauvegardées
 _mine.saved.tags=Etiquettes sauvegardées
 _mine.user.information=Information pour l'utilisateur
+_mine.user.registration.notification.succeed=Vous êtes enregistré avec succès
 _mine.username=Nom d'utilisateur
-_option.any.field=N'importe quel champ
-_prompt.email.address=Adresse mél.
-_prompt.provider=Fournisseur
+_portal.menu.languagedropdownlist=Langue
+_portal.ui.message.less=Moins
+_portal.ui.message.more=Plus
+_portal.ui.message.noscript=Pour avoir une utilisation optimale du site web, vous avez besoin d'activer Javascript
+_portal.ui.message.success.search.saved=Recherche sauvegardée
+_portal.ui.message.usertags=Les étiquettes de l'utilisateur
+_portal.ui.messages.items=Objets
+_portal.ui.navigation.matchesfor=Réponses pour
+_portal.ui.navigation.next=Suivant
+_portal.ui.navigation.of=de
+_portal.ui.navigation.page=Page
+_portal.ui.notification.error=Erreur
+_portal.ui.notification.noitemsfound=Pas d'objets trouvés
+_portal.ui.reset.searchbox=Réinitialiser
+_portal.ui.results=Résultats
+_portal.ui.viewingrelateditems=Visualiser les objets en relation
+_register-request.emailalreadyregistered=Cette adresse mél est déjà enregistrée
 _register.email.has.been.sent=Un mél. a été envoyé à l'adresse suivante
+_register.emailclicktoconfirm=Veuillez cliquer sur le lien pour confirmer votre inscription
+_register.emailuse=Vous devez entrer votre adresse mél et votre mot de passe pour vous ouvrir une session
+_register.entervalidemail=Veuillez entrer une adresse mél. valide
+_register.enteryouremail=Entrer votre adresse mél.
+_register.errordetails=Détails de l'erreur
+_register.finishregistration=Finir l'enregistrement
+_register.iagree=J'accepte
+_register.linkexpired=Le lien que vous utilisez pour terminer votre inscription est invalide ou a expiré
+_register.mycodeofconduct=J’accepte les conditions sous lesquelles je crée les étiquettes pour les objets que j’aurai choisis. J'accepte de ne pas créer d'étiquette qui pourrait être considérée comme diffamatoire, dommageable, préjudiciable, illégale, calomnieuse, incorrecte, injurieuse, provocatrice, gênante, pornographique, obscène, malhonnête, haineuse ou raciale d'un point de vue ethnique ou de toute autre manière qui pourrait être considérée comme choquante. J’accepte de ne pas créer d’étiquette qui serait susceptible de porter atteinte au respect de la vie privée ou qui ne pourrait être diffusé. En cliquant sur cette case, j'accepte de respecter les termes de l'accord. Dans le cas contraire, mon inscription à Europeana sera interrompue.
+_register.mycodeofconductrequired=Vous acceptez notre code de conduite pour vous inscrire sur Mon Europeana
+_register.password=Mot de passe
 _register.password.choose=Choisir un mot de passe
 _register.password.explain=La longueur du mot de passe doit être entre 6-30 caractères
 _register.pick.user.name=Votre nom d'utilisateur s'affichera une fois connecté
@@ -234,13 +195,25 @@ _register.please.follow.link=Veuillez suivre le lien envoyé sur votre adresse m
 _register.register=S´enregistrer
 _register.registration.failed=Une erreur s'est produite lors de votre enregistrement. Veuillez recommencer
 _register.repeat.password=Répéter le mot de passe
+_register.requiredfield=C'est un champ requis
 _register.username.choose=Choisir un nom d'utilisateur
 _register.username.explain=Votre nom d'utilisateur s'affichera une fois connecté
+_search.boolean.and=et
+_search.boolean.not=sauf
+_search.boolean.or=ou
+_search.field.any.field=N'importe quel champ
 _search.field.creator=Createur
 _search.field.date=Date
-_search.option.subject=Sujet
-_search.option.title=Titre
-_success.search.saved=Recherche sauvegardée
+_search.field.provider=Fournisseur
+_search.field.subject=Sujet
+_search.field.title=Titre
+_toberemoved.althome=Cliquer ici pour retourner à la page d'accueil
+_toberemoved.altlogoeuropeana=logo Europeana pensez culture
+_toberemoved.checkthefaqs=Vérifier les FAQ- ils peuvent contenir une réponse
+_toberemoved.communities=Communautés
+_toberemoved.contributorexplain=Ce sont les organisations qui ont versé les objets numérisés - tableaux, livres, émissions etc... Certains des contributeurs sont des agrégateurs*, Culture.fr en est le plus important, fournissant le contenu de plus de 480 organisations en France, incluant le Louvre et le Musée d'Orsay. Le nombre d'organisations appartenant à un agrégateur figure entre parenthèses après celui-ci, comme par exemple Videoactive (10)
+_toberemoved.emaileuropeanateam=L'équipe Europeana
+_toberemoved.using.europeana=Utiliser Europeana
 _unused.about.us=A propos
 _unused.accessibility=Accessibilité
 _unused.add=Ajouter
@@ -249,10 +222,34 @@ _unused.altprint=Imprimer cette page
 _unused.aplacetoshareideas=Une source d'inspiration et d'idées. Recherchez dans le patrimoine culturel de l'Europe et partagez vos découvertes.
 _unused.bosnia.and.herzegovina=Bosnie-Herzégovine
 _unused.browse.through.time=Feuilleter dans le temps
+_unused.contacts=Contacts
+_unused.contributors=Contributeurs
+_unused.country=Pays
+_unused.createaccount=Créer un compte
+_unused.emailwelcome=Bienvenue sur Mon Europeana
+_unused.enewsoptin=Rester en contact avec les nouveaux développements d'Europeana
+_unused.featuredisabled=Cette fonction est actuellement désactivée
+_unused.feedbackresponse=Recevez nos remerciements pour votre remarque. Si votre remarque nécessite une réponse un membre de l'équipe d'Europeana vous contactera dès que possible. Pour une réponse plus rapide, veuillez soumettre votre remarque en anglais.
+_unused.findoutmore=Plus de résultats sur
+_unused.fromourparnters=de nos partenaires des musées, des centres d'archives, des bibliothèques et des collections audiovisuelles
+_unused.fundedby=co-financé par l'Union européenne
+_unused.fyrom=Ancienne République yougoslave de Macédoine
+_unused.hideadvancedsearch=Masquer la recherche avancée
+_unused.image=Image
+_unused.invalidquery=Requête invalide
+_unused.itemdetails=Détails de l'objet
+_unused.languagepolicy=Politique en matière de langues
+_unused.newcontent=Nouveau contenu
 _unused.other=Autre
+_unused.partner=Partenaire
+_unused.partnerexplain=C'est le réseau des partenaires qui ont collaboré à créer Europeana et qui représentent Europeana dans leur pays et dans les associations professionnelles.
+_unused.partners=Partenaires
+_unused.peoplearecurrentlythinkingabout=On pense actuellement à
 _unused.privacy=Confidentialité
+_unused.registeragain=S'enregister à nouveau
 _unused.remember.me=Voulez-vous que Europeana retienne ce mot de passe
 _unused.remove=Retirer
+_unused.sector=Secteur
 _unused.send.feedback=Envoyez-nous vos remarques
 _unused.share.your.ideas=Partager vos idées
 _unused.show.all=Afficher tout
@@ -260,17 +257,20 @@ _unused.sign.in=S'inscrire
 _unused.site.map=Plan du site
 _unused.slovenia=Slovénie
 _unused.sound=Son
+_unused.strorylinecredits=Plan et crédits
 _unused.tag.added=Etiquette ajoutée
 _unused.tag.addition.failed=Echec de l'ajout de l'étiquette
 _unused.tagging=Ajout d'une étiquette
 _unused.terms.and.conditions=Termes et conditions
 _unused.text=Texte
-_unused.username.in.use=déjà utilisé. Veuillez choisir un autre nom d'utilisateur
-_unused.usertags=Les étiquettes de l'utilisateur
-_unused.using.europeana=Utiliser Europeana
-_unused.view.as.xml=Voir en XML
-_unused.view.with.labels=Voir avec les labels
-_unused.view.without.labels=Voir sans les labels
-_unused.you.have.search.for=Vous avez recherché sur
-languageDropDownList_t=Langue
-registrationSucceed_t=Vous êtes enregistré avec succès
+_unused.thisiseuropeana=Europeana
+_unused.thoughtlab=Laboratoire d'idées
+_unused.timeline=Frise chronologique
+_unused.timelinenavigator=Barre de navigation de la frise chronologique
+_unused.userconduct=Code d'utilisation
+_unused.userconductagree=J’accepte les conditions sous lesquelles je crée les étiquettes pour les objets que j’aurai choisis. J'accepte de ne pas créer d'étiquette qui pourrait être considérée comme diffamatoire, dommageable, préjudiciable, illégale, calomnieuse, incorrecte, injurieuse, provocatrice, gênante, pornographique, obscène, malhonnête, haineuse ou raciale d'un point de vue ethnique ou de toute autre manière qui pourrait être considérée comme choquante. J’accepte de ne pas créer d’étiquette qui serait susceptible de porter atteinte au respect de la vie privée ou qui ne pourrait être diffusé. En cliquant sur cette case, j'accepte de respecter les termes de l'accord. Dans le cas contraire, mon inscription à Europeana sera interrompue. CLIQUER POUR ACCEPTER
+_unused_portal.ui.message.view.as.xml=Voir en XML
+_unused_portal.ui.message.view.with.labels=Voir avec les labels
+_unused_portal.ui.message.view.without.labels=Voir sans les labels
+_unused_portal.ui.message.you.have.search.for=Vous avez recherché sur
+_unused_validation.username.in.use=déjà utilisé. Veuillez choisir un autre nom d'utilisateur
