--- a/portal/src/main/resources/i18n/messages_ga.properties
+++ b/portal/src/main/resources/i18n/messages_ga.properties
@@ -1,88 +1,3 @@
-All_t=Gach
-AltHome_t=Cliceáil anseo chun filleadh ar leathanch baile Europeana
-AltLogoEuropeana_t=mana Europeana think culture
-CheckTheFaqs_t=Check the FAQs - they may cover your feedback
-ChooseLanguage_t=Roghnaigh Teanga
-Communities_t=Comhphobail
-Contacts_t=Teagmhálacha
-ContributorExplain_t=These are the organisations that are contributing content - digitised paintings, books, broadcasts etc. Some of these contributors are  aggregators*, Culture.fr is the largest aggregator, providing content from about 480 organisations in France, including the Louvre and the Musée d’Orsay. The number of organisations contributing to an aggregator is shown in brackets after the aggregator’s name, e.g. Videoactive (10)
-Contributor_t=Rannpháirtí
-Contributors_t=Rannpháirtithe
-Country_t=Tír
-CreateAccount_t=Cruthaigh cuntas
-Description_t=Cur síos
-EmailAlreadyRegistered_t=Tá an r-phost seo cláraithe cheana
-EmailClickToConfirm_t=Cliceáil ar an nasc seo leanas le do thoil chun do chláru a chinntiú
-EmailEuropeanaTeam_t=Foireann Europeana
-EmailFormatError_t=Cinntigh le do thoil go bhfuil do r-phost formáidithe i gceart agus triail arís é
-EmailSendFailed_t=Níor seoladh an R-phost
-EmailSent_t=R-phost seolta
-EmailUse_t=Úsáidfidh tú do r-phost mar aon le do phasfhocal chun logáil isteach ar an suíomh
-EmailWelcome_t=Fáilte chuig My Personal Page
-EnewsOptin_t=Keep me in touch with new developments to Europeana
-EnterValidEmail_t=Cuir isteach seoladh r-phoist bailí le do thoil
-EnterYourEmail_t=Cuir isteach do r-phost
-ErrorDetails_t=Sonraí earráide
-Error_t=Earráid
-FYROM_t=Iar-Phoblacht Iúgslavach na Macadóine
-FeatureDisabled_t=This feature is currently disabled.
-FeedbackResponse_t=Thank you very much for your feedback. If your feedback requires a response a member of the Europeana team will get back to you as soon as possible. For faster response feedback should be submitted in English.
-FindOutMore_t=Tuilleadh eolais
-FinishRegistration_t=Críochnaigh an clárú
-FirstName_t=First name
-ForgotPassword_t=Rinne mé dearmad ar mo phasfhocal
-FromOurParnters_t=Ónar gcomhiarsmalanna, cartlanna, leabharlanna agus balilúcháín chlosamhairc
-FundedBy_t=comh-mhaoinithe ag an Aontas Eorpach
-HideAdvancedSearch_t=Folaigh cuardach casta
-IAgree_t=Aontaím
-Image_t=Íomhá
-Images_t=Íomhánna
-InvalidQuery_t=Ceist neamhbhailí
-ItemDetails_t=Sonraí míreanna
-ItemSaveFailed_t=Mír sábhailte teipthe
-ItemSaved_t=Mír sábháilte
-Items_t=Míreanna
-LanguagePolicy_t=Beartas teanga
-Less_t=Níos lú
-LinkExpired_t=Tá an nasc a d'úsáid tú chun an clárú a dhéanamh neamhbhailí nó éagtha
-LogIn_t=Logáil isteach
-LogOut_t=Logáil amach
-LoggedInAs_t=Logáilte isteach mar
-MatchesFor_t=Meaiteálacha do
-More_t=Níos mó
-MyCodeOfConductRequired_t=You must agree to our code of conduct to register for portal membership
-MyCodeOfConduct_t=Tuigim go dtugann My Personal Page an deis dom clibeanna a chruthú do mhír ar bith is mian liom. Aontaím nach gcruthóidh mé aon chlibeanna a d'fhéadfadh a bheith aithiseach, díobhálach, bagrach, mídhleathach, clúmhillteach, sáraitheach, díblithe, gríosaitheach, ciapthach, pornagrafach, gáirsiúil, calaoiseach, ina shárú príobháide nó cearta poiblíochta, gráiniúil, nó inlochtaithe ar bhonn ciníoch, eitneach nó ar aon bhonn eile. Trí chliceáil ar an mbosca seo aontaím go gcloífidh mé leis an gcomhaontú seo agus sa chás nach gcloífidh tuigim go gcuirfear deireadh le mo bhallraíocht ar My Personal Page.
-NewContent_t=Ábhar nua
-Next_t=Ar aghaidh
-NoItemsFound_t=Ní bhfuarthas aon mhíreanna
-NoSavedItems_t=Níl aon mhíreanna sábháilte
-NoSavedSearches_t=Níl aon chuardaigh shábháilte
-NoSavedTags_t=Níl aon chlibeanna sábháilte
-NoScript_t=To make optimal use of this website you need to have JavaScript activated
-Of_t=de
-OpensInNewWindow_t=Osclaíonn i bhfuinneog nua
-Page_t=Leathanach
-PartnerExplain_t=This is the network of partners who collaborated to make Europeana happen, and who represent Europeana in their countries and professional associations.
-Partner_t=Comhpháirtí
-Partners_t=Comhpháirtithe
-Password_t=Pasfhocal
-PeopleAreCurrentlyThinkingAbout_t=Faoi láthair tá daoine ag smaoineamh ar
-RegisterAgain_t=Cláraigh arís
-RequiredField_t=Is réimse riachtanach é seo
-Reset_t=Athshocraigh
-Results_t=Torthaí
-Sector_t=Earnáil
-Sounds_t=Fuaimeanna
-StrorylineCredits_t=Storyline and credits
-Texts_t=Téacsanna
-ThisIsEuropeana_t=Seo é Europeana
-ThoughtLab_t=Smaoineamhlann
-TimelineNavigator_t=Nascleantóir amlíne
-Timeline_t=Amlíne
-UserConductAgree_t=I understand that the Delving portal gives me the opportunity to create tags for any item I wish. I agree that I will not create any tags that could be considered libelous, harmful, threatening, unlawful, defamatory, infringing, abusive, inflammatory, harassing, pornographic, obscene, fraudulent, invasive of privacy or publicity rights, hateful, or racially, ethnically or otherwise objectionable. By clicking this box I agree to abide by this agreement, and understand that if I don't my login on the portal will be terminated. CLICK TO AGREE
-UserConduct_t=User Conduct
-Video_t=Físeán
-ViewingRelatedItems_t=Tá tú ag féachaint ar mhíreanna gaolmhara
 _action.add.annotation=null
 _action.add.tag=Cuir clib leis seo
 _action.advanced.search=Cuardach casta
@@ -103,9 +18,7 @@ _action.send=Seol
 _action.share.with.friend=Roinn le cara
 _action.videos=Físeáin
 _action.view.in.original.context=Amharc sa chomhthécs bunaidh
-_boolean.and=agus
-_boolean.not=ni
-_boolean.or=nó
+_actionOpenInNewWindow=Osclaíonn i bhfuinneog nua
 _facet.by.collection=null
 _facet.by.country=De réir tíre
 _facet.by.date=De réir dáta
@@ -117,6 +30,7 @@ _facet.by.year=null
 _failure.search.saved=Sábháil cuardach teipthe
 _header.actions=Gníomhartha
 _header.relatedcontent=Ábhar gaolmhar
+_inc_result_table_full.description=Cur síos
 _language_select.italian=Iodáilis (ita)
 _locale.AL=An Albáin
 _locale.AM=An Airméin
@@ -186,6 +100,10 @@ _locale.sk=Slóvaicis (slo)
 _locale.sl=Slóivéinis (slv)
 _locale.sr=Seirbis (scc)
 _locale.sv=Sualainnis (sve/swe)
+_menu.i18n.chooselanguage=Roghnaigh Teanga
+_messages.error.emailformaterror=Cinntigh le do thoil go bhfuil do r-phost formáidithe i gceart agus triail arís é
+_messages.error.emailsendfailed=Níor seoladh an R-phost
+_messages.notification.emailsent=R-phost seolta
 _metadata.dc.contributor=Rannpháirtí
 _metadata.dc.coverage=Clúdach
 _metadata.dc.creator=Údar
@@ -215,18 +133,61 @@ _metadata.dcterms.replaces=Ionadaíonn
 _metadata.dcterms.requires=Éilíonn
 _metadata.dcterms.spatial=Clúdach spasúil
 _metadata.dcterms.temporal=Clúdach ama
+_metadata.searchfield.contributor=Rannpháirtí
+_metadata.type.all=Gach
+_metadata.type.images=Íomhánna
+_metadata.type.sounds=Fuaimeanna
+_metadata.type.texts=Téacsanna
+_metadata.type.video=Físeán
 _mine.date.saved=Dáta sábháilte
 _mine.delete=Scrios
+_mine.email.address=Seoladh r-phoist
+_mine.firstname=First name
+_mine.forgotpassword=Rinne mé dearmad ar mo phasfhocal
+_mine.itemsaved=Mír sábháilte
+_mine.itemsavefailed=Mír sábhailte teipthe
 _mine.last.name=Last name
+_mine.loggedinas=Logáilte isteach mar
+_mine.login=Logáil isteach
+_mine.logout=Logáil amach
+_mine.nosaveditems=Níl aon mhíreanna sábháilte
+_mine.nosavedsearches=Níl aon chuardaigh shábháilte
+_mine.nosavedtags=Níl aon chlibeanna sábháilte
 _mine.saved.items=Míreanna sábhailte
 _mine.saved.searches=Cuardaigh shábháilte
 _mine.saved.tags=Clibeanna sábhailte
 _mine.user.information=Eolas úsáideora
+_mine.user.registration.notification.succeed=D'éirigh leat tú féin a chlárú
 _mine.username=Ainm úsáideora
-_option.any.field=Réimse ar bith
-_prompt.email.address=Seoladh r-phoist
-_prompt.provider=Soláthróir
+_portal.menu.languagedropdownlist=Teanga
+_portal.ui.message.less=Níos lú
+_portal.ui.message.more=Níos mó
+_portal.ui.message.noscript=To make optimal use of this website you need to have JavaScript activated
+_portal.ui.message.success.search.saved=Cuardach sábháilte
+_portal.ui.message.usertags=Clibeanna úsáideora
+_portal.ui.messages.items=Míreanna
+_portal.ui.navigation.matchesfor=Meaiteálacha do
+_portal.ui.navigation.next=Ar aghaidh
+_portal.ui.navigation.of=de
+_portal.ui.navigation.page=Leathanach
+_portal.ui.notification.error=Earráid
+_portal.ui.notification.noitemsfound=Ní bhfuarthas aon mhíreanna
+_portal.ui.reset.searchbox=Athshocraigh
+_portal.ui.results=Torthaí
+_portal.ui.viewingrelateditems=Tá tú ag féachaint ar mhíreanna gaolmhara
+_register-request.emailalreadyregistered=Tá an r-phost seo cláraithe cheana
 _register.email.has.been.sent=Seoladh r-phost chuig an seoladh seo leanas
+_register.emailclicktoconfirm=Cliceáil ar an nasc seo leanas le do thoil chun do chláru a chinntiú
+_register.emailuse=Úsáidfidh tú do r-phost mar aon le do phasfhocal chun logáil isteach ar an suíomh
+_register.entervalidemail=Cuir isteach seoladh r-phoist bailí le do thoil
+_register.enteryouremail=Cuir isteach do r-phost
+_register.errordetails=Sonraí earráide
+_register.finishregistration=Críochnaigh an clárú
+_register.iagree=Aontaím
+_register.linkexpired=Tá an nasc a d'úsáid tú chun an clárú a dhéanamh neamhbhailí nó éagtha
+_register.mycodeofconduct=Tuigim go dtugann My Personal Page an deis dom clibeanna a chruthú do mhír ar bith is mian liom. Aontaím nach gcruthóidh mé aon chlibeanna a d'fhéadfadh a bheith aithiseach, díobhálach, bagrach, mídhleathach, clúmhillteach, sáraitheach, díblithe, gríosaitheach, ciapthach, pornagrafach, gáirsiúil, calaoiseach, ina shárú príobháide nó cearta poiblíochta, gráiniúil, nó inlochtaithe ar bhonn ciníoch, eitneach nó ar aon bhonn eile. Trí chliceáil ar an mbosca seo aontaím go gcloífidh mé leis an gcomhaontú seo agus sa chás nach gcloífidh tuigim go gcuirfear deireadh le mo bhallraíocht ar My Personal Page.
+_register.mycodeofconductrequired=You must agree to our code of conduct to register for portal membership
+_register.password=Pasfhocal
 _register.password.choose=Roghnaigh pasfhocal
 _register.password.explain=Caithfear pasfhocail a bheith idir 6 agus 30 carachtar ar fad
 _register.pick.user.name=Taispeánfar d'ainm úsáideora nuair a bheidh tú logáílte isteach
@@ -234,13 +195,25 @@ _register.please.follow.link=Lean an nasc atá san r-phost le do thoil chun an p
 _register.register=Cláraigh
 _register.registration.failed=Tharla earráid agus do chlárú á phróiseáil. Triail arís é le do thoil
 _register.repeat.password=Athscríobh an pasfhocal
+_register.requiredfield=Is réimse riachtanach é seo
 _register.username.choose=Roghnaigh ainm úsáideora
 _register.username.explain=Taispeánfar d'ainm úsáideora nuair a bheidh tú logáilte isteach
+_search.boolean.and=agus
+_search.boolean.not=ni
+_search.boolean.or=nó
+_search.field.any.field=Réimse ar bith
 _search.field.creator=Cruthaitheoir
 _search.field.date=Dáta
-_search.option.subject=Ábhar
-_search.option.title=Teideal
-_success.search.saved=Cuardach sábháilte
+_search.field.provider=Soláthróir
+_search.field.subject=Ábhar
+_search.field.title=Teideal
+_toberemoved.althome=Cliceáil anseo chun filleadh ar leathanch baile Europeana
+_toberemoved.altlogoeuropeana=mana Europeana think culture
+_toberemoved.checkthefaqs=Check the FAQs - they may cover your feedback
+_toberemoved.communities=Comhphobail
+_toberemoved.contributorexplain=These are the organisations that are contributing content - digitised paintings, books, broadcasts etc. Some of these contributors are  aggregators*, Culture.fr is the largest aggregator, providing content from about 480 organisations in France, including the Louvre and the Musée d’Orsay. The number of organisations contributing to an aggregator is shown in brackets after the aggregator’s name, e.g. Videoactive (10)
+_toberemoved.emaileuropeanateam=Foireann Europeana
+_toberemoved.using.europeana=Ag úsáid Europeana
 _unused.about.us=Cé sinne
 _unused.accessibility=Inrochtain
 _unused.add=Suimigh
@@ -249,10 +222,34 @@ _unused.altprint=Priontáil an leathanach seo
 _unused.aplacetoshareideas=áit spreagtha agus smaointe. Déan cuardach ar bhailiúcháin chultúrtha na hEorpa, nasc le cosáin úsáideora eile agus roinn do chuid fionnahtana
 _unused.bosnia.and.herzegovina=An Bhoisnia-Heirseagaivéin
 _unused.browse.through.time=Brabhsáil trí am
+_unused.contacts=Teagmhálacha
+_unused.contributors=Rannpháirtithe
+_unused.country=Tír
+_unused.createaccount=Cruthaigh cuntas
+_unused.emailwelcome=Fáilte chuig My Personal Page
+_unused.enewsoptin=Keep me in touch with new developments to Europeana
+_unused.featuredisabled=This feature is currently disabled.
+_unused.feedbackresponse=Thank you very much for your feedback. If your feedback requires a response a member of the Europeana team will get back to you as soon as possible. For faster response feedback should be submitted in English.
+_unused.findoutmore=Tuilleadh eolais
+_unused.fromourparnters=Ónar gcomhiarsmalanna, cartlanna, leabharlanna agus balilúcháín chlosamhairc
+_unused.fundedby=comh-mhaoinithe ag an Aontas Eorpach
+_unused.fyrom=Iar-Phoblacht Iúgslavach na Macadóine
+_unused.hideadvancedsearch=Folaigh cuardach casta
+_unused.image=Íomhá
+_unused.invalidquery=Ceist neamhbhailí
+_unused.itemdetails=Sonraí míreanna
+_unused.languagepolicy=Beartas teanga
+_unused.newcontent=Ábhar nua
 _unused.other=Eile
+_unused.partner=Comhpháirtí
+_unused.partnerexplain=This is the network of partners who collaborated to make Europeana happen, and who represent Europeana in their countries and professional associations.
+_unused.partners=Comhpháirtithe
+_unused.peoplearecurrentlythinkingabout=Faoi láthair tá daoine ag smaoineamh ar
 _unused.privacy=Príobháideacht
+_unused.registeragain=Cláraigh arís
 _unused.remember.me=Cuimhnigh orm ar an ríomhaire seo
 _unused.remove=Bain
+_unused.sector=Earnáil
 _unused.send.feedback=Seol aiseolas chugainn
 _unused.share.your.ideas=Roinn do chuid smaointe
 _unused.show.all=Taispeáin gach rud
@@ -260,17 +257,20 @@ _unused.sign.in=Sínigh isteach
 _unused.site.map=Mapa suímh
 _unused.slovenia=An tSlóivéin
 _unused.sound=Fuaim
+_unused.strorylinecredits=Storyline and credits
 _unused.tag.added=Clib curtha leis seo
 _unused.tag.addition.failed=Theip ort an chlib a chur leis seo
 _unused.tagging=Clibeáil
 _unused.terms.and.conditions=Téarmaí agus coinníollacha
 _unused.text=Téacs
-_unused.username.in.use=in úsáid. Roghnaigh ainm úsáideora eile le do thoil
-_unused.usertags=Clibeanna úsáideora
-_unused.using.europeana=Ag úsáid Europeana
-_unused.view.as.xml=Amharc mar XML
-_unused.view.with.labels=Amharc le lipéid
-_unused.view.without.labels=Amharc gan lipéidd
-_unused.you.have.search.for=Chuardaigh tú
-languageDropDownList_t=Teanga
-registrationSucceed_t=D'éirigh leat tú féin a chlárú
+_unused.thisiseuropeana=Seo é Europeana
+_unused.thoughtlab=Smaoineamhlann
+_unused.timeline=Amlíne
+_unused.timelinenavigator=Nascleantóir amlíne
+_unused.userconduct=User Conduct
+_unused.userconductagree=I understand that the Delving portal gives me the opportunity to create tags for any item I wish. I agree that I will not create any tags that could be considered libelous, harmful, threatening, unlawful, defamatory, infringing, abusive, inflammatory, harassing, pornographic, obscene, fraudulent, invasive of privacy or publicity rights, hateful, or racially, ethnically or otherwise objectionable. By clicking this box I agree to abide by this agreement, and understand that if I don't my login on the portal will be terminated. CLICK TO AGREE
+_unused_portal.ui.message.view.as.xml=Amharc mar XML
+_unused_portal.ui.message.view.with.labels=Amharc le lipéid
+_unused_portal.ui.message.view.without.labels=Amharc gan lipéidd
+_unused_portal.ui.message.you.have.search.for=Chuardaigh tú
+_unused_validation.username.in.use=in úsáid. Roghnaigh ainm úsáideora eile le do thoil
