--- a/portal/src/main/resources/i18n/messages_hu.properties
+++ b/portal/src/main/resources/i18n/messages_hu.properties
@@ -1,88 +1,3 @@
-All_t=Mind
-AltHome_t=Vissza az Europeana honalphoz
-AltLogoEuropeana_t=Europeana logó kultúrában gondolkodunk
-CheckTheFaqs_t=Tekintse meg a Gyakran Ismételt Kérdéseket (GYIK), hátha választ kap a kérdésére
-ChooseLanguage_t=Nyelvválasztás
-Communities_t=Közösségek
-Contacts_t=Kapcsolat
-ContributorExplain_t=Ezek azok a szervezetek, amelyek közreműködtek a digitális tartalom kialakításában digitalizált képekkel, könyvekkel, hírműsorokkal, stb. Néhányan a közreműködők közül szolgáltatók*, mint például a Culture.fr, amely a legnagyobb ezek közül, 480 franciaországi gyűjtemény digitális tartalmainak szolgáltatásával, többek között a Louvre és a Musée d’Orsay gyűjteményeiből.
-Contributor_t=Közreműködő
-Contributors_t=Közreműködők
-Country_t=Ország
-CreateAccount_t=Felhasználói fiók létrehozása
-Description_t=Leírás
-EmailAlreadyRegistered_t=Ezzel az e-mail címmel már regisztráltak.
-EmailClickToConfirm_t=A regisztráció megerősítéséhez kérjük, kattintson az alábbi linkre
-EmailEuropeanaTeam_t=Az Europeana csapata
-EmailFormatError_t=Kérjük, ellenőrizze, hogy az e-mail cím megfelelő-e.
-EmailSendFailed_t=Az e-mail küldése sikertelen.
-EmailSent_t=E-mail elküldve
-EmailUse_t=A bejelentkezéshez az e-mail címét és jelszavát fogja használni.
-EmailWelcome_t=Üdvözüljük Az én Europeanámban
-EnewsOptin_t=Tájékoztatssanak az Europeana új fejlesztéseiről
-EnterValidEmail_t=Kérem, adjon meg egy valós e-mail címet.
-EnterYourEmail_t=Írja be az e-mail címét!
-ErrorDetails_t=A hiba részletes leírása
-Error_t=Hiba
-FYROM_t=Macedónia Volt Jugoszláv Köztársaság
-FeatureDisabled_t=Ez a funkció jelenleg nem használható.
-FeedbackResponse_t=Nagyon köszönjük a visszajelzést! Amennyiben a megjegyzése választ igényel, az Europeana csapata válaszolni fog, amilyen gyorsan csak tud. A gyorsabb válasz érdekében kérjük, hogy angolul írjon!
-FindOutMore_t=További információk
-FinishRegistration_t=A regisztráció befejezése.
-FirstName_t=Keresztnév
-ForgotPassword_t=Elfelejtettem a jelszavamat
-FromOurParnters_t=Partnereinktől: múzeumoktól, könyvtáraktól, levéltáraktól, audiovizuális gyűjteményektől.
-FundedBy_t=közös finanszírozásban az Európai Unióval
-HideAdvancedSearch_t=Az összetett keresés elrejtése
-IAgree_t=Elfogadom
-Image_t=Kép
-Images_t=Képek
-InvalidQuery_t=Érvénytelen keresőkérdés
-ItemDetails_t=Elem részletesen
-ItemSaveFailed_t=Az elem mentése sikertelen
-ItemSaved_t=Elem elmentve
-Items_t=Elemek
-LanguagePolicy_t=Nyelvi irányelvek
-Less_t=Kevesebb
-LinkExpired_t=A link, amelyet a regisztráció befejezéséhez használt, érvénytelen vagy lejárt.
-LogIn_t=Bejelentkezés
-LogOut_t=Kijelentkezés
-LoggedInAs_t=Bejelentkezve
-MatchesFor_t=Találatok
-More_t=Több
-MyCodeOfConductRequired_t=El kell fogadnia a My Personal Page Felhasználói magatártásra vonatkozó szabályait
-MyCodeOfConduct_t=Tudom, hogy Az én Europeánám lehetővé teszi, hogy bármely digitális dokumentumhoz címkét hozzak létre. Megígérem, hogy nem hozok létre olyan címkét, amely sértő, károsító, fenyegető, törvénytelen, rágalmazó, gyalázkodó, zaklató, pornográf, obszcén, tisztességtelen, sérti a magán vagy közösségi jogokat, gyűlölködő, és faji, etnikai vagy egyéb okból elítélendő. A négyzetre történő kattintással elfogadom, hogy betartom ezt a megállapodást. Amennyiben ettől eltérek, Az én Europeanámban való tagságom megszűnik.
-NewContent_t=Újdonság
-Next_t=Következő
-NoItemsFound_t=Nincs találat
-NoSavedItems_t=Nincs mentett elem
-NoSavedSearches_t=Nincs mentett keresés
-NoSavedTags_t=Nincs mentett címke
-NoScript_t=A honlap optimális használatához a JavaScript aktiválása szükséges
-Of_t=:
-OpensInNewWindow_t=Megnyitás új abalakban
-Page_t=Oldal
-PartnerExplain_t=Ez az a partneri együttműködés, amelyben azok a könyvtárak vesznek részt, amelyek közreműködtek a Europeana létrehozásában, valamint képviselik a Europeanát országukban és a szakmai szervezetekben.
-Partner_t=Partner
-Partners_t=Partnerek
-Password_t=Jelszó
-PeopleAreCurrentlyThinkingAbout_t=Az emberek jelenleg erre gondolnak
-RegisterAgain_t=Új regisztráció
-RequiredField_t=Ez egy kötelező mező.
-Reset_t=Törlés
-Results_t=Eredmények
-Sector_t=Terület
-Sounds_t=Hanganyagok
-StrorylineCredits_t=Történet és stáblista
-Texts_t=Szövegek
-ThisIsEuropeana_t=Ez az Europeana
-ThoughtLab_t=Gondolatok
-TimelineNavigator_t=Eligazodás az időrendben
-Timeline_t=Időrend
-UserConductAgree_t=Tudom, hogy Az én Europeánám lehetővé teszi, hogy bármely digitális dokumentumhoz címkét hozzak létre. Megígérem, hogy nem hozok létre olyan címkét, amely sértő, károsító, fenyegető, törvénytelen, rágalmazó, gyalázkodó, zaklató, pornográf, obszcén, tisztességtelen, sérti a magán vagy közösségi jogokat, gyűlölködő, és faji, etnikai vagy egyéb okból elítélendő. A négyzetre történő kattintással elfogadom, hogy betartom ezt a megállapodást. Amennyiben ettől eltérek, Az én Europeanámban való tagságom megszűnik. KLIKKELJEN AZ ELFOGADÁSHOZ
-UserConduct_t=Felhasználói magatartás
-Video_t=Videó
-ViewingRelatedItems_t=A kapcsolódó elemek megtekintése
 _action.add.annotation=null
 _action.add.tag=Címke hozzáadása
 _action.advanced.search=Összetett keresés
@@ -103,9 +18,7 @@ _action.send=Küldés
 _action.share.with.friend=Megosztás egy baráttal
 _action.videos=Videók
 _action.view.in.original.context=Eredeti kontextus
-_boolean.and=és
-_boolean.not=nem
-_boolean.or=vagy
+_actionOpenInNewWindow=Megnyitás új abalakban
 _facet.by.collection=null
 _facet.by.country=Ország
 _facet.by.date=Dátum
@@ -117,6 +30,7 @@ _facet.by.year=null
 _failure.search.saved=A keresés mentése sikertelen.
 _header.actions=Műveletek
 _header.relatedcontent=Kapcsolódó tartalom
+_inc_result_table_full.description=Leírás
 _language_select.italian=olasz
 _locale.AL=Albánia
 _locale.AM=Örményország
@@ -186,6 +100,10 @@ _locale.sk=szlovák
 _locale.sl=szlovén
 _locale.sr=szerb
 _locale.sv=svéd
+_menu.i18n.chooselanguage=Nyelvválasztás
+_messages.error.emailformaterror=Kérjük, ellenőrizze, hogy az e-mail cím megfelelő-e.
+_messages.error.emailsendfailed=Az e-mail küldése sikertelen.
+_messages.notification.emailsent=E-mail elküldve
 _metadata.dc.contributor=Közreműködő
 _metadata.dc.coverage=Tartalom
 _metadata.dc.creator=Szerző
@@ -215,18 +133,61 @@ _metadata.dcterms.replaces=Helyettesít
 _metadata.dcterms.requires=Igényel
 _metadata.dcterms.spatial=Térbeli lefedettség
 _metadata.dcterms.temporal=Időbeli lefedettség
+_metadata.searchfield.contributor=Közreműködő
+_metadata.type.all=Mind
+_metadata.type.images=Képek
+_metadata.type.sounds=Hanganyagok
+_metadata.type.texts=Szövegek
+_metadata.type.video=Videó
 _mine.date.saved=Dátum mentése
 _mine.delete=Törlés
+_mine.email.address=E-mail címek
+_mine.firstname=Keresztnév
+_mine.forgotpassword=Elfelejtettem a jelszavamat
+_mine.itemsaved=Elem elmentve
+_mine.itemsavefailed=Az elem mentése sikertelen
 _mine.last.name=Családnév
+_mine.loggedinas=Bejelentkezve
+_mine.login=Bejelentkezés
+_mine.logout=Kijelentkezés
+_mine.nosaveditems=Nincs mentett elem
+_mine.nosavedsearches=Nincs mentett keresés
+_mine.nosavedtags=Nincs mentett címke
 _mine.saved.items=Mentett elemek
 _mine.saved.searches=Mentett keresések
 _mine.saved.tags=Mentett címkék
 _mine.user.information=Felhasználói információ
+_mine.user.registration.notification.succeed=Ön sikeresen regisztrált.
 _mine.username=A felhasználónév
-_option.any.field=Bármely kulcsszó
-_prompt.email.address=E-mail címek
-_prompt.provider=Szolgáltató
+_portal.menu.languagedropdownlist=Nyelv
+_portal.ui.message.less=Kevesebb
+_portal.ui.message.more=Több
+_portal.ui.message.noscript=A honlap optimális használatához a JavaScript aktiválása szükséges
+_portal.ui.message.success.search.saved=Mentett keresés
+_portal.ui.message.usertags=Felhasználói címkék
+_portal.ui.messages.items=Elemek
+_portal.ui.navigation.matchesfor=Találatok
+_portal.ui.navigation.next=Következő
+_portal.ui.navigation.of=:
+_portal.ui.navigation.page=Oldal
+_portal.ui.notification.error=Hiba
+_portal.ui.notification.noitemsfound=Nincs találat
+_portal.ui.reset.searchbox=Törlés
+_portal.ui.results=Eredmények
+_portal.ui.viewingrelateditems=A kapcsolódó elemek megtekintése
+_register-request.emailalreadyregistered=Ezzel az e-mail címmel már regisztráltak.
 _register.email.has.been.sent=E-mailt küldtünk az alábbi címre:
+_register.emailclicktoconfirm=A regisztráció megerősítéséhez kérjük, kattintson az alábbi linkre
+_register.emailuse=A bejelentkezéshez az e-mail címét és jelszavát fogja használni.
+_register.entervalidemail=Kérem, adjon meg egy valós e-mail címet.
+_register.enteryouremail=Írja be az e-mail címét!
+_register.errordetails=A hiba részletes leírása
+_register.finishregistration=A regisztráció befejezése.
+_register.iagree=Elfogadom
+_register.linkexpired=A link, amelyet a regisztráció befejezéséhez használt, érvénytelen vagy lejárt.
+_register.mycodeofconduct=Tudom, hogy Az én Europeánám lehetővé teszi, hogy bármely digitális dokumentumhoz címkét hozzak létre. Megígérem, hogy nem hozok létre olyan címkét, amely sértő, károsító, fenyegető, törvénytelen, rágalmazó, gyalázkodó, zaklató, pornográf, obszcén, tisztességtelen, sérti a magán vagy közösségi jogokat, gyűlölködő, és faji, etnikai vagy egyéb okból elítélendő. A négyzetre történő kattintással elfogadom, hogy betartom ezt a megállapodást. Amennyiben ettől eltérek, Az én Europeanámban való tagságom megszűnik.
+_register.mycodeofconductrequired=El kell fogadnia a My Personal Page Felhasználói magatártásra vonatkozó szabályait
+_register.password=Jelszó
 _register.password.choose=Válasszon jelszót!
 _register.password.explain=A jelszónak 6-30 karakter hosszúnak kell lennie.
 _register.pick.user.name=A felhasználóneve akkor jelenik meg, ha bejelentkezik.
@@ -234,13 +195,25 @@ _register.please.follow.link=Kérjük, kattintson az alábbi linkre a regisztrá
 _register.register=Regisztráció
 _register.registration.failed=A regisztráció során hiba történt. Kérjük, próbálja meg újra.
 _register.repeat.password=Jelszó megismétlése
+_register.requiredfield=Ez egy kötelező mező.
 _register.username.choose=Válasszon felhasználónevet!
 _register.username.explain=A felhasználónevét bejelentkezéskor fogjuk megjeleníteni.
+_search.boolean.and=és
+_search.boolean.not=nem
+_search.boolean.or=vagy
+_search.field.any.field=Bármely kulcsszó
 _search.field.creator=Létrehozó
 _search.field.date=Dátum
-_search.option.subject=Téma
-_search.option.title=Cím
-_success.search.saved=Mentett keresés
+_search.field.provider=Szolgáltató
+_search.field.subject=Téma
+_search.field.title=Cím
+_toberemoved.althome=Vissza az Europeana honalphoz
+_toberemoved.altlogoeuropeana=Europeana logó kultúrában gondolkodunk
+_toberemoved.checkthefaqs=Tekintse meg a Gyakran Ismételt Kérdéseket (GYIK), hátha választ kap a kérdésére
+_toberemoved.communities=Közösségek
+_toberemoved.contributorexplain=Ezek azok a szervezetek, amelyek közreműködtek a digitális tartalom kialakításában digitalizált képekkel, könyvekkel, hírműsorokkal, stb. Néhányan a közreműködők közül szolgáltatók*, mint például a Culture.fr, amely a legnagyobb ezek közül, 480 franciaországi gyűjtemény digitális tartalmainak szolgáltatásával, többek között a Louvre és a Musée d’Orsay gyűjteményeiből.
+_toberemoved.emaileuropeanateam=Az Europeana csapata
+_toberemoved.using.europeana=Az Europeana használata
 _unused.about.us=Rólunk
 _unused.accessibility=Elérhetőség
 _unused.add=Hozzáad
@@ -249,10 +222,34 @@ _unused.altprint=Nyomtatás
 _unused.aplacetoshareideas=- teret ad a gondolatoknak és inspirációknak. Keressen Európa kulturális gyűjteményeiben, kapcsolódjon más felhasználók keresési útvonalaihoz, és ossza meg felefdezéseit!
 _unused.bosnia.and.herzegovina=Bosznia-Hercegovina
 _unused.browse.through.time=Idő szerinti keresés
+_unused.contacts=Kapcsolat
+_unused.contributors=Közreműködők
+_unused.country=Ország
+_unused.createaccount=Felhasználói fiók létrehozása
+_unused.emailwelcome=Üdvözüljük Az én Europeanámban
+_unused.enewsoptin=Tájékoztatssanak az Europeana új fejlesztéseiről
+_unused.featuredisabled=Ez a funkció jelenleg nem használható.
+_unused.feedbackresponse=Nagyon köszönjük a visszajelzést! Amennyiben a megjegyzése választ igényel, az Europeana csapata válaszolni fog, amilyen gyorsan csak tud. A gyorsabb válasz érdekében kérjük, hogy angolul írjon!
+_unused.findoutmore=További információk
+_unused.fromourparnters=Partnereinktől: múzeumoktól, könyvtáraktól, levéltáraktól, audiovizuális gyűjteményektől.
+_unused.fundedby=közös finanszírozásban az Európai Unióval
+_unused.fyrom=Macedónia Volt Jugoszláv Köztársaság
+_unused.hideadvancedsearch=Az összetett keresés elrejtése
+_unused.image=Kép
+_unused.invalidquery=Érvénytelen keresőkérdés
+_unused.itemdetails=Elem részletesen
+_unused.languagepolicy=Nyelvi irányelvek
+_unused.newcontent=Újdonság
 _unused.other=egyéb
+_unused.partner=Partner
+_unused.partnerexplain=Ez az a partneri együttműködés, amelyben azok a könyvtárak vesznek részt, amelyek közreműködtek a Europeana létrehozásában, valamint képviselik a Europeanát országukban és a szakmai szervezetekben.
+_unused.partners=Partnerek
+_unused.peoplearecurrentlythinkingabout=Az emberek jelenleg erre gondolnak
 _unused.privacy=Adatvédelem
+_unused.registeragain=Új regisztráció
 _unused.remember.me=Emlékezzen rám ezen a számítógépen
 _unused.remove=Törlés
+_unused.sector=Terület
 _unused.send.feedback=Írjon nekünk!
 _unused.share.your.ideas=Ossza meg gondolatait
 _unused.show.all=Az összes megtekintése
@@ -260,17 +257,20 @@ _unused.sign.in=Bejelentkezés
 _unused.site.map=Honlaptérkép
 _unused.slovenia=Szlovénia
 _unused.sound=Hang
+_unused.strorylinecredits=Történet és stáblista
 _unused.tag.added=Címke hozzáadva
 _unused.tag.addition.failed=A címke hozzáadása sikertelen.
 _unused.tagging=Címkézés
 _unused.terms.and.conditions=A szolgáltatás feltételei
 _unused.text=Szöveg
-_unused.username.in.use=használatban van. Kérjük, hogy válasszon másik felhasználónevet.
-_unused.usertags=Felhasználói címkék
-_unused.using.europeana=Az Europeana használata
-_unused.view.as.xml=XML nézet
-_unused.view.with.labels=Feliratos nézet
-_unused.view.without.labels=Felirat nélküli nézet
-_unused.you.have.search.for=Keresés
-languageDropDownList_t=Nyelv
-registrationSucceed_t=Ön sikeresen regisztrált.
+_unused.thisiseuropeana=Ez az Europeana
+_unused.thoughtlab=Gondolatok
+_unused.timeline=Időrend
+_unused.timelinenavigator=Eligazodás az időrendben
+_unused.userconduct=Felhasználói magatartás
+_unused.userconductagree=Tudom, hogy Az én Europeánám lehetővé teszi, hogy bármely digitális dokumentumhoz címkét hozzak létre. Megígérem, hogy nem hozok létre olyan címkét, amely sértő, károsító, fenyegető, törvénytelen, rágalmazó, gyalázkodó, zaklató, pornográf, obszcén, tisztességtelen, sérti a magán vagy közösségi jogokat, gyűlölködő, és faji, etnikai vagy egyéb okból elítélendő. A négyzetre történő kattintással elfogadom, hogy betartom ezt a megállapodást. Amennyiben ettől eltérek, Az én Europeanámban való tagságom megszűnik. KLIKKELJEN AZ ELFOGADÁSHOZ
+_unused_portal.ui.message.view.as.xml=XML nézet
+_unused_portal.ui.message.view.with.labels=Feliratos nézet
+_unused_portal.ui.message.view.without.labels=Felirat nélküli nézet
+_unused_portal.ui.message.you.have.search.for=Keresés
+_unused_validation.username.in.use=használatban van. Kérjük, hogy válasszon másik felhasználónevet.
