--- a/portal/src/main/resources/i18n/messages_lt.properties
+++ b/portal/src/main/resources/i18n/messages_lt.properties
@@ -1,88 +1,3 @@
-All_t=Visi
-AltHome_t=Spausti čia, norint grįžti į Europeana namų puslapį
-AltLogoEuropeana_t=Europeana: kultūra, galvokim apie ją, logo
-CheckTheFaqs_t=Pasitikrinkite DUK skyriuje - jame jau galite rasti jums reikalingą atsakymą
-ChooseLanguage_t=Pasirinkite kalbą
-Communities_t=Bendruomenės
-Contacts_t=Kontaktai
-ContributorExplain_t=Štai čia yra organizacijos, prisidedančios prie skaitmeninio turinio - piešinių, knygų, radijo ir televizijos transliacijų ir pan. Kai kurie iš šių prisidedančiųjų organizacijų yra tiesiog agregatai, Kultūra.fr yra stambiausias iš jų, kuris pateikia turinį iš daugiau negu 480 Prancūzijos organizacijų, įskaitant Louvre ir Musee d'Orsay. Organizacijų, bendradarbiaujančių su tokiu agregatu skaičius pateikiamas skliaustuose tuoj pat po agregato pavadinimo, pavyzdžiui, Videoactive (10)
-Contributor_t=Bendradarbiaujanti organizacija
-Contributors_t=Bendradarbiaujančios organizacijos
-Country_t=Valstybė
-CreateAccount_t=Sukurti paskyrą
-Description_t=Aprašymas
-EmailAlreadyRegistered_t=Šis elektroninio pašto adresas jau užregistruotas
-EmailClickToConfirm_t=Prašome spausti šią nuorodą ir patvirtinti savo registraciją
-EmailEuropeanaTeam_t=Europeana komanda
-EmailFormatError_t=Įsitikinkite, kad jūsų elektroninio pašto adresas yra teisingas, ir bandykite darkart
-EmailSendFailed_t=Elektroninio pašto laiškas neišsiųstas
-EmailSent_t=Elektroninio pašto laiškas išsiųstas
-EmailUse_t=Norėdami prisijungti prie tinklalapio, jūs naudosite savo elektroninio pašto adresą ir slaptažodį
-EmailWelcome_t=Sveiki atvykę į ManoEuropeana
-EnewsOptin_t=Informuokite mane apie Europeana naujoves.
-EnterValidEmail_t=Prašome įrašyti veikiantį elektroninio pašto adresą
-EnterYourEmail_t=Įveskite savo elektroninio pašto adresą
-ErrorDetails_t=Apie klaidas smulkiau
-Error_t=Klaida
-FYROM_t=Buvusioji Jugoslavijos Respublika Makedonija
-FeatureDisabled_t=Ši savybė (elementas) šiuo metu neveikia
-FeedbackResponse_t=Labai ačiū už jūsų atsiliepimus. Jei pageidautumėte atsakymo, su  jumis nedelsiant susisieks Europeana komandos narys. Norint atsakymą gauti kuo greičiau, atsiliepimai turėtų būti pateikiami anglų kalba.
-FindOutMore_t=Daugiau
-FinishRegistration_t=Baigti registraciją
-FirstName_t=Vardas
-ForgotPassword_t=Pamiršau savo slaptažodį
-FromOurParnters_t=Iš mūsų partnerių muziejų, archyvų, bibliotekų ir garso-vaizdo institucijų
-FundedBy_t=Iš dalies finansavo Europos Sąjunga
-HideAdvancedSearch_t=Nerodyti patikslintosios paieškos galimybės
-IAgree_t=Sutinku
-Image_t=Paveikslas
-Images_t=Paveikslai
-InvalidQuery_t=Klaidinga užklausa
-ItemDetails_t=Smulkiau apie elementus
-ItemSaveFailed_t=Išsaugoti nepavyko
-ItemSaved_t=Išsaugota
-Items_t=Elementai
-LanguagePolicy_t=Kalbos politika
-Less_t=Mažiau
-LinkExpired_t=Jūsų naudojama nuoroda registracijai užbaigti klaidinga arba neveikianti
-LogIn_t=Prisijunkite
-LogOut_t=Atsijunkite
-LoggedInAs_t=Prisijungta kaip
-MatchesFor_t=Jūs ieškote
-More_t=Daugiau
-MyCodeOfConductRequired_t=Privalote sutikti su registravimosi My Personal Page tvarka
-MyCodeOfConduct_t=Suprantu, kad My Personal Page man suteikia galimybę susikurti žymes bet kuriam mano norimam objektui. Sutinku, kad nekursiu tokių žymių, kurios būtų šmeižikiškos, žalingos, grasinančios, neteisėtos,įžeidžiančios, pažeidžiančios įstatymus, užgaulios, kurstančios, pornografinės, nepadorios, apgaulingos, grobikiškos privačiųjų ar viešųjų teisių požiūriu,  skleidžiančios rasinę bei etninę  neapykantą ar užgaulios kitais požiūriais. Spustelėjus šį langelį išreiškiu sutikimą laikytis šio susitarimo ir suprantu, kad jei jo nesilaikysiu, mano narystė tinklalapyje My Personal Page bus nutraukta.
-NewContent_t=Naujas turinys
-Next_t=Kitas
-NoItemsFound_t=Nerasta
-NoSavedItems_t=Nėra išsaugota
-NoSavedSearches_t=Paieška neišsaugota
-NoSavedTags_t=Nėra išsaugotų žymenų
-NoScript_t=Norint naudotis šiuo tinklalapiu, būtina turėti aktyvuotą JavaScript
-Of_t={preposition, gram.}
-OpensInNewWindow_t=Atidaro naujame lange
-Page_t=Puslapis
-PartnerExplain_t=Tai Europeana partnerių tinklas, prisidėjusių prie jos veikimo ir atstovaujančių Europeana savo valstybėse bei profesinėse asociacijose.
-Partner_t=Partneris
-Partners_t=Partneriai
-Password_t=Slaptažodis
-PeopleAreCurrentlyThinkingAbout_t=Šiuo metu žmonės galvoja apie
-RegisterAgain_t=Registruotis dar kartą
-RequiredField_t=Šį lauką būtina užpildyti
-Reset_t=Į pradžią
-Results_t=Rezultatai
-Sector_t=Sektorius
-Sounds_t=Garso medžiaga
-StrorylineCredits_t=Pagrindinė linija ir kreditai
-Texts_t=Tekstai
-ThisIsEuropeana_t=Tai Europeana
-ThoughtLab_t=Minčių laboratorija
-TimelineNavigator_t=Laiko skalės navigatorius
-Timeline_t=Laiko skalė
-UserConductAgree_t=Suprantu, kad My Personal Page man suteikia galimybę susikurti žymes bet kuriam mano norimam objektui. Sutinku, kad nekursiu tokių žymių, kurios būtų šmeižikiškos, žalingos, grasinančios, neteisėtos,įžeidžiančios, pažeidžiančios įstatymus, užgaulios, kurstančios, pornografinės, nepadorios, apgaulingos, grobikiškos privačiųjų ar viešųjų teisių požiūriu,  skleidžiančios rasinę bei etninę  neapykantą ar užgaulios kitais požiūriais. Spustelėjus šį langelį išreiškiu sutikimą laikytis šio susitarimo ir suprantu, kad jei jo nesilaikysiu, mano narystė tinklalapyje My Personal Page bus nutraukta. SPUSTELĖKITE NORĖDAMI PATVIRTINTI SUTIKIMĄ
-UserConduct_t=vartotojo elgesio tvarka
-Video_t=Video
-ViewingRelatedItems_t=Žiūrite susijusius vienetus
 _action.add.annotation=null
 _action.add.tag=Pridėti žymenį
 _action.advanced.search=Patikslintoji paieška
@@ -103,9 +18,7 @@ _action.send=Siųsti
 _action.share.with.friend=Dalinkitės su draugu
 _action.videos=Video
 _action.view.in.original.context=Žiūrėti originalų kontekstą
-_boolean.and=ir
-_boolean.not=ne
-_boolean.or=arba
+_actionOpenInNewWindow=Atidaro naujame lange
 _facet.by.collection=null
 _facet.by.country=Pagal valstybę
 _facet.by.date=Pagal datą
@@ -117,6 +30,7 @@ _facet.by.year=null
 _failure.search.saved=Paieškos išsaugojimas nepavyko
 _header.actions=Veiksmai
 _header.relatedcontent=Susijęs turinys
+_inc_result_table_full.description=Aprašymas
 _language_select.italian=Italų (ita)
 _locale.AL=Albanija
 _locale.AM=Armėnija
@@ -186,6 +100,10 @@ _locale.sk=Slovakų (slo)
 _locale.sl=Slovėnų (slv)
 _locale.sr=Serbų (scc)
 _locale.sv=Švedų (sve/swe)
+_menu.i18n.chooselanguage=Pasirinkite kalbą
+_messages.error.emailformaterror=Įsitikinkite, kad jūsų elektroninio pašto adresas yra teisingas, ir bandykite darkart
+_messages.error.emailsendfailed=Elektroninio pašto laiškas neišsiųstas
+_messages.notification.emailsent=Elektroninio pašto laiškas išsiųstas
 _metadata.dc.contributor=Bendraautorius
 _metadata.dc.coverage=Aprėptis
 _metadata.dc.creator=Autorius
@@ -215,18 +133,61 @@ _metadata.dcterms.replaces=Pakeitimai
 _metadata.dcterms.requires=Reikalauja
 _metadata.dcterms.spatial=Erdvinė aprėptis
 _metadata.dcterms.temporal=Chronologinė aprėptis
+_metadata.searchfield.contributor=Bendradarbiaujanti organizacija
+_metadata.type.all=Visi
+_metadata.type.images=Paveikslai
+_metadata.type.sounds=Garso medžiaga
+_metadata.type.texts=Tekstai
+_metadata.type.video=Video
 _mine.date.saved=Išsaugota data
 _mine.delete=Trinti
+_mine.email.address=Elektroninio pašto adresas
+_mine.firstname=Vardas
+_mine.forgotpassword=Pamiršau savo slaptažodį
+_mine.itemsaved=Išsaugota
+_mine.itemsavefailed=Išsaugoti nepavyko
 _mine.last.name=Pavardė
+_mine.loggedinas=Prisijungta kaip
+_mine.login=Prisijunkite
+_mine.logout=Atsijunkite
+_mine.nosaveditems=Nėra išsaugota
+_mine.nosavedsearches=Paieška neišsaugota
+_mine.nosavedtags=Nėra išsaugotų žymenų
 _mine.saved.items=Išsaugoti vienetai
 _mine.saved.searches=Išsaugotos užklausos
 _mine.saved.tags=Išsaugoti žymenys
 _mine.user.information=Vartotojo informacija
+_mine.user.registration.notification.succeed=Registracija baigta
 _mine.username=Vartotojo vardas
-_option.any.field=Bet kuris laukas
-_prompt.email.address=Elektroninio pašto adresas
-_prompt.provider=Tiekėjas
+_portal.menu.languagedropdownlist=Kalba
+_portal.ui.message.less=Mažiau
+_portal.ui.message.more=Daugiau
+_portal.ui.message.noscript=Norint naudotis šiuo tinklalapiu, būtina turėti aktyvuotą JavaScript
+_portal.ui.message.success.search.saved=Išsaugota paieška
+_portal.ui.message.usertags=Vartotojo žymenys
+_portal.ui.messages.items=Elementai
+_portal.ui.navigation.matchesfor=Jūs ieškote
+_portal.ui.navigation.next=Kitas
+_portal.ui.navigation.of={preposition, gram.}
+_portal.ui.navigation.page=Puslapis
+_portal.ui.notification.error=Klaida
+_portal.ui.notification.noitemsfound=Nerasta
+_portal.ui.reset.searchbox=Į pradžią
+_portal.ui.results=Rezultatai
+_portal.ui.viewingrelateditems=Žiūrite susijusius vienetus
+_register-request.emailalreadyregistered=Šis elektroninio pašto adresas jau užregistruotas
 _register.email.has.been.sent=Elektroninis laiškas išsiųstas šiuo adresu
+_register.emailclicktoconfirm=Prašome spausti šią nuorodą ir patvirtinti savo registraciją
+_register.emailuse=Norėdami prisijungti prie tinklalapio, jūs naudosite savo elektroninio pašto adresą ir slaptažodį
+_register.entervalidemail=Prašome įrašyti veikiantį elektroninio pašto adresą
+_register.enteryouremail=Įveskite savo elektroninio pašto adresą
+_register.errordetails=Apie klaidas smulkiau
+_register.finishregistration=Baigti registraciją
+_register.iagree=Sutinku
+_register.linkexpired=Jūsų naudojama nuoroda registracijai užbaigti klaidinga arba neveikianti
+_register.mycodeofconduct=Suprantu, kad My Personal Page man suteikia galimybę susikurti žymes bet kuriam mano norimam objektui. Sutinku, kad nekursiu tokių žymių, kurios būtų šmeižikiškos, žalingos, grasinančios, neteisėtos,įžeidžiančios, pažeidžiančios įstatymus, užgaulios, kurstančios, pornografinės, nepadorios, apgaulingos, grobikiškos privačiųjų ar viešųjų teisių požiūriu,  skleidžiančios rasinę bei etninę  neapykantą ar užgaulios kitais požiūriais. Spustelėjus šį langelį išreiškiu sutikimą laikytis šio susitarimo ir suprantu, kad jei jo nesilaikysiu, mano narystė tinklalapyje My Personal Page bus nutraukta.
+_register.mycodeofconductrequired=Privalote sutikti su registravimosi My Personal Page tvarka
+_register.password=Slaptažodis
 _register.password.choose=Pasirinkite slaptažodį
 _register.password.explain=Slaptažodį turi sudaryti 6-30 ženklų
 _register.pick.user.name=Prisijungimo metu bus pateikiamas jūsų vartotojo vardas
@@ -234,13 +195,25 @@ _register.please.follow.link=Prašome naudotis elektroniniame laiške pateiktąj
 _register.register=Registruotis
 _register.registration.failed=Registracijos metu įvyko klaida. Bandykite dar kartą
 _register.repeat.password=Pakartokite slaptažodį
+_register.requiredfield=Šį lauką būtina užpildyti
 _register.username.choose=Pasirinkite vartotojo vardą
 _register.username.explain=Jūsų vartotojo vardas bus parodomas jums prisijungiant
+_search.boolean.and=ir
+_search.boolean.not=ne
+_search.boolean.or=arba
+_search.field.any.field=Bet kuris laukas
 _search.field.creator=Kūrėjas
 _search.field.date=Data
-_search.option.subject=Dalykas
-_search.option.title=Antraštė
-_success.search.saved=Išsaugota paieška
+_search.field.provider=Tiekėjas
+_search.field.subject=Dalykas
+_search.field.title=Antraštė
+_toberemoved.althome=Spausti čia, norint grįžti į Europeana namų puslapį
+_toberemoved.altlogoeuropeana=Europeana: kultūra, galvokim apie ją, logo
+_toberemoved.checkthefaqs=Pasitikrinkite DUK skyriuje - jame jau galite rasti jums reikalingą atsakymą
+_toberemoved.communities=Bendruomenės
+_toberemoved.contributorexplain=Štai čia yra organizacijos, prisidedančios prie skaitmeninio turinio - piešinių, knygų, radijo ir televizijos transliacijų ir pan. Kai kurie iš šių prisidedančiųjų organizacijų yra tiesiog agregatai, Kultūra.fr yra stambiausias iš jų, kuris pateikia turinį iš daugiau negu 480 Prancūzijos organizacijų, įskaitant Louvre ir Musee d'Orsay. Organizacijų, bendradarbiaujančių su tokiu agregatu skaičius pateikiamas skliaustuose tuoj pat po agregato pavadinimo, pavyzdžiui, Videoactive (10)
+_toberemoved.emaileuropeanateam=Europeana komanda
+_toberemoved.using.europeana=Naudojant Europeana
 _unused.about.us=Apie mus
 _unused.accessibility=Prieiga
 _unused.add=Įtraukite
@@ -249,10 +222,34 @@ _unused.altprint=Spausdinti šį puslapį
 _unused.aplacetoshareideas=vieta mintims ir idėjoms. Ieškokite Europos kultūros ištekliuose, susisiekite su kitu vartotoju ir ir pasidalinkite patirtimi.
 _unused.bosnia.and.herzegovina=Bosnija ir Hercegovina
 _unused.browse.through.time=Peržiūra per tam tikrą laiką
+_unused.contacts=Kontaktai
+_unused.contributors=Bendradarbiaujančios organizacijos
+_unused.country=Valstybė
+_unused.createaccount=Sukurti paskyrą
+_unused.emailwelcome=Sveiki atvykę į ManoEuropeana
+_unused.enewsoptin=Informuokite mane apie Europeana naujoves.
+_unused.featuredisabled=Ši savybė (elementas) šiuo metu neveikia
+_unused.feedbackresponse=Labai ačiū už jūsų atsiliepimus. Jei pageidautumėte atsakymo, su  jumis nedelsiant susisieks Europeana komandos narys. Norint atsakymą gauti kuo greičiau, atsiliepimai turėtų būti pateikiami anglų kalba.
+_unused.findoutmore=Daugiau
+_unused.fromourparnters=Iš mūsų partnerių muziejų, archyvų, bibliotekų ir garso-vaizdo institucijų
+_unused.fundedby=Iš dalies finansavo Europos Sąjunga
+_unused.fyrom=Buvusioji Jugoslavijos Respublika Makedonija
+_unused.hideadvancedsearch=Nerodyti patikslintosios paieškos galimybės
+_unused.image=Paveikslas
+_unused.invalidquery=Klaidinga užklausa
+_unused.itemdetails=Smulkiau apie elementus
+_unused.languagepolicy=Kalbos politika
+_unused.newcontent=Naujas turinys
 _unused.other=Kita
+_unused.partner=Partneris
+_unused.partnerexplain=Tai Europeana partnerių tinklas, prisidėjusių prie jos veikimo ir atstovaujančių Europeana savo valstybėse bei profesinėse asociacijose.
+_unused.partners=Partneriai
+_unused.peoplearecurrentlythinkingabout=Šiuo metu žmonės galvoja apie
 _unused.privacy=Privatumas
+_unused.registeragain=Registruotis dar kartą
 _unused.remember.me=Įsidėmėti mane šiame kompiuteryje
 _unused.remove=Naikinti
+_unused.sector=Sektorius
 _unused.send.feedback=Siųskite savo komentarus
 _unused.share.your.ideas=Pasidalinkite savo idėjomis
 _unused.show.all=Rodyti viską
@@ -260,17 +257,20 @@ _unused.sign.in=Prisijungti
 _unused.site.map=Svetainės struktūra
 _unused.slovenia=Slovėnija
 _unused.sound=Garsas
+_unused.strorylinecredits=Pagrindinė linija ir kreditai
 _unused.tag.added=Pridėtas žymuo
 _unused.tag.addition.failed=Žymens pridėti nepavyko
 _unused.tagging=Žymenų pateikimas
 _unused.terms.and.conditions=Sąlygos
 _unused.text=Tekstas
-_unused.username.in.use=jau naudojamas. Pasirinkite kitą vartotojo vardą
-_unused.usertags=Vartotojo žymenys
-_unused.using.europeana=Naudojant Europeana
-_unused.view.as.xml=Žiūrėti kaip XML
-_unused.view.with.labels=Žiūrėti etiketes
-_unused.view.without.labels=Žiūrėti be etikečių
-_unused.you.have.search.for=Atlikote paiešką
-languageDropDownList_t=Kalba
-registrationSucceed_t=Registracija baigta
+_unused.thisiseuropeana=Tai Europeana
+_unused.thoughtlab=Minčių laboratorija
+_unused.timeline=Laiko skalė
+_unused.timelinenavigator=Laiko skalės navigatorius
+_unused.userconduct=vartotojo elgesio tvarka
+_unused.userconductagree=Suprantu, kad My Personal Page man suteikia galimybę susikurti žymes bet kuriam mano norimam objektui. Sutinku, kad nekursiu tokių žymių, kurios būtų šmeižikiškos, žalingos, grasinančios, neteisėtos,įžeidžiančios, pažeidžiančios įstatymus, užgaulios, kurstančios, pornografinės, nepadorios, apgaulingos, grobikiškos privačiųjų ar viešųjų teisių požiūriu,  skleidžiančios rasinę bei etninę  neapykantą ar užgaulios kitais požiūriais. Spustelėjus šį langelį išreiškiu sutikimą laikytis šio susitarimo ir suprantu, kad jei jo nesilaikysiu, mano narystė tinklalapyje My Personal Page bus nutraukta. SPUSTELĖKITE NORĖDAMI PATVIRTINTI SUTIKIMĄ
+_unused_portal.ui.message.view.as.xml=Žiūrėti kaip XML
+_unused_portal.ui.message.view.with.labels=Žiūrėti etiketes
+_unused_portal.ui.message.view.without.labels=Žiūrėti be etikečių
+_unused_portal.ui.message.you.have.search.for=Atlikote paiešką
+_unused_validation.username.in.use=jau naudojamas. Pasirinkite kitą vartotojo vardą
