--- a/portal/src/main/resources/i18n/messages_lv.properties
+++ b/portal/src/main/resources/i18n/messages_lv.properties
@@ -1,88 +1,3 @@
-All_t=Visi
-AltHome_t=Klikšķināt, lai atgrieztos Europeana sākumlapā
-AltLogoEuropeana_t=Europeana logo domā kultūrā
-CheckTheFaqs_t=Ieskaties FAQ - tajos var būt atbilde uz Tavu jautājumu.
-ChooseLanguage_t=Izvēlēties valodu
-Communities_t=Kopienas
-Contacts_t=Saziņai
-ContributorExplain_t=Šīs ir tās organizācijas, kas piegādā saturu - digitalizētas gleznas, grāmatas, apraides u.c. Daži no šiem piegādātājiem ir agregatori*; lielākais no tiem ir Culture.fr, kas apkopo saturu no aptuveni 480  organizācijām Francijā, tajā skaitā - Luvras un d'Orsay muzeja. Organizāciju skaits, kuru saturu apkopo agregators, ir norādīts iekavās pēc agregatora nosaukuma, piem., Videoactive (10).
-Contributor_t=Līdzradītājs
-Contributors_t=Līdzradītāji
-Country_t=Valsts
-CreateAccount_t=Izveidot kontu
-Description_t=Apraksts
-EmailAlreadyRegistered_t=Šis e-pasta adrese jau ir piereģistrēta
-EmailClickToConfirm_t=Lūdzu klikšķināt uz saiti, lai apstiprinātu savu reģistrāciju
-EmailEuropeanaTeam_t=Europeana komanda
-EmailFormatError_t=Lūdzu pārbaudiet jūsu e-pasta adreses pareizību un mēģiniet vēlreiz
-EmailSendFailed_t=E-pasta nosūtīšana neizdevās
-EmailSent_t=E-pasts nosūtīts
-EmailUse_t=Lai pieslēgtos vietnei, lietojiet savu e-pasta adresi un paroli
-EmailWelcome_t=Sveicināti Mana Europeana
-EnewsOptin_t=Vēlos būt lietas kursā par Europeana jaunumiem.
-EnterValidEmail_t=Lūdzu ievadiet pareizu e-pasta adresi
-EnterYourEmail_t=Ievadiet savu e-pastu
-ErrorDetails_t=Kļūdas apraksts
-Error_t=Kļūda
-FYROM_t=Bijusī Dienvidslāvijas republika Maķedonija
-FeatureDisabled_t=Šī funkcija šobrīd nav pieejama.
-FeedbackResponse_t=Pateicamies par jūsu atgriezenisko saiti. Ja nepieciešama atbilde, ar jums, cik ātri vien iespējams, sazināsies Europeana komanda. Lai saņemtu ātrāku atbildi, saziņai iesakām lietot angļu valodu.
-FindOutMore_t=Uzzināt vairāk
-FinishRegistration_t=Pabeigt reģistrāciju
-FirstName_t=Vārds
-ForgotPassword_t=Aizmirsu paroli
-FromOurParnters_t=No mūsu partneriem muzejos, arhīvos, bibliotēkās un audiovizuālajām kolekcijām
-FundedBy_t=finansēts kopā ar Eiropas Savienību
-HideAdvancedSearch_t=Noslēpt izvērsto meklēšanu
-IAgree_t=Piekrītu
-Image_t=Attēls
-Images_t=Attēli
-InvalidQuery_t=Nepareizs vaicājums
-ItemDetails_t=Objekta apraksts
-ItemSaveFailed_t=Objektu saglabāt neizdevās
-ItemSaved_t=Objekts saglabāts
-Items_t=Objekti
-LanguagePolicy_t=Valodu politika
-Less_t=Mazāk
-LinkExpired_t=Saite, ko lietojāt reģistrācijas pabeigšanai, nav derīga vai tās derīguma termiņš ir beidzies
-LogIn_t=Pieslēgties
-LogOut_t=Iziet
-LoggedInAs_t=Pieslēdzies kā
-MatchesFor_t=Atbilst
-More_t=Vairāk
-MyCodeOfConductRequired_t=Lai reģistrētos Mana Europeana, jums ir jāsniedz sava piekrišana mūsu Uzvedības kodeksam.
-MyCodeOfConduct_t=Man ir skaidrs, ka Mana Europeana dod man iespēju izveidot tagus jebkuram dokumentam. Es apņemos neveidot tagus, kas varētu tikt uzskatīti par nomelnojošiem, kaitējošiem, draudus saturošiem, pretlikumīgiem, apmelojošiem, aizskarošiem, apvainojošiem, uzbrūkošiem, iebiedējošiem, pornogrāfiskiem, neķītriem, negodīgiem, privātās vai publiskās tiesības ierobežojošiem, naidīgiem, rasistiski, etniski vai citādus iebildumus raisošiem. Ieklikšķinot šajā lodziņā, es apņemos ievērot šo vienošanos un saprotu, ka pretējā gadījumā mana dalība Mana Europeana tiks apturēta.
-NewContent_t=Jauns saturs
-Next_t=Nākamais
-NoItemsFound_t=Nekas nav atrasts
-NoSavedItems_t=Nav saglabātu objektu
-NoSavedSearches_t=Nav saglabātu meklējumu
-NoSavedTags_t=Nav saglabātu tagu
-NoScript_t=Lai izmantotu visas šīs vietnes iespējas, jums nepieciešams aktivizēt Java skriptu.
-Of_t=no
-OpensInNewWindow_t=Atveras jaunā logā
-Page_t=Lappuse
-PartnerExplain_t=Šis ir partneru tīkls, kuri sadarbojās Europeana tapšanā un kuri pārstāv Europeanu savās valstīs un profesionālajās apvienībās.
-Partner_t=Partneris
-Partners_t=Partneri
-Password_t=Parole
-PeopleAreCurrentlyThinkingAbout_t=Šobrīd citi domā par
-RegisterAgain_t=Reģistrēties atkārtoti
-RequiredField_t=Šis lauks ir obligāts
-Reset_t=Notīrīt
-Results_t=Rezultāti
-Sector_t=Sektors
-Sounds_t=Skaņa
-StrorylineCredits_t=Sižets un resursa veidotāji.
-Texts_t=Teksti
-ThisIsEuropeana_t=Šī ir Europeana
-ThoughtLab_t=Domu laboratorija
-TimelineNavigator_t=Laika joslas navigācija
-Timeline_t=Laika josla
-UserConductAgree_t=Es saprotu, ka Mana Europeana dod man iespēju izveidot tagus jebkuram manis izvēlētam objektam. Es piekrītu neveidot tagus, kas var tikt uzskatīti par aizskarošiem, kaitējošiem, draudus saturošiem, nelikumīgiem, aizskarošiem, apmelojošiem, aizvainojošiem, uzbrūkošiem, agresīviem, pornogrāfiskiem, neķītriem, melīgiem, privātās vai sabiedrības tiesības aizskarošiem, naidīgiem, rasistiskiem, kā arī etniski vai kā citādi aizskarošiem. Uzklikšķinot uz šīs pogas, es piekrītu ievērot šo vienošanos un apzinos, ka pretējā gadījumā mana dalība Mana Europeana tiks apturēta. Piekrītu.
-UserConduct_t=Lietotāju uzvedība
-Video_t=Video
-ViewingRelatedItems_t=Jūs aplūkojat saistītus objektus
 _action.add.annotation=null
 _action.add.tag=Pievienot tagu
 _action.advanced.search=Izvērstā meklēšana
@@ -103,9 +18,7 @@ _action.send=Nosūtīt
 _action.share.with.friend=Dalies ar draugu
 _action.videos=Video
 _action.view.in.original.context=Skatīt oriģinālkontekstā
-_boolean.and=un
-_boolean.not=ne
-_boolean.or=vai
+_actionOpenInNewWindow=Atveras jaunā logā
 _facet.by.collection=null
 _facet.by.country=Pēc valsts
 _facet.by.date=Pēc datuma
@@ -117,6 +30,7 @@ _facet.by.year=null
 _failure.search.saved=Meklējuma saglabāšana neizdevās
 _header.actions=Darbības
 _header.relatedcontent=Saistītais saturs
+_inc_result_table_full.description=Apraksts
 _language_select.italian=itāļu
 _locale.AL=Albānija
 _locale.AM=Armēnija
@@ -186,6 +100,10 @@ _locale.sk=slovāku
 _locale.sl=slovēņu
 _locale.sr=serbu
 _locale.sv=zviedru
+_menu.i18n.chooselanguage=Izvēlēties valodu
+_messages.error.emailformaterror=Lūdzu pārbaudiet jūsu e-pasta adreses pareizību un mēģiniet vēlreiz
+_messages.error.emailsendfailed=E-pasta nosūtīšana neizdevās
+_messages.notification.emailsent=E-pasts nosūtīts
 _metadata.dc.contributor=Līdzradītājs
 _metadata.dc.coverage=Aptvērums
 _metadata.dc.creator=Autors
@@ -215,18 +133,61 @@ _metadata.dcterms.replaces=Aizvieto
 _metadata.dcterms.requires=Prasa
 _metadata.dcterms.spatial=Telpiskais aptvērums
 _metadata.dcterms.temporal=Aptvērums laikā
+_metadata.searchfield.contributor=Līdzradītājs
+_metadata.type.all=Visi
+_metadata.type.images=Attēli
+_metadata.type.sounds=Skaņa
+_metadata.type.texts=Teksti
+_metadata.type.video=Video
 _mine.date.saved=Saglabāšanas datums
 _mine.delete=Izdzēst
+_mine.email.address=E-pasta adrese
+_mine.firstname=Vārds
+_mine.forgotpassword=Aizmirsu paroli
+_mine.itemsaved=Objekts saglabāts
+_mine.itemsavefailed=Objektu saglabāt neizdevās
 _mine.last.name=Uzvārds
+_mine.loggedinas=Pieslēdzies kā
+_mine.login=Pieslēgties
+_mine.logout=Iziet
+_mine.nosaveditems=Nav saglabātu objektu
+_mine.nosavedsearches=Nav saglabātu meklējumu
+_mine.nosavedtags=Nav saglabātu tagu
 _mine.saved.items=Saglabātie objekti
 _mine.saved.searches=Saglabātie meklējumi
 _mine.saved.tags=Saglabātie tagi
 _mine.user.information=Informācija lietotājiem
+_mine.user.registration.notification.succeed=Jūsu reģistrācija ir veiksmīga
 _mine.username=Lietotāja vārds
-_option.any.field=Jebkurš lauks
-_prompt.email.address=E-pasta adrese
-_prompt.provider=Piegādātājs
+_portal.menu.languagedropdownlist=Valoda
+_portal.ui.message.less=Mazāk
+_portal.ui.message.more=Vairāk
+_portal.ui.message.noscript=Lai izmantotu visas šīs vietnes iespējas, jums nepieciešams aktivizēt Java skriptu.
+_portal.ui.message.success.search.saved=Meklējums saglabāts
+_portal.ui.message.usertags=Lietotāju tagi
+_portal.ui.messages.items=Objekti
+_portal.ui.navigation.matchesfor=Atbilst
+_portal.ui.navigation.next=Nākamais
+_portal.ui.navigation.of=no
+_portal.ui.navigation.page=Lappuse
+_portal.ui.notification.error=Kļūda
+_portal.ui.notification.noitemsfound=Nekas nav atrasts
+_portal.ui.reset.searchbox=Notīrīt
+_portal.ui.results=Rezultāti
+_portal.ui.viewingrelateditems=Jūs aplūkojat saistītus objektus
+_register-request.emailalreadyregistered=Šis e-pasta adrese jau ir piereģistrēta
 _register.email.has.been.sent=E-pasts tika nosūtīts uz sekojošu adresi
+_register.emailclicktoconfirm=Lūdzu klikšķināt uz saiti, lai apstiprinātu savu reģistrāciju
+_register.emailuse=Lai pieslēgtos vietnei, lietojiet savu e-pasta adresi un paroli
+_register.entervalidemail=Lūdzu ievadiet pareizu e-pasta adresi
+_register.enteryouremail=Ievadiet savu e-pastu
+_register.errordetails=Kļūdas apraksts
+_register.finishregistration=Pabeigt reģistrāciju
+_register.iagree=Piekrītu
+_register.linkexpired=Saite, ko lietojāt reģistrācijas pabeigšanai, nav derīga vai tās derīguma termiņš ir beidzies
+_register.mycodeofconduct=Man ir skaidrs, ka Mana Europeana dod man iespēju izveidot tagus jebkuram dokumentam. Es apņemos neveidot tagus, kas varētu tikt uzskatīti par nomelnojošiem, kaitējošiem, draudus saturošiem, pretlikumīgiem, apmelojošiem, aizskarošiem, apvainojošiem, uzbrūkošiem, iebiedējošiem, pornogrāfiskiem, neķītriem, negodīgiem, privātās vai publiskās tiesības ierobežojošiem, naidīgiem, rasistiski, etniski vai citādus iebildumus raisošiem. Ieklikšķinot šajā lodziņā, es apņemos ievērot šo vienošanos un saprotu, ka pretējā gadījumā mana dalība Mana Europeana tiks apturēta.
+_register.mycodeofconductrequired=Lai reģistrētos Mana Europeana, jums ir jāsniedz sava piekrišana mūsu Uzvedības kodeksam.
+_register.password=Parole
 _register.password.choose=Izvēlēties paroli
 _register.password.explain=Parolei jābūt no 6-30 rakstu zīmēm
 _register.pick.user.name=Jūsu lietotāja vārds tiks parādīts pēc pieslēgšanās
@@ -234,13 +195,25 @@ _register.please.follow.link=Lūdzu izvēlēties e-pastā norādīto saiti, lai 
 _register.register=Piereģistrēties
 _register.registration.failed=Apstrādājot jūsu reģistrācijas datus, radusies kļūda. Lūdzu mēģiniet vēlreiz
 _register.repeat.password=Atkārtot paroli
+_register.requiredfield=Šis lauks ir obligāts
 _register.username.choose=Izvēlēties lietotāja vārdu
 _register.username.explain=Jūsu lietotāja vārds tiks parādīts pēc pieslēgšanās
+_search.boolean.and=un
+_search.boolean.not=ne
+_search.boolean.or=vai
+_search.field.any.field=Jebkurš lauks
 _search.field.creator=Autors
 _search.field.date=Datums
-_search.option.subject=Priekšmets
-_search.option.title=Nosaukums
-_success.search.saved=Meklējums saglabāts
+_search.field.provider=Piegādātājs
+_search.field.subject=Priekšmets
+_search.field.title=Nosaukums
+_toberemoved.althome=Klikšķināt, lai atgrieztos Europeana sākumlapā
+_toberemoved.altlogoeuropeana=Europeana logo domā kultūrā
+_toberemoved.checkthefaqs=Ieskaties FAQ - tajos var būt atbilde uz Tavu jautājumu.
+_toberemoved.communities=Kopienas
+_toberemoved.contributorexplain=Šīs ir tās organizācijas, kas piegādā saturu - digitalizētas gleznas, grāmatas, apraides u.c. Daži no šiem piegādātājiem ir agregatori*; lielākais no tiem ir Culture.fr, kas apkopo saturu no aptuveni 480  organizācijām Francijā, tajā skaitā - Luvras un d'Orsay muzeja. Organizāciju skaits, kuru saturu apkopo agregators, ir norādīts iekavās pēc agregatora nosaukuma, piem., Videoactive (10).
+_toberemoved.emaileuropeanateam=Europeana komanda
+_toberemoved.using.europeana=Europeana lietošana
 _unused.about.us=Par mums
 _unused.accessibility=Piekļuve
 _unused.add=Pievienot
@@ -249,10 +222,34 @@ _unused.altprint=Izdrukāt lappusi
 _unused.aplacetoshareideas=vieta iedvesmai un idejām. Meklē Eiropas kultūras kolekcijās, ieskaties citu lietotāju meklējumos un dalies savos atklājumos.
 _unused.bosnia.and.herzegovina=Bosnija un Hercogovina
 _unused.browse.through.time=Pārlūkot laikā
+_unused.contacts=Saziņai
+_unused.contributors=Līdzradītāji
+_unused.country=Valsts
+_unused.createaccount=Izveidot kontu
+_unused.emailwelcome=Sveicināti Mana Europeana
+_unused.enewsoptin=Vēlos būt lietas kursā par Europeana jaunumiem.
+_unused.featuredisabled=Šī funkcija šobrīd nav pieejama.
+_unused.feedbackresponse=Pateicamies par jūsu atgriezenisko saiti. Ja nepieciešama atbilde, ar jums, cik ātri vien iespējams, sazināsies Europeana komanda. Lai saņemtu ātrāku atbildi, saziņai iesakām lietot angļu valodu.
+_unused.findoutmore=Uzzināt vairāk
+_unused.fromourparnters=No mūsu partneriem muzejos, arhīvos, bibliotēkās un audiovizuālajām kolekcijām
+_unused.fundedby=finansēts kopā ar Eiropas Savienību
+_unused.fyrom=Bijusī Dienvidslāvijas republika Maķedonija
+_unused.hideadvancedsearch=Noslēpt izvērsto meklēšanu
+_unused.image=Attēls
+_unused.invalidquery=Nepareizs vaicājums
+_unused.itemdetails=Objekta apraksts
+_unused.languagepolicy=Valodu politika
+_unused.newcontent=Jauns saturs
 _unused.other=citas
+_unused.partner=Partneris
+_unused.partnerexplain=Šis ir partneru tīkls, kuri sadarbojās Europeana tapšanā un kuri pārstāv Europeanu savās valstīs un profesionālajās apvienībās.
+_unused.partners=Partneri
+_unused.peoplearecurrentlythinkingabout=Šobrīd citi domā par
 _unused.privacy=Privātums
+_unused.registeragain=Reģistrēties atkārtoti
 _unused.remember.me=Atcerēties mani šajā datorā
 _unused.remove=Aizvākt
+_unused.sector=Sektors
 _unused.send.feedback=Nosūtīt atsauksmi
 _unused.share.your.ideas=Dalies ar idejām
 _unused.show.all=Parādīt visus
@@ -260,17 +257,20 @@ _unused.sign.in=Pieslēgties
 _unused.site.map=Lapas karte
 _unused.slovenia=Slovēnija
 _unused.sound=Skaņa
+_unused.strorylinecredits=Sižets un resursa veidotāji.
 _unused.tag.added=Tags pievienots
 _unused.tag.addition.failed=Tagu pievienot neizdevās
 _unused.tagging=Tagošana
 _unused.terms.and.conditions=Nosacījumi
 _unused.text=Teksts
-_unused.username.in.use=jau ir izmantots. Lūdzu izvēlieties citu.
-_unused.usertags=Lietotāju tagi
-_unused.using.europeana=Europeana lietošana
-_unused.view.as.xml=Skatīt kā XML
-_unused.view.with.labels=Skatīt ar iezīmēm
-_unused.view.without.labels=Skatīt bez iezīmēm
-_unused.you.have.search.for=Jūs meklējāt pēc
-languageDropDownList_t=Valoda
-registrationSucceed_t=Jūsu reģistrācija ir veiksmīga
+_unused.thisiseuropeana=Šī ir Europeana
+_unused.thoughtlab=Domu laboratorija
+_unused.timeline=Laika josla
+_unused.timelinenavigator=Laika joslas navigācija
+_unused.userconduct=Lietotāju uzvedība
+_unused.userconductagree=Es saprotu, ka Mana Europeana dod man iespēju izveidot tagus jebkuram manis izvēlētam objektam. Es piekrītu neveidot tagus, kas var tikt uzskatīti par aizskarošiem, kaitējošiem, draudus saturošiem, nelikumīgiem, aizskarošiem, apmelojošiem, aizvainojošiem, uzbrūkošiem, agresīviem, pornogrāfiskiem, neķītriem, melīgiem, privātās vai sabiedrības tiesības aizskarošiem, naidīgiem, rasistiskiem, kā arī etniski vai kā citādi aizskarošiem. Uzklikšķinot uz šīs pogas, es piekrītu ievērot šo vienošanos un apzinos, ka pretējā gadījumā mana dalība Mana Europeana tiks apturēta. Piekrītu.
+_unused_portal.ui.message.view.as.xml=Skatīt kā XML
+_unused_portal.ui.message.view.with.labels=Skatīt ar iezīmēm
+_unused_portal.ui.message.view.without.labels=Skatīt bez iezīmēm
+_unused_portal.ui.message.you.have.search.for=Jūs meklējāt pēc
+_unused_validation.username.in.use=jau ir izmantots. Lūdzu izvēlieties citu.
