--- a/portal/src/main/resources/i18n/messages_mt.properties
+++ b/portal/src/main/resources/i18n/messages_mt.properties
@@ -1,88 +1,3 @@
-All_t=Kollha
-AltHome_t=Ikklikkja hawn biex terġa' lura lejn il-paġna ewlenija tal-Europeana
-AltLogoEuropeana_t=logo Europeana aħseb f'termini ta' kultura
-CheckTheFaqs_t=Ara l-Mistoqsijiet Komuni - jafu jkopru l-fehma tiegħek
-ChooseLanguage_t=Agħżel lingwa
-Communities_t=Komunitajiet
-Contacts_t=Kuntatti
-ContributorExplain_t=Dawn huma l-organizzazzjonijiet li qegħdin jikkontribwixxu l-kontenut - pitturi, kotba, xandiriet eċċ. diġitizzati. Uħud minn dawn il-kontributuri huma aggregaturi*. Culture.fr huwa l-akbar aggregatur, u jipprovdi kontenut minn madwar 480 organizzazzjoni fi Franza, inklużi l-Louvre u l-Musée d'Orsay. L-għadd ta' organizzazzjonijiet li jikkontribwixxu lil aggregatur huwa muri fil-parentesi wara isem l-aggregatur, eż. Videoactive (10)
-Contributor_t=Kontributur
-Contributors_t=Kontributuri
-Country_t=Pajjiż
-CreateAccount_t=Oħloq kont
-Description_t=Deskrizzjoni
-EmailAlreadyRegistered_t=Dan l-indirizz ġa rreġistrat
-EmailClickToConfirm_t=Ikklikkja l-link li ġejja biex tikkonferma r-reġistrazzjoni tiegħek
-EmailEuropeanaTeam_t=It-Tim tal-Europeana
-EmailFormatError_t=Kun żġur li l-ittre tiegħek ifformattjata sew u erġa' pprova
-EmailSendFailed_t=L-ittre ma setgħetx tintbagħat
-EmailSent_t=L-ittre ntbagħtet
-EmailUse_t=Biex tidħol fis-sit, tuża l-indirizz u l-password tiegħek
-EmailWelcome_t=Merħba f'L-Europeana Tiegħi
-EnewsOptin_t=Avżani dwar żviluppi ġodda fl-Europeana
-EnterValidEmail_t=Daħħal indirizz elettroniku validu
-EnterYourEmail_t=Daħħal l-indirizz tiegħek
-ErrorDetails_t=Dettalji tal-iżball
-Error_t=Żball
-FYROM_t=L-ex-Repubblika Jugoslava tal-Maċedonja
-FeatureDisabled_t=Din il-funzjonalità bħalissa mitfija.
-FeedbackResponse_t=Grazzi ħafna talli għedtilna x'taħseb. Jekk teħtieġ tweġiba, ma jdumx ma jkellmek membru tat-tim tal-Europeana. Għal tweġiba aktar malajr, dak li taħseb għandek tgħidu bl-Ingliż.
-FindOutMore_t=Skopri aktar
-FinishRegistration_t=Spiċċa r-reġistrazzjoni
-FirstName_t=Isem
-ForgotPassword_t=Insejt il-password
-FromOurParnters_t=Mill-mużewijiet, arkivji, libreriji u ġabriet awdjoviżivi msiħbin tagħna
-FundedBy_t=Ikkofinanzjat mill-Unjoni Ewropea
-HideAdvancedSearch_t=Aħbi t-tiftix avvanzat
-IAgree_t=Naqbel
-Image_t=Xbieha
-Images_t=Xbihat
-InvalidQuery_t=Mistoqsija invalida
-ItemDetails_t=Dettalji tal-oġġetti
-ItemSaveFailed_t=L-issejvjar tal-oġġett falla
-ItemSaved_t=L-oġġett ġie ssejvjat
-Items_t=Oġġetti
-LanguagePolicy_t=Politka fuq il-lingwa
-Less_t=Anqas
-LinkExpired_t=Il-link li użajt biex tirreġistra invalida jew skaduta.
-LogIn_t=Idħol fi
-LogOut_t=Oħroġ minn
-LoggedInAs_t=Illoggjat bħala
-MatchesFor_t=Jaqblu ma'
-More_t=Aktar
-MyCodeOfConductRequired_t=Trid taqbel mal-kodiċi tal-kondotta tagħna biex tirreġistra għal L-Europeana Tiegħi
-MyCodeOfConduct_t=Nifhem li L-Europeana Tiegħi jagħtini l-opportunità li noħloq tikketti għal kwalunkwe oġġett li nixtieq. Naqbel li ma noħloq ebda tikketta li tista' titqies libelluża, dannuża, ta' theddida, illeġittima, defamatorja, trażgredenti, abbużiva, xewwiexa, fastidjuża, pornografika, oxxena, frodulenti, li tinvadi d-drittijiet tal-privatezza jew tal-pubbliċità, odjuża, jew oġġezzjonabbli razzjalment, etnikament jew b'xi mod ieħor. Meta qed nikklikkja dil-kaxxa naqbel li nimxi ma' dan il-ftehim, u nifhem li fin-nuqqas is-sħubija tiegħi f'L-Europeana Tiegħi tiġi mitmuma.
-NewContent_t=Kontenut ġdid
-Next_t=Li jmiss
-NoItemsFound_t=Ma nstab l-ebda oġġett
-NoSavedItems_t=Ebda oġġett issejvjat
-NoSavedSearches_t=Ebda tiftixa ssejvjata
-NoSavedTags_t=Ebda tikketta ssejvjata
-NoScript_t=Għal użu aqwa minn dan is-sit, irid ikollok il-JavaScript attivat
-Of_t=minn
-OpensInNewWindow_t=Jinfetaħ f'tieqa ġdida
-Page_t=Paġna
-PartnerExplain_t=Dan huwa n-netwerk ta' kontributuri msiħbin li kkollaboraw sabiex l-Europeana jsir realtà, u li jirrappreżentaw l-Europeana fil-pajjiżi u l-assoċjazzjonijiet professjonali tagħhom.
-Partner_t=Imsiħbin
-Partners_t=Sħab
-Password_t=Password
-PeopleAreCurrentlyThinkingAbout_t=Bħalissa n-nies qed jaħsbu dwar
-RegisterAgain_t=Erġa' rreġistra
-RequiredField_t=Dan qasam meħtieġ
-Reset_t=Issettja mill-ġdid
-Results_t=Riżultati
-Sector_t=Settur
-Sounds_t=Ħsejjes
-StrorylineCredits_t=Plott u ismijiet tal-aħħar
-Texts_t=Testi
-ThisIsEuropeana_t=Dan l-Europeana
-ThoughtLab_t=Laboratorju tal-ideat
-TimelineNavigator_t=Navigatur tal-linja kronoloġika
-Timeline_t=Linja kronoloġika
-UserConductAgree_t=Nifhem li L-Europeana Tiegħi jagħtini l-opportunità li noħloq tikketti għal kwalunkwe oġġett li nixtieq. Naqbel li ma noħloq ebda tikketta li tista' titqies libelluża, dannuża, ta' theddida, illeġittima, defamatorja, trażgredenti, abbużiva, xewwiexa, fastidjuża, pornografika, oxxena, frodulenti, li tinvadi d-drittijiet tal-privatezza jew tal-pubbliċità, odjuża, jew oġġezzjonabbli razzjalment, etnikament jew b'xi mod ieħor. Meta qed nikklikkja dil-kaxxa naqbel li nimxi ma' dan il-ftehim, u nifhem li fin-nuqqas is-sħubija tiegħi f'L-Europeana Tiegħi tiġi mitmuma. IKKLIKKJA BIEX TAQBEL
-UserConduct_t=Kondotta tal-Użaturi
-Video_t=Vidjow
-ViewingRelatedItems_t=Qed tara oġġetti relatati
 _action.add.annotation=null
 _action.add.tag=Żid tikketta
 _action.advanced.search=Tiftix avvanzat
@@ -103,9 +18,7 @@ _action.send=Ibgħat
 _action.share.with.friend=Aqsam ma' ħabib
 _action.videos=Vidjows
 _action.view.in.original.context=Ara fil-kuntest oriġinali
-_boolean.and=u
-_boolean.not=mhux
-_boolean.or=jew
+_actionOpenInNewWindow=Jinfetaħ f'tieqa ġdida
 _facet.by.collection=null
 _facet.by.country=Bil-pajjiż
 _facet.by.date=Bid-data
@@ -117,6 +30,7 @@ _facet.by.year=null
 _failure.search.saved=L-issejvjar tat-tiftixa falla
 _header.actions=Azzjonijiet
 _header.relatedcontent=Kontenut relatat
+_inc_result_table_full.description=Deskrizzjoni
 _language_select.italian=Taljan (ita)
 _locale.AL=L-Albanija
 _locale.AM=L-Armenja
@@ -186,6 +100,10 @@ _locale.sk=Slovakk (slo)
 _locale.sl=Sloven (slv)
 _locale.sr=Serb (scc)
 _locale.sv=Żvediż (sve/swe)
+_menu.i18n.chooselanguage=Agħżel lingwa
+_messages.error.emailformaterror=Kun żġur li l-ittre tiegħek ifformattjata sew u erġa' pprova
+_messages.error.emailsendfailed=L-ittre ma setgħetx tintbagħat
+_messages.notification.emailsent=L-ittre ntbagħtet
 _metadata.dc.contributor=Kontributur
 _metadata.dc.coverage=Kopertura
 _metadata.dc.creator=Awtur
@@ -215,18 +133,61 @@ _metadata.dcterms.replaces=Jieħu post
 _metadata.dcterms.requires=Jeħtieġ
 _metadata.dcterms.spatial=Kopertura spazjali
 _metadata.dcterms.temporal=Kopertura temporali
+_metadata.searchfield.contributor=Kontributur
+_metadata.type.all=Kollha
+_metadata.type.images=Xbihat
+_metadata.type.sounds=Ħsejjes
+_metadata.type.texts=Testi
+_metadata.type.video=Vidjow
 _mine.date.saved=Data tal-issejvjar
 _mine.delete=Ħassar
+_mine.email.address=Indirizz elettroniku
+_mine.firstname=Isem
+_mine.forgotpassword=Insejt il-password
+_mine.itemsaved=L-oġġett ġie ssejvjat
+_mine.itemsavefailed=L-issejvjar tal-oġġett falla
 _mine.last.name=Kunjom
+_mine.loggedinas=Illoggjat bħala
+_mine.login=Idħol fi
+_mine.logout=Oħroġ minn
+_mine.nosaveditems=Ebda oġġett issejvjat
+_mine.nosavedsearches=Ebda tiftixa ssejvjata
+_mine.nosavedtags=Ebda tikketta ssejvjata
 _mine.saved.items=Oġġetti ssejvjati
 _mine.saved.searches=Tiftixiet issejvjati
 _mine.saved.tags=Tikketti ssejvjati
 _mine.user.information=Informazzjoni fuq l-użatur
+_mine.user.registration.notification.succeed=Irreġistrajt b'suċċess
 _mine.username=Isem ta' użatur
-_option.any.field=Kwalunkwe qasam
-_prompt.email.address=Indirizz elettroniku
-_prompt.provider=Provditur
+_portal.menu.languagedropdownlist=Lingwa
+_portal.ui.message.less=Anqas
+_portal.ui.message.more=Aktar
+_portal.ui.message.noscript=Għal użu aqwa minn dan is-sit, irid ikollok il-JavaScript attivat
+_portal.ui.message.success.search.saved=It-tiftixa ssejvjata
+_portal.ui.message.usertags=Tikketti tal-użaturi
+_portal.ui.messages.items=Oġġetti
+_portal.ui.navigation.matchesfor=Jaqblu ma'
+_portal.ui.navigation.next=Li jmiss
+_portal.ui.navigation.of=minn
+_portal.ui.navigation.page=Paġna
+_portal.ui.notification.error=Żball
+_portal.ui.notification.noitemsfound=Ma nstab l-ebda oġġett
+_portal.ui.reset.searchbox=Issettja mill-ġdid
+_portal.ui.results=Riżultati
+_portal.ui.viewingrelateditems=Qed tara oġġetti relatati
+_register-request.emailalreadyregistered=Dan l-indirizz ġa rreġistrat
 _register.email.has.been.sent=Intbgħatet ittre fl-indirizz li ġej
+_register.emailclicktoconfirm=Ikklikkja l-link li ġejja biex tikkonferma r-reġistrazzjoni tiegħek
+_register.emailuse=Biex tidħol fis-sit, tuża l-indirizz u l-password tiegħek
+_register.entervalidemail=Daħħal indirizz elettroniku validu
+_register.enteryouremail=Daħħal l-indirizz tiegħek
+_register.errordetails=Dettalji tal-iżball
+_register.finishregistration=Spiċċa r-reġistrazzjoni
+_register.iagree=Naqbel
+_register.linkexpired=Il-link li użajt biex tirreġistra invalida jew skaduta.
+_register.mycodeofconduct=Nifhem li L-Europeana Tiegħi jagħtini l-opportunità li noħloq tikketti għal kwalunkwe oġġett li nixtieq. Naqbel li ma noħloq ebda tikketta li tista' titqies libelluża, dannuża, ta' theddida, illeġittima, defamatorja, trażgredenti, abbużiva, xewwiexa, fastidjuża, pornografika, oxxena, frodulenti, li tinvadi d-drittijiet tal-privatezza jew tal-pubbliċità, odjuża, jew oġġezzjonabbli razzjalment, etnikament jew b'xi mod ieħor. Meta qed nikklikkja dil-kaxxa naqbel li nimxi ma' dan il-ftehim, u nifhem li fin-nuqqas is-sħubija tiegħi f'L-Europeana Tiegħi tiġi mitmuma.
+_register.mycodeofconductrequired=Trid taqbel mal-kodiċi tal-kondotta tagħna biex tirreġistra għal L-Europeana Tiegħi
+_register.password=Password
 _register.password.choose=Agħżel password
 _register.password.explain=Il-passwords iridu jkunu twal minn 6 sa 30 karattru
 _register.pick.user.name=Meta tidħol jintwera ismek ta' użatur
@@ -234,13 +195,25 @@ _register.please.follow.link=Segwi l-link provduta fl-ittre u spiċċa l-proċes
 _register.register=Irreġistra
 _register.registration.failed=Sar żball waqt li r-reġistrazzjoni tiegħek kienet qed tipprova tiġi pproċessata. Jekk jogħġbok erġa' pprova.
 _register.repeat.password=Irrepeti l-password
+_register.requiredfield=Dan qasam meħtieġ
 _register.username.choose=Agħżel isem ta' użatur
 _register.username.explain=Meta tidħol jintwera ismek ta' użatur
+_search.boolean.and=u
+_search.boolean.not=mhux
+_search.boolean.or=jew
+_search.field.any.field=Kwalunkwe qasam
 _search.field.creator=Ħallieq
 _search.field.date=Data
-_search.option.subject=Suġġett
-_search.option.title=Titlu
-_success.search.saved=It-tiftixa ssejvjata
+_search.field.provider=Provditur
+_search.field.subject=Suġġett
+_search.field.title=Titlu
+_toberemoved.althome=Ikklikkja hawn biex terġa' lura lejn il-paġna ewlenija tal-Europeana
+_toberemoved.altlogoeuropeana=logo Europeana aħseb f'termini ta' kultura
+_toberemoved.checkthefaqs=Ara l-Mistoqsijiet Komuni - jafu jkopru l-fehma tiegħek
+_toberemoved.communities=Komunitajiet
+_toberemoved.contributorexplain=Dawn huma l-organizzazzjonijiet li qegħdin jikkontribwixxu l-kontenut - pitturi, kotba, xandiriet eċċ. diġitizzati. Uħud minn dawn il-kontributuri huma aggregaturi*. Culture.fr huwa l-akbar aggregatur, u jipprovdi kontenut minn madwar 480 organizzazzjoni fi Franza, inklużi l-Louvre u l-Musée d'Orsay. L-għadd ta' organizzazzjonijiet li jikkontribwixxu lil aggregatur huwa muri fil-parentesi wara isem l-aggregatur, eż. Videoactive (10)
+_toberemoved.emaileuropeanateam=It-Tim tal-Europeana
+_toberemoved.using.europeana=Manwal tal-Europeana
 _unused.about.us=Dwarna
 _unused.accessibility=L-aċċessibilità
 _unused.add=Żid
@@ -249,10 +222,34 @@ _unused.altprint=Stampa din il-paġna
 _unused.aplacetoshareideas=post ta' ispirazzjoni u ideat. Fittex fil-ġabriet kulturali tal-Ewropa, aqbad ma' mogħdijiet ta' użaturi oħra u aqsam is-sejbiet tiegħek.
 _unused.bosnia.and.herzegovina=Il-Bożnja-Ħerzegovina
 _unused.browse.through.time=Qalleb kronoloġikament
+_unused.contacts=Kuntatti
+_unused.contributors=Kontributuri
+_unused.country=Pajjiż
+_unused.createaccount=Oħloq kont
+_unused.emailwelcome=Merħba f'L-Europeana Tiegħi
+_unused.enewsoptin=Avżani dwar żviluppi ġodda fl-Europeana
+_unused.featuredisabled=Din il-funzjonalità bħalissa mitfija.
+_unused.feedbackresponse=Grazzi ħafna talli għedtilna x'taħseb. Jekk teħtieġ tweġiba, ma jdumx ma jkellmek membru tat-tim tal-Europeana. Għal tweġiba aktar malajr, dak li taħseb għandek tgħidu bl-Ingliż.
+_unused.findoutmore=Skopri aktar
+_unused.fromourparnters=Mill-mużewijiet, arkivji, libreriji u ġabriet awdjoviżivi msiħbin tagħna
+_unused.fundedby=Ikkofinanzjat mill-Unjoni Ewropea
+_unused.fyrom=L-ex-Repubblika Jugoslava tal-Maċedonja
+_unused.hideadvancedsearch=Aħbi t-tiftix avvanzat
+_unused.image=Xbieha
+_unused.invalidquery=Mistoqsija invalida
+_unused.itemdetails=Dettalji tal-oġġetti
+_unused.languagepolicy=Politka fuq il-lingwa
+_unused.newcontent=Kontenut ġdid
 _unused.other=Oħrajn
+_unused.partner=Imsiħbin
+_unused.partnerexplain=Dan huwa n-netwerk ta' kontributuri msiħbin li kkollaboraw sabiex l-Europeana jsir realtà, u li jirrappreżentaw l-Europeana fil-pajjiżi u l-assoċjazzjonijiet professjonali tagħhom.
+_unused.partners=Sħab
+_unused.peoplearecurrentlythinkingabout=Bħalissa n-nies qed jaħsbu dwar
 _unused.privacy=Privatezza
+_unused.registeragain=Erġa' rreġistra
 _unused.remember.me=Ftakarni fuq dan il-kompjuter
 _unused.remove=Neħħi
+_unused.sector=Settur
 _unused.send.feedback=Ibgħat għidilna x'taħseb
 _unused.share.your.ideas=Aqsam l-ideat tiegħek
 _unused.show.all=Uri kollox
@@ -260,17 +257,20 @@ _unused.sign.in=Idħol
 _unused.site.map=Mappa tas-sit
 _unused.slovenia=Is-Slovenja
 _unused.sound=Ħoss
+_unused.strorylinecredits=Plott u ismijiet tal-aħħar
 _unused.tag.added=It-tikketta miżjuda
 _unused.tag.addition.failed=Iż-żieda tat-tikketta falliet
 _unused.tagging=Tikkettjar
 _unused.terms.and.conditions=Termini u kundizzjonijiet
 _unused.text=Test
-_unused.username.in.use=qed jintuża. Jekk jogħġbok agħżel isem ieħor ta' użatur
-_unused.usertags=Tikketti tal-użaturi
-_unused.using.europeana=Manwal tal-Europeana
-_unused.view.as.xml=Ara bħala XML
-_unused.view.with.labels=Ara bit-tikketti
-_unused.view.without.labels=Ara bla tikketti
-_unused.you.have.search.for=Fittixt
-languageDropDownList_t=Lingwa
-registrationSucceed_t=Irreġistrajt b'suċċess
+_unused.thisiseuropeana=Dan l-Europeana
+_unused.thoughtlab=Laboratorju tal-ideat
+_unused.timeline=Linja kronoloġika
+_unused.timelinenavigator=Navigatur tal-linja kronoloġika
+_unused.userconduct=Kondotta tal-Użaturi
+_unused.userconductagree=Nifhem li L-Europeana Tiegħi jagħtini l-opportunità li noħloq tikketti għal kwalunkwe oġġett li nixtieq. Naqbel li ma noħloq ebda tikketta li tista' titqies libelluża, dannuża, ta' theddida, illeġittima, defamatorja, trażgredenti, abbużiva, xewwiexa, fastidjuża, pornografika, oxxena, frodulenti, li tinvadi d-drittijiet tal-privatezza jew tal-pubbliċità, odjuża, jew oġġezzjonabbli razzjalment, etnikament jew b'xi mod ieħor. Meta qed nikklikkja dil-kaxxa naqbel li nimxi ma' dan il-ftehim, u nifhem li fin-nuqqas is-sħubija tiegħi f'L-Europeana Tiegħi tiġi mitmuma. IKKLIKKJA BIEX TAQBEL
+_unused_portal.ui.message.view.as.xml=Ara bħala XML
+_unused_portal.ui.message.view.with.labels=Ara bit-tikketti
+_unused_portal.ui.message.view.without.labels=Ara bla tikketti
+_unused_portal.ui.message.you.have.search.for=Fittixt
+_unused_validation.username.in.use=qed jintuża. Jekk jogħġbok agħżel isem ieħor ta' użatur
