--- a/portal/src/main/resources/i18n/messages_nb.properties
+++ b/portal/src/main/resources/i18n/messages_nb.properties
@@ -1,88 +1,3 @@
-All_t=Alle
-AltHome_t=Klikk her for å gå tilbake til Europeanas hjemmeside
-AltLogoEuropeana_t=logo Norvegiana tenk kultur
-CheckTheFaqs_t=Sjekk FAQ - dine spørsmål kan være besvart der
-ChooseLanguage_t=Velg språk
-Communities_t=Fellesskap
-Contacts_t=Kontakter
-ContributorExplain_t=Dette er organisasjonene som bidrar med innhold, digilae malerier, bøker, kringkastet materiale etc. Noen av disse er samlingsportaler. Culture.fr er den største portalen som bidrar med innhold fra 480 institusjoner i Frankrike, inkluder Louvre og Mes\ee d'Orsay. Antallet organiasjoner som bidrar til en portal vises i parantes, f.eks Videoactive (10)
-Contributor_t=Bidragsyter
-Contributors_t=Bidragsytere
-Country_t=Land
-CreateAccount_t=Generer en konto
-Description_t=Beskrivelse
-EmailAlreadyRegistered_t=Denne emailadressen er allerede registert
-EmailClickToConfirm_t=Klikk på denne lenken for å bekrefte registreringen
-EmailEuropeanaTeam_t=Norvegiana-teamet
-EmailFormatError_t=Vær vennlig å forsikre deg om at emailadressen er korrekt
-EmailSendFailed_t=Email kunne ikke sendes
-EmailSent_t=Email sendt
-EmailUse_t=Du vil måtte bruke din emailadresse sammen med passordet for å logge på nettstedet
-EmailWelcome_t=Velkommen til Mitt Norvegiana
-EnewsOptin_t=Oppdater meg på ny utvikling av Norvegiana
-EnterValidEmail_t=Vær vennlig å skriv inn en gyldig emailadresse
-EnterYourEmail_t=Skriv inn din emailadresse
-ErrorDetails_t=Feilinformasjon
-Error_t=Feil
-FYROM_t=Den tidligere republikken Jugoslavia
-FeatureDisabled_t=Denne funksjonen er midlertidig ute av bruk.
-FeedbackResponse_t=Mange takk for din tilbakemelding. Dersom din melding innebærer at et medlem av Norvegiana-teamet, vil et svar komme så snart det er praktisk mulig.. Et raskt svar vil fordre at spørsmaålet stilles på engelsk.
-FindOutMore_t=Finn ut mere
-FinishRegistration_t=Ferdigstill registrering
-FirstName_t=Fornavn
-ForgotPassword_t=Glemt passord?
-FromOurParnters_t=Fra våre partner-museer, arkiver, bibliotek og audiovisuelle samlinger
-FundedBy_t=del-finansiert av Den Europeiske Union
-HideAdvancedSearch_t=Skjul avansert søk
-IAgree_t=Jeg godtar
-Image_t=Bilde
-Images_t=Bilder
-InvalidQuery_t=Ugyldig spørring
-ItemDetails_t=objekt detaljer
-ItemSaveFailed_t=Lagring av objekt feilet
-ItemSaved_t=Objekt lagret
-Items_t=objekter
-LanguagePolicy_t=Språkpolitikk
-Less_t=Færre
-LinkExpired_t=Lenken du brukte for å ferdigstille registreringen er ugyldig eller har fått tidsavbrudd.
-LogIn_t=Logg inn
-LogOut_t=Logg ut
-LoggedInAs_t=Logget inn som
-MatchesFor_t=Søkeresultat for
-More_t=Flere
-MyCodeOfConductRequired_t=Du må godta reglene for oppførsel for å registrere deg til Mitt Norvegiana
-MyCodeOfConduct_t=Jeg forstår at Mitt Norvegiana gir meg mulighet til å generere tags for alle objekter jeg måtte ønske .Jeg aksepterer at jeg ikke kan generere tags som kan oppfattes som injurierende, skadelige, truende, ulovlige, nedsettende, støtende, oppviglerske, pornografiske, obskøne, svindlende, invaderende i privatrettslig eller offentlig forstand, hatefulle, eller rasistiske, etniske eller på annet vis anstøtende. Ved å klikke i denne boksen godtar jeg å følge denne avtalen, og forstår at dersom jeg bryter mot denne, vil jeg bli utestengt fra Mitt Norvegiana.
-NewContent_t=Nytt innhold
-Next_t=Neste
-NoItemsFound_t=Ingen objekter funnet
-NoSavedItems_t=Ingen lagrede objekter
-NoSavedSearches_t=Ingen lagrede søk
-NoSavedTags_t=Ingen lagrede tags
-NoScript_t=Best bruk av dette nettstedet fordrer bruk av Javaskript
-Of_t=av
-OpensInNewWindow_t=Åpne i nytt vindu
-Page_t=Side
-PartnerExplain_t=Dette er pertnernettverket som saamarbeidet for å virkeliggjøre Norvegiana, og som representerer Norvegiana i deres land og profesjonelle institusjoner.
-Partner_t=Partner
-Partners_t=Partnere
-Password_t=Passord
-PeopleAreCurrentlyThinkingAbout_t=Folk tenker for tiden på
-RegisterAgain_t=Registrer deg igjen
-RequiredField_t=Dette er et oblogatorisk felt
-Reset_t=Reset
-Results_t=Resultater
-Sector_t=Sektor
-Sounds_t=Lyder
-StrorylineCredits_t=Storyline og kredittering
-Texts_t=Tekster
-ThisIsEuropeana_t=Dette er Norvegiana
-ThoughtLab_t=Tankelaboratorium
-TimelineNavigator_t=Tidslinjenavigator
-Timeline_t=Tidslinje
-UserConductAgree_t=Jeg er inneforstått med at Mitt Norvegiana gir meg muligheter til å tagge et hvert objekt. Jeg vil ikke generere noen tag som kan oppfattes som injurierende, skadelige, truende, ulovlige, nedsettende, støtende, oppviglerske, pornografiske, obskøne, svindlende, invaderende i privatrettslig eller offentlig forstand, hatefulle, eller rasistiske, etniske eller på annet vis anstøtende. Gjennom å klikke på denne boksen sier jeg meg enig i å følge disse reglren, og er inneforståått med at brudd kan avslutte mitt medlemskap i Mitt uropeana. KLIKK FOR ENIGHET:
-UserConduct_t=Brukeroppførsel
-Video_t=Video
-ViewingRelatedItems_t=Du ser relatert innhold
 _action.add.annotation=null
 _action.add.tag=Legg til en tag
 _action.advanced.search=Avansert søk
@@ -103,9 +18,7 @@ _action.send=Send
 _action.share.with.friend=Del med en venn
 _action.videos=Videoer
 _action.view.in.original.context=Se i opprinnelig kontekst
-_boolean.and=og
-_boolean.not=ikke
-_boolean.or=eller
+_actionOpenInNewWindow=Åpne i nytt vindu
 _facet.by.collection=null
 _facet.by.country=via land
 _facet.by.date=via dato
@@ -117,6 +30,7 @@ _facet.by.year=null
 _failure.search.saved=Lagring av søk feilet
 _header.actions=via hendelser
 _header.relatedcontent=Relatert innhold
+_inc_result_table_full.description=Beskrivelse
 _language_select.italian=Italiensk
 _locale.AL=Albania
 _locale.AM=Armenia
@@ -186,6 +100,10 @@ _locale.sk=Slovakisk
 _locale.sl=Slovensk
 _locale.sr=Serbisk
 _locale.sv=Svensk
+_menu.i18n.chooselanguage=Velg språk
+_messages.error.emailformaterror=Vær vennlig å forsikre deg om at emailadressen er korrekt
+_messages.error.emailsendfailed=Email kunne ikke sendes
+_messages.notification.emailsent=Email sendt
 _metadata.abm.contentprovider=Institusjon
 _metadata.abm.county=Fylke
 _metadata.abm.municipality=Kommune
@@ -206,7 +124,6 @@ _metadata.dc.title=Tittel
 _metadata.dc.type=Ressurstype
 _metadata.dcterms.alternative=Alternativ tittel
 _metadata.dcterms.conforms.to=Er i samsvar med
-_metadata.dcterms.created2=Dato
 _metadata.dcterms.has.format=Har format
 _metadata.dcterms.has.part=Har del
 _metadata.dcterms.is.format.of=Er format av
@@ -223,18 +140,61 @@ _metadata.europeana.country=Land
 _metadata.europeana.data.provider=Tilbyder
 _metadata.europeana.provider=Tilbyder
 _metadata.europeana.type=Type
+_metadata.searchfield.contributor=Bidragsyter
+_metadata.type.all=Alle
+_metadata.type.images=Bilder
+_metadata.type.sounds=Lyder
+_metadata.type.texts=Tekster
+_metadata.type.video=Video
 _mine.date.saved=Dato lagret
 _mine.delete=Slett
+_mine.email.address=Emailadresse
+_mine.firstname=Fornavn
+_mine.forgotpassword=Glemt passord?
+_mine.itemsaved=Objekt lagret
+_mine.itemsavefailed=Lagring av objekt feilet
 _mine.last.name=Etternavn
+_mine.loggedinas=Logget inn som
+_mine.login=Logg inn
+_mine.logout=Logg ut
+_mine.nosaveditems=Ingen lagrede objekter
+_mine.nosavedsearches=Ingen lagrede søk
+_mine.nosavedtags=Ingen lagrede tags
 _mine.saved.items=Lagrede objekter
 _mine.saved.searches=Lagrede søk
 _mine.saved.tags=Lagrede tags
 _mine.user.information=Brukerinfo
+_mine.user.registration.notification.succeed=Du er nå registrert
 _mine.username=Brukernavn
-_option.any.field=Alle felt
-_prompt.email.address=Emailadresse
-_prompt.provider=Tilbyder
+_portal.menu.languagedropdownlist=Språk
+_portal.ui.message.less=Færre
+_portal.ui.message.more=Flere
+_portal.ui.message.noscript=Best bruk av dette nettstedet fordrer bruk av Javaskript
+_portal.ui.message.success.search.saved=Søk lagret
+_portal.ui.message.usertags=Brukertags
+_portal.ui.messages.items=objekter
+_portal.ui.navigation.matchesfor=Søkeresultat for
+_portal.ui.navigation.next=Neste
+_portal.ui.navigation.of=av
+_portal.ui.navigation.page=Side
+_portal.ui.notification.error=Feil
+_portal.ui.notification.noitemsfound=Ingen objekter funnet
+_portal.ui.reset.searchbox=Reset
+_portal.ui.results=Resultater
+_portal.ui.viewingrelateditems=Du ser relatert innhold
+_register-request.emailalreadyregistered=Denne emailadressen er allerede registert
 _register.email.has.been.sent=En email er blitt sendt til denne adressen
+_register.emailclicktoconfirm=Klikk på denne lenken for å bekrefte registreringen
+_register.emailuse=Du vil måtte bruke din emailadresse sammen med passordet for å logge på nettstedet
+_register.entervalidemail=Vær vennlig å skriv inn en gyldig emailadresse
+_register.enteryouremail=Skriv inn din emailadresse
+_register.errordetails=Feilinformasjon
+_register.finishregistration=Ferdigstill registrering
+_register.iagree=Jeg godtar
+_register.linkexpired=Lenken du brukte for å ferdigstille registreringen er ugyldig eller har fått tidsavbrudd.
+_register.mycodeofconduct=Jeg forstår at Mitt Norvegiana gir meg mulighet til å generere tags for alle objekter jeg måtte ønske .Jeg aksepterer at jeg ikke kan generere tags som kan oppfattes som injurierende, skadelige, truende, ulovlige, nedsettende, støtende, oppviglerske, pornografiske, obskøne, svindlende, invaderende i privatrettslig eller offentlig forstand, hatefulle, eller rasistiske, etniske eller på annet vis anstøtende. Ved å klikke i denne boksen godtar jeg å følge denne avtalen, og forstår at dersom jeg bryter mot denne, vil jeg bli utestengt fra Mitt Norvegiana.
+_register.mycodeofconductrequired=Du må godta reglene for oppførsel for å registrere deg til Mitt Norvegiana
+_register.password=Passord
 _register.password.choose=Velg passord
 _register.password.explain=Passordet må være 6-30 karakterer langt
 _register.pick.user.name=Ditt brukernavn vil vises etter pålogging
@@ -242,13 +202,27 @@ _register.please.follow.link=Vær vennlig å følg lenken som følger i emailen 
 _register.register=Registrer
 _register.registration.failed=Det oppsto en feil i forbindelse med registreringen. Prøv igjen.
 _register.repeat.password=Gjenta passord
+_register.requiredfield=Dette er et oblogatorisk felt
 _register.username.choose=Velg brukernavn
 _register.username.explain=Brukernavnet vill vises når du har logget på
+_search.boolean.and=og
+_search.boolean.not=ikke
+_search.boolean.or=eller
+_search.field.any.field=Alle felt
 _search.field.creator=Produsent
 _search.field.date=Dato
-_search.option.subject=Tema
-_search.option.title=Tittel
-_success.search.saved=Søk lagret
+_search.field.provider=Tilbyder
+_search.field.subject=Tema
+_search.field.title=Tittel
+_toberemoved.althome=Klikk her for å gå tilbake til Europeanas hjemmeside
+_toberemoved.altlogoeuropeana=logo Norvegiana tenk kultur
+_toberemoved.checkthefaqs=Sjekk FAQ - dine spørsmål kan være besvart der
+_toberemoved.communities=Fellesskap
+_toberemoved.contributorexplain=Dette er organisasjonene som bidrar med innhold, digilae malerier, bøker, kringkastet materiale etc. Noen av disse er samlingsportaler. Culture.fr er den største portalen som bidrar med innhold fra 480 institusjoner i Frankrike, inkluder Louvre og Mes\ee d'Orsay. Antallet organiasjoner som bidrar til en portal vises i parantes, f.eks Videoactive (10)
+_toberemoved.emaileuropeanateam=Norvegiana-teamet
+_toberemoved.metadata.dcterms.created2=Dato
+_toberemoved.sumbit=Send
+_toberemoved.using.europeana=Bruk av Norvegiana
 _unused.about.us=Om oss
 _unused.accessibility=Tilgjengelighet
 _unused.add=Legg til
@@ -257,10 +231,34 @@ _unused.altprint=Skriv ut denne siden
 _unused.aplacetoshareideas=et sted for inspirasjon og ideer. Søk i de kulturelle samlingene i Europa, finn nye brukerveier og del dine funn
 _unused.bosnia.and.herzegovina=Bosnia Herzegovina
 _unused.browse.through.time=Browse via tidslinje
+_unused.contacts=Kontakter
+_unused.contributors=Bidragsytere
+_unused.country=Land
+_unused.createaccount=Generer en konto
+_unused.emailwelcome=Velkommen til Mitt Norvegiana
+_unused.enewsoptin=Oppdater meg på ny utvikling av Norvegiana
+_unused.featuredisabled=Denne funksjonen er midlertidig ute av bruk.
+_unused.feedbackresponse=Mange takk for din tilbakemelding. Dersom din melding innebærer at et medlem av Norvegiana-teamet, vil et svar komme så snart det er praktisk mulig.. Et raskt svar vil fordre at spørsmaålet stilles på engelsk.
+_unused.findoutmore=Finn ut mere
+_unused.fromourparnters=Fra våre partner-museer, arkiver, bibliotek og audiovisuelle samlinger
+_unused.fundedby=del-finansiert av Den Europeiske Union
+_unused.fyrom=Den tidligere republikken Jugoslavia
+_unused.hideadvancedsearch=Skjul avansert søk
+_unused.image=Bilde
+_unused.invalidquery=Ugyldig spørring
+_unused.itemdetails=objekt detaljer
+_unused.languagepolicy=Språkpolitikk
+_unused.newcontent=Nytt innhold
 _unused.other=Andre
+_unused.partner=Partner
+_unused.partnerexplain=Dette er pertnernettverket som saamarbeidet for å virkeliggjøre Norvegiana, og som representerer Norvegiana i deres land og profesjonelle institusjoner.
+_unused.partners=Partnere
+_unused.peoplearecurrentlythinkingabout=Folk tenker for tiden på
 _unused.privacy=Privatvern
+_unused.registeragain=Registrer deg igjen
 _unused.remember.me=Husk meg på denne maskina
 _unused.remove=Fjern
+_unused.sector=Sektor
 _unused.send.feedback=Send oss tilbakemeldinger
 _unused.share.your.ideas=Del dine ideer
 _unused.show.all=Vis alle
@@ -268,18 +266,20 @@ _unused.sign.in=Logg inn
 _unused.site.map=Nettkart
 _unused.slovenia=Slovenia
 _unused.sound=Lyd
+_unused.strorylinecredits=Storyline og kredittering
 _unused.tag.added=Tag lagt til
 _unused.tag.addition.failed=Tag kunne ikke legges til
 _unused.tagging=Tagging
 _unused.terms.and.conditions=Betingelser og vilkår
 _unused.text=Tekst
-_unused.username.in.use=er i bruk. Velg et annet brukernavn
-_unused.usertags=Brukertags
-_unused.using.europeana=Bruk av Norvegiana
-_unused.view.as.xml=Se som XML
-_unused.view.with.labels=Se med labels
-_unused.view.without.labels=Se uten labels
-_unused.you.have.search.for=Du har søkt på
-form.sumbit=Send
-languageDropDownList_t=Språk
-registrationSucceed_t=Du er nå registrert
+_unused.thisiseuropeana=Dette er Norvegiana
+_unused.thoughtlab=Tankelaboratorium
+_unused.timeline=Tidslinje
+_unused.timelinenavigator=Tidslinjenavigator
+_unused.userconduct=Brukeroppførsel
+_unused.userconductagree=Jeg er inneforstått med at Mitt Norvegiana gir meg muligheter til å tagge et hvert objekt. Jeg vil ikke generere noen tag som kan oppfattes som injurierende, skadelige, truende, ulovlige, nedsettende, støtende, oppviglerske, pornografiske, obskøne, svindlende, invaderende i privatrettslig eller offentlig forstand, hatefulle, eller rasistiske, etniske eller på annet vis anstøtende. Gjennom å klikke på denne boksen sier jeg meg enig i å følge disse reglren, og er inneforståått med at brudd kan avslutte mitt medlemskap i Mitt uropeana. KLIKK FOR ENIGHET:
+_unused_portal.ui.message.view.as.xml=Se som XML
+_unused_portal.ui.message.view.with.labels=Se med labels
+_unused_portal.ui.message.view.without.labels=Se uten labels
+_unused_portal.ui.message.you.have.search.for=Du har søkt på
+_unused_validation.username.in.use=er i bruk. Velg et annet brukernavn
