--- a/portal/src/main/resources/i18n/messages_pl.properties
+++ b/portal/src/main/resources/i18n/messages_pl.properties
@@ -1,88 +1,3 @@
-All_t=Wszystkie
-AltHome_t=Kliknij by wrócić na stronę główną
-AltLogoEuropeana_t=logo Europeany pomyśl o kulturze
-CheckTheFaqs_t=Sprawdź FAQ - możesz znaleźć tam odpowiedź na swoje pytanie
-ChooseLanguage_t=Wybierz język
-Communities_t=Społeczność
-Contacts_t=Kontakt
-ContributorExplain_t=Lista instytucji i organizacji, które dostarczają zasoby cyfrowe - zdigitalizaowane książki, obrazy, pliki dźwiękowe itp. Część dostawców to agregatorzy, udostępniający dane z wielu instytucji - jak portal Culture.fr gromadzący zasoby z ok. 480 frnacuskich instytucji kultury, m.in. Luwru i Muzeum d'Orsay. Liczba współpracujących z kontrybutorem instytucji znajduje się w nawiasie np. Videoactive (10)
-Contributor_t=Dostawca treści
-Contributors_t=Dostawcy treści
-Country_t=Kraj
-CreateAccount_t=Utwórz konto
-Description_t=Opis
-EmailAlreadyRegistered_t=Email został zarejestrowany
-EmailClickToConfirm_t=Kliknij poniższy link by potwierdzić rejestrację
-EmailEuropeanaTeam_t=Zespół Europeany
-EmailFormatError_t=Sprawdź, czy email jest prawidłowo sformatowany i spróbuj ponownie
-EmailSendFailed_t=Email nie został wysłany
-EmailSent_t=Email wysłany
-EmailUse_t=W celu zalogowania się na stronę będziesz używać adresu email oraz hasła
-EmailWelcome_t=Witamy w Moja Europeana
-EnewsOptin_t=Chcę być informowany o nowościach Europeany
-EnterValidEmail_t=Proszę wprowadzić poprawny adres e-mail
-EnterYourEmail_t=Wpisz adres email
-ErrorDetails_t=Informacja o błędzie
-Error_t=Błąd
-FYROM_t=Była Jugosłowiańska Republika Macedonii
-FeatureDisabled_t=Opcja jest obecnie niedostępna.
-FeedbackResponse_t=Dziękujemy za kontakt. Jeżeli jest to pytanie wymagające odpowiedzi od zespołu Europeany, dostaniesz ją w najbliższym możliwym terminie. Kontakt w języku angielskim przyspiesza otrzymanie odpowiedzi.
-FindOutMore_t=Dowiedz się więcej
-FinishRegistration_t=Zakończ rejestrację
-FirstName_t=Imię
-ForgotPassword_t=Zapomianłem hasła
-FromOurParnters_t=Od naszych partnerów - muzeów, archiwów, bibliotek i archiwów audiowizualnych
-FundedBy_t=współfinansowana przez Unię Europesjką
-HideAdvancedSearch_t=Ukryj wyszukiwanie zaawansowane
-IAgree_t=Wyrażam zgodę
-Image_t=Obraz
-Images_t=Obrazy
-InvalidQuery_t=Niewłaściwe zapytanie
-ItemDetails_t=Szczegóły dokumentów
-ItemSaveFailed_t=Zachowanie dokumentu nie pwoiodło się
-ItemSaved_t=Dokument zachowany
-Items_t=Dokumenty
-LanguagePolicy_t=Polityka językowa
-Less_t=Mniej
-LinkExpired_t=Link, którego używasz w celu dokończenia rejestracji jest niepoprawny lub wygasł
-LogIn_t=Logowanie
-LogOut_t=Wylogowanie
-LoggedInAs_t=Zalogowany jako
-MatchesFor_t=Opisy pasujące do terminu:
-More_t=Więcej
-MyCodeOfConductRequired_t=Aby zarejstrować się w serwisie Moja Europeana, musisz zaakceptować regulamin użytkownika.
-MyCodeOfConduct_t=Przyjmuję do wiadomości, że Moja Europeana daje mi sposobność tworzenia tagów dla dowolnych obiektów cyfrowych. Zgadzam się na nietworzenie tagów, które mogłyby być zrozumiane jako oszczercze, krzywdzące, zawierające pogróżki, bezprawne, szkalujące, naruszające prawo, obelżywe, podżegające, nękające, pornograficzne, nieprzyzwoite, fałszywe, zakłócające prawo do prywatności lub reklamy, nienawistne lub budzące sprzeciw ze względów rasowych, etnicznych lub innych. Kliknięcie w to okienko oznacza, że zgadzam się przestrzegać tego regulaminu i rozumiem, że jego złamanie oznaczać będzie wygaśnięcie mojego członkostwa.
-NewContent_t=Nowa zawartość
-Next_t=Następny
-NoItemsFound_t=Brak wyników wyszukiwania
-NoSavedItems_t=Brak zachowanych dokumentów
-NoSavedSearches_t=Brak zachowanych wyszukiwań
-NoSavedTags_t=Brak zachowanych tagów
-NoScript_t=Aktywacja JavaScript poprawia działanie strony
-Of_t=z
-OpensInNewWindow_t=Otwiera się w nowym oknie
-Page_t=Strona
-PartnerExplain_t=Lista partnerów, którzy współpracowali przy budowie Europeany i reprezentują ją w poszczególnych krajach i w organizacjach zawodowych.
-Partner_t=Partner
-Partners_t=Partnerzy
-Password_t=Hasło
-PeopleAreCurrentlyThinkingAbout_t=Ludzie teraz myślą o
-RegisterAgain_t=Ponowna rejestracja
-RequiredField_t=To pole jest wymagane
-Reset_t=Wyczyść
-Results_t=Wyniki
-Sector_t=Sektor
-Sounds_t=Nagrania dźwiękowe
-StrorylineCredits_t=Storyline and credits
-Texts_t=Teksty
-ThisIsEuropeana_t=To jest Europeana
-ThoughtLab_t=Laboratorium myśli
-TimelineNavigator_t=Nawigator osi czasu
-Timeline_t=Oś czasu
-UserConductAgree_t=Przyjmuję do wiadomości, że Moja Europeana daje mi sposobność tworzenia tagów dla dowolnych obiektów cyfrowych. Zgadzam się na nietworzenie tagów, które mogłyby być zrozumiane jako oszczercze, krzywdzące, zawierające pogróżki, bezprawne, szkalujące, naruszające prawo, obelżywe, podżegające, nękające, pornograficzne, nieprzyzwoite, fałszywe, zakłócające prawo do prywatności lub reklamy, nienawistne lub budzące sprzeciw ze względów rasowych, etnicznych lub innych. Kliknięcie okienka oznacza zgadę na przestrzeganie tego regulaminu i rozumiem, że jego złamanie oznaczać będzie wygaśnięcie mojego członkostwa. KLIKNIJ BY POTWIERDZIĆ
-UserConduct_t=Regulamin użytkownika
-Video_t=Film wideo
-ViewingRelatedItems_t=Oglądasz powiązane dokumenty
 _action.add.annotation=null
 _action.add.tag=Dodaj tag
 _action.advanced.search=Wyszukiwanie zaawansowane
@@ -103,9 +18,7 @@ _action.send=Wyślij
 _action.share.with.friend=Poinformuj znajomego
 _action.videos=Filmy wideo
 _action.view.in.original.context=Zobacz w kontekście oryginalnym
-_boolean.and=i
-_boolean.not=nie
-_boolean.or=lub
+_actionOpenInNewWindow=Otwiera się w nowym oknie
 _facet.by.collection=null
 _facet.by.country=Według kraju
 _facet.by.date=Według daty
@@ -117,6 +30,7 @@ _facet.by.year=null
 _failure.search.saved=Zachowanie wyszukiwania nie powiodło się
 _header.actions=Działania
 _header.relatedcontent=Powiązana zawartość
+_inc_result_table_full.description=Opis
 _language_select.italian=Włoski (ita)
 _locale.AL=Albania
 _locale.AM=Armenia
@@ -186,6 +100,10 @@ _locale.sk=słowacki (slo)
 _locale.sl=Słoweński (slv)
 _locale.sr=Serbski (scc)
 _locale.sv=Szwedzki (sve/swe)
+_menu.i18n.chooselanguage=Wybierz język
+_messages.error.emailformaterror=Sprawdź, czy email jest prawidłowo sformatowany i spróbuj ponownie
+_messages.error.emailsendfailed=Email nie został wysłany
+_messages.notification.emailsent=Email wysłany
 _metadata.dc.contributor=Współautor
 _metadata.dc.coverage=Zakres
 _metadata.dc.creator=Autor
@@ -215,18 +133,61 @@ _metadata.dcterms.replaces=Zastępuje
 _metadata.dcterms.requires=Wymaga
 _metadata.dcterms.spatial=Zasięg terytorialny
 _metadata.dcterms.temporal=Zakres czasowy
+_metadata.searchfield.contributor=Dostawca treści
+_metadata.type.all=Wszystkie
+_metadata.type.images=Obrazy
+_metadata.type.sounds=Nagrania dźwiękowe
+_metadata.type.texts=Teksty
+_metadata.type.video=Film wideo
 _mine.date.saved=Data zachowana
 _mine.delete=Usuń
+_mine.email.address=Adres email
+_mine.firstname=Imię
+_mine.forgotpassword=Zapomianłem hasła
+_mine.itemsaved=Dokument zachowany
+_mine.itemsavefailed=Zachowanie dokumentu nie pwoiodło się
 _mine.last.name=Nazwisko
+_mine.loggedinas=Zalogowany jako
+_mine.login=Logowanie
+_mine.logout=Wylogowanie
+_mine.nosaveditems=Brak zachowanych dokumentów
+_mine.nosavedsearches=Brak zachowanych wyszukiwań
+_mine.nosavedtags=Brak zachowanych tagów
 _mine.saved.items=Zachowane dokumenty
 _mine.saved.searches=Zachowane wyszukiwania
 _mine.saved.tags=Zachowane tagi
 _mine.user.information=Informacja o użytkowniku
+_mine.user.registration.notification.succeed=Rejestracja zakończona powodzeniem
 _mine.username=Nazwa użytkownika
-_option.any.field=Dowolne pole
-_prompt.email.address=Adres email
-_prompt.provider=Instytucja
+_portal.menu.languagedropdownlist=Język
+_portal.ui.message.less=Mniej
+_portal.ui.message.more=Więcej
+_portal.ui.message.noscript=Aktywacja JavaScript poprawia działanie strony
+_portal.ui.message.success.search.saved=Zapamiętane wyszukiwania
+_portal.ui.message.usertags=Tagi użytkowników
+_portal.ui.messages.items=Dokumenty
+_portal.ui.navigation.matchesfor=Opisy pasujące do terminu:
+_portal.ui.navigation.next=Następny
+_portal.ui.navigation.of=z
+_portal.ui.navigation.page=Strona
+_portal.ui.notification.error=Błąd
+_portal.ui.notification.noitemsfound=Brak wyników wyszukiwania
+_portal.ui.reset.searchbox=Wyczyść
+_portal.ui.results=Wyniki
+_portal.ui.viewingrelateditems=Oglądasz powiązane dokumenty
+_register-request.emailalreadyregistered=Email został zarejestrowany
 _register.email.has.been.sent=Email został wysłany pod następujący adres
+_register.emailclicktoconfirm=Kliknij poniższy link by potwierdzić rejestrację
+_register.emailuse=W celu zalogowania się na stronę będziesz używać adresu email oraz hasła
+_register.entervalidemail=Proszę wprowadzić poprawny adres e-mail
+_register.enteryouremail=Wpisz adres email
+_register.errordetails=Informacja o błędzie
+_register.finishregistration=Zakończ rejestrację
+_register.iagree=Wyrażam zgodę
+_register.linkexpired=Link, którego używasz w celu dokończenia rejestracji jest niepoprawny lub wygasł
+_register.mycodeofconduct=Przyjmuję do wiadomości, że Moja Europeana daje mi sposobność tworzenia tagów dla dowolnych obiektów cyfrowych. Zgadzam się na nietworzenie tagów, które mogłyby być zrozumiane jako oszczercze, krzywdzące, zawierające pogróżki, bezprawne, szkalujące, naruszające prawo, obelżywe, podżegające, nękające, pornograficzne, nieprzyzwoite, fałszywe, zakłócające prawo do prywatności lub reklamy, nienawistne lub budzące sprzeciw ze względów rasowych, etnicznych lub innych. Kliknięcie w to okienko oznacza, że zgadzam się przestrzegać tego regulaminu i rozumiem, że jego złamanie oznaczać będzie wygaśnięcie mojego członkostwa.
+_register.mycodeofconductrequired=Aby zarejstrować się w serwisie Moja Europeana, musisz zaakceptować regulamin użytkownika.
+_register.password=Hasło
 _register.password.choose=Wybierz hasło
 _register.password.explain=Hasło musi mieć długość od 6 do znaków
 _register.pick.user.name=Nazwa użytkownika zostanie wyświetlona po zalogowaniu
@@ -234,13 +195,25 @@ _register.please.follow.link=Prosimy użyć linku znajdującego się w emailu i 
 _register.register=Rejestracja
 _register.registration.failed=Podczas przetwarzania rejestracji wystąpił błąd. Proszę ponowić próbę
 _register.repeat.password=Powtórz hasło
+_register.requiredfield=To pole jest wymagane
 _register.username.choose=Wybierz nazwę użytkownika
 _register.username.explain=Nazwa użytkownika będzie wyświetlana po zalogowaniu
+_search.boolean.and=i
+_search.boolean.not=nie
+_search.boolean.or=lub
+_search.field.any.field=Dowolne pole
 _search.field.creator=Twórca
 _search.field.date=Data
-_search.option.subject=Temat
-_search.option.title=Tytuł
-_success.search.saved=Zapamiętane wyszukiwania
+_search.field.provider=Instytucja
+_search.field.subject=Temat
+_search.field.title=Tytuł
+_toberemoved.althome=Kliknij by wrócić na stronę główną
+_toberemoved.altlogoeuropeana=logo Europeany pomyśl o kulturze
+_toberemoved.checkthefaqs=Sprawdź FAQ - możesz znaleźć tam odpowiedź na swoje pytanie
+_toberemoved.communities=Społeczność
+_toberemoved.contributorexplain=Lista instytucji i organizacji, które dostarczają zasoby cyfrowe - zdigitalizaowane książki, obrazy, pliki dźwiękowe itp. Część dostawców to agregatorzy, udostępniający dane z wielu instytucji - jak portal Culture.fr gromadzący zasoby z ok. 480 frnacuskich instytucji kultury, m.in. Luwru i Muzeum d'Orsay. Liczba współpracujących z kontrybutorem instytucji znajduje się w nawiasie np. Videoactive (10)
+_toberemoved.emaileuropeanateam=Zespół Europeany
+_toberemoved.using.europeana=Korzystanie z Europeany
 _unused.about.us=O nas
 _unused.accessibility=Dostępność
 _unused.add=Dodaj
@@ -249,10 +222,34 @@ _unused.altprint=Drukuj stronę
 _unused.aplacetoshareideas=miejsce inspiracji i pomysłów. Przeszukuj kolekcje europejskiego dziedzictwa kulturowego, współpracuj z innymi użytkownikami i dziel się swoimi odkryciami.
 _unused.bosnia.and.herzegovina=Bośnia i Hercegowina
 _unused.browse.through.time=Przeglądaj oś czasu
+_unused.contacts=Kontakt
+_unused.contributors=Dostawcy treści
+_unused.country=Kraj
+_unused.createaccount=Utwórz konto
+_unused.emailwelcome=Witamy w Moja Europeana
+_unused.enewsoptin=Chcę być informowany o nowościach Europeany
+_unused.featuredisabled=Opcja jest obecnie niedostępna.
+_unused.feedbackresponse=Dziękujemy za kontakt. Jeżeli jest to pytanie wymagające odpowiedzi od zespołu Europeany, dostaniesz ją w najbliższym możliwym terminie. Kontakt w języku angielskim przyspiesza otrzymanie odpowiedzi.
+_unused.findoutmore=Dowiedz się więcej
+_unused.fromourparnters=Od naszych partnerów - muzeów, archiwów, bibliotek i archiwów audiowizualnych
+_unused.fundedby=współfinansowana przez Unię Europesjką
+_unused.fyrom=Była Jugosłowiańska Republika Macedonii
+_unused.hideadvancedsearch=Ukryj wyszukiwanie zaawansowane
+_unused.image=Obraz
+_unused.invalidquery=Niewłaściwe zapytanie
+_unused.itemdetails=Szczegóły dokumentów
+_unused.languagepolicy=Polityka językowa
+_unused.newcontent=Nowa zawartość
 _unused.other=Inne
+_unused.partner=Partner
+_unused.partnerexplain=Lista partnerów, którzy współpracowali przy budowie Europeany i reprezentują ją w poszczególnych krajach i w organizacjach zawodowych.
+_unused.partners=Partnerzy
+_unused.peoplearecurrentlythinkingabout=Ludzie teraz myślą o
 _unused.privacy=Prywatność
+_unused.registeragain=Ponowna rejestracja
 _unused.remember.me=Zapamiętaj mnie na tym komputerze
 _unused.remove=Usuń
+_unused.sector=Sektor
 _unused.send.feedback=Przyślij opinię
 _unused.share.your.ideas=Podziel się pomysłami
 _unused.show.all=Pokaż wszystko
@@ -260,17 +257,20 @@ _unused.sign.in=Zarejestruj się
 _unused.site.map=Mapa serwisu
 _unused.slovenia=Słowenia
 _unused.sound=Nagranie dźwiękowe
+_unused.strorylinecredits=Storyline and credits
 _unused.tag.added=Tag dodany
 _unused.tag.addition.failed=Dodanie tagu nie powiodło się
 _unused.tagging=Tagowanie
 _unused.terms.and.conditions=Zasady i warunki
 _unused.text=Tekst
-_unused.username.in.use=już wykorzystywana. Proszę wybrać inną nazwę użytkownika
-_unused.usertags=Tagi użytkowników
-_unused.using.europeana=Korzystanie z Europeany
-_unused.view.as.xml=Widok XML
-_unused.view.with.labels=Widok z etykietami
-_unused.view.without.labels=Widok bez etykiet
-_unused.you.have.search.for=Szukasz
-languageDropDownList_t=Język
-registrationSucceed_t=Rejestracja zakończona powodzeniem
+_unused.thisiseuropeana=To jest Europeana
+_unused.thoughtlab=Laboratorium myśli
+_unused.timeline=Oś czasu
+_unused.timelinenavigator=Nawigator osi czasu
+_unused.userconduct=Regulamin użytkownika
+_unused.userconductagree=Przyjmuję do wiadomości, że Moja Europeana daje mi sposobność tworzenia tagów dla dowolnych obiektów cyfrowych. Zgadzam się na nietworzenie tagów, które mogłyby być zrozumiane jako oszczercze, krzywdzące, zawierające pogróżki, bezprawne, szkalujące, naruszające prawo, obelżywe, podżegające, nękające, pornograficzne, nieprzyzwoite, fałszywe, zakłócające prawo do prywatności lub reklamy, nienawistne lub budzące sprzeciw ze względów rasowych, etnicznych lub innych. Kliknięcie okienka oznacza zgadę na przestrzeganie tego regulaminu i rozumiem, że jego złamanie oznaczać będzie wygaśnięcie mojego członkostwa. KLIKNIJ BY POTWIERDZIĆ
+_unused_portal.ui.message.view.as.xml=Widok XML
+_unused_portal.ui.message.view.with.labels=Widok z etykietami
+_unused_portal.ui.message.view.without.labels=Widok bez etykiet
+_unused_portal.ui.message.you.have.search.for=Szukasz
+_unused_validation.username.in.use=już wykorzystywana. Proszę wybrać inną nazwę użytkownika
