--- a/portal/src/main/resources/i18n/messages_pt.properties
+++ b/portal/src/main/resources/i18n/messages_pt.properties
@@ -1,88 +1,3 @@
-All_t=Todos
-AltHome_t=Clique aqui para voltar à página inicial de Europeana
-AltLogoEuropeana_t=logo Europeana pensar cultura
-CheckTheFaqs_t=Verifique as Perguntas Frequentes - eles podem conter a resposta às suas questões
-ChooseLanguage_t=Escolha uma língua
-Communities_t=Comunidades
-Contacts_t=Contactos
-ContributorExplain_t=Estas são as organizações que contribuem com conteúdos - pinturas, livros, programas áudio e vídeo, etc., digitalizados. Alguns destes participantes são agregadores*; Culture.fr é o maior agregador, fornecendo conteúdos de cerca de 480 organizações francesas, incluindo os museus do Louvre e D'Orsay. O número de organizações que contribuem para um agregador é apresentado entre parêntesis a seguir ao nome do agregador, por ex., Videoactive (10)
-Contributor_t=Participante
-Contributors_t=Participantes
-Country_t=País
-CreateAccount_t=Criar uma conta
-Description_t=Descrição
-EmailAlreadyRegistered_t=Este email já foi registado
-EmailClickToConfirm_t=Por favor, clique nesta ligação para confirmar o seu registo
-EmailEuropeanaTeam_t=A Equipa de Europeana
-EmailFormatError_t=Por favor, confira se o email está correcto e tente novamente
-EmailSendFailed_t=O email não pôde ser enviado
-EmailSent_t=Email enviado
-EmailUse_t=Utilizará o seu endereço de email juntamente com a palavra-passe para entrar no sítio Web
-EmailWelcome_t=Bem-vindo a Minha Europeana
-EnewsOptin_t=Mantenham-me informado dos novos desenvolvimentos da Europeana
-EnterValidEmail_t=Por favor, insira um endereço de correio electrónico válido
-EnterYourEmail_t=Introduza o seu endereço
-ErrorDetails_t=Detalhes do erro
-Error_t=Erro
-FYROM_t=Antiga República jugoslava da Macedónia
-FeatureDisabled_t=Esta funcionalidade encontra-se actualmente desactivada.
-FeedbackResponse_t=Muito obrigado pelos seus comentários. Se uma resposta for necessária, um membro da equipa da Europeana contactá-lo-á logo que possível. Para obter uma resposta mais rápida, submeta os seus comentários em inglês.
-FindOutMore_t=Descubra mais
-FinishRegistration_t=Terminar o registo
-FirstName_t=Primeiro nome
-ForgotPassword_t=Esqueci a minha palavra-passe
-FromOurParnters_t=Dos museus, arquivos bibliotecas e colecções audiovisuais nossos parceiros
-FundedBy_t=co-financiado pela União Europeia
-HideAdvancedSearch_t=Esconder pesquisa avançada
-IAgree_t=Aceito
-Image_t=Imagem
-Images_t=Imagens
-InvalidQuery_t=Pesquisa inválida
-ItemDetails_t=Detalhes do item
-ItemSaveFailed_t=O item não pôde ser guardado
-ItemSaved_t=Item guardado
-Items_t=Itens
-LanguagePolicy_t=Política de línguas
-Less_t=Menos
-LinkExpired_t=A ligação que usou para completar o registo é inválida ou já expirou
-LogIn_t=Entrar
-LogOut_t=Sair
-LoggedInAs_t=Registado como
-MatchesFor_t=Resultados para
-More_t=Mais
-MyCodeOfConductRequired_t=Deve aceitar o nosso código de conduta para se registar em Minha Europeana
-MyCodeOfConduct_t=Tenho conhecimento de que a Minha Europeana me dá oportunidade de criar etiquetas para qualquer item que queira. Comprometo-me a não criar quaisquer etiquetas que possam ser consideradas caluniosas, ofensivas, ameaçadoras, ilegítimas, difamatórias, infractoras, abusivas, provocadoras, persecutórias, pornográficas, obscenas, fraudulentas, invasivas de direitos de privacidade e publicidade, inspiradoras de ódio ou de algum modo reprováveis em termos raciais ou étnicos. Ao clicar neste botão, aceito cumprir este acordo e que, se o não cumprir, o meu registo na Minha Europeana será terminado.
-NewContent_t=Novo conteúdo
-Next_t=Seguinte
-NoItemsFound_t=Não foram encontrados items
-NoSavedItems_t=Sem items guardados
-NoSavedSearches_t=Sem pesquisas guardadas
-NoSavedTags_t=Sem etiquetas adicionadas
-NoScript_t=Para optimizar a sua utilização deste sítio Web necessita de ter JavaScript activado
-Of_t=de
-OpensInNewWindow_t=Abre uma nova janela
-Page_t=Página
-PartnerExplain_t=Esta é a rede de parceiros que colaboraram na concretização da Europeana e que representam a Europeana nos seus países e associações profissionais
-Partner_t=Parceiro
-Partners_t=Parceiros
-Password_t=Palavra-passe
-PeopleAreCurrentlyThinkingAbout_t=Actualmente, as pessoas pensam em
-RegisterAgain_t=Registar novamente
-RequiredField_t=Este campo é obrigatório
-Reset_t=Limpar
-Results_t=Resultados
-Sector_t=Sector
-Sounds_t=Sons
-StrorylineCredits_t=Guião e créditos
-Texts_t=Textos
-ThisIsEuropeana_t=Isto é a Europeana
-ThoughtLab_t=Laboratório de ideias
-TimelineNavigator_t=Navegador cronológico
-Timeline_t=Cronologia
-UserConductAgree_t=Tenho conhecimento de que a Minha Europeana me dá oportunidade de criar etiquetas para qualquer item que queira. Comprometo-me a não criar quaisquer etiquetas que possam ser consideradas caluniosas, ofensivas, ameaçadoras, ilegítimas, difamatórias, infractoras, abusivas, provocadoras, persecutórias, pornográficas, obscenas, fraudulentas, invasivas de direitos de privacidade e publicidade, inspiradoras de ódio ou de algum modo reprováveis em termos raciais ou étnicos. Ao clicar neste botão, aceito cumprir este acordo e que, se o não cumprir, o meu registo na Minha Europeana será terminado. CLIQUE PARA ACEITAR
-UserConduct_t=Conduta do utilizador
-Video_t=Vídeo
-ViewingRelatedItems_t=Está a visualizar items relacionados
 _action.add.annotation=null
 _action.add.tag=Adicionar uma etiqueta
 _action.advanced.search=Pesquisa avançada
@@ -103,9 +18,7 @@ _action.send=Enviado
 _action.share.with.friend=Partilhe com um amigo
 _action.videos=Vídeos
 _action.view.in.original.context=Ver no contexto original
-_boolean.and=e
-_boolean.not=excepto
-_boolean.or=ou
+_actionOpenInNewWindow=Abre uma nova janela
 _facet.by.collection=null
 _facet.by.country=Por país
 _facet.by.date=Por data
@@ -117,6 +30,7 @@ _facet.by.year=null
 _failure.search.saved=Guardar a pesquisa falhou
 _header.actions=Acções
 _header.relatedcontent=Conteúdo relacionado
+_inc_result_table_full.description=Descrição
 _language_select.italian=Italiano (ita)
 _locale.AL=Albânia
 _locale.AM=Arménia
@@ -186,6 +100,10 @@ _locale.sk=Eslovaco (slo)
 _locale.sl=Esloveno (slv)
 _locale.sr=Servo-croata(Sérvia) (scc)
 _locale.sv=Sueco (sve/swe)
+_menu.i18n.chooselanguage=Escolha uma língua
+_messages.error.emailformaterror=Por favor, confira se o email está correcto e tente novamente
+_messages.error.emailsendfailed=O email não pôde ser enviado
+_messages.notification.emailsent=Email enviado
 _metadata.dc.contributor=Outro Contribuinte
 _metadata.dc.coverage=Cobertura
 _metadata.dc.creator=Autor
@@ -215,18 +133,61 @@ _metadata.dcterms.replaces=Substitui
 _metadata.dcterms.requires=Requer
 _metadata.dcterms.spatial=Cobertura espacial
 _metadata.dcterms.temporal=Cobertura temporal
+_metadata.searchfield.contributor=Participante
+_metadata.type.all=Todos
+_metadata.type.images=Imagens
+_metadata.type.sounds=Sons
+_metadata.type.texts=Textos
+_metadata.type.video=Vídeo
 _mine.date.saved=Guardado em (data)
 _mine.delete=Apagar
+_mine.email.address=Endereço de email
+_mine.firstname=Primeiro nome
+_mine.forgotpassword=Esqueci a minha palavra-passe
+_mine.itemsaved=Item guardado
+_mine.itemsavefailed=O item não pôde ser guardado
 _mine.last.name=Último nome
+_mine.loggedinas=Registado como
+_mine.login=Entrar
+_mine.logout=Sair
+_mine.nosaveditems=Sem items guardados
+_mine.nosavedsearches=Sem pesquisas guardadas
+_mine.nosavedtags=Sem etiquetas adicionadas
 _mine.saved.items=Items guardados
 _mine.saved.searches=Pesquisas guardadas
 _mine.saved.tags=Etiquetas guardadas
 _mine.user.information=Informação do utilizador
+_mine.user.registration.notification.succeed=O seu registo foi efectuado com sucesso
 _mine.username=Nome de utilizador
-_option.any.field=Qualquer campo
-_prompt.email.address=Endereço de email
-_prompt.provider=Fornecedor
+_portal.menu.languagedropdownlist=Língua
+_portal.ui.message.less=Menos
+_portal.ui.message.more=Mais
+_portal.ui.message.noscript=Para optimizar a sua utilização deste sítio Web necessita de ter JavaScript activado
+_portal.ui.message.success.search.saved=Pesquisa guardada
+_portal.ui.message.usertags=Etiquetas de utilizador
+_portal.ui.messages.items=Itens
+_portal.ui.navigation.matchesfor=Resultados para
+_portal.ui.navigation.next=Seguinte
+_portal.ui.navigation.of=de
+_portal.ui.navigation.page=Página
+_portal.ui.notification.error=Erro
+_portal.ui.notification.noitemsfound=Não foram encontrados items
+_portal.ui.reset.searchbox=Limpar
+_portal.ui.results=Resultados
+_portal.ui.viewingrelateditems=Está a visualizar items relacionados
+_register-request.emailalreadyregistered=Este email já foi registado
 _register.email.has.been.sent=Foi-lhe enviado um email para o seguinte endereço
+_register.emailclicktoconfirm=Por favor, clique nesta ligação para confirmar o seu registo
+_register.emailuse=Utilizará o seu endereço de email juntamente com a palavra-passe para entrar no sítio Web
+_register.entervalidemail=Por favor, insira um endereço de correio electrónico válido
+_register.enteryouremail=Introduza o seu endereço
+_register.errordetails=Detalhes do erro
+_register.finishregistration=Terminar o registo
+_register.iagree=Aceito
+_register.linkexpired=A ligação que usou para completar o registo é inválida ou já expirou
+_register.mycodeofconduct=Tenho conhecimento de que a Minha Europeana me dá oportunidade de criar etiquetas para qualquer item que queira. Comprometo-me a não criar quaisquer etiquetas que possam ser consideradas caluniosas, ofensivas, ameaçadoras, ilegítimas, difamatórias, infractoras, abusivas, provocadoras, persecutórias, pornográficas, obscenas, fraudulentas, invasivas de direitos de privacidade e publicidade, inspiradoras de ódio ou de algum modo reprováveis em termos raciais ou étnicos. Ao clicar neste botão, aceito cumprir este acordo e que, se o não cumprir, o meu registo na Minha Europeana será terminado.
+_register.mycodeofconductrequired=Deve aceitar o nosso código de conduta para se registar em Minha Europeana
+_register.password=Palavra-passe
 _register.password.choose=Escolha uma palavra-passe
 _register.password.explain=As palavras-passe devem ter entre 6-30 caracteres
 _register.pick.user.name=O seu nome de utilizador será apresentado quando tiver feito login
@@ -234,13 +195,25 @@ _register.please.follow.link=Por favor, siga a ligação que surge no email e te
 _register.register=Registo
 _register.registration.failed=Ocorreu um erro no processamente do seu registo. Por favor tente novamente
 _register.repeat.password=Repetir palavra-passe
+_register.requiredfield=Este campo é obrigatório
 _register.username.choose=Escolha um nome de utilizador
 _register.username.explain=O seu nome de utilizador surgirá no écran ao entrar
+_search.boolean.and=e
+_search.boolean.not=excepto
+_search.boolean.or=ou
+_search.field.any.field=Qualquer campo
 _search.field.creator=Criador
 _search.field.date=Data
-_search.option.subject=Assunto
-_search.option.title=Título
-_success.search.saved=Pesquisa guardada
+_search.field.provider=Fornecedor
+_search.field.subject=Assunto
+_search.field.title=Título
+_toberemoved.althome=Clique aqui para voltar à página inicial de Europeana
+_toberemoved.altlogoeuropeana=logo Europeana pensar cultura
+_toberemoved.checkthefaqs=Verifique as Perguntas Frequentes - eles podem conter a resposta às suas questões
+_toberemoved.communities=Comunidades
+_toberemoved.contributorexplain=Estas são as organizações que contribuem com conteúdos - pinturas, livros, programas áudio e vídeo, etc., digitalizados. Alguns destes participantes são agregadores*; Culture.fr é o maior agregador, fornecendo conteúdos de cerca de 480 organizações francesas, incluindo os museus do Louvre e D'Orsay. O número de organizações que contribuem para um agregador é apresentado entre parêntesis a seguir ao nome do agregador, por ex., Videoactive (10)
+_toberemoved.emaileuropeanateam=A Equipa de Europeana
+_toberemoved.using.europeana=A usar Europeana
 _unused.about.us=Sobre nós
 _unused.accessibility=Acessibilidade
 _unused.add=Adicionar
@@ -249,10 +222,34 @@ _unused.altprint=Imprimir esta página
 _unused.aplacetoshareideas=um lugar de inspiração e ideias. Pesquise através das colecções culturais da Europa, ligue-se aos percursos de outros utilizadores e partilhe as suas descobertas.
 _unused.bosnia.and.herzegovina=Bósnia e Herzegovina
 _unused.browse.through.time=Percorra atrvés do tempo
+_unused.contacts=Contactos
+_unused.contributors=Participantes
+_unused.country=País
+_unused.createaccount=Criar uma conta
+_unused.emailwelcome=Bem-vindo a Minha Europeana
+_unused.enewsoptin=Mantenham-me informado dos novos desenvolvimentos da Europeana
+_unused.featuredisabled=Esta funcionalidade encontra-se actualmente desactivada.
+_unused.feedbackresponse=Muito obrigado pelos seus comentários. Se uma resposta for necessária, um membro da equipa da Europeana contactá-lo-á logo que possível. Para obter uma resposta mais rápida, submeta os seus comentários em inglês.
+_unused.findoutmore=Descubra mais
+_unused.fromourparnters=Dos museus, arquivos bibliotecas e colecções audiovisuais nossos parceiros
+_unused.fundedby=co-financiado pela União Europeia
+_unused.fyrom=Antiga República jugoslava da Macedónia
+_unused.hideadvancedsearch=Esconder pesquisa avançada
+_unused.image=Imagem
+_unused.invalidquery=Pesquisa inválida
+_unused.itemdetails=Detalhes do item
+_unused.languagepolicy=Política de línguas
+_unused.newcontent=Novo conteúdo
 _unused.other=Outra
+_unused.partner=Parceiro
+_unused.partnerexplain=Esta é a rede de parceiros que colaboraram na concretização da Europeana e que representam a Europeana nos seus países e associações profissionais
+_unused.partners=Parceiros
+_unused.peoplearecurrentlythinkingabout=Actualmente, as pessoas pensam em
 _unused.privacy=Privacidade
+_unused.registeragain=Registar novamente
 _unused.remember.me=Lembrar-me neste computador
 _unused.remove=Remover
+_unused.sector=Sector
 _unused.send.feedback=Envie-nos as suas sugestões
 _unused.share.your.ideas=Partilhe as suas ideias
 _unused.show.all=Mostrar todos
@@ -260,17 +257,20 @@ _unused.sign.in=Entrar
 _unused.site.map=Mapa do sítio
 _unused.slovenia=Eslovénia
 _unused.sound=Som
+_unused.strorylinecredits=Guião e créditos
 _unused.tag.added=Etiqueta adicionada
 _unused.tag.addition.failed=Adicionar etiqueta falhou
 _unused.tagging=Etiquetar
 _unused.terms.and.conditions=Termos e condições
 _unused.text=Texto
-_unused.username.in.use=está a ser utilizado. Por favor escolha outro nome de utilizador
-_unused.usertags=Etiquetas de utilizador
-_unused.using.europeana=A usar Europeana
-_unused.view.as.xml=Ver em XML
-_unused.view.with.labels=Ver com etiquetas
-_unused.view.without.labels=Ver sem etiquetas
-_unused.you.have.search.for=Pesquisou por
-languageDropDownList_t=Língua
-registrationSucceed_t=O seu registo foi efectuado com sucesso
+_unused.thisiseuropeana=Isto é a Europeana
+_unused.thoughtlab=Laboratório de ideias
+_unused.timeline=Cronologia
+_unused.timelinenavigator=Navegador cronológico
+_unused.userconduct=Conduta do utilizador
+_unused.userconductagree=Tenho conhecimento de que a Minha Europeana me dá oportunidade de criar etiquetas para qualquer item que queira. Comprometo-me a não criar quaisquer etiquetas que possam ser consideradas caluniosas, ofensivas, ameaçadoras, ilegítimas, difamatórias, infractoras, abusivas, provocadoras, persecutórias, pornográficas, obscenas, fraudulentas, invasivas de direitos de privacidade e publicidade, inspiradoras de ódio ou de algum modo reprováveis em termos raciais ou étnicos. Ao clicar neste botão, aceito cumprir este acordo e que, se o não cumprir, o meu registo na Minha Europeana será terminado. CLIQUE PARA ACEITAR
+_unused_portal.ui.message.view.as.xml=Ver em XML
+_unused_portal.ui.message.view.with.labels=Ver com etiquetas
+_unused_portal.ui.message.view.without.labels=Ver sem etiquetas
+_unused_portal.ui.message.you.have.search.for=Pesquisou por
+_unused_validation.username.in.use=está a ser utilizado. Por favor escolha outro nome de utilizador
