--- a/portal/src/main/resources/i18n/messages_sl.properties
+++ b/portal/src/main/resources/i18n/messages_sl.properties
@@ -1,88 +1,3 @@
-All_t=Vse
-AltHome_t=Za povratek na domačo stran Europeane kliknite tukaj
-AltLogoEuropeana_t=logotip Europeana mislimo na kulturo
-CheckTheFaqs_t=Preverite Pogosto zastavljena vprašanja - morda najdete odgovor na vaše vprašanje
-ChooseLanguage_t=Izberite jezik
-Communities_t=Skupnosti
-Contacts_t=Kontakt
-ContributorExplain_t=Spodaj je seznam organizacij, ki prispevajo vsebine - digitalizirane slike, knjige, oddaje itd. Nekatere od naštetih organizacij hkrati delujejo tudi kot zbirni centri*. Največji zbirni center, Culture.fr, posreduje vsebine okrog 480 organizacij iz Francije, med katerimi sta tudi Louvre in Musée d'Orsay. Število organizacij, ki prispevajo svoje vsebine k določenemu zbirnemu centru, je navedeno v oklepaju za imenom zbirnega centra, denimo Videoactive (10).
-Contributor_t=Prispeval
-Contributors_t=Prispevali
-Country_t=Država
-CreateAccount_t=Ustvari račun
-Description_t=Opis
-EmailAlreadyRegistered_t=Uporabnik s tem elektronskim naslovom se je že registriral
-EmailClickToConfirm_t=Za potrditev registracije prosimo sledite spodnji povezavi
-EmailEuropeanaTeam_t=Ekipa Europeane
-EmailFormatError_t=Prosimo preverite, če je navedeni naslov pravilen, nato poskusite znova
-EmailSendFailed_t=Sporočila ni bilo mogoče poslati
-EmailSent_t=Sporočilo poslano
-EmailUse_t=Uporabniško ime in geslo boste potrebovali za prijavo na stran
-EmailWelcome_t=Dobrodošli na Moji Europeani
-EnewsOptin_t=Obveščajte me o novostih na Europeani.
-EnterValidEmail_t=Prosimo vnesite veljaven elektronski naslov
-EnterYourEmail_t=Vnesite vaš elektronski naslov
-ErrorDetails_t=Podrobnosti o napaki
-Error_t=Napaka
-FYROM_t=Nekdanja jugoslovanska republika Makedonija
-FeatureDisabled_t=Storitev ternutno ni na voljo.
-FeedbackResponse_t=Thank you very much for your feedback. If your feedback requires a response a member of the Europeana team will get back to you as soon as possible. For faster response feedback should be submitted in English.
-FindOutMore_t=Več
-FinishRegistration_t=Zaključi registracijo
-FirstName_t=Ime
-ForgotPassword_t=Pozabil sem geslo
-FromOurParnters_t=Iz muzejev, arhivov, knjižnic in avdio-vizualnih zbirk naših partnerjev
-FundedBy_t=so-financirano s strani Evropske unije
-HideAdvancedSearch_t=Skrij napredno iskanje
-IAgree_t=Strinjam se
-Image_t=Slika
-Images_t=Slike
-InvalidQuery_t=Neveljaven vnos
-ItemDetails_t=Podrobnosti o predmetih
-ItemSaveFailed_t=Shranjevanje predmeta ni uspelo
-ItemSaved_t=Predmet shranjen
-Items_t=Predmeti
-LanguagePolicy_t=Jezikovna politika
-Less_t=Manj
-LinkExpired_t=Povezava, ki ste jo vnesli za zaključek registracije, je neveljavna oziroma je potekla.
-LogIn_t=Prijava
-LogOut_t=Odjava
-LoggedInAs_t=Prijavljen kot
-MatchesFor_t=Zadetki za
-More_t=Več
-MyCodeOfConductRequired_t=Za registracijo v storitev Moja Europeana morate potrditi, da se strinjate s pravili ravnanja
-MyCodeOfConduct_t=Storitev Moja Europeana mi omogoča ustvarjanje zaznamkov za kateri koli predmet. Zavedam se, da ustvarjanje zaznamkov z namenom klevetanja, oškodovanja, groženja, obrekovanja, žaljenja, podžiganja rasnih, etničnih ali drugih predsodkov, nadlegovanja, goljufanja, širjenja neprimernih vsebin, kršenja osebnih ali drugih pravic, ali kakršne koli druge zlorabe storitve ni dovoljeno. S klikom na »Strinjam se« izražam svoje soglasje k zgornjim pogojem; strinjam se tudi, da se mi, v kolikor navedenih pogojev ne bom spoštoval, članstvo lahko ukine.
-NewContent_t=Nove vsebine
-Next_t=Naprej
-NoItemsFound_t=Ni zadetkov
-NoSavedItems_t=Ni shranjenih predmetov
-NoSavedSearches_t=Ni shranjenih iskanj
-NoSavedTags_t=Ni shranjenih zaznamkov
-NoScript_t=Stran deluje najbolje, če je JavaScript aktiviran
-Of_t=od
-OpensInNewWindow_t=Odpre se v novem oknu
-Page_t=Stran
-PartnerExplain_t=Spodaj je mreža partnerjev, ki so sodelovali pri ustvarjanju Europeane in jo zastopajo v svojih državah in strokovnih združenjih
-Partner_t=Partner
-Partners_t=Partnerji
-Password_t=Geslo
-PeopleAreCurrentlyThinkingAbout_t=Ljudje trenutno mislijo na
-RegisterAgain_t=Ponovna registracija
-RequiredField_t=To polje je obvezno
-Reset_t=Ponastavi
-Results_t=Rezultati
-Sector_t=Področje
-Sounds_t=Zvoki
-StrorylineCredits_t=Ozadje in zahvale
-Texts_t=Besedila
-ThisIsEuropeana_t=To je Europeana
-ThoughtLab_t=Valilnica idej
-TimelineNavigator_t=Časovni navigator
-Timeline_t=Časovni okvir
-UserConductAgree_t=Storitev Moja Europeana mi omogoča ustvarjanje zaznamkov za kateri koli predmet. Zavedam se, da ustvarjanje zaznamkov z namenom klevetanja, oškodovanja, groženja, obrekovanja, žaljenja, podžiganja rasnih, etničnih ali drugih predsodkov, nadlegovanja, goljufanja, širjenja neprimernih vsebin, kršenja osebnih ali drugih pravic, oziroma kakršne koli druge zlorabe storitve ni dovoljeno. S klikom na spodnji gumb izražam svoje soglasje k zgornjim pogojem; strinjam se tudi, da se mi, v kolikor navedenih pogojev ne bom spoštoval, članstvo lahko ukine. STRINJAM SE
-UserConduct_t=Pravila ravnanja
-Video_t=Video
-ViewingRelatedItems_t=Pregledujete sorodne predmete
 _action.add.annotation=null
 _action.add.tag=Dodaj zaznamek
 _action.advanced.search=Napredno iskanje
@@ -103,9 +18,7 @@ _action.send=Pošlji
 _action.share.with.friend=Pošlji prijatelju
 _action.videos=Video
 _action.view.in.original.context=Prikaži v izvirnem kontekstu
-_boolean.and=in
-_boolean.not=in ne
-_boolean.or=ali
+_actionOpenInNewWindow=Odpre se v novem oknu
 _facet.by.collection=null
 _facet.by.country=Po državi
 _facet.by.date=Po datumu
@@ -117,6 +30,7 @@ _facet.by.year=null
 _failure.search.saved=Shranjevanje iskanja ni uspelo
 _header.actions=Možnosti
 _header.relatedcontent=Sorodne vsebine
+_inc_result_table_full.description=Opis
 _language_select.italian=italijanščina (ita)
 _locale.AL=Albanija
 _locale.AM=Armenija
@@ -186,6 +100,10 @@ _locale.sk=slovaščina (slo)
 _locale.sl=slovenščina (slv)
 _locale.sr=srbščina (scc)
 _locale.sv=švedščina (sve/swe)
+_menu.i18n.chooselanguage=Izberite jezik
+_messages.error.emailformaterror=Prosimo preverite, če je navedeni naslov pravilen, nato poskusite znova
+_messages.error.emailsendfailed=Sporočila ni bilo mogoče poslati
+_messages.notification.emailsent=Sporočilo poslano
 _metadata.dc.contributor=Prispevali
 _metadata.dc.coverage=Pokritost
 _metadata.dc.creator=Avtor
@@ -215,18 +133,61 @@ _metadata.dcterms.replaces=Nadomešča
 _metadata.dcterms.requires=Zahteva
 _metadata.dcterms.spatial=Geografska pokritost
 _metadata.dcterms.temporal=Časovna pokritost
+_metadata.searchfield.contributor=Prispeval
+_metadata.type.all=Vse
+_metadata.type.images=Slike
+_metadata.type.sounds=Zvoki
+_metadata.type.texts=Besedila
+_metadata.type.video=Video
 _mine.date.saved=Datum
 _mine.delete=Izbriši
+_mine.email.address=Elektronski naslov
+_mine.firstname=Ime
+_mine.forgotpassword=Pozabil sem geslo
+_mine.itemsaved=Predmet shranjen
+_mine.itemsavefailed=Shranjevanje predmeta ni uspelo
 _mine.last.name=Priimek
+_mine.loggedinas=Prijavljen kot
+_mine.login=Prijava
+_mine.logout=Odjava
+_mine.nosaveditems=Ni shranjenih predmetov
+_mine.nosavedsearches=Ni shranjenih iskanj
+_mine.nosavedtags=Ni shranjenih zaznamkov
 _mine.saved.items=Shranjeni predmeti
 _mine.saved.searches=Shranjena iskanja
 _mine.saved.tags=Shranjeni zaznamki
 _mine.user.information=Podatki o uporabniku
+_mine.user.registration.notification.succeed=Uspešno ste se registrirali
 _mine.username=Uporabniško ime
-_option.any.field=Vsa polja
-_prompt.email.address=Elektronski naslov
-_prompt.provider=Ponudnik
+_portal.menu.languagedropdownlist=Jezik
+_portal.ui.message.less=Manj
+_portal.ui.message.more=Več
+_portal.ui.message.noscript=Stran deluje najbolje, če je JavaScript aktiviran
+_portal.ui.message.success.search.saved=Išči po shranjenih iskanjih
+_portal.ui.message.usertags=Uporabniški zaznamki
+_portal.ui.messages.items=Predmeti
+_portal.ui.navigation.matchesfor=Zadetki za
+_portal.ui.navigation.next=Naprej
+_portal.ui.navigation.of=od
+_portal.ui.navigation.page=Stran
+_portal.ui.notification.error=Napaka
+_portal.ui.notification.noitemsfound=Ni zadetkov
+_portal.ui.reset.searchbox=Ponastavi
+_portal.ui.results=Rezultati
+_portal.ui.viewingrelateditems=Pregledujete sorodne predmete
+_register-request.emailalreadyregistered=Uporabnik s tem elektronskim naslovom se je že registriral
 _register.email.has.been.sent=Na navedeni naslov smo poslali sporočilo
+_register.emailclicktoconfirm=Za potrditev registracije prosimo sledite spodnji povezavi
+_register.emailuse=Uporabniško ime in geslo boste potrebovali za prijavo na stran
+_register.entervalidemail=Prosimo vnesite veljaven elektronski naslov
+_register.enteryouremail=Vnesite vaš elektronski naslov
+_register.errordetails=Podrobnosti o napaki
+_register.finishregistration=Zaključi registracijo
+_register.iagree=Strinjam se
+_register.linkexpired=Povezava, ki ste jo vnesli za zaključek registracije, je neveljavna oziroma je potekla.
+_register.mycodeofconduct=Storitev Moja Europeana mi omogoča ustvarjanje zaznamkov za kateri koli predmet. Zavedam se, da ustvarjanje zaznamkov z namenom klevetanja, oškodovanja, groženja, obrekovanja, žaljenja, podžiganja rasnih, etničnih ali drugih predsodkov, nadlegovanja, goljufanja, širjenja neprimernih vsebin, kršenja osebnih ali drugih pravic, ali kakršne koli druge zlorabe storitve ni dovoljeno. S klikom na »Strinjam se« izražam svoje soglasje k zgornjim pogojem; strinjam se tudi, da se mi, v kolikor navedenih pogojev ne bom spoštoval, članstvo lahko ukine.
+_register.mycodeofconductrequired=Za registracijo v storitev Moja Europeana morate potrditi, da se strinjate s pravili ravnanja
+_register.password=Geslo
 _register.password.choose=Izberite geslo
 _register.password.explain=Geslo mora biti dolgo od 6 do 30 črk.
 _register.pick.user.name=Vaše uporabniško ime bo prikazano, ko boste prijavljeni
@@ -234,13 +195,25 @@ _register.please.follow.link=Za zaključek registracije prosimo sledite povezavi
 _register.register=Registracija
 _register.registration.failed=Med obdelavo vaše registracije je prišlo do napake. Prosimo, poskusite znova
 _register.repeat.password=Ponovno vnesite geslo
+_register.requiredfield=To polje je obvezno
 _register.username.choose=Izberite uporabniško ime
 _register.username.explain=Vaše uporabniško ime bo prikazano, ko boste prijavljeni
+_search.boolean.and=in
+_search.boolean.not=in ne
+_search.boolean.or=ali
+_search.field.any.field=Vsa polja
 _search.field.creator=Avtor
 _search.field.date=Datum
-_search.option.subject=Predmet
-_search.option.title=Naslov
-_success.search.saved=Išči po shranjenih iskanjih
+_search.field.provider=Ponudnik
+_search.field.subject=Predmet
+_search.field.title=Naslov
+_toberemoved.althome=Za povratek na domačo stran Europeane kliknite tukaj
+_toberemoved.altlogoeuropeana=logotip Europeana mislimo na kulturo
+_toberemoved.checkthefaqs=Preverite Pogosto zastavljena vprašanja - morda najdete odgovor na vaše vprašanje
+_toberemoved.communities=Skupnosti
+_toberemoved.contributorexplain=Spodaj je seznam organizacij, ki prispevajo vsebine - digitalizirane slike, knjige, oddaje itd. Nekatere od naštetih organizacij hkrati delujejo tudi kot zbirni centri*. Največji zbirni center, Culture.fr, posreduje vsebine okrog 480 organizacij iz Francije, med katerimi sta tudi Louvre in Musée d'Orsay. Število organizacij, ki prispevajo svoje vsebine k določenemu zbirnemu centru, je navedeno v oklepaju za imenom zbirnega centra, denimo Videoactive (10).
+_toberemoved.emaileuropeanateam=Ekipa Europeane
+_toberemoved.using.europeana=Uporaba Europeane
 _unused.about.us=O nas
 _unused.accessibility=Dostopnost
 _unused.add=Dodaj
@@ -249,10 +222,34 @@ _unused.altprint=Natisnite stran
 _unused.aplacetoshareideas=vir navdiha in novih idej. Iščite po kulturnih zbirkah Evrope, povežite se z drugimi uporabniki in delite svoja odkritja.
 _unused.bosnia.and.herzegovina=Bosna in Hercegovina
 _unused.browse.through.time=Brskajte po času
+_unused.contacts=Kontakt
+_unused.contributors=Prispevali
+_unused.country=Država
+_unused.createaccount=Ustvari račun
+_unused.emailwelcome=Dobrodošli na Moji Europeani
+_unused.enewsoptin=Obveščajte me o novostih na Europeani.
+_unused.featuredisabled=Storitev ternutno ni na voljo.
+_unused.feedbackresponse=Thank you very much for your feedback. If your feedback requires a response a member of the Europeana team will get back to you as soon as possible. For faster response feedback should be submitted in English.
+_unused.findoutmore=Več
+_unused.fromourparnters=Iz muzejev, arhivov, knjižnic in avdio-vizualnih zbirk naših partnerjev
+_unused.fundedby=so-financirano s strani Evropske unije
+_unused.fyrom=Nekdanja jugoslovanska republika Makedonija
+_unused.hideadvancedsearch=Skrij napredno iskanje
+_unused.image=Slika
+_unused.invalidquery=Neveljaven vnos
+_unused.itemdetails=Podrobnosti o predmetih
+_unused.languagepolicy=Jezikovna politika
+_unused.newcontent=Nove vsebine
 _unused.other=drugo
+_unused.partner=Partner
+_unused.partnerexplain=Spodaj je mreža partnerjev, ki so sodelovali pri ustvarjanju Europeane in jo zastopajo v svojih državah in strokovnih združenjih
+_unused.partners=Partnerji
+_unused.peoplearecurrentlythinkingabout=Ljudje trenutno mislijo na
 _unused.privacy=Zasebnost
+_unused.registeragain=Ponovna registracija
 _unused.remember.me=Zapomni si me na tem računalniku
 _unused.remove=Odstrani
+_unused.sector=Področje
 _unused.send.feedback=Pošljite svoje mnenje
 _unused.share.your.ideas=Posredujte svoje ideje
 _unused.show.all=Prikaži vse
@@ -260,17 +257,20 @@ _unused.sign.in=Prijava
 _unused.site.map=Zemljevid strani
 _unused.slovenia=Slovenija
 _unused.sound=Zvok
+_unused.strorylinecredits=Ozadje in zahvale
 _unused.tag.added=Zaznamek dodan
 _unused.tag.addition.failed=Dodajanje zaznamka ni uspelo
 _unused.tagging=Zaznamki
 _unused.terms.and.conditions=Pogoji uporabe
 _unused.text=Besedilo
-_unused.username.in.use=je že uporabljeno. Prosimo, izberite drugo uporabniško ime
-_unused.usertags=Uporabniški zaznamki
-_unused.using.europeana=Uporaba Europeane
-_unused.view.as.xml=Poglej kot XML
-_unused.view.with.labels=Pogled z oznakami
-_unused.view.without.labels=Pogled brez oznak
-_unused.you.have.search.for=Iskali ste
-languageDropDownList_t=Jezik
-registrationSucceed_t=Uspešno ste se registrirali
+_unused.thisiseuropeana=To je Europeana
+_unused.thoughtlab=Valilnica idej
+_unused.timeline=Časovni okvir
+_unused.timelinenavigator=Časovni navigator
+_unused.userconduct=Pravila ravnanja
+_unused.userconductagree=Storitev Moja Europeana mi omogoča ustvarjanje zaznamkov za kateri koli predmet. Zavedam se, da ustvarjanje zaznamkov z namenom klevetanja, oškodovanja, groženja, obrekovanja, žaljenja, podžiganja rasnih, etničnih ali drugih predsodkov, nadlegovanja, goljufanja, širjenja neprimernih vsebin, kršenja osebnih ali drugih pravic, oziroma kakršne koli druge zlorabe storitve ni dovoljeno. S klikom na spodnji gumb izražam svoje soglasje k zgornjim pogojem; strinjam se tudi, da se mi, v kolikor navedenih pogojev ne bom spoštoval, članstvo lahko ukine. STRINJAM SE
+_unused_portal.ui.message.view.as.xml=Poglej kot XML
+_unused_portal.ui.message.view.with.labels=Pogled z oznakami
+_unused_portal.ui.message.view.without.labels=Pogled brez oznak
+_unused_portal.ui.message.you.have.search.for=Iskali ste
+_unused_validation.username.in.use=je že uporabljeno. Prosimo, izberite drugo uporabniško ime
