--- a/portal/src/main/resources/i18n/messages_sr.properties
+++ b/portal/src/main/resources/i18n/messages_sr.properties
@@ -1,88 +1,3 @@
-All_t=All
-AltHome_t=Click here to return to the Europeana homepage
-AltLogoEuropeana_t=logo Europeana think culture
-CheckTheFaqs_t=Check the FAQs - they may cover your feedback
-ChooseLanguage_t=Choose a language
-Communities_t=Communities
-Contacts_t=Contacts
-ContributorExplain_t=These are the organisations that are contributing content - digitised paintings, books, broadcasts etc. Some of these contributors are  aggregators*, Culture.fr is the largest aggregator, providing content from about 480 organisations in France, including the Louvre and the Musée d’Orsay. The number of organisations contributing to an aggregator is shown in brackets after the aggregator’s name, e.g. Videoactive (10)
-Contributor_t=Contributor
-Contributors_t=Contributors
-Country_t=Zemlja
-CreateAccount_t=Create an account
-Description_t=Description
-EmailAlreadyRegistered_t=This email is already registered
-EmailClickToConfirm_t=Please click on the following link to confirm your registration
-EmailEuropeanaTeam_t=The Europeana Team
-EmailFormatError_t=Please make sure your email is correctly formatted and try again
-EmailSendFailed_t=Email could not be sent
-EmailSent_t=Email sent
-EmailUse_t=You will use your email together with your password to log into the site
-EmailWelcome_t=Welcome to My Personal Page
-EnewsOptin_t=Keep me in touch with new developments to Europeana
-EnterValidEmail_t=Please enter a valid email address
-EnterYourEmail_t=Enter your email
-ErrorDetails_t=Error details
-Error_t=Error
-FYROM_t=Former Yugoslav Republic Of Macedonia
-FeatureDisabled_t=This feature is currently disabled.
-FeedbackResponse_t=Thank you very much for your feedback. If your feedback requires a response a member of the Europeana team will get back to you as soon as possible. For faster response feedback should be submitted in English.
-FindOutMore_t=Find out more
-FinishRegistration_t=Finish registration
-FirstName_t=First name
-ForgotPassword_t=I forgot my password
-FromOurParnters_t=From our partner museums, archives, libraries and audio-visual collections
-FundedBy_t=co-funded by the European Union
-HideAdvancedSearch_t=Hide advanced search
-IAgree_t=I agree
-Image_t=Image
-Images_t=Images
-InvalidQuery_t=Invalid query
-ItemDetails_t=Item details
-ItemSaveFailed_t=Save item failed
-ItemSaved_t=Item saved
-Items_t=Items
-LanguagePolicy_t=Language policy
-Less_t=Less
-LinkExpired_t=The link you used to complete registration is invalid or has expired.
-LogIn_t=Login
-LogOut_t=Log out
-LoggedInAs_t=Logged in as
-MatchesFor_t=Odgovori za
-More_t=More
-MyCodeOfConductRequired_t=You must agree to our code of conduct to register for portal membership
-MyCodeOfConduct_t=I understand that the Delving portal gives me the opportunity to create tags for any item I wish. I agree that I will not create any tags that could be considered libelous, harmful, threatening, unlawful, defamatory, infringing, abusive, inflammatory, harassing, pornographic, obscene, fraudulent, invasive of privacy or publicity rights, hateful, or racially, ethnically or otherwise objectionable. By clicking this box I agree to abide by this agreement, and understand that if I don't my login on the portal will be terminated.
-NewContent_t=New content
-Next_t=Next
-NoItemsFound_t=No items found
-NoSavedItems_t=No saved items
-NoSavedSearches_t=No saved searches
-NoSavedTags_t=No saved tags
-NoScript_t=To make optimal use of this website you need to have JavaScript activated
-Of_t=of
-OpensInNewWindow_t=Opens in a new window
-Page_t=Page
-PartnerExplain_t=This is the network of partners who collaborated to make Europeana happen, and who represent Europeana in their countries and professional associations.
-Partner_t=Partner
-Partners_t=Partners
-Password_t=Lozinka
-PeopleAreCurrentlyThinkingAbout_t=People are currently thinking about
-RegisterAgain_t=Register again
-RequiredField_t=This is a required field
-Reset_t=Reset
-Results_t=Results
-Sector_t=Sector
-Sounds_t=Sounds
-StrorylineCredits_t=Storyline and credits
-Texts_t=Texts
-ThisIsEuropeana_t=This is Europeana
-ThoughtLab_t=Thought lab
-TimelineNavigator_t=Timeline navigator
-Timeline_t=Timeline
-UserConductAgree_t=I understand that the Delving portal gives me the opportunity to create tags for any item I wish. I agree that I will not create any tags that could be considered libelous, harmful, threatening, unlawful, defamatory, infringing, abusive, inflammatory, harassing, pornographic, obscene, fraudulent, invasive of privacy or publicity rights, hateful, or racially, ethnically or otherwise objectionable. By clicking this box I agree to abide by this agreement, and understand that if I don't my login on the portal will be terminated. CLICK TO AGREE
-UserConduct_t=User Conduct
-Video_t=Video
-ViewingRelatedItems_t=You are viewing related items
 _action.add.annotation=null
 _action.add.tag=Add a tag
 _action.advanced.search=Advanced search
@@ -103,9 +18,7 @@ _action.send=Send
 _action.share.with.friend=Share with a friend
 _action.videos=Videos
 _action.view.in.original.context=View in original context
-_boolean.and=i
-_boolean.not=ne
-_boolean.or=ili
+_actionOpenInNewWindow=Opens in a new window
 _facet.by.collection=null
 _facet.by.country=By country
 _facet.by.date=By date
@@ -117,6 +30,7 @@ _facet.by.year=null
 _failure.search.saved=Saving search failed
 _header.actions=Actions
 _header.relatedcontent=Related content
+_inc_result_table_full.description=Description
 _language_select.italian=Italijanski (ita)
 _locale.AL=Albania
 _locale.AM=Armenia
@@ -186,6 +100,10 @@ _locale.sk=slovački (slo)
 _locale.sl=Slovenački (slv)
 _locale.sr=Srpski (ser)
 _locale.sv=Švedski (sve/swe)
+_menu.i18n.chooselanguage=Choose a language
+_messages.error.emailformaterror=Please make sure your email is correctly formatted and try again
+_messages.error.emailsendfailed=Email could not be sent
+_messages.notification.emailsent=Email sent
 _metadata.dc.contributor=Saradnik
 _metadata.dc.coverage=Opseg
 _metadata.dc.creator=Autor
@@ -215,18 +133,61 @@ _metadata.dcterms.replaces=Zamenjuje
 _metadata.dcterms.requires=Zahteva
 _metadata.dcterms.spatial=Prostorni opseg
 _metadata.dcterms.temporal=Vremenski opseg
+_metadata.searchfield.contributor=Contributor
+_metadata.type.all=All
+_metadata.type.images=Images
+_metadata.type.sounds=Sounds
+_metadata.type.texts=Texts
+_metadata.type.video=Video
 _mine.date.saved=Date saved
 _mine.delete=Delete
+_mine.email.address=Email address
+_mine.firstname=First name
+_mine.forgotpassword=I forgot my password
+_mine.itemsaved=Item saved
+_mine.itemsavefailed=Save item failed
 _mine.last.name=Last name
+_mine.loggedinas=Logged in as
+_mine.login=Login
+_mine.logout=Log out
+_mine.nosaveditems=No saved items
+_mine.nosavedsearches=No saved searches
+_mine.nosavedtags=No saved tags
 _mine.saved.items=Saved items
 _mine.saved.searches=Saved searches
 _mine.saved.tags=Saved tags
 _mine.user.information=User information
+_mine.user.registration.notification.succeed=Uspešno ste se registrovali.
 _mine.username=Korisničko ime
-_option.any.field=Bilo koje polje
-_prompt.email.address=Email address
-_prompt.provider=Provider
+_portal.menu.languagedropdownlist=Jezik
+_portal.ui.message.less=Less
+_portal.ui.message.more=More
+_portal.ui.message.noscript=To make optimal use of this website you need to have JavaScript activated
+_portal.ui.message.success.search.saved=Search saved
+_portal.ui.message.usertags=User tags
+_portal.ui.messages.items=Items
+_portal.ui.navigation.matchesfor=Odgovori za
+_portal.ui.navigation.next=Next
+_portal.ui.navigation.of=of
+_portal.ui.navigation.page=Page
+_portal.ui.notification.error=Error
+_portal.ui.notification.noitemsfound=No items found
+_portal.ui.reset.searchbox=Reset
+_portal.ui.results=Results
+_portal.ui.viewingrelateditems=You are viewing related items
+_register-request.emailalreadyregistered=This email is already registered
 _register.email.has.been.sent=An email has been sent to the following address
+_register.emailclicktoconfirm=Please click on the following link to confirm your registration
+_register.emailuse=You will use your email together with your password to log into the site
+_register.entervalidemail=Please enter a valid email address
+_register.enteryouremail=Enter your email
+_register.errordetails=Error details
+_register.finishregistration=Finish registration
+_register.iagree=I agree
+_register.linkexpired=The link you used to complete registration is invalid or has expired.
+_register.mycodeofconduct=I understand that the Delving portal gives me the opportunity to create tags for any item I wish. I agree that I will not create any tags that could be considered libelous, harmful, threatening, unlawful, defamatory, infringing, abusive, inflammatory, harassing, pornographic, obscene, fraudulent, invasive of privacy or publicity rights, hateful, or racially, ethnically or otherwise objectionable. By clicking this box I agree to abide by this agreement, and understand that if I don't my login on the portal will be terminated.
+_register.mycodeofconductrequired=You must agree to our code of conduct to register for portal membership
+_register.password=Lozinka
 _register.password.choose=Choose a password
 _register.password.explain=Passwords must be 6-30 characters in length
 _register.pick.user.name=Your username will be displayed when you have logged in
@@ -234,13 +195,25 @@ _register.please.follow.link=Please follow the link provided in the email and fi
 _register.register=Registrujte se
 _register.registration.failed=Došlo je do greške tokom obrade vaše registracije. Molimo vas da pokušate ponovo.
 _register.repeat.password=Repeat password
+_register.requiredfield=This is a required field
 _register.username.choose=Choose a username
 _register.username.explain=Your username will be displayed when you have logged in
+_search.boolean.and=i
+_search.boolean.not=ne
+_search.boolean.or=ili
+_search.field.any.field=Bilo koje polje
 _search.field.creator=Creator
 _search.field.date=Date
-_search.option.subject=Subject
-_search.option.title=Title
-_success.search.saved=Search saved
+_search.field.provider=Provider
+_search.field.subject=Subject
+_search.field.title=Title
+_toberemoved.althome=Click here to return to the Europeana homepage
+_toberemoved.altlogoeuropeana=logo Europeana think culture
+_toberemoved.checkthefaqs=Check the FAQs - they may cover your feedback
+_toberemoved.communities=Communities
+_toberemoved.contributorexplain=These are the organisations that are contributing content - digitised paintings, books, broadcasts etc. Some of these contributors are  aggregators*, Culture.fr is the largest aggregator, providing content from about 480 organisations in France, including the Louvre and the Musée d’Orsay. The number of organisations contributing to an aggregator is shown in brackets after the aggregator’s name, e.g. Videoactive (10)
+_toberemoved.emaileuropeanateam=The Europeana Team
+_toberemoved.using.europeana=Using Europeana
 _unused.about.us=About us
 _unused.accessibility=Accessibility
 _unused.add=Add
@@ -249,10 +222,34 @@ _unused.altprint=Print this page
 _unused.aplacetoshareideas=a place for inspiration and ideas. Search through the cultural collections of Europe, connect to other user pathways and share your discoveries.
 _unused.bosnia.and.herzegovina=Bosnia and Herzegovina
 _unused.browse.through.time=Browse through time
+_unused.contacts=Contacts
+_unused.contributors=Contributors
+_unused.country=Zemlja
+_unused.createaccount=Create an account
+_unused.emailwelcome=Welcome to My Personal Page
+_unused.enewsoptin=Keep me in touch with new developments to Europeana
+_unused.featuredisabled=This feature is currently disabled.
+_unused.feedbackresponse=Thank you very much for your feedback. If your feedback requires a response a member of the Europeana team will get back to you as soon as possible. For faster response feedback should be submitted in English.
+_unused.findoutmore=Find out more
+_unused.fromourparnters=From our partner museums, archives, libraries and audio-visual collections
+_unused.fundedby=co-funded by the European Union
+_unused.fyrom=Former Yugoslav Republic Of Macedonia
+_unused.hideadvancedsearch=Hide advanced search
+_unused.image=Image
+_unused.invalidquery=Invalid query
+_unused.itemdetails=Item details
+_unused.languagepolicy=Language policy
+_unused.newcontent=New content
 _unused.other=Ostali
+_unused.partner=Partner
+_unused.partnerexplain=This is the network of partners who collaborated to make Europeana happen, and who represent Europeana in their countries and professional associations.
+_unused.partners=Partners
+_unused.peoplearecurrentlythinkingabout=People are currently thinking about
 _unused.privacy=Privacy
+_unused.registeragain=Register again
 _unused.remember.me=Remember me on this computer
 _unused.remove=Remove
+_unused.sector=Sector
 _unused.send.feedback=Send us feedback
 _unused.share.your.ideas=Share your ideas
 _unused.show.all=Show all
@@ -260,17 +257,20 @@ _unused.sign.in=Sign in
 _unused.site.map=Sitemap
 _unused.slovenia=Slovenija
 _unused.sound=Sound
+_unused.strorylinecredits=Storyline and credits
 _unused.tag.added=Tag added
 _unused.tag.addition.failed=Tag addition failed
 _unused.tagging=Tagging
 _unused.terms.and.conditions=Terms and conditions
 _unused.text=Text
-_unused.username.in.use=Već je iskorišćeno. Molimo vas da odaberete drugo korisničko ime
-_unused.usertags=User tags
-_unused.using.europeana=Using Europeana
-_unused.view.as.xml=View as XML
-_unused.view.with.labels=View with labels
-_unused.view.without.labels=View without labels
-_unused.you.have.search.for=You have searched for
-languageDropDownList_t=Jezik
-registrationSucceed_t=Uspešno ste se registrovali.
+_unused.thisiseuropeana=This is Europeana
+_unused.thoughtlab=Thought lab
+_unused.timeline=Timeline
+_unused.timelinenavigator=Timeline navigator
+_unused.userconduct=User Conduct
+_unused.userconductagree=I understand that the Delving portal gives me the opportunity to create tags for any item I wish. I agree that I will not create any tags that could be considered libelous, harmful, threatening, unlawful, defamatory, infringing, abusive, inflammatory, harassing, pornographic, obscene, fraudulent, invasive of privacy or publicity rights, hateful, or racially, ethnically or otherwise objectionable. By clicking this box I agree to abide by this agreement, and understand that if I don't my login on the portal will be terminated. CLICK TO AGREE
+_unused_portal.ui.message.view.as.xml=View as XML
+_unused_portal.ui.message.view.with.labels=View with labels
+_unused_portal.ui.message.view.without.labels=View without labels
+_unused_portal.ui.message.you.have.search.for=You have searched for
+_unused_validation.username.in.use=Već je iskorišćeno. Molimo vas da odaberete drugo korisničko ime
