--- a/portal/src/main/resources/i18n/messages_sv.properties
+++ b/portal/src/main/resources/i18n/messages_sv.properties
@@ -1,88 +1,3 @@
-All_t=Alla
-AltHome_t=Klicka här om du vill komma tillbaka till Europeanas hemsida
-AltLogoEuropeana_t=Logotyp för Europeanas portal till kulturella samlingar
-CheckTheFaqs_t=Kontrollera frågor och svar – de kanske kan besvara din feedback
-ChooseLanguage_t=Välj språk
-Communities_t=Webbgrupper
-Contacts_t=Kontakt
-ContributorExplain_t=Det här är organisationer som bidrar med innehåll – digitaliserade målningar, böcker, sändningar och så vidare. Vissa av dessa bidragsgivare är aggregatorer*. Den största aggregatorn är Culture.fr, som bidrar med innehåll från omkring 480 organisationer i Frankrike, inklusive Louvren och Musée d’Orsay. Antalet organisationer som bidrar till en aggregator visas inom parentes efter aggregatorns namn, till exempel Videoactive (10).
-Contributor_t=Medverkande
-Contributors_t=Medverkande
-Country_t=Land
-CreateAccount_t=Skapa ett konto
-Description_t=Beskrivning
-EmailAlreadyRegistered_t=Den här e-postadressen har redan registrerats
-EmailClickToConfirm_t=Bekräfta din registering genom att klicka på länken nedan
-EmailEuropeanaTeam_t=Europeanagruppen
-EmailFormatError_t=Kontrollera att e-postadressen är rättstavad och försök igen
-EmailSendFailed_t=Det gick inte att skicka e-post
-EmailSent_t=E-post har skickats
-EmailUse_t=Du loggar in på webbplatsen med din e-postadress och ett lösenord
-EmailWelcome_t=Välkommen till Mitt Europeana
-EnewsOptin_t=Håll mig underrättad om ny utveckling inom Europeana
-EnterValidEmail_t=Ange en giltig e-postadress
-EnterYourEmail_t=Ange din e-postadress
-ErrorDetails_t=Felinformation
-Error_t=Fel
-FYROM_t=F.d. jugoslaviska republiken Makedonien
-FeatureDisabled_t=Den här funktionen har inaktiverats för tillfället.
-FeedbackResponse_t=Tack för din feedback. Om ett svar krävs kommer en person i Europeana-teamet att kontakta dig så snart som möjligt. Det går snabbare att få svar om din feedback skrivs på engelska.
-FindOutMore_t=Upptäck mer
-FinishRegistration_t=Sluför registreringen
-FirstName_t=Förnamn
-ForgotPassword_t=Jag har glömt mitt lösenord
-FromOurParnters_t=Från våra samarbetpartner bland museer, arkiv, bibliotek och audiovisuella samlingar
-FundedBy_t=Finansierad i samarbete med Europeiska unionen
-HideAdvancedSearch_t=Dölj avancerad sökning
-IAgree_t=Jag accepterar
-Image_t=Bild
-Images_t=Bilder
-InvalidQuery_t=Ogiltig fråga
-ItemDetails_t=Objektinformation
-ItemSaveFailed_t=Det gick inte att spara objektet
-ItemSaved_t=Objektet har sparats
-Items_t=Objekt
-LanguagePolicy_t=Språkliga riktlinjer
-Less_t=Dölj
-LinkExpired_t=Länken som du använde för att slutföra registreringen är ogiltig eller inaktuell
-LogIn_t=Logga in
-LogOut_t=Logga ut
-LoggedInAs_t=Inloggad som
-MatchesFor_t=Träffar för
-More_t=Visa mer
-MyCodeOfConductRequired_t=Du måste acceptera våra regler för uppförande innan du kan registrera dig på My Personal Page
-MyCodeOfConduct_t=Jag är medveten om att jag kan lägga till märkningar för vilket objekt som helst på My Personal Page. Jag lovar att inte att skapa några märkningar som skulle kunna uppfattas som ärekränkande, hotfulla, lagstridiga, nedsättande, rättighetskränkande, provocerande, pornografiska, obscena, falska, hatiska eller stötande med avseende på etnicitet och ursprung, eller som skulle kunna vara till skada för någon eller tolkas som smutskastning, trakasseri, kränkning av publiceringsrätt eller privatlivets helgd. Genom att klicka i den här rutan lovar jag att följa reglerna i det här avtalet, och jag är medveten om att medlemskapet i My Europeana annars avslutas.
-NewContent_t=Nytt material
-Next_t=Nästa
-NoItemsFound_t=Inga objekt hittades
-NoSavedItems_t=Inga sparade objekt
-NoSavedSearches_t=Inga sparade sökningar
-NoSavedTags_t=Inga sparade märkningar
-NoScript_t=Om du vill kunna använda den här webbplatsen fullt ut måste JavaScript vara aktiverat
-Of_t=av
-OpensInNewWindow_t=Öppna i ett nytt fönster
-Page_t=Sida
-PartnerExplain_t=Det här är nätverket med partner som har samarbetat för att genomföra Europeana, och som representerar Europeana i sina länder och yrkesföreningar.
-Partner_t=Partner
-Partners_t=Partner
-Password_t=Lösenord
-PeopleAreCurrentlyThinkingAbout_t=Människor tänker just nu på
-RegisterAgain_t=Registrera på nytt
-RequiredField_t=Detta är ett obligatoriskt fält
-Reset_t=Återställ
-Results_t=Resultat
-Sector_t=Område
-Sounds_t=Ljud
-StrorylineCredits_t=Handling och medverkande
-Texts_t=Texter
-ThisIsEuropeana_t=Detta är Europeana
-ThoughtLab_t=Idélabb
-TimelineNavigator_t=Tidslinjenavigerare
-Timeline_t=Tidslinje
-UserConductAgree_t=Jag är medveten om att jag kan lägga till märkningar för vilket objekt som helst på My Personal Page. Jag lovar att inte att skapa några märkningar som skulle kunna uppfattas som ärekränkande, hotfulla, lagstridiga, nedsättande, rättighetskränkande, provocerande, pornografiska, obscena, falska, hatiska eller stötande med avseende på etnicitet och ursprung, eller som skulle kunna vara till skada för någon eller tolkas som smutskastning, trakasseri, kränkning av publiceringsrätt eller privatlivets helgd. Genom att klicka i den här rutan lovar jag att följa reglerna i det här avtalet, och jag är medveten om att medlemskapet i My Personal Page annars avslutas. KLICKA FÖR ATT ACCEPTERA
-UserConduct_t=Användarregler
-Video_t=Video
-ViewingRelatedItems_t=Du visar liknande objekt
 _action.add.annotation=null
 _action.add.tag=Lägg till en märkning
 _action.advanced.search=Avancerad sökning
@@ -103,9 +18,7 @@ _action.send=Skicka
 _action.share.with.friend=Tipsa en vän
 _action.videos=Videor
 _action.view.in.original.context=Visa i ursprungssammanhang
-_boolean.and=och
-_boolean.not=inte
-_boolean.or=eller
+_actionOpenInNewWindow=Öppna i ett nytt fönster
 _facet.by.collection=null
 _facet.by.country=Efter land
 _facet.by.date=Efter datum
@@ -117,6 +30,7 @@ _facet.by.year=null
 _failure.search.saved=Det gick inte att spara sökningen
 _header.actions=Åtgärder
 _header.relatedcontent=Liknande material
+_inc_result_table_full.description=Beskrivning
 _language_select.italian=Italienska (ita)
 _locale.AL=Albanien
 _locale.AM=Armenien
@@ -186,6 +100,10 @@ _locale.sk=Slovakiska (slo)
 _locale.sl=Slovenska (slv)
 _locale.sr=Serbiska (scc)
 _locale.sv=Svenska (sve/swe)
+_menu.i18n.chooselanguage=Välj språk
+_messages.error.emailformaterror=Kontrollera att e-postadressen är rättstavad och försök igen
+_messages.error.emailsendfailed=Det gick inte att skicka e-post
+_messages.notification.emailsent=E-post har skickats
 _metadata.dc.contributor=Medarbetare
 _metadata.dc.coverage=Täckning
 _metadata.dc.creator=Författare
@@ -215,18 +133,61 @@ _metadata.dcterms.replaces=Ersätter
 _metadata.dcterms.requires=Kräver
 _metadata.dcterms.spatial=Plats
 _metadata.dcterms.temporal=Tid
+_metadata.searchfield.contributor=Medverkande
+_metadata.type.all=Alla
+_metadata.type.images=Bilder
+_metadata.type.sounds=Ljud
+_metadata.type.texts=Texter
+_metadata.type.video=Video
 _mine.date.saved=Informationen har sparats
 _mine.delete=Ta bort
+_mine.email.address=E-postadress
+_mine.firstname=Förnamn
+_mine.forgotpassword=Jag har glömt mitt lösenord
+_mine.itemsaved=Objektet har sparats
+_mine.itemsavefailed=Det gick inte att spara objektet
 _mine.last.name=Efternamn
+_mine.loggedinas=Inloggad som
+_mine.login=Logga in
+_mine.logout=Logga ut
+_mine.nosaveditems=Inga sparade objekt
+_mine.nosavedsearches=Inga sparade sökningar
+_mine.nosavedtags=Inga sparade märkningar
 _mine.saved.items=Sparade objekt
 _mine.saved.searches=Sparade sökningar
 _mine.saved.tags=Sparade märkningar
 _mine.user.information=Användaruppgifter
+_mine.user.registration.notification.succeed=Du har nu registrerat dig
 _mine.username=Användarnamn
-_option.any.field=Alla fält
-_prompt.email.address=E-postadress
-_prompt.provider=Leverantör
+_portal.menu.languagedropdownlist=Språk
+_portal.ui.message.less=Dölj
+_portal.ui.message.more=Visa mer
+_portal.ui.message.noscript=Om du vill kunna använda den här webbplatsen fullt ut måste JavaScript vara aktiverat
+_portal.ui.message.success.search.saved=Sök bland sparade sökningar
+_portal.ui.message.usertags=Användarmärkning
+_portal.ui.messages.items=Objekt
+_portal.ui.navigation.matchesfor=Träffar för
+_portal.ui.navigation.next=Nästa
+_portal.ui.navigation.of=av
+_portal.ui.navigation.page=Sida
+_portal.ui.notification.error=Fel
+_portal.ui.notification.noitemsfound=Inga objekt hittades
+_portal.ui.reset.searchbox=Återställ
+_portal.ui.results=Resultat
+_portal.ui.viewingrelateditems=Du visar liknande objekt
+_register-request.emailalreadyregistered=Den här e-postadressen har redan registrerats
 _register.email.has.been.sent=E-post har skickats till följande adress
+_register.emailclicktoconfirm=Bekräfta din registering genom att klicka på länken nedan
+_register.emailuse=Du loggar in på webbplatsen med din e-postadress och ett lösenord
+_register.entervalidemail=Ange en giltig e-postadress
+_register.enteryouremail=Ange din e-postadress
+_register.errordetails=Felinformation
+_register.finishregistration=Sluför registreringen
+_register.iagree=Jag accepterar
+_register.linkexpired=Länken som du använde för att slutföra registreringen är ogiltig eller inaktuell
+_register.mycodeofconduct=Jag är medveten om att jag kan lägga till märkningar för vilket objekt som helst på My Personal Page. Jag lovar att inte att skapa några märkningar som skulle kunna uppfattas som ärekränkande, hotfulla, lagstridiga, nedsättande, rättighetskränkande, provocerande, pornografiska, obscena, falska, hatiska eller stötande med avseende på etnicitet och ursprung, eller som skulle kunna vara till skada för någon eller tolkas som smutskastning, trakasseri, kränkning av publiceringsrätt eller privatlivets helgd. Genom att klicka i den här rutan lovar jag att följa reglerna i det här avtalet, och jag är medveten om att medlemskapet i My Europeana annars avslutas.
+_register.mycodeofconductrequired=Du måste acceptera våra regler för uppförande innan du kan registrera dig på My Personal Page
+_register.password=Lösenord
 _register.password.choose=Välj ett lösenord
 _register.password.explain=Lösenord får vara 6-30 ord långa
 _register.pick.user.name=Ditt användarnamn visas när du har loggat in
@@ -234,13 +195,25 @@ _register.please.follow.link=Klicka på länken i e-postmeddelandet och gör kla
 _register.register=Registrera
 _register.registration.failed=Ett fel uppstod vid behandlingen av din registrering. Försök igen
 _register.repeat.password=Upprepa lösenordet
+_register.requiredfield=Detta är ett obligatoriskt fält
 _register.username.choose=Välj ett användarnamn
 _register.username.explain=Ditt användarnamn visas när du har loggat in
+_search.boolean.and=och
+_search.boolean.not=inte
+_search.boolean.or=eller
+_search.field.any.field=Alla fält
 _search.field.creator=Upphovsperson
 _search.field.date=Datum
-_search.option.subject=Ämne
-_search.option.title=Titel
-_success.search.saved=Sök bland sparade sökningar
+_search.field.provider=Leverantör
+_search.field.subject=Ämne
+_search.field.title=Titel
+_toberemoved.althome=Klicka här om du vill komma tillbaka till Europeanas hemsida
+_toberemoved.altlogoeuropeana=Logotyp för Europeanas portal till kulturella samlingar
+_toberemoved.checkthefaqs=Kontrollera frågor och svar – de kanske kan besvara din feedback
+_toberemoved.communities=Webbgrupper
+_toberemoved.contributorexplain=Det här är organisationer som bidrar med innehåll – digitaliserade målningar, böcker, sändningar och så vidare. Vissa av dessa bidragsgivare är aggregatorer*. Den största aggregatorn är Culture.fr, som bidrar med innehåll från omkring 480 organisationer i Frankrike, inklusive Louvren och Musée d’Orsay. Antalet organisationer som bidrar till en aggregator visas inom parentes efter aggregatorns namn, till exempel Videoactive (10).
+_toberemoved.emaileuropeanateam=Europeanagruppen
+_toberemoved.using.europeana=Använda Europeana
 _unused.about.us=Om oss
 _unused.accessibility=Hjälpmedel
 _unused.add=Lägg till
@@ -249,10 +222,34 @@ _unused.altprint=Skriv ut den här sidan
 _unused.aplacetoshareideas=en plats för inspiration och idéer. Sök bland Europas kulturella samlingar, upptäck andras favoriter och dela med dig av dina upptäckter.
 _unused.bosnia.and.herzegovina=Bosnien och Hercegovina
 _unused.browse.through.time=Bläddra bland alla tider
+_unused.contacts=Kontakt
+_unused.contributors=Medverkande
+_unused.country=Land
+_unused.createaccount=Skapa ett konto
+_unused.emailwelcome=Välkommen till Mitt Europeana
+_unused.enewsoptin=Håll mig underrättad om ny utveckling inom Europeana
+_unused.featuredisabled=Den här funktionen har inaktiverats för tillfället.
+_unused.feedbackresponse=Tack för din feedback. Om ett svar krävs kommer en person i Europeana-teamet att kontakta dig så snart som möjligt. Det går snabbare att få svar om din feedback skrivs på engelska.
+_unused.findoutmore=Upptäck mer
+_unused.fromourparnters=Från våra samarbetpartner bland museer, arkiv, bibliotek och audiovisuella samlingar
+_unused.fundedby=Finansierad i samarbete med Europeiska unionen
+_unused.fyrom=F.d. jugoslaviska republiken Makedonien
+_unused.hideadvancedsearch=Dölj avancerad sökning
+_unused.image=Bild
+_unused.invalidquery=Ogiltig fråga
+_unused.itemdetails=Objektinformation
+_unused.languagepolicy=Språkliga riktlinjer
+_unused.newcontent=Nytt material
 _unused.other=Annat
+_unused.partner=Partner
+_unused.partnerexplain=Det här är nätverket med partner som har samarbetat för att genomföra Europeana, och som representerar Europeana i sina länder och yrkesföreningar.
+_unused.partners=Partner
+_unused.peoplearecurrentlythinkingabout=Människor tänker just nu på
 _unused.privacy=Sekretess
+_unused.registeragain=Registrera på nytt
 _unused.remember.me=Kom ihåg mig på den här datorn
 _unused.remove=Ta bort
+_unused.sector=Område
 _unused.send.feedback=Skicka feedback
 _unused.share.your.ideas=Dela med dig av dina idéer
 _unused.show.all=Visa alla
@@ -260,17 +257,20 @@ _unused.sign.in=Logga in
 _unused.site.map=Webbplatsöversikt
 _unused.slovenia=Slovenien
 _unused.sound=Ljud
+_unused.strorylinecredits=Handling och medverkande
 _unused.tag.added=Märkningen har lagts till
 _unused.tag.addition.failed=Det gick inte att lägga till märkningen
 _unused.tagging=Märkning
 _unused.terms.and.conditions=Bestämmelser och villkor
 _unused.text=Text
-_unused.username.in.use=används redan. Välj ett annat användarnamn
-_unused.usertags=Användarmärkning
-_unused.using.europeana=Använda Europeana
-_unused.view.as.xml=Visa som XML
-_unused.view.with.labels=Visa med etiketter
-_unused.view.without.labels=Visa utan etiketter
-_unused.you.have.search.for=Du sökte efter
-languageDropDownList_t=Språk
-registrationSucceed_t=Du har nu registrerat dig
+_unused.thisiseuropeana=Detta är Europeana
+_unused.thoughtlab=Idélabb
+_unused.timeline=Tidslinje
+_unused.timelinenavigator=Tidslinjenavigerare
+_unused.userconduct=Användarregler
+_unused.userconductagree=Jag är medveten om att jag kan lägga till märkningar för vilket objekt som helst på My Personal Page. Jag lovar att inte att skapa några märkningar som skulle kunna uppfattas som ärekränkande, hotfulla, lagstridiga, nedsättande, rättighetskränkande, provocerande, pornografiska, obscena, falska, hatiska eller stötande med avseende på etnicitet och ursprung, eller som skulle kunna vara till skada för någon eller tolkas som smutskastning, trakasseri, kränkning av publiceringsrätt eller privatlivets helgd. Genom att klicka i den här rutan lovar jag att följa reglerna i det här avtalet, och jag är medveten om att medlemskapet i My Personal Page annars avslutas. KLICKA FÖR ATT ACCEPTERA
+_unused_portal.ui.message.view.as.xml=Visa som XML
+_unused_portal.ui.message.view.with.labels=Visa med etiketter
+_unused_portal.ui.message.view.without.labels=Visa utan etiketter
+_unused_portal.ui.message.you.have.search.for=Du sökte efter
+_unused_validation.username.in.use=används redan. Välj ett annat användarnamn
