--- a/portal/src/main/resources/i18n/messages_xx.properties
+++ b/portal/src/main/resources/i18n/messages_xx.properties
@@ -1,88 +1,3 @@
-All_t=XXXXXX
-AltHome_t=XXXXXX
-AltLogoEuropeana_t=XXXXXX
-CheckTheFaqs_t=XXXXXX
-ChooseLanguage_t=XXXXXX
-Communities_t=XXXXXX
-Contacts_t=XXXXXX
-ContributorExplain_t=These are the organisations that are contributing content - digitised paintings, books, broadcasts etc. Some of these contributors are  aggregators*, Culture.fr is the largest aggregator, providing content from about 480 organisations in France, including the Louvre and the Musée d’Orsay. The number of organisations contributing to an aggregator is shown in brackets after the aggregator’s name, e.g. Videoactive (10)
-Contributor_t=XXXXXX
-Contributors_t=XXXXXX
-Country_t=XXXXXX
-CreateAccount_t=XXXXXX
-Description_t=XXXXXX
-EmailAlreadyRegistered_t=XXXXXX
-EmailClickToConfirm_t=XXXXXX
-EmailEuropeanaTeam_t=XXXXXX
-EmailFormatError_t=XXXXXX
-EmailSendFailed_t=XXXXXX
-EmailSent_t=XXXXXX
-EmailUse_t=XXXXXX
-EmailWelcome_t=XXXXXX
-EnewsOptin_t=XXXXXX
-EnterValidEmail_t=XXXXXX
-EnterYourEmail_t=XXXXXX
-ErrorDetails_t=XXXXXX
-Error_t=XXXXXX
-FYROM_t=XXXXXX
-FeatureDisabled_t=XXXXXX
-FeedbackResponse_t=Thank you very much for your feedback. If your feedback requires a response a member of the Europeana team will get back to you as soon as possible. For faster response feedback should be submitted in English.
-FindOutMore_t=XXXXXX
-FinishRegistration_t=XXXXXX
-FirstName_t=First name
-ForgotPassword_t=XXXXXX
-FromOurParnters_t=XXXXXX
-FundedBy_t=XXXXXX
-HideAdvancedSearch_t=XXXXXX
-IAgree_t=XXXXXX
-Image_t=XXXXXX
-Images_t=XXXXXX
-InvalidQuery_t=XXXXXX
-ItemDetails_t=XXXXXX
-ItemSaveFailed_t=XXXXXX
-ItemSaved_t=XXXXXX
-Items_t=XXXXXX
-LanguagePolicy_t=XXXXXX
-Less_t=XXXXXX
-LinkExpired_t=XXXXXX
-LogIn_t=XXXXXX
-LogOut_t=XXXXXX
-LoggedInAs_t=XXXXXX
-MatchesFor_t=XXXXXX
-More_t=XXXXXX
-MyCodeOfConductRequired_t=XXXXXX
-MyCodeOfConduct_t=XXXXXX
-NewContent_t=XXXXXX
-Next_t=XXXXXX
-NoItemsFound_t=XXXXXX
-NoSavedItems_t=XXXXXX
-NoSavedSearches_t=XXXXXX
-NoSavedTags_t=XXXXXX
-NoScript_t=XXXXXX
-Of_t=XXXXXX
-OpensInNewWindow_t=XXXXXX
-Page_t=XXXXXX
-PartnerExplain_t=This is the network of partners who collaborated to make Europeana happen, and who represent Europeana in their countries and professional associations.
-Partner_t=XXXXXX
-Partners_t=XXXXXX
-Password_t=XXXXXX
-PeopleAreCurrentlyThinkingAbout_t=XXXXXX
-RegisterAgain_t=XXXXXX
-RequiredField_t=XXXXXX
-Reset_t=XXXXXX
-Results_t=XXXXXX
-Sector_t=XXXXXX
-Sounds_t=XXXXXX
-StrorylineCredits_t=XXXXXX
-Texts_t=XXXXXX
-ThisIsEuropeana_t=XXXXXX
-ThoughtLab_t=XXXXXX
-TimelineNavigator_t=XXXXXX
-Timeline_t=XXXXXX
-UserConductAgree_t=XXXXXX
-UserConduct_t=XXXXXX
-Video_t=XXXXXX
-ViewingRelatedItems_t=XXXXXX
 _action.add.annotation=null
 _action.add.tag=XXXXXX
 _action.advanced.search=XXXXXX
@@ -103,9 +18,7 @@ _action.send=XXXXXX
 _action.share.with.friend=XXXXXX
 _action.videos=XXXXXX
 _action.view.in.original.context=XXXXXX
-_boolean.and=XXXXXX
-_boolean.not=XXXXXX
-_boolean.or=XXXXXX
+_actionOpenInNewWindow=XXXXXX
 _facet.by.collection=null
 _facet.by.country=XXXXXX
 _facet.by.date=XXXXXX
@@ -117,6 +30,7 @@ _facet.by.year=null
 _failure.search.saved=XXXXXX
 _header.actions=XXXXXX
 _header.relatedcontent=XXXXXX
+_inc_result_table_full.description=XXXXXX
 _language_select.italian=XXXXXX
 _locale.AL=XXXXXX
 _locale.AM=XXXXXX
@@ -186,6 +100,10 @@ _locale.sk=XXXXXX
 _locale.sl=XXXXXX
 _locale.sr=XXXXXX
 _locale.sv=XXXXXX
+_menu.i18n.chooselanguage=XXXXXX
+_messages.error.emailformaterror=XXXXXX
+_messages.error.emailsendfailed=XXXXXX
+_messages.notification.emailsent=XXXXXX
 _metadata.dc.contributor=XXXXXX
 _metadata.dc.coverage=XXXXXX
 _metadata.dc.creator=XXXXXX
@@ -215,18 +133,61 @@ _metadata.dcterms.replaces=XXXXXX
 _metadata.dcterms.requires=XXXXXX
 _metadata.dcterms.spatial=XXXXXX
 _metadata.dcterms.temporal=XXXXXX
+_metadata.searchfield.contributor=XXXXXX
+_metadata.type.all=XXXXXX
+_metadata.type.images=XXXXXX
+_metadata.type.sounds=XXXXXX
+_metadata.type.texts=XXXXXX
+_metadata.type.video=XXXXXX
 _mine.date.saved=XXXXXX
 _mine.delete=XXXXXX
+_mine.email.address=XXXXXX
+_mine.firstname=First name
+_mine.forgotpassword=XXXXXX
+_mine.itemsaved=XXXXXX
+_mine.itemsavefailed=XXXXXX
 _mine.last.name=Last name
+_mine.loggedinas=XXXXXX
+_mine.login=XXXXXX
+_mine.logout=XXXXXX
+_mine.nosaveditems=XXXXXX
+_mine.nosavedsearches=XXXXXX
+_mine.nosavedtags=XXXXXX
 _mine.saved.items=XXXXXX
 _mine.saved.searches=XXXXXX
 _mine.saved.tags=XXXXXX
 _mine.user.information=XXXXXX
+_mine.user.registration.notification.succeed=XXXXXX
 _mine.username=XXXXXX
-_option.any.field=XXXXXX
-_prompt.email.address=XXXXXX
-_prompt.provider=XXXXXX
+_portal.menu.languagedropdownlist=XXXXXX
+_portal.ui.message.less=XXXXXX
+_portal.ui.message.more=XXXXXX
+_portal.ui.message.noscript=XXXXXX
+_portal.ui.message.success.search.saved=XXXXXX
+_portal.ui.message.usertags=XXXXXX
+_portal.ui.messages.items=XXXXXX
+_portal.ui.navigation.matchesfor=XXXXXX
+_portal.ui.navigation.next=XXXXXX
+_portal.ui.navigation.of=XXXXXX
+_portal.ui.navigation.page=XXXXXX
+_portal.ui.notification.error=XXXXXX
+_portal.ui.notification.noitemsfound=XXXXXX
+_portal.ui.reset.searchbox=XXXXXX
+_portal.ui.results=XXXXXX
+_portal.ui.viewingrelateditems=XXXXXX
+_register-request.emailalreadyregistered=XXXXXX
 _register.email.has.been.sent=XXXXXX
+_register.emailclicktoconfirm=XXXXXX
+_register.emailuse=XXXXXX
+_register.entervalidemail=XXXXXX
+_register.enteryouremail=XXXXXX
+_register.errordetails=XXXXXX
+_register.finishregistration=XXXXXX
+_register.iagree=XXXXXX
+_register.linkexpired=XXXXXX
+_register.mycodeofconduct=XXXXXX
+_register.mycodeofconductrequired=XXXXXX
+_register.password=XXXXXX
 _register.password.choose=XXXXXX
 _register.password.explain=XXXXXX
 _register.pick.user.name=XXXXXX
@@ -234,13 +195,25 @@ _register.please.follow.link=XXXXXX
 _register.register=XXXXXX
 _register.registration.failed=XXXXXX
 _register.repeat.password=XXXXXX
+_register.requiredfield=XXXXXX
 _register.username.choose=XXXXXX
 _register.username.explain=XXXXXX
+_search.boolean.and=XXXXXX
+_search.boolean.not=XXXXXX
+_search.boolean.or=XXXXXX
+_search.field.any.field=XXXXXX
 _search.field.creator=XXXXXX
 _search.field.date=XXXXXX
-_search.option.subject=XXXXXX
-_search.option.title=XXXXXX
-_success.search.saved=XXXXXX
+_search.field.provider=XXXXXX
+_search.field.subject=XXXXXX
+_search.field.title=XXXXXX
+_toberemoved.althome=XXXXXX
+_toberemoved.altlogoeuropeana=XXXXXX
+_toberemoved.checkthefaqs=XXXXXX
+_toberemoved.communities=XXXXXX
+_toberemoved.contributorexplain=These are the organisations that are contributing content - digitised paintings, books, broadcasts etc. Some of these contributors are  aggregators*, Culture.fr is the largest aggregator, providing content from about 480 organisations in France, including the Louvre and the Musée d’Orsay. The number of organisations contributing to an aggregator is shown in brackets after the aggregator’s name, e.g. Videoactive (10)
+_toberemoved.emaileuropeanateam=XXXXXX
+_toberemoved.using.europeana=XXXXXX
 _unused.about.us=XXXXXX
 _unused.accessibility=XXXXXX
 _unused.add=XXXXXX
@@ -249,10 +222,34 @@ _unused.altprint=XXXXXX
 _unused.aplacetoshareideas=XXXXXX
 _unused.bosnia.and.herzegovina=XXXXXX
 _unused.browse.through.time=XXXXXX
+_unused.contacts=XXXXXX
+_unused.contributors=XXXXXX
+_unused.country=XXXXXX
+_unused.createaccount=XXXXXX
+_unused.emailwelcome=XXXXXX
+_unused.enewsoptin=XXXXXX
+_unused.featuredisabled=XXXXXX
+_unused.feedbackresponse=Thank you very much for your feedback. If your feedback requires a response a member of the Europeana team will get back to you as soon as possible. For faster response feedback should be submitted in English.
+_unused.findoutmore=XXXXXX
+_unused.fromourparnters=XXXXXX
+_unused.fundedby=XXXXXX
+_unused.fyrom=XXXXXX
+_unused.hideadvancedsearch=XXXXXX
+_unused.image=XXXXXX
+_unused.invalidquery=XXXXXX
+_unused.itemdetails=XXXXXX
+_unused.languagepolicy=XXXXXX
+_unused.newcontent=XXXXXX
 _unused.other=XXXXXX
+_unused.partner=XXXXXX
+_unused.partnerexplain=This is the network of partners who collaborated to make Europeana happen, and who represent Europeana in their countries and professional associations.
+_unused.partners=XXXXXX
+_unused.peoplearecurrentlythinkingabout=XXXXXX
 _unused.privacy=XXXXXX
+_unused.registeragain=XXXXXX
 _unused.remember.me=XXXXXX
 _unused.remove=XXXXXX
+_unused.sector=XXXXXX
 _unused.send.feedback=XXXXXX
 _unused.share.your.ideas=XXXXXX
 _unused.show.all=XXXXXX
@@ -260,17 +257,20 @@ _unused.sign.in=XXXXXX
 _unused.site.map=XXXXXX
 _unused.slovenia=XXXXXX
 _unused.sound=XXXXXX
+_unused.strorylinecredits=XXXXXX
 _unused.tag.added=XXXXXX
 _unused.tag.addition.failed=XXXXXX
 _unused.tagging=XXXXXX
 _unused.terms.and.conditions=XXXXXX
 _unused.text=XXXXXX
-_unused.username.in.use=XXXXXX
-_unused.usertags=XXXXXX
-_unused.using.europeana=XXXXXX
-_unused.view.as.xml=XXXXXX
-_unused.view.with.labels=XXXXXX
-_unused.view.without.labels=XXXXXX
-_unused.you.have.search.for=XXXXXX
-languageDropDownList_t=XXXXXX
-registrationSucceed_t=XXXXXX
+_unused.thisiseuropeana=XXXXXX
+_unused.thoughtlab=XXXXXX
+_unused.timeline=XXXXXX
+_unused.timelinenavigator=XXXXXX
+_unused.userconduct=XXXXXX
+_unused.userconductagree=XXXXXX
+_unused_portal.ui.message.view.as.xml=XXXXXX
+_unused_portal.ui.message.view.with.labels=XXXXXX
+_unused_portal.ui.message.view.without.labels=XXXXXX
+_unused_portal.ui.message.you.have.search.for=XXXXXX
+_unused_validation.username.in.use=XXXXXX
