--- a/portal/src/main/resources/i18n/messages_ca.properties
+++ b/portal/src/main/resources/i18n/messages_ca.properties
@@ -1,88 +1,3 @@
-All_t=Tots
-AltHome_t=Cliqueu aquí per tornar a la pàgina principal d'Europeana
-AltLogoEuropeana_t=Logo Europeana pensa cultura
-CheckTheFaqs_t=Comproveu les PMF - poden donar resposta a les vostres consultes
-ChooseLanguage_t=Escolliu una llengua
-Communities_t=Comunitats
-Contacts_t=Contactes
-ContributorExplain_t=Són les organitzacions que contribueixen amb continguts -pintures, llibres o emissions digitalitzades, etc. Alguns contribuïdors són agregadors*. Culture.fr és l'agregador més gran, proveeix contingut de 480 organitzacions de França, inclosos els museus del Louvre i d'Orsay. El nombre d'organitzacions que proveeixen un agregador s'indica entre claudàtors a continuació del nom de l'agregador, per ex. Videoactive (10)
-Contributor_t=Contribuïdor
-Contributors_t=Contribuïdors
-Country_t=País
-CreateAccount_t=Crear un compte
-Description_t=Descripció
-EmailAlreadyRegistered_t=Aquest correu electrònic ja ha estat registrat
-EmailClickToConfirm_t=Si us plau, cliqueu el següent enllaç per confirmar el vostre registre
-EmailEuropeanaTeam_t=L'Equip Europeana
-EmailFormatError_t=Si us plau, comproveu que el correu elctrònic tingui el format correcte i intenteu-lo de nou
-EmailSendFailed_t=No s'ha pogut enviar el correu electrònic
-EmailSent_t=Correu electrònic enviat
-EmailUse_t=Utilitzeu el vostre correu electrònic i contrasenya per connectar-vos
-EmailWelcome_t=Benvingut a la Meva Europeana
-EnewsOptin_t=Informeu-me dels nous desenvolupaments d'Europeana
-EnterValidEmail_t=Si us plau, entreu una adreça de correu vàlida
-EnterYourEmail_t=Entreu el vostre correu electrònic
-ErrorDetails_t=Detalls de l'error
-Error_t=Error
-FYROM_t=Macedònia
-FeatureDisabled_t=Aquesta funció es troba actualment desactivada.
-FeedbackResponse_t=Moltes gràcies pels vostres comentaris. Si aquests requereixen una resposta, un membre de l'equip d'Europeana us contactarà el més aviat possible. Per rebre més ràpidament una resposta escriviu, si us plau, els vostres comentaris en anglès.
-FindOutMore_t=Més informació
-FinishRegistration_t=Registre finalitzat
-FirstName_t=Nom
-ForgotPassword_t=He oblidat la meva contrasenya
-FromOurParnters_t=Dels museus, arxius, biblioteques i col·leccions audiovisuals que són els nostres socis
-FundedBy_t=cofinançat per la Unió Europea
-HideAdvancedSearch_t=Amagar cerca avançada
-IAgree_t=Estic d'acord
-Image_t=Imatge
-Images_t=Imatges
-InvalidQuery_t=Cerca no vàlida
-ItemDetails_t=Detalls de l'ítem
-ItemSaveFailed_t=Guardar ítem ha fallat
-ItemSaved_t=Ítem guardat
-Items_t=Ítems
-LanguagePolicy_t=Política sobre llengües
-Less_t=Menys
-LinkExpired_t=L'enllaç que vau utilitzar per registrar-vos és invàlid o ha expirat
-LogIn_t=Connexió
-LogOut_t=Desconnexió
-LoggedInAs_t=Connectat com
-MatchesFor_t=Coincidències per a
-More_t=Més
-MyCodeOfConductRequired_t=Per registrar-vos a la Meva Europeana heu d'estar d'acord amb el seu codi de conducta
-MyCodeOfConduct_t=Entenc que la Meva Europeana em dóna l'oportunitat de crear etiquetes per a qualsevol ítem que desitgi. Estic d'acord en no crear etiquetes que puguin ser considerades difamatòries, perjudicials, amenaçadores, il•legals, abusives, infamatòries, il•lícites, assetjadores, pornogràfiques, obscenes, fraudulentes, que envaeixin la privacitat o els drets de publicitat, odioses, racials o ètniques o de qualsevol mena que puguin ser objectables. En fer clic en aquesta casella accepto complir aquest acord, i entenc que si no ho faig, la meva condició de membre de la Meva Europeana es donarà per finalitzada.
-NewContent_t=Nou contingut
-Next_t=Següent
-NoItemsFound_t=No s'han trobat ítems
-NoSavedItems_t=No hi ha ítems guardats
-NoSavedSearches_t=No hi ha cerques guardades
-NoSavedTags_t=No hi ha etiquetes guardades
-NoScript_t=Per a un ús òptim d'aquest lloc web cal tenir JavaScript activat
-Of_t=de
-OpensInNewWindow_t=S'obre a una finestra nova
-Page_t=Pàgina
-PartnerExplain_t=És la xarxa de socis que han col·laborat en fer possible Europeana i que representen Europeana als seus països i associacions professionals.
-Partner_t=Soci
-Partners_t=Socis
-Password_t=Contrasenya
-PeopleAreCurrentlyThinkingAbout_t=La gent pensa actualment en
-RegisterAgain_t=Registreu-vos una altra vegada
-RequiredField_t=És un camp obligatori
-Reset_t=Reinicialitzar
-Results_t=Resultats
-Sector_t=Sector
-Sounds_t=Sons
-StrorylineCredits_t=Guió i crèdits
-Texts_t=Textos
-ThisIsEuropeana_t=Això és Europeana
-ThoughtLab_t=Laboratori del pensament
-TimelineNavigator_t=Navegador cronològic
-Timeline_t=Cronologia
-UserConductAgree_t=Entenc que la Meva Europeana em dóna l'oportunitat de crear etiquetes per a qualsevol ítem que desitgi. Estic d'acord en no crear etiquetes que puguin ser considerades difamatòries, perjudicials, amenaçadores, il•legals, abusives, infamatòries, il•lícites, assetjadores, pornogràfiques, obscenes, fraudulentes, que envaeixin la privacitat o els drets de publicitat, odioses, racials o ètniques o de qualsevol mena que puguin ser objectables. En fer clic en aquesta casella accepto complir aquest acord, i entenc que si no ho faig, la meva condició de membre de la Meva Europeana es donarà per finalitzada. CLIQUEU PER ACCEPTAR
-UserConduct_t=Conducta de l'usuari
-Video_t=Video
-ViewingRelatedItems_t=Esteu visualitzant ítems relacionats
 _action.add.annotation=null
 _action.add.tag=Afegir una etiqueta
 _action.advanced.search=Cerca avançada
@@ -103,9 +18,7 @@ _action.send=Enviar
 _action.share.with.friend=Compartir amb un amic
 _action.videos=Videos
 _action.view.in.original.context=Veure en el context original
-_boolean.and=i
-_boolean.not=no
-_boolean.or=o
+_actionOpenInNewWindow=S'obre a una finestra nova
 _facet.by.collection=null
 _facet.by.country=Per país
 _facet.by.date=Per data
@@ -117,6 +30,7 @@ _facet.by.year=null
 _failure.search.saved=Guardar la cerca ha fallat
 _header.actions=Accions
 _header.relatedcontent=Contingut relacionat
+_inc_result_table_full.description=Descripció
 _language_select.italian=Italià
 _locale.AL=Albània
 _locale.AM=Armènia
@@ -186,6 +100,10 @@ _locale.sk=Eslovac
 _locale.sl=Eslovè
 _locale.sr=Serbi
 _locale.sv=Suec
+_menu.i18n.chooselanguage=Escolliu una llengua
+_messages.error.emailformaterror=Si us plau, comproveu que el correu elctrònic tingui el format correcte i intenteu-lo de nou
+_messages.error.emailsendfailed=No s'ha pogut enviar el correu electrònic
+_messages.notification.emailsent=Correu electrònic enviat
 _metadata.dc.contributor=Contribuïdor
 _metadata.dc.coverage=Abast
 _metadata.dc.creator=Autor
@@ -215,18 +133,61 @@ _metadata.dcterms.replaces=Substitueix
 _metadata.dcterms.requires=Requereix
 _metadata.dcterms.spatial=Abast espacial
 _metadata.dcterms.temporal=Abast temporal
+_metadata.searchfield.contributor=Contribuïdor
+_metadata.type.all=Tots
+_metadata.type.images=Imatges
+_metadata.type.sounds=Sons
+_metadata.type.texts=Textos
+_metadata.type.video=Video
 _mine.date.saved=Data guardada
 _mine.delete=Esborrar
+_mine.email.address=Adreça de correu electrònic
+_mine.firstname=Nom
+_mine.forgotpassword=He oblidat la meva contrasenya
+_mine.itemsaved=Ítem guardat
+_mine.itemsavefailed=Guardar ítem ha fallat
 _mine.last.name=Cognom
+_mine.loggedinas=Connectat com
+_mine.login=Connexió
+_mine.logout=Desconnexió
+_mine.nosaveditems=No hi ha ítems guardats
+_mine.nosavedsearches=No hi ha cerques guardades
+_mine.nosavedtags=No hi ha etiquetes guardades
 _mine.saved.items=Ítems guardats
 _mine.saved.searches=Cerques guardades
 _mine.saved.tags=Etiquetes guardades
 _mine.user.information=Informació de l'usuari
+_mine.user.registration.notification.succeed=Us heu registrat amb èxit
 _mine.username=Nom d'usuari
-_option.any.field=Qualsevol camp
-_prompt.email.address=Adreça de correu electrònic
-_prompt.provider=Proveïdor
+_portal.menu.languagedropdownlist=Llengua
+_portal.ui.message.less=Menys
+_portal.ui.message.more=Més
+_portal.ui.message.noscript=Per a un ús òptim d'aquest lloc web cal tenir JavaScript activat
+_portal.ui.message.success.search.saved=Cerca guardada
+_portal.ui.message.usertags=Etiquetes d'usuari
+_portal.ui.messages.items=Ítems
+_portal.ui.navigation.matchesfor=Coincidències per a
+_portal.ui.navigation.next=Següent
+_portal.ui.navigation.of=de
+_portal.ui.navigation.page=Pàgina
+_portal.ui.notification.error=Error
+_portal.ui.notification.noitemsfound=No s'han trobat ítems
+_portal.ui.reset.searchbox=Reinicialitzar
+_portal.ui.results=Resultats
+_portal.ui.viewingrelateditems=Esteu visualitzant ítems relacionats
+_register-request.emailalreadyregistered=Aquest correu electrònic ja ha estat registrat
 _register.email.has.been.sent=S'ha enviat un correu electrònic a l'adreça següent
+_register.emailclicktoconfirm=Si us plau, cliqueu el següent enllaç per confirmar el vostre registre
+_register.emailuse=Utilitzeu el vostre correu electrònic i contrasenya per connectar-vos
+_register.entervalidemail=Si us plau, entreu una adreça de correu vàlida
+_register.enteryouremail=Entreu el vostre correu electrònic
+_register.errordetails=Detalls de l'error
+_register.finishregistration=Registre finalitzat
+_register.iagree=Estic d'acord
+_register.linkexpired=L'enllaç que vau utilitzar per registrar-vos és invàlid o ha expirat
+_register.mycodeofconduct=Entenc que la Meva Europeana em dóna l'oportunitat de crear etiquetes per a qualsevol ítem que desitgi. Estic d'acord en no crear etiquetes que puguin ser considerades difamatòries, perjudicials, amenaçadores, il•legals, abusives, infamatòries, il•lícites, assetjadores, pornogràfiques, obscenes, fraudulentes, que envaeixin la privacitat o els drets de publicitat, odioses, racials o ètniques o de qualsevol mena que puguin ser objectables. En fer clic en aquesta casella accepto complir aquest acord, i entenc que si no ho faig, la meva condició de membre de la Meva Europeana es donarà per finalitzada.
+_register.mycodeofconductrequired=Per registrar-vos a la Meva Europeana heu d'estar d'acord amb el seu codi de conducta
+_register.password=Contrasenya
 _register.password.choose=Escolliu una contrasenya
 _register.password.explain=Les contrasenyes han de tenir entre 6 i 30 caràcters
 _register.pick.user.name=Quan us hagueu connectat es visualitzarà el vostre nom d'usuari
@@ -234,13 +195,25 @@ _register.please.follow.link=Si us plau, seguiu l'enllaç del correu electrònic
 _register.register=Registreu-vos
 _register.registration.failed=S'ha produït un error mentre us registraveu. Si us plau, intenteu-lo de nou
 _register.repeat.password=Repetiu la contrasenya
+_register.requiredfield=És un camp obligatori
 _register.username.choose=Escolliu un nom d'usuari
 _register.username.explain=Quan us hagueu connectat es visualitzarà el vostre nom d'usuari
+_search.boolean.and=i
+_search.boolean.not=no
+_search.boolean.or=o
+_search.field.any.field=Qualsevol camp
 _search.field.creator=Creador
 _search.field.date=Data
-_search.option.subject=Matèria
-_search.option.title=Títol
-_success.search.saved=Cerca guardada
+_search.field.provider=Proveïdor
+_search.field.subject=Matèria
+_search.field.title=Títol
+_toberemoved.althome=Cliqueu aquí per tornar a la pàgina principal d'Europeana
+_toberemoved.altlogoeuropeana=Logo Europeana pensa cultura
+_toberemoved.checkthefaqs=Comproveu les PMF - poden donar resposta a les vostres consultes
+_toberemoved.communities=Comunitats
+_toberemoved.contributorexplain=Són les organitzacions que contribueixen amb continguts -pintures, llibres o emissions digitalitzades, etc. Alguns contribuïdors són agregadors*. Culture.fr és l'agregador més gran, proveeix contingut de 480 organitzacions de França, inclosos els museus del Louvre i d'Orsay. El nombre d'organitzacions que proveeixen un agregador s'indica entre claudàtors a continuació del nom de l'agregador, per ex. Videoactive (10)
+_toberemoved.emaileuropeanateam=L'Equip Europeana
+_toberemoved.using.europeana=Utilitzar Europeana
 _unused.about.us=Qui som
 _unused.accessibility=Accessibilitat
 _unused.add=Afegir
@@ -249,10 +222,34 @@ _unused.altprint=Imprimir aquesta pàgina
 _unused.aplacetoshareideas=un lloc per a la inspiració i les idees. Cerqueu entre col·leccions culturals d'Europa, connecteu-vos a camins d'altres usuaris i compartiu els vostres descobriments.
 _unused.bosnia.and.herzegovina=Bòsnia i Hercegovina
 _unused.browse.through.time=Navegueu pel temps
+_unused.contacts=Contactes
+_unused.contributors=Contribuïdors
+_unused.country=País
+_unused.createaccount=Crear un compte
+_unused.emailwelcome=Benvingut a la Meva Europeana
+_unused.enewsoptin=Informeu-me dels nous desenvolupaments d'Europeana
+_unused.featuredisabled=Aquesta funció es troba actualment desactivada.
+_unused.feedbackresponse=Moltes gràcies pels vostres comentaris. Si aquests requereixen una resposta, un membre de l'equip d'Europeana us contactarà el més aviat possible. Per rebre més ràpidament una resposta escriviu, si us plau, els vostres comentaris en anglès.
+_unused.findoutmore=Més informació
+_unused.fromourparnters=Dels museus, arxius, biblioteques i col·leccions audiovisuals que són els nostres socis
+_unused.fundedby=cofinançat per la Unió Europea
+_unused.fyrom=Macedònia
+_unused.hideadvancedsearch=Amagar cerca avançada
+_unused.image=Imatge
+_unused.invalidquery=Cerca no vàlida
+_unused.itemdetails=Detalls de l'ítem
+_unused.languagepolicy=Política sobre llengües
+_unused.newcontent=Nou contingut
 _unused.other=Altre
+_unused.partner=Soci
+_unused.partnerexplain=És la xarxa de socis que han col·laborat en fer possible Europeana i que representen Europeana als seus països i associacions professionals.
+_unused.partners=Socis
+_unused.peoplearecurrentlythinkingabout=La gent pensa actualment en
 _unused.privacy=Privacitat
+_unused.registeragain=Registreu-vos una altra vegada
 _unused.remember.me=Recordeu-me en aquest ordinador
 _unused.remove=Eliminar
+_unused.sector=Sector
 _unused.send.feedback=Envieu-nos comentaris
 _unused.share.your.ideas=Compartiu les vostres idees
 _unused.show.all=Mostrar tot
@@ -260,17 +257,20 @@ _unused.sign.in=Inscriure's
 _unused.site.map=Mapa del lloc
 _unused.slovenia=Eslovènia
 _unused.sound=So
+_unused.strorylinecredits=Guió i crèdits
 _unused.tag.added=Etiqueta afegida
 _unused.tag.addition.failed=Afegir etiqueta ha fallat
 _unused.tagging=Etiquetatge
 _unused.terms.and.conditions=Termes i condicions
 _unused.text=Text
-_unused.username.in.use=és en ús. Si us plau, escolliu un altre nom d'usuari
-_unused.usertags=Etiquetes d'usuari
-_unused.using.europeana=Utilitzar Europeana
-_unused.view.as.xml=Visualització en XML
-_unused.view.with.labels=Visualització amb etiquetes
-_unused.view.without.labels=Visualització sense etiquetes
-_unused.you.have.search.for=Heu cercat
-languageDropDownList_t=Llengua
-registrationSucceed_t=Us heu registrat amb èxit
+_unused.thisiseuropeana=Això és Europeana
+_unused.thoughtlab=Laboratori del pensament
+_unused.timeline=Cronologia
+_unused.timelinenavigator=Navegador cronològic
+_unused.userconduct=Conducta de l'usuari
+_unused.userconductagree=Entenc que la Meva Europeana em dóna l'oportunitat de crear etiquetes per a qualsevol ítem que desitgi. Estic d'acord en no crear etiquetes que puguin ser considerades difamatòries, perjudicials, amenaçadores, il•legals, abusives, infamatòries, il•lícites, assetjadores, pornogràfiques, obscenes, fraudulentes, que envaeixin la privacitat o els drets de publicitat, odioses, racials o ètniques o de qualsevol mena que puguin ser objectables. En fer clic en aquesta casella accepto complir aquest acord, i entenc que si no ho faig, la meva condició de membre de la Meva Europeana es donarà per finalitzada. CLIQUEU PER ACCEPTAR
+_unused_portal.ui.message.view.as.xml=Visualització en XML
+_unused_portal.ui.message.view.with.labels=Visualització amb etiquetes
+_unused_portal.ui.message.view.without.labels=Visualització sense etiquetes
+_unused_portal.ui.message.you.have.search.for=Heu cercat
+_unused_validation.username.in.use=és en ús. Si us plau, escolliu un altre nom d'usuari
