--- a/portal/src/main/resources/i18n/messages_de.properties
+++ b/portal/src/main/resources/i18n/messages_de.properties
@@ -1,88 +1,3 @@
-All_t=Alles
-AltHome_t=Klicken Sie hier, um zur Europeana-Homepage zurückzukehren
-AltLogoEuropeana_t=Logo Europeana Kultur Denken
-CheckTheFaqs_t=Lesen Sie die FAQs - sie könnten Ihre Fragen beantworten
-ChooseLanguage_t=Wählen Sie eine Sprache
-Communities_t=Communities
-Contacts_t=Kontakt
-ContributorExplain_t=Dies sind die Organisationen, die Inhalte zur Europeana beisteuern, digitalisierte Gemälde, Bücher, Rundfunksendungen etc. Einige dieser Beiträger sind Aggregatoren*, Culture.fr ist der größte Aggregator, der Inhalte von rund 480 Organisationen und Institutionen in Frankreich beisteuert, darunter der Louvre und die Musée d'Orsay. Die Zahl der Organisationen und Institutionen, die an einen Aggregator Inhalte liefern, wird in Klammern hinter dem Namen des Aggregators angezeigt, z. B. Videoactive (10).
-Contributor_t=Beiträger
-Contributors_t=Beiträger
-Country_t=Land
-CreateAccount_t=Ein Konto anlegen
-Description_t=Beschreibung
-EmailAlreadyRegistered_t=Diese E-Mail-Adresse ist bereits registriert.
-EmailClickToConfirm_t=Bitte klicken Sie auf den folgenden Link, um Ihre Registrierung zu bestätigen
-EmailEuropeanaTeam_t=Das Europeana-Team
-EmailFormatError_t=Bitte stellen Sie sicher, dass Ihre E-Mail korrekt formatiert ist und versuchen Sie es erneut.
-EmailSendFailed_t=E-Mail konnte nicht gesendet werden
-EmailSent_t=E-Mail gesendet
-EmailUse_t=Nutzen Sie Ihre E-Mailadresse zusammen mit Ihrem Passwort, um sich einzuloggen
-EmailWelcome_t=Willkommen zu My Personal Page
-EnewsOptin_t=Bitte halten Sie mich über Neuigkeiten der Europeana auf dem Laufenden.
-EnterValidEmail_t=Bitte fügen Sie eine gültige E-Mail-Adresse ein
-EnterYourEmail_t=Tragen Sie Ihre E-Mailadresse ein
-ErrorDetails_t=Fehlerdetails
-Error_t=Fehler
-FYROM_t=Ehemalige jugoslawische Republik Mazedonien
-FeatureDisabled_t=Diese Funktion ist zurzeit nicht aktiviert.
-FeedbackResponse_t=Vielen Dank für Ihr Feedback. Falls Ihr feedback eine Antwort erfordert, wird sich ein Mitglied des Europeana-Teams so bald wie möglich mit Ihnen in Verbindung setzen. Sie erhalten schneller eine Antwort, wenn Sie Ihr Feedback in englischer Sprache verfassen.
-FindOutMore_t=Mehr herausfinden
-FinishRegistration_t=Registrierung abschließen
-FirstName_t=Vorname
-ForgotPassword_t=Ich habe mein Passwort vergessen
-FromOurParnters_t=Von unseren Partnern: Museen, Archiven, Bibliotheken und Bild- und Tonarchiven
-FundedBy_t=von der Europäischen Union mitfinanziert
-HideAdvancedSearch_t=Erweiterte Suche verbergen
-IAgree_t=Ich stimme zu
-Image_t=Bild
-Images_t=Bilder
-InvalidQuery_t=Ungültige Suchanfrage
-ItemDetails_t=Objektdetails
-ItemSaveFailed_t=Objekt speichern fehlgeschlagen
-ItemSaved_t=Objekt gespeichert
-Items_t=Objekte
-LanguagePolicy_t=Sprachregelung
-Less_t=Weniger
-LinkExpired_t=Der Link, den Sie zur Vervollständigung Ihrer Registrierung verwendet haben, ist ungültig oder abgelaufen.
-LogIn_t=Einloggen
-LogOut_t=Ausloggen
-LoggedInAs_t=Eingeloggt als
-MatchesFor_t=Für
-More_t=Mehr
-MyCodeOfConductRequired_t=Sie müssen unseren Verhaltensregeln zustimmen, um sich für My Personal Page registrieren zu können.
-MyCodeOfConduct_t=Ich habe verstanden, dass ich in My Personal Page die Möglichkeit habe, Tags für jedes Objekt zu erstellen. Ich verpflichte mich, dass ich keine Tags erstelle, die verleumderisch, schädlich, drohend, rechtswidrig, diffamierend, regelwidrig, missbräuchlich, aufrührerisch, belästigend, pornografisch, obszön oder betrügerisch sind, die in die Privatsphäre eingreifen oder die Öffentlichkeit angreifen, Hass, Rassismus oder sonstige ethnisch begründete Ablehnungen darstellen. Durch Anklicken stimme ich zu, mich an diese Regelungen zu halten und weiß, dass bei Verstoß meine Teilnahme an My Personal Page beendet wird.
-NewContent_t=Neue Inhalte
-Next_t=Nächste
-NoItemsFound_t=Keine Objekte gefunden
-NoSavedItems_t=Keine gespeicherten Objekte
-NoSavedSearches_t=Keine gespeicherten Suchanfragen
-NoSavedTags_t=Keine gespeicherten Tags
-NoScript_t=Um diese Seite optimal nutzen zu können, müssen Sie Javascript aktiviert haben
-Of_t=von
-OpensInNewWindow_t=In neuem Fenster öffnen
-Page_t=Seite
-PartnerExplain_t=Dies ist das Netzwerk derjenigen Partner, die für den Aufbau der Europeana zusammengearbeitet haben und die Europeana in ihren Ländern und professionellen Organisationen vertreten.
-Partner_t=Partner
-Partners_t=Partner
-Password_t=Passwort
-PeopleAreCurrentlyThinkingAbout_t=Zurzeit wird nachgedacht über
-RegisterAgain_t=Wieder registrieren
-RequiredField_t=Dies ist ein obligatorisches Feld
-Reset_t=Reset
-Results_t=Ergebnisse
-Sector_t=Bereich
-Sounds_t=Töne
-StrorylineCredits_t=Inhalt und Beteiligte
-Texts_t=Texte
-ThisIsEuropeana_t=Das ist Europeana
-ThoughtLab_t=Denklabor
-TimelineNavigator_t=Zeitstrahl-Navigator
-Timeline_t=Zeitstrahl
-UserConductAgree_t=Ich habe verstanden, dass ich in My Personal Page die Möglichkeit habe, Tags für jedes Objekt zu erstellen. Ich verpflichte mich, dass ich keine Tags erstelle, die verleumderisch, schädlich, drohend, rechtswidrig, diffamierend, regelwidrig, missbräuchlich, aufrührerisch, belästigend, pornografisch, obszön oder betrügerisch sind, die in die Privatsphäre eingreifen oder die Öffentlichkeit angreifen, Hass, Rassismus oder sonstige ethnisch begründete Ablehnungen darstellen. Durch Anklicken stimme ich zu, mich an diese Regelungen zu halten und weiß, dass bei Verstoß meine Teilnahme an My Personal Page beendet wird. HIER KLICKEN UM ZUZUSTIMMEN
-UserConduct_t=Nutzerverhalten
-Video_t=Video
-ViewingRelatedItems_t=Sie betrachten ähnliche Objekte
 _action.add.annotation=Annotation hinzufügen
 _action.add.tag=Tag hinzufügen
 _action.advanced.search=Erweiterte Suche
@@ -103,9 +18,7 @@ _action.send=Senden
 _action.share.with.friend=An einen Freund schicken
 _action.videos=Videos
 _action.view.in.original.context=Im Originalzusammenhang ansehen
-_boolean.and=und
-_boolean.not=nicht
-_boolean.or=oder
+_actionOpenInNewWindow=In neuem Fenster öffnen
 _facet.by.collection=null
 _facet.by.country=nach Land
 _facet.by.date=nach Datum
@@ -117,6 +30,7 @@ _facet.by.year=null
 _failure.search.saved=Speichern der Suche fehlgeschlagen
 _header.actions=Aktionen
 _header.relatedcontent=Ähnlicher Inhalt
+_inc_result_table_full.description=Beschreibung
 _language_select.italian=italienisch
 _locale.AL=Albanien
 _locale.AM=Armenien
@@ -186,6 +100,10 @@ _locale.sk=slowakisch
 _locale.sl=slowenisch
 _locale.sr=serbisch
 _locale.sv=schwedisch
+_menu.i18n.chooselanguage=Wählen Sie eine Sprache
+_messages.error.emailformaterror=Bitte stellen Sie sicher, dass Ihre E-Mail korrekt formatiert ist und versuchen Sie es erneut.
+_messages.error.emailsendfailed=E-Mail konnte nicht gesendet werden
+_messages.notification.emailsent=E-Mail gesendet
 _metadata.dc.contributor=Weitere beteiligte Person
 _metadata.dc.coverage=Umfang
 _metadata.dc.creator=Autor
@@ -215,18 +133,61 @@ _metadata.dcterms.replaces=ersetzt
 _metadata.dcterms.requires=benötigt
 _metadata.dcterms.spatial=Räumliche Abdeckung
 _metadata.dcterms.temporal=Zeitliche Abdeckung
+_metadata.searchfield.contributor=Beiträger
+_metadata.type.all=Alles
+_metadata.type.images=Bilder
+_metadata.type.sounds=Töne
+_metadata.type.texts=Texte
+_metadata.type.video=Video
 _mine.date.saved=Datum gespeichert
 _mine.delete=Löschen
+_mine.email.address=E-Mailadresse
+_mine.firstname=Vorname
+_mine.forgotpassword=Ich habe mein Passwort vergessen
+_mine.itemsaved=Objekt gespeichert
+_mine.itemsavefailed=Objekt speichern fehlgeschlagen
 _mine.last.name=Nachname
+_mine.loggedinas=Eingeloggt als
+_mine.login=Einloggen
+_mine.logout=Ausloggen
+_mine.nosaveditems=Keine gespeicherten Objekte
+_mine.nosavedsearches=Keine gespeicherten Suchanfragen
+_mine.nosavedtags=Keine gespeicherten Tags
 _mine.saved.items=Gespeicherte Objekte
 _mine.saved.searches=Gespeicherte Suchanfragen
 _mine.saved.tags=Gespeicherte Tags
 _mine.user.information=Nutzerinformation
+_mine.user.registration.notification.succeed=Sie haben sich erfolgreich registriert.
 _mine.username=Nutzername
-_option.any.field=Alle Felder
-_prompt.email.address=E-Mailadresse
-_prompt.provider=Anbieter
+_portal.menu.languagedropdownlist=Sprache
+_portal.ui.message.less=Weniger
+_portal.ui.message.more=Mehr
+_portal.ui.message.noscript=Um diese Seite optimal nutzen zu können, müssen Sie Javascript aktiviert haben
+_portal.ui.message.success.search.saved=Suche gespeichert
+_portal.ui.message.usertags=Nutzertags
+_portal.ui.messages.items=Objekte
+_portal.ui.navigation.matchesfor=Für
+_portal.ui.navigation.next=Nächste
+_portal.ui.navigation.of=von
+_portal.ui.navigation.page=Seite
+_portal.ui.notification.error=Fehler
+_portal.ui.notification.noitemsfound=Keine Objekte gefunden
+_portal.ui.reset.searchbox=Reset
+_portal.ui.results=Ergebnisse
+_portal.ui.viewingrelateditems=Sie betrachten ähnliche Objekte
+_register-request.emailalreadyregistered=Diese E-Mail-Adresse ist bereits registriert.
 _register.email.has.been.sent=Eine E-Mail wurde an folgende Adresse gesendet
+_register.emailclicktoconfirm=Bitte klicken Sie auf den folgenden Link, um Ihre Registrierung zu bestätigen
+_register.emailuse=Nutzen Sie Ihre E-Mailadresse zusammen mit Ihrem Passwort, um sich einzuloggen
+_register.entervalidemail=Bitte fügen Sie eine gültige E-Mail-Adresse ein
+_register.enteryouremail=Tragen Sie Ihre E-Mailadresse ein
+_register.errordetails=Fehlerdetails
+_register.finishregistration=Registrierung abschließen
+_register.iagree=Ich stimme zu
+_register.linkexpired=Der Link, den Sie zur Vervollständigung Ihrer Registrierung verwendet haben, ist ungültig oder abgelaufen.
+_register.mycodeofconduct=Ich habe verstanden, dass ich in My Personal Page die Möglichkeit habe, Tags für jedes Objekt zu erstellen. Ich verpflichte mich, dass ich keine Tags erstelle, die verleumderisch, schädlich, drohend, rechtswidrig, diffamierend, regelwidrig, missbräuchlich, aufrührerisch, belästigend, pornografisch, obszön oder betrügerisch sind, die in die Privatsphäre eingreifen oder die Öffentlichkeit angreifen, Hass, Rassismus oder sonstige ethnisch begründete Ablehnungen darstellen. Durch Anklicken stimme ich zu, mich an diese Regelungen zu halten und weiß, dass bei Verstoß meine Teilnahme an My Personal Page beendet wird.
+_register.mycodeofconductrequired=Sie müssen unseren Verhaltensregeln zustimmen, um sich für My Personal Page registrieren zu können.
+_register.password=Passwort
 _register.password.choose=Wählen Sie ein Passwort
 _register.password.explain=Passwörter müssen 6-30 Zeichen haben
 _register.pick.user.name=Ihr Benutzername wird angezeigt, wenn Sie eingeloggt sind
@@ -234,13 +195,25 @@ _register.please.follow.link=Bitte folgen Sie dem Link in der E-Mail, um die Reg
 _register.register=Registrierung
 _register.registration.failed=Bei der Bearbeitung Ihrer Registrierung ist ein Fehler aufgetreten. Bitte versuchen Sie es noch einmal
 _register.repeat.password=Passwort wiederholen
+_register.requiredfield=Dies ist ein obligatorisches Feld
 _register.username.choose=Wählen Sie einen Benutzernamen
 _register.username.explain=Ihr Benutzername wird angezeigt, wenn Sie eingeloggt sind
+_search.boolean.and=und
+_search.boolean.not=nicht
+_search.boolean.or=oder
+_search.field.any.field=Alle Felder
 _search.field.creator=Urheber
 _search.field.date=Datum
-_search.option.subject=Thema
-_search.option.title=Titel
-_success.search.saved=Suche gespeichert
+_search.field.provider=Anbieter
+_search.field.subject=Thema
+_search.field.title=Titel
+_toberemoved.althome=Klicken Sie hier, um zur Europeana-Homepage zurückzukehren
+_toberemoved.altlogoeuropeana=Logo Europeana Kultur Denken
+_toberemoved.checkthefaqs=Lesen Sie die FAQs - sie könnten Ihre Fragen beantworten
+_toberemoved.communities=Communities
+_toberemoved.contributorexplain=Dies sind die Organisationen, die Inhalte zur Europeana beisteuern, digitalisierte Gemälde, Bücher, Rundfunksendungen etc. Einige dieser Beiträger sind Aggregatoren*, Culture.fr ist der größte Aggregator, der Inhalte von rund 480 Organisationen und Institutionen in Frankreich beisteuert, darunter der Louvre und die Musée d'Orsay. Die Zahl der Organisationen und Institutionen, die an einen Aggregator Inhalte liefern, wird in Klammern hinter dem Namen des Aggregators angezeigt, z. B. Videoactive (10).
+_toberemoved.emaileuropeanateam=Das Europeana-Team
+_toberemoved.using.europeana=Europeana nutzen
 _unused.about.us=Wir über uns
 _unused.accessibility=Zugänglichkeit
 _unused.add=Hinzufügen
@@ -249,10 +222,34 @@ _unused.altprint=Diese Seite drucken
 _unused.aplacetoshareideas=ein Ort für Inspiration und Ideen. Durchsuchen Sie die kulturellen Sammlungen Europas, verbinden Sie sich mit den Suchwegen anderer und teilen Sie Ihre Entdeckungen.
 _unused.bosnia.and.herzegovina=Bosnien und Herzegowina
 _unused.browse.through.time=Durch die Zeit browsen
+_unused.contacts=Kontakt
+_unused.contributors=Beiträger
+_unused.country=Land
+_unused.createaccount=Ein Konto anlegen
+_unused.emailwelcome=Willkommen zu My Personal Page
+_unused.enewsoptin=Bitte halten Sie mich über Neuigkeiten der Europeana auf dem Laufenden.
+_unused.featuredisabled=Diese Funktion ist zurzeit nicht aktiviert.
+_unused.feedbackresponse=Vielen Dank für Ihr Feedback. Falls Ihr feedback eine Antwort erfordert, wird sich ein Mitglied des Europeana-Teams so bald wie möglich mit Ihnen in Verbindung setzen. Sie erhalten schneller eine Antwort, wenn Sie Ihr Feedback in englischer Sprache verfassen.
+_unused.findoutmore=Mehr herausfinden
+_unused.fromourparnters=Von unseren Partnern: Museen, Archiven, Bibliotheken und Bild- und Tonarchiven
+_unused.fundedby=von der Europäischen Union mitfinanziert
+_unused.fyrom=Ehemalige jugoslawische Republik Mazedonien
+_unused.hideadvancedsearch=Erweiterte Suche verbergen
+_unused.image=Bild
+_unused.invalidquery=Ungültige Suchanfrage
+_unused.itemdetails=Objektdetails
+_unused.languagepolicy=Sprachregelung
+_unused.newcontent=Neue Inhalte
 _unused.other=andere
+_unused.partner=Partner
+_unused.partnerexplain=Dies ist das Netzwerk derjenigen Partner, die für den Aufbau der Europeana zusammengearbeitet haben und die Europeana in ihren Ländern und professionellen Organisationen vertreten.
+_unused.partners=Partner
+_unused.peoplearecurrentlythinkingabout=Zurzeit wird nachgedacht über
 _unused.privacy=Datenschutz
+_unused.registeragain=Wieder registrieren
 _unused.remember.me=Auf diesem Computer merken
 _unused.remove=Entfernen
+_unused.sector=Bereich
 _unused.send.feedback=Schicken Sie uns Ihr Feedback
 _unused.share.your.ideas=Teilen Sie Ihre Ideen
 _unused.show.all=Alles anzeigen
@@ -260,17 +257,20 @@ _unused.sign.in=Anmelden
 _unused.site.map=Sitemap
 _unused.slovenia=Slowenien
 _unused.sound=Ton
+_unused.strorylinecredits=Inhalt und Beteiligte
 _unused.tag.added=Tag hinzugefügt
 _unused.tag.addition.failed=Tag hinzufügen fehlgeschlagen
 _unused.tagging=Tagging
 _unused.terms.and.conditions=Benutzungsbedingungen
 _unused.text=Text
-_unused.username.in.use=ist schon vergeben. Bitte wählen Sie einen anderen Benutzernamen.
-_unused.usertags=Nutzertags
-_unused.using.europeana=Europeana nutzen
-_unused.view.as.xml=In XML ansehen
-_unused.view.with.labels=Mit Labels ansehen
-_unused.view.without.labels=Ohne Labels ansehen
-_unused.you.have.search.for=Sie haben nach...gesucht
-languageDropDownList_t=Sprache
-registrationSucceed_t=Sie haben sich erfolgreich registriert.
+_unused.thisiseuropeana=Das ist Europeana
+_unused.thoughtlab=Denklabor
+_unused.timeline=Zeitstrahl
+_unused.timelinenavigator=Zeitstrahl-Navigator
+_unused.userconduct=Nutzerverhalten
+_unused.userconductagree=Ich habe verstanden, dass ich in My Personal Page die Möglichkeit habe, Tags für jedes Objekt zu erstellen. Ich verpflichte mich, dass ich keine Tags erstelle, die verleumderisch, schädlich, drohend, rechtswidrig, diffamierend, regelwidrig, missbräuchlich, aufrührerisch, belästigend, pornografisch, obszön oder betrügerisch sind, die in die Privatsphäre eingreifen oder die Öffentlichkeit angreifen, Hass, Rassismus oder sonstige ethnisch begründete Ablehnungen darstellen. Durch Anklicken stimme ich zu, mich an diese Regelungen zu halten und weiß, dass bei Verstoß meine Teilnahme an My Personal Page beendet wird. HIER KLICKEN UM ZUZUSTIMMEN
+_unused_portal.ui.message.view.as.xml=In XML ansehen
+_unused_portal.ui.message.view.with.labels=Mit Labels ansehen
+_unused_portal.ui.message.view.without.labels=Ohne Labels ansehen
+_unused_portal.ui.message.you.have.search.for=Sie haben nach...gesucht
+_unused_validation.username.in.use=ist schon vergeben. Bitte wählen Sie einen anderen Benutzernamen.
