--- a/portal/src/main/resources/i18n/messages_it.properties
+++ b/portal/src/main/resources/i18n/messages_it.properties
@@ -1,88 +1,3 @@
-All_t=Tutto
-AltHome_t=Torna all'homepage di Europeana
-AltLogoEuropeana_t=Logo Europeana pensare cultura
-CheckTheFaqs_t=Controlla le FAQ – potrebbero contenere le risposte alle tue domande
-ChooseLanguage_t=Scegli una lingua
-Communities_t=Comunità
-Contacts_t=Contatti
-ContributorExplain_t=These are the organisations that are contributing content - digitised paintings, books, broadcasts etc. Some of these contributors are  aggregators*, Culture.fr is the largest aggregator, providing content from about 480 organisations in France, including the Louvre and the Musée d’Orsay. The number of organisations contributing to an aggregator is shown in brackets after the aggregator’s name, e.g. Videoactive (10)
-Contributor_t=Autore di contributo
-Contributors_t=Autori di contributi
-Country_t=Paese
-CreateAccount_t=Creare un account
-Description_t=Descrizione
-EmailAlreadyRegistered_t=Questa e-mail è stata già registrata
-EmailClickToConfirm_t=Cliccare sul link seguente per confermare la registrazione
-EmailEuropeanaTeam_t=Il team Europeana
-EmailFormatError_t=Verificare che la e-mail sia formattata correttamente e provare di nuovo
-EmailSendFailed_t=La e-mail non ha potuto essere inviata
-EmailSent_t=E-mail inviata
-EmailUse_t=Per entrare nel sito sono necessari username e password
-EmailWelcome_t=Benvenuti in My Personal Page
-EnewsOptin_t=Tienimi aggiornato sui nuovi sviluppi di Europeana
-EnterValidEmail_t=Per favore inserire un indirizzo e-mail valido
-EnterYourEmail_t=Inserire la e-mail
-ErrorDetails_t=Specifiche dell'errore
-Error_t=Errore
-FYROM_t=Macedonia (ex Repubblica iugoslava di)
-FeatureDisabled_t=Questa funzione è attualmente disabilitata
-FeedbackResponse_t=Molte grazie per il tuo feedback. Se questo richiede una risposta, un membro del team di Europeana provvederà a fornirtela al più presto. Per una risposta più rapida i commenti dovranno essere inviati in lingua inglese.
-FindOutMore_t=Per saperne di più
-FinishRegistration_t=Termina la registrazione
-FirstName_t=Nome
-ForgotPassword_t=Ho dimenticato la password
-FromOurParnters_t=Dai nostri partner, musei, archivi, biblioteche e collezioni audiovisive
-FundedBy_t=co-finanziato dall'Unione europea
-HideAdvancedSearch_t=Nascondi la ricerca avanzata
-IAgree_t=Accetto
-Image_t=Immagine
-Images_t=Immagini
-InvalidQuery_t=Interrogazione non valida
-ItemDetails_t=Particolari dell'oggetto
-ItemSaveFailed_t=Oggetto non salvato
-ItemSaved_t=Oggetto salvato
-Items_t=Oggetti
-LanguagePolicy_t=Politica linguistica
-Less_t=Meno
-LinkExpired_t=Il link usato per completare la registrazione non è valido o è scaduto
-LogIn_t=Accedi
-LogOut_t=Esci
-LoggedInAs_t=Accesso come
-MatchesFor_t=Risultati per
-More_t=Più
-MyCodeOfConductRequired_t=Devi accettare il nostro codice di condotta per poterti registrare in My Personal Page
-MyCodeOfConduct_t=Capisco che My Personal Page mi offre l'opportunità di creare tag per qualsiasi elemento desideri. Mi impegno a non creare alcun tag che possa essere considerato calunnioso, dannoso, minaccioso, illecito, diffamatorio, illegale, abusivo, molesto, pornografico, osceno, fraudolento, invasivo della privacy, istigatore all’odio razziale o etnico o altrimenti deplorevole. Cliccando su questa casella mi impegno a rispettare questo accordo; accetto che, in caso contrario, la mia adesione a My Personal Page verrà revocata.
-NewContent_t=Nuovo contenuto
-Next_t=Successivo
-NoItemsFound_t=Nessun oggetto trovato
-NoSavedItems_t=Nessun oggetto salvato
-NoSavedSearches_t=Nessuna ricerca salvata
-NoSavedTags_t=Nessun tag salvato
-NoScript_t=Per un uso ottimale di questo sito è necessario aver attivato JavaScript
-Of_t=di
-OpensInNewWindow_t=Apri in un'altra finestra
-Page_t=Pagina
-PartnerExplain_t=Questa è la rete dei partner che hanno collaborato alla realizzazione di Europeana e che la rappresentano nei propri paesi e associazioni professionali.
-Partner_t=Partner
-Partners_t=I partner
-Password_t=Password
-PeopleAreCurrentlyThinkingAbout_t=Si sta riflettendo su
-RegisterAgain_t=Registrati di nuovo
-RequiredField_t=Questo campo è obbligatorio
-Reset_t=Reset
-Results_t=Risultati
-Sector_t=Settore
-Sounds_t=Suoni
-StrorylineCredits_t=Piano e crediti
-Texts_t=Testi
-ThisIsEuropeana_t=Europeana
-ThoughtLab_t=Pensatoio
-TimelineNavigator_t=Navigatore cronologico
-Timeline_t=Cronologia
-UserConductAgree_t=I understand that the Delving portal gives me the opportunity to create tags for any item I wish. I agree that I will not create any tags that could be considered libelous, harmful, threatening, unlawful, defamatory, infringing, abusive, inflammatory, harassing, pornographic, obscene, fraudulent, invasive of privacy or publicity rights, hateful, or racially, ethnically or otherwise objectionable. By clicking this box I agree to abide by this agreement, and understand that if I don't my login on the portal will be terminated. CLICK TO AGREE
-UserConduct_t=User Conduct
-Video_t=Video
-ViewingRelatedItems_t=Stai visualizzando gli oggetti correlati
 _action.add.annotation=null
 _action.add.tag=Aggiungi un tag
 _action.advanced.search=Ricerca avanzata
@@ -103,9 +18,7 @@ _action.send=Invia
 _action.share.with.friend=Condividi
 _action.videos=Video
 _action.view.in.original.context=Vedi nel contesto originale
-_boolean.and=e
-_boolean.not=non
-_boolean.or=o
+_actionOpenInNewWindow=Apri in un'altra finestra
 _facet.by.collection=null
 _facet.by.country=Per paese
 _facet.by.date=Per data
@@ -117,6 +30,7 @@ _facet.by.year=null
 _failure.search.saved=Salvataggio ricerca fallito
 _header.actions=Azioni
 _header.relatedcontent=Contenuti correlati
+_inc_result_table_full.description=Descrizione
 _language_select.italian=italiano
 _locale.AL=Albania
 _locale.AM=Armenia
@@ -186,6 +100,10 @@ _locale.sk=slovacco
 _locale.sl=sloveno
 _locale.sr=serbo
 _locale.sv=svedese
+_menu.i18n.chooselanguage=Scegli una lingua
+_messages.error.emailformaterror=Verificare che la e-mail sia formattata correttamente e provare di nuovo
+_messages.error.emailsendfailed=La e-mail non ha potuto essere inviata
+_messages.notification.emailsent=E-mail inviata
 _metadata.dc.contributor=Autore di contributo subordinato
 _metadata.dc.coverage=Copertura
 _metadata.dc.creator=Autore
@@ -215,18 +133,61 @@ _metadata.dcterms.replaces=Sostituisce
 _metadata.dcterms.requires=Richiede
 _metadata.dcterms.spatial=Copertura spaziale
 _metadata.dcterms.temporal=Copertura temporale
+_metadata.searchfield.contributor=Autore di contributo
+_metadata.type.all=Tutto
+_metadata.type.images=Immagini
+_metadata.type.sounds=Suoni
+_metadata.type.texts=Testi
+_metadata.type.video=Video
 _mine.date.saved=Dati salvati
 _mine.delete=Cancella
+_mine.email.address=Indirizzo e-mail
+_mine.firstname=Nome
+_mine.forgotpassword=Ho dimenticato la password
+_mine.itemsaved=Oggetto salvato
+_mine.itemsavefailed=Oggetto non salvato
 _mine.last.name=Cognome
+_mine.loggedinas=Accesso come
+_mine.login=Accedi
+_mine.logout=Esci
+_mine.nosaveditems=Nessun oggetto salvato
+_mine.nosavedsearches=Nessuna ricerca salvata
+_mine.nosavedtags=Nessun tag salvato
 _mine.saved.items=Oggetti salvati
 _mine.saved.searches=Ricerche salvate
 _mine.saved.tags=Tag salvati
 _mine.user.information=Informazioni utente
+_mine.user.registration.notification.succeed=La tua registrazione e'avvenuta con successo
 _mine.username=Username
-_option.any.field=Tutti i campi
-_prompt.email.address=Indirizzo e-mail
-_prompt.provider=Fornitore
+_portal.menu.languagedropdownlist=Lingua
+_portal.ui.message.less=Meno
+_portal.ui.message.more=Più
+_portal.ui.message.noscript=Per un uso ottimale di questo sito è necessario aver attivato JavaScript
+_portal.ui.message.success.search.saved=Ricerca salvata
+_portal.ui.message.usertags=Tag dell'utente
+_portal.ui.messages.items=Oggetti
+_portal.ui.navigation.matchesfor=Risultati per
+_portal.ui.navigation.next=Successivo
+_portal.ui.navigation.of=di
+_portal.ui.navigation.page=Pagina
+_portal.ui.notification.error=Errore
+_portal.ui.notification.noitemsfound=Nessun oggetto trovato
+_portal.ui.reset.searchbox=Reset
+_portal.ui.results=Risultati
+_portal.ui.viewingrelateditems=Stai visualizzando gli oggetti correlati
+_register-request.emailalreadyregistered=Questa e-mail è stata già registrata
 _register.email.has.been.sent=E' stata inviata una e-mail al seguente indirizzo
+_register.emailclicktoconfirm=Cliccare sul link seguente per confermare la registrazione
+_register.emailuse=Per entrare nel sito sono necessari username e password
+_register.entervalidemail=Per favore inserire un indirizzo e-mail valido
+_register.enteryouremail=Inserire la e-mail
+_register.errordetails=Specifiche dell'errore
+_register.finishregistration=Termina la registrazione
+_register.iagree=Accetto
+_register.linkexpired=Il link usato per completare la registrazione non è valido o è scaduto
+_register.mycodeofconduct=Capisco che My Personal Page mi offre l'opportunità di creare tag per qualsiasi elemento desideri. Mi impegno a non creare alcun tag che possa essere considerato calunnioso, dannoso, minaccioso, illecito, diffamatorio, illegale, abusivo, molesto, pornografico, osceno, fraudolento, invasivo della privacy, istigatore all’odio razziale o etnico o altrimenti deplorevole. Cliccando su questa casella mi impegno a rispettare questo accordo; accetto che, in caso contrario, la mia adesione a My Personal Page verrà revocata.
+_register.mycodeofconductrequired=Devi accettare il nostro codice di condotta per poterti registrare in My Personal Page
+_register.password=Password
 _register.password.choose=Scegliere una password
 _register.password.explain=La password deve contenere da 6 a 30 caratteri
 _register.pick.user.name=Lo username apparirà una volta entrati nel sistema
@@ -234,13 +195,25 @@ _register.please.follow.link=Seguire il link inviato per e-mail per terminare ui
 _register.register=Registrati
 _register.registration.failed=Si è verificato un errore durante il processo di registrazione. Per favore riprovare
 _register.repeat.password=Ripeti la password
+_register.requiredfield=Questo campo è obbligatorio
 _register.username.choose=Scegliere uno username
 _register.username.explain=Lo username apparirà una volta entrati nel sistema
+_search.boolean.and=e
+_search.boolean.not=non
+_search.boolean.or=o
+_search.field.any.field=Tutti i campi
 _search.field.creator=Creatore
 _search.field.date=Data
-_search.option.subject=Soggetto
-_search.option.title=Titolo
-_success.search.saved=Ricerca salvata
+_search.field.provider=Fornitore
+_search.field.subject=Soggetto
+_search.field.title=Titolo
+_toberemoved.althome=Torna all'homepage di Europeana
+_toberemoved.altlogoeuropeana=Logo Europeana pensare cultura
+_toberemoved.checkthefaqs=Controlla le FAQ – potrebbero contenere le risposte alle tue domande
+_toberemoved.communities=Comunità
+_toberemoved.contributorexplain=These are the organisations that are contributing content - digitised paintings, books, broadcasts etc. Some of these contributors are  aggregators*, Culture.fr is the largest aggregator, providing content from about 480 organisations in France, including the Louvre and the Musée d’Orsay. The number of organisations contributing to an aggregator is shown in brackets after the aggregator’s name, e.g. Videoactive (10)
+_toberemoved.emaileuropeanateam=Il team Europeana
+_toberemoved.using.europeana=Come usare Europeana
 _unused.about.us=Chi siamo
 _unused.accessibility=Accessibilità
 _unused.add=Aggiungi
@@ -249,10 +222,34 @@ _unused.altprint=Stampa questa pagina
 _unused.aplacetoshareideas=un luogo per le idee e l'ispirazione. Ricerca le collezioni culturali europee, collegati ai percorsi degli altri utenti e condividi le tue scoperte
 _unused.bosnia.and.herzegovina=Bosnia Erzegovina
 _unused.browse.through.time=Naviga attraverso il tempo
+_unused.contacts=Contatti
+_unused.contributors=Autori di contributi
+_unused.country=Paese
+_unused.createaccount=Creare un account
+_unused.emailwelcome=Benvenuti in My Personal Page
+_unused.enewsoptin=Tienimi aggiornato sui nuovi sviluppi di Europeana
+_unused.featuredisabled=Questa funzione è attualmente disabilitata
+_unused.feedbackresponse=Molte grazie per il tuo feedback. Se questo richiede una risposta, un membro del team di Europeana provvederà a fornirtela al più presto. Per una risposta più rapida i commenti dovranno essere inviati in lingua inglese.
+_unused.findoutmore=Per saperne di più
+_unused.fromourparnters=Dai nostri partner, musei, archivi, biblioteche e collezioni audiovisive
+_unused.fundedby=co-finanziato dall'Unione europea
+_unused.fyrom=Macedonia (ex Repubblica iugoslava di)
+_unused.hideadvancedsearch=Nascondi la ricerca avanzata
+_unused.image=Immagine
+_unused.invalidquery=Interrogazione non valida
+_unused.itemdetails=Particolari dell'oggetto
+_unused.languagepolicy=Politica linguistica
+_unused.newcontent=Nuovo contenuto
 _unused.other=altro
+_unused.partner=Partner
+_unused.partnerexplain=Questa è la rete dei partner che hanno collaborato alla realizzazione di Europeana e che la rappresentano nei propri paesi e associazioni professionali.
+_unused.partners=I partner
+_unused.peoplearecurrentlythinkingabout=Si sta riflettendo su
 _unused.privacy=Privacy
+_unused.registeragain=Registrati di nuovo
 _unused.remember.me=Ricordami su questo computer
 _unused.remove=Rimuovi
+_unused.sector=Settore
 _unused.send.feedback=Inviaci i tuoi commenti
 _unused.share.your.ideas=Condividi le tue idee
 _unused.show.all=Mostra tutti
@@ -260,17 +257,20 @@ _unused.sign.in=Registrarsi
 _unused.site.map=Mappa del sito
 _unused.slovenia=Slovenia
 _unused.sound=Suono
+_unused.strorylinecredits=Piano e crediti
 _unused.tag.added=Tag aggiunto
 _unused.tag.addition.failed=Etichettatura non riuscita
 _unused.tagging=Contrassegna
 _unused.terms.and.conditions=Termini e condizioni d'uso
 _unused.text=Testo
-_unused.username.in.use=non è disponibile. Sceglierne un altro
-_unused.usertags=Tag dell'utente
-_unused.using.europeana=Come usare Europeana
-_unused.view.as.xml=Visualizza come XML
-_unused.view.with.labels=Visualizza con le etichette
-_unused.view.without.labels=Visualizza senza etichette
-_unused.you.have.search.for=Hai cercato
-languageDropDownList_t=Lingua
-registrationSucceed_t=La tua registrazione e'avvenuta con successo
+_unused.thisiseuropeana=Europeana
+_unused.thoughtlab=Pensatoio
+_unused.timeline=Cronologia
+_unused.timelinenavigator=Navigatore cronologico
+_unused.userconduct=User Conduct
+_unused.userconductagree=I understand that the Delving portal gives me the opportunity to create tags for any item I wish. I agree that I will not create any tags that could be considered libelous, harmful, threatening, unlawful, defamatory, infringing, abusive, inflammatory, harassing, pornographic, obscene, fraudulent, invasive of privacy or publicity rights, hateful, or racially, ethnically or otherwise objectionable. By clicking this box I agree to abide by this agreement, and understand that if I don't my login on the portal will be terminated. CLICK TO AGREE
+_unused_portal.ui.message.view.as.xml=Visualizza come XML
+_unused_portal.ui.message.view.with.labels=Visualizza con le etichette
+_unused_portal.ui.message.view.without.labels=Visualizza senza etichette
+_unused_portal.ui.message.you.have.search.for=Hai cercato
+_unused_validation.username.in.use=non è disponibile. Sceglierne un altro
