--- a/portal/src/main/resources/i18n/messages_nl.properties
+++ b/portal/src/main/resources/i18n/messages_nl.properties
@@ -1,89 +1,3 @@
-All_t=Alle
-AltHome_t=Klik hier om terug te keren naar de Europeana homepage
-AltLogoEuropeana_t=logo Europeana denk cultuur
-CheckTheFaqs_t=Bekijk de lijst met veelgestelde vragen; wellicht omvat deze uw feedback.
-ChooseLanguage_t=Kies een taal
-Communities_t=Communities
-Contacts_t=Contact
-ContributorExplain_t=Dit zijn de organisaties die materiaal bijdragen: gedigitaliseerde schilderijen, boeken, uitzendingen enz. Een aantal van deze bijdragers is aggregator*, Culture.fr is de grootste aggregator, die onderwerpen aanbiedt afkomstig van ongeveer 480 organisaties in Frankrijk, waaronder het Louvre en het Musée d'Orsay. Achter de naam van de aggregator ziet u tussen haakjes het aantal organisaties dat informatie aanlevert bij de aggregator, bijv. Videoactive (10)
-Contributor_t=Bijdragende organisatie
-Contributors_t=Bijdragende organisaties
-Country_t=Land
-CreateAccount_t=Maak een account
-Description_t=Omschrijving
-EmailAlreadyRegistered_t=Deze email adres is reeds geregistreerd
-EmailClickToConfirm_t=Klik op de volgende link om uw registratie te bevestigen
-EmailEuropeanaTeam_t=Het Europeana Team
-EmailFormatError_t=Controleer of uw email correct is opgemaakt en probeer het opnieuw
-EmailSendFailed_t=Email kan niet worden verzonden
-EmailSent_t=Email verzonden
-EmailUse_t=U gebruikt uw email samen met uw wachtwoord om in te loggen op de site
-EmailWelcome_t=Welkom bij Mijn Europeana
-EnewsOptin_t=Houd mij op de hoogte van nieuwe ontwikkelingen binnen Europeana
-EnterValidEmail_t=Voer a.u.b. een geldig email adres in
-EnterYourEmail_t=Geef uw email
-Erase_t=Wissen
-ErrorDetails_t=Fout details
-Error_t=Fout
-FYROM_t=Voormalige Joegoslavische Republiek Macedonië
-FeatureDisabled_t=Deze functie is momenteel niet in gebruik
-FeedbackResponse_t=Hartelijk dank voor uw feedback. Als uw feedback antwoord behoeft, neemt een lid van het Europeana-team zo snel mogelijk contact met u op. Voor een snellere reactie dient feedback in het Engels te worden aangeboden.
-FindOutMore_t=Lees meer
-FinishRegistration_t=Registratie voltooien
-FirstName_t=Voornaam
-ForgotPassword_t=Ik ben mijn wachtwoord vergeten
-FromOurParnters_t=Van onze partner musea, archieven, bibliotheken en audiovisuele collecties.
-FundedBy_t=mede gefinancierd door de Europese Unie
-HideAdvancedSearch_t=Verberg uitgebreid zoeken
-IAgree_t=Ik ga akkoord
-Image_t=Beeld
-Images_t=Beelden
-InvalidQuery_t=Ongeldige zoekopdracht
-ItemDetails_t=Item details
-ItemSaveFailed_t=Opslaan item mislukt
-ItemSaved_t=Items opgeslagen
-Items_t=Items
-LanguagePolicy_t=Taalbeleid
-Less_t=Minder
-LinkExpired_t=De link die u heeft gebruikt voor het voltooien van uw registratie is ongeldig of verlopen
-LogIn_t=Inloggen
-LogOut_t=Uitloggen
-LoggedInAs_t=Ingelogd als
-MatchesFor_t=Zoekresultaten voor
-More_t=Meer
-MyCodeOfConductRequired_t=U dient in te stemmen met onze gedragscode om u te laten registreren voor My Europeana
-MyCodeOfConduct_t=Ik begrijp dat registreren mij de mogelijkheid biedt tags te creëren voor ieder gewenst item. Ik ga ermee akkoord dat ik geen tags zal creëren die beschouwd zouden kunnen worden als lasterlijk, schadelijk, bedreigend, onwettig, smadend, schendend, beledigend, opruiend, treiterend, pornografisch, onzedelijk, frauduleus, de privacy- of publiciteitsrechten schendend, kwaadaardig, of racistisch of vanuit een etnisch of ander oogpunt aanstootgevend. Door het aanklikken van deze knop verklaar ik dat ik mij zal houden aan deze overeenkomst en ik begrijp dat als ik dat niet doe, mijn registratie zal worden beëindigd.
-NewContent_t=Nieuwe inhoud
-Next_t=Volgende
-NoItemsFound_t=Geen items gevonden
-NoSavedItems_t=Geen opgeslagen items
-NoSavedSearches_t=Geen opgeslagen zoekopdrachten
-NoSavedTags_t=Geen opgeslagen tags
-NoScript_t=Om optimaal gebruik te kunnen maken van deze website, dient JavaScript op uw computer geactiveerd te zijn.
-Of_t=van
-OpensInNewWindow_t=Opent in een nieuw venster
-Page_t=Pagina
-PartnerExplain_t=Dit is het netwerk van partners die hebben bijgedragen aan de totstandkoming van Europeana en die Europeana vertegenwoordigen in hun eigen land en bij beroepsverenigingen.
-Partner_t=Partner
-Partners_t=Partners
-Password_t=Wachtwoord
-PeopleAreCurrentlyThinkingAbout_t=Mensen denken momenteel aan
-RegisterAgain_t=Registreer opnieuw
-RequiredField_t=Dit is een verplicht veld
-Reset_t=Reset
-Results_t=Resultaten
-Sector_t=Sector
-Sounds_t=Geluiden
-StrorylineCredits_t=Storyline en credits
-Texts_t=Teksten
-ThisIsEuropeana_t=Dit is Europeana
-ThoughtLab_t=Denklab
-TimelineNavigator_t=Tijdslijn navigatie
-Timeline_t=Tijdslijn
-UserConductAgree_t=Ik begrijp dat registreren mij de mogelijkheid biedt tags te creëren voor ieder gewenst item. Ik ga ermee akkoord dat ik geen tags zal creëren die beschouwd zouden kunnen worden als lasterlijk, schadelijk, bedreigend, onwettig, smadend, schendend, beledigend, opruiend, treiterend, pornografisch, onzedelijk, frauduleus, de privacy- of publiciteitsrechten schendend, kwaadaardig, of racistisch of vanuit een etnisch of ander oogpunt aanstootgevend. Door het aanklikken van deze knop verklaar ik dat ik mij zal houden aan deze overeenkomst en ik begrijp dat als ik dat niet doe, mijn lidmaatschap zal worden beëindigd. AANKLIKKEN OM AKKOORD TE GAAN
-UserConduct_t=Gebruikersgedrag
-Video_t=Video
-ViewingRelatedItems_t=U bekijkt gerelateerde items
 _action.add.annotation=null
 _action.add.tag=Voeg een tag toe
 _action.advanced.search=Uitgebreid zoeken
@@ -104,9 +18,7 @@ _action.send=Verstuur
 _action.share.with.friend=Deel met een vriend
 _action.videos=Videos
 _action.view.in.original.context=Bekijk in oorspronkelijke context
-_boolean.and=en
-_boolean.not=niet
-_boolean.or=of
+_actionOpenInNewWindow=Opent in een nieuw venster
 _cms.administration.images=Afbeeldingen beheren
 _cms.administration.pages=Paginas beheren
 _cms.administration.title=Beheer
@@ -135,6 +47,7 @@ _cms.upload=Uploaden
 _cms.version.approve=Deze versie goedkeuren
 _cms.version.approve.explain=Door een versie goed te keuren worden alle andere versies verwijderd.
 _cms.version.management=Versiebeheer
+_delving-macros.search.order.by=Sorteren op
 _facet.by.collection=Per collectie
 _facet.by.country=Per land
 _facet.by.date=Per datum
@@ -146,6 +59,7 @@ _facet.by.year=Per jaar
 _failure.search.saved=Zoekopdracht opslaan mislukt
 _header.actions=Acties
 _header.relatedcontent=Gerelateerde content
+_inc_result_table_full.description=Omschrijving
 _language_select.italian=Italiaans (ita)
 _locale.AL=Albanië
 _locale.AM=Armenië
@@ -215,6 +129,10 @@ _locale.sk=Slowaaks (slo)
 _locale.sl=Sloveens (slv)
 _locale.sr=Servisch (ser)
 _locale.sv=Zweeds (zwe)
+_menu.i18n.chooselanguage=Kies een taal
+_messages.error.emailformaterror=Controleer of uw email correct is opgemaakt en probeer het opnieuw
+_messages.error.emailsendfailed=Email kan niet worden verzonden
+_messages.notification.emailsent=Email verzonden
 _metadata.dc.contributor=Met bijdrage van
 _metadata.dc.coverage=Herkomst
 _metadata.dc.creator=Vervaardiger
@@ -244,18 +162,69 @@ _metadata.dcterms.replaces=Vervangt
 _metadata.dcterms.requires=Vereist
 _metadata.dcterms.spatial=Plaats van vervaardiging
 _metadata.dcterms.temporal=Periode
+_metadata.searchfield.contributor=Bijdragende organisatie
+_metadata.type.all=Alle
+_metadata.type.images=Beelden
+_metadata.type.sounds=Geluiden
+_metadata.type.texts=Teksten
+_metadata.type.video=Video
 _mine.date.saved=Datum opgeslagen
 _mine.delete=Verwijder
+_mine.email.address=Email adres
+_mine.firstname=Voornaam
+_mine.forgotpassword=Ik ben mijn wachtwoord vergeten
+_mine.itemsaved=Items opgeslagen
+_mine.itemsavefailed=Opslaan item mislukt
 _mine.last.name=Achternaam
+_mine.loggedinas=Ingelogd als
+_mine.login=Inloggen
+_mine.logout=Uitloggen
+_mine.nosaveditems=Geen opgeslagen items
+_mine.nosavedsearches=Geen opgeslagen zoekopdrachten
+_mine.nosavedtags=Geen opgeslagen tags
 _mine.saved.items=Bewaarde items
 _mine.saved.searches=Bewaarde zoekopdrachten
 _mine.saved.tags=Bewaarde tags
 _mine.user.information=Gebruikersinformatie
+_mine.user.registration.notification.succeed=U bent met succes geregistreerd
+_mine.user.validation.disclaimer.unchecked=Voorwaarden moeten geaccepteerd worden
+_mine.user.validation.password.long=Wachtwoord te lang
+_mine.user.validation.password.mismatch=Wachtwoorden ongelijk
+_mine.user.validation.password.tooshort=Wachtwoord te kort
+_mine.user.validation.username.exists=Gebrukersnaam bestaat al
+_mine.user.validation.username.invalid.chars=Gebruikersnaam mag alleen letters, cijfers, spaties en onderstreep bevatten
+_mine.user.validation.username.long=Gebruikersnaam is te lang
 _mine.username=Gebruikersnaam
-_option.any.field=Elk veld
-_prompt.email.address=Email adres
-_prompt.provider=Aanbieder
+_portal.menu.languagedropdownlist=Taal
+_portal.ui.message.less=Minder
+_portal.ui.message.more=Meer
+_portal.ui.message.noscript=Om optimaal gebruik te kunnen maken van deze website, dient JavaScript op uw computer geactiveerd te zijn.
+_portal.ui.message.success.search.saved=Zoekopdracht bewaard
+_portal.ui.message.usertags=Gebruikerstag(s)
+_portal.ui.messages.items=Items
+_portal.ui.navigation.matchesfor=Zoekresultaten voor
+_portal.ui.navigation.next=Volgende
+_portal.ui.navigation.of=van
+_portal.ui.navigation.page=Pagina
+_portal.ui.notification.error=Fout
+_portal.ui.notification.noitemsfound=Geen items gevonden
+_portal.ui.reset.searchbox=Reset
+_portal.ui.results=Resultaten
+_portal.ui.viewingrelateditems=U bekijkt gerelateerde items
+_register-request.emailalreadyregistered=Deze email adres is reeds geregistreerd
 _register.email.has.been.sent=Een email is verzonden naar het volgende adres
+_register.emailclicktoconfirm=Klik op de volgende link om uw registratie te bevestigen
+_register.emailuse=U gebruikt uw email samen met uw wachtwoord om in te loggen op de site
+_register.entervalidemail=Voer a.u.b. een geldig email adres in
+_register.enteryouremail=Geef uw email
+_register.erase=Wissen
+_register.errordetails=Fout details
+_register.finishregistration=Registratie voltooien
+_register.iagree=Ik ga akkoord
+_register.linkexpired=De link die u heeft gebruikt voor het voltooien van uw registratie is ongeldig of verlopen
+_register.mycodeofconduct=Ik begrijp dat registreren mij de mogelijkheid biedt tags te creëren voor ieder gewenst item. Ik ga ermee akkoord dat ik geen tags zal creëren die beschouwd zouden kunnen worden als lasterlijk, schadelijk, bedreigend, onwettig, smadend, schendend, beledigend, opruiend, treiterend, pornografisch, onzedelijk, frauduleus, de privacy- of publiciteitsrechten schendend, kwaadaardig, of racistisch of vanuit een etnisch of ander oogpunt aanstootgevend. Door het aanklikken van deze knop verklaar ik dat ik mij zal houden aan deze overeenkomst en ik begrijp dat als ik dat niet doe, mijn registratie zal worden beëindigd.
+_register.mycodeofconductrequired=U dient in te stemmen met onze gedragscode om u te laten registreren voor My Europeana
+_register.password=Wachtwoord
 _register.password.choose=Kies een wachtwoord
 _register.password.explain=Wachtwoorden dienen 6-30 karakters lang te zijn
 _register.pick.user.name=Uw gebruikersnaam wordt weergegeven wanneer u bent ingelogd
@@ -263,13 +232,25 @@ _register.please.follow.link=Volg de link in de email om de registratie af te ro
 _register.register=Registreren
 _register.registration.failed=Een fout is opgetreden tijdens het verwerken van uw registratie. Probeert het opnieuw
 _register.repeat.password=Herhaal wachtwoord
+_register.requiredfield=Dit is een verplicht veld
 _register.username.choose=Kies een gebruikersnaam
 _register.username.explain=Uw gebruikersnaam wordt weergegeven wanneer u bent ingelogd
+_search.boolean.and=en
+_search.boolean.not=niet
+_search.boolean.or=of
+_search.field.any.field=Elk veld
 _search.field.creator=Auteur
 _search.field.date=Datum
-_search.option.subject=Onderwerp
-_search.option.title=Titel
-_success.search.saved=Zoekopdracht bewaard
+_search.field.provider=Aanbieder
+_search.field.subject=Onderwerp
+_search.field.title=Titel
+_toberemoved.althome=Klik hier om terug te keren naar de Europeana homepage
+_toberemoved.altlogoeuropeana=logo Europeana denk cultuur
+_toberemoved.checkthefaqs=Bekijk de lijst met veelgestelde vragen; wellicht omvat deze uw feedback.
+_toberemoved.communities=Communities
+_toberemoved.contributorexplain=Dit zijn de organisaties die materiaal bijdragen: gedigitaliseerde schilderijen, boeken, uitzendingen enz. Een aantal van deze bijdragers is aggregator*, Culture.fr is de grootste aggregator, die onderwerpen aanbiedt afkomstig van ongeveer 480 organisaties in Frankrijk, waaronder het Louvre en het Musée d'Orsay. Achter de naam van de aggregator ziet u tussen haakjes het aantal organisaties dat informatie aanlevert bij de aggregator, bijv. Videoactive (10)
+_toberemoved.emaileuropeanateam=Het Europeana Team
+_toberemoved.using.europeana=Gebruik Europeana
 _unused.about.us=Over ons
 _unused.accessibility=Toegang
 _unused.add=Toevoegen
@@ -278,10 +259,34 @@ _unused.altprint=Print deze pagina
 _unused.aplacetoshareideas=een plaats voor inspiratie en ideeën. Doorzoek de culturele collecties van Europa, volg het pad van andere gebruikers en deel je ontdekkingen.
 _unused.bosnia.and.herzegovina=Bosnië en Herzegovina
 _unused.browse.through.time=Browse door de tijd
+_unused.contacts=Contact
+_unused.contributors=Bijdragende organisaties
+_unused.country=Land
+_unused.createaccount=Maak een account
+_unused.emailwelcome=Welkom bij Mijn Europeana
+_unused.enewsoptin=Houd mij op de hoogte van nieuwe ontwikkelingen binnen Europeana
+_unused.featuredisabled=Deze functie is momenteel niet in gebruik
+_unused.feedbackresponse=Hartelijk dank voor uw feedback. Als uw feedback antwoord behoeft, neemt een lid van het Europeana-team zo snel mogelijk contact met u op. Voor een snellere reactie dient feedback in het Engels te worden aangeboden.
+_unused.findoutmore=Lees meer
+_unused.fromourparnters=Van onze partner musea, archieven, bibliotheken en audiovisuele collecties.
+_unused.fundedby=mede gefinancierd door de Europese Unie
+_unused.fyrom=Voormalige Joegoslavische Republiek Macedonië
+_unused.hideadvancedsearch=Verberg uitgebreid zoeken
+_unused.image=Beeld
+_unused.invalidquery=Ongeldige zoekopdracht
+_unused.itemdetails=Item details
+_unused.languagepolicy=Taalbeleid
+_unused.newcontent=Nieuwe inhoud
 _unused.other=Overig
+_unused.partner=Partner
+_unused.partnerexplain=Dit is het netwerk van partners die hebben bijgedragen aan de totstandkoming van Europeana en die Europeana vertegenwoordigen in hun eigen land en bij beroepsverenigingen.
+_unused.partners=Partners
+_unused.peoplearecurrentlythinkingabout=Mensen denken momenteel aan
 _unused.privacy=Privacy
+_unused.registeragain=Registreer opnieuw
 _unused.remember.me=Onthoud mij op deze computer
 _unused.remove=Verwijder
+_unused.sector=Sector
 _unused.send.feedback=Stuur ons feedback
 _unused.share.your.ideas=Deel jouw ideeën
 _unused.show.all=Toon alles
@@ -289,25 +294,20 @@ _unused.sign.in=Log in
 _unused.site.map=Sitemap
 _unused.slovenia=Slovenië
 _unused.sound=Geluid
+_unused.strorylinecredits=Storyline en credits
 _unused.tag.added=Tags toevoegen
 _unused.tag.addition.failed=Tag toevoegen mislukt
 _unused.tagging=Tagging
 _unused.terms.and.conditions=Algemene voorwaarden
 _unused.text=Teksten
-_unused.username.in.use=Is in gebruik. Kies een andere gebruikernaam
-_unused.usertags=Gebruikerstag(s)
-_unused.using.europeana=Gebruik Europeana
-_unused.view.as.xml=Bekijk als XML
-_unused.view.with.labels=Bekijk met labels
-_unused.view.without.labels=Bekijk zonder labels
-_unused.you.have.search.for=U heeft gezocht naar
-_validation.disclaimer.unchecked=Voorwaarden moeten geaccepteerd worden
-_validation.password.long=Wachtwoord te lang
-_validation.password.mismatch=Wachtwoorden ongelijk
-_validation.password.short=Wachtwoord te kort
-_validation.username.exists=Gebrukersnaam bestaat al
-_validation.username.invalid.chars=Gebruikersnaam mag alleen letters, cijfers, spaties en onderstreep bevatten
-_validation.username.long=Gebruikersnaam is te lang
-languageDropDownList_t=Taal
-registrationSucceed_t=U bent met succes geregistreerd
-search.order.by=Sorteren op
+_unused.thisiseuropeana=Dit is Europeana
+_unused.thoughtlab=Denklab
+_unused.timeline=Tijdslijn
+_unused.timelinenavigator=Tijdslijn navigatie
+_unused.userconduct=Gebruikersgedrag
+_unused.userconductagree=Ik begrijp dat registreren mij de mogelijkheid biedt tags te creëren voor ieder gewenst item. Ik ga ermee akkoord dat ik geen tags zal creëren die beschouwd zouden kunnen worden als lasterlijk, schadelijk, bedreigend, onwettig, smadend, schendend, beledigend, opruiend, treiterend, pornografisch, onzedelijk, frauduleus, de privacy- of publiciteitsrechten schendend, kwaadaardig, of racistisch of vanuit een etnisch of ander oogpunt aanstootgevend. Door het aanklikken van deze knop verklaar ik dat ik mij zal houden aan deze overeenkomst en ik begrijp dat als ik dat niet doe, mijn lidmaatschap zal worden beëindigd. AANKLIKKEN OM AKKOORD TE GAAN
+_unused_portal.ui.message.view.as.xml=Bekijk als XML
+_unused_portal.ui.message.view.with.labels=Bekijk met labels
+_unused_portal.ui.message.view.without.labels=Bekijk zonder labels
+_unused_portal.ui.message.you.have.search.for=U heeft gezocht naar
+_unused_validation.username.in.use=Is in gebruik. Kies een andere gebruikernaam
