--- a/portal/src/main/resources/i18n/messages_ro.properties
+++ b/portal/src/main/resources/i18n/messages_ro.properties
@@ -1,88 +1,3 @@
-All_t=Tot/toată/toți/toate
-AltHome_t=Click aici pentru a reveni pe pagina natală Europeana
-AltLogoEuropeana_t=Logo-ul Europeana: gândeşte-te la cultură
-CheckTheFaqs_t=Consultați FAQ (Întrebări frecvente) — poate că găsiți un răspuns la problema dvs.
-ChooseLanguage_t=Alegeţi o limbă
-Communities_t=Comunităţi
-Contacts_t=Contacte
-ContributorExplain_t=Acestea sunt organizații care au contribuit cu conținut — picturi, cărți, fonograme etc. digitizate. Unii dintre acești contributori sunt agregatori*, Culture.fr este cel mai mare agregator, furnizând conținut de la circa 480 organizații din Franța, inclusiv Luvru și Musée d’Orsay. Numărul contributorilor asociați unui agregator este afișat în paranteze, după numele agregatorului, e.g. Videoactive (10)
-Contributor_t=Contributor
-Contributors_t=Contributori
-Country_t=Ţara
-CreateAccount_t=Creaţi un cont
-Description_t=Descriere
-EmailAlreadyRegistered_t=Această adresă de meil este deja înregistrată
-EmailClickToConfirm_t=Vă rug să clickaţi pe acest link pentru a vă confirma înregistrarea
-EmailEuropeanaTeam_t=Echipa Europeana
-EmailFormatError_t=Vă rog să vă asiguraţi că adresa dvs. de meil este corect formată şi reîncercaţi
-EmailSendFailed_t=Meilul n-a putut fi expediat
-EmailSent_t=Meil expediat
-EmailUse_t=Veţi utiliza adresa dvs. de meil împreună cu parola dvs. pentru a vă loga pe sait
-EmailWelcome_t=Bine ați venit pe My Personal Page
-EnewsOptin_t=Țineți-mă la curent cu evoluțiile Europeana
-EnterValidEmail_t=Vă rugăm să introduceţi o adresa de meil validă
-EnterYourEmail_t=Introduceţi adresa dvs. de meil
-ErrorDetails_t=Detalii ale erorii
-Error_t=Eroare
-FYROM_t=Fosta Republică Iugoslavă a Macedoniei
-FeatureDisabled_t=Această facilitate este (momentan) dezactivată
-FeedbackResponse_t=Vă mulțumim foarte mult pentru feedback-ul dvs. Dacă el implică un răspuns, un membru al echipei Europeana vă va contacta cât de curând. Pentru un răspuns mai rapid, feedback-ul ar trebui să fie în engleză.
-FindOutMore_t=Găseşte mai mult
-FinishRegistration_t=Finalizaţi înregistrarea
-FirstName_t=Prenume
-ForgotPassword_t=Mi-am uitat parola
-FromOurParnters_t=Din partea muzeelor, arhivelor, bibliotecilor şi colecţiilor audiovizuale partenere
-FundedBy_t=co-finanţată de către Uniunea Europeană
-HideAdvancedSearch_t=Ascunde căutarea avansată
-IAgree_t=Consimt
-Image_t=Imagine
-Images_t=Imagini
-InvalidQuery_t=Interogare invalidă
-ItemDetails_t=Detalii ale resursei
-ItemSaveFailed_t=Salvarea resursei a eşuat
-ItemSaved_t=Resursă salvată
-Items_t=Resurse
-LanguagePolicy_t=Politica lingvistică
-Less_t=Mai puţin
-LinkExpired_t=Link-ul pe care l-aţi folosit pentru a completa înregistrarea este invalid sau expirat.
-LogIn_t=Login
-LogOut_t=Logout
-LoggedInAs_t=Logat ca
-MatchesFor_t=Corespunde cu
-More_t=Mai mult
-MyCodeOfConductRequired_t=Pentru a vă înregistra în My Personal Page trebuie să acceptați codul nostru de conduită
-MyCodeOfConduct_t=Înţeleg că My Personal Page îmi oferă posibilitatea de a crea descriptori pentru oricare resursă. Sunt de acord să nu creez descriptori care pot fi consideraţi defăimători, vătămători, ameninţători, ilegali, abuzivi, inflamatori, deranjanţi, pornografici, obsceni, frauduloşi, care încalcă intimitatea sau drepturile de publicitate, odioşi sau care pot provoca obiecţii de natură rasială, etnică sau de altă natură. Bifând această casetă, consimt să respect această înţelegere, şi înţeleg că dacă o încalc, calitatea mea de membru al My Personal Page va fi anulată.
-NewContent_t=Conţinut nou
-Next_t=Următorul/următoarea
-NoItemsFound_t=Nu s-a găsit nici o resursă
-NoSavedItems_t=Nu s-au salvat resurse
-NoSavedSearches_t=Nu s-au salvat interogări
-NoSavedTags_t=Nu s-au salvat descriptori
-NoScript_t=Pentru o utilizare optimală a acestui sait, e necesar să aveți JavaScript activat.
-Of_t=a(l)/ai/ale
-OpensInNewWindow_t=Se deschide într-o fereastră nouă
-Page_t=Pagină
-PartnerExplain_t=Aceasta este o rețea de parteneri care au colaborat pentru a înfăptui Europeana, și care au reprezentat Europeana în țările lor și în asociațiile lor profesionale.
-Partner_t=Partener
-Partners_t=Parteneri
-Password_t=Parola
-PeopleAreCurrentlyThinkingAbout_t=Lumea se gândeşte acum la
-RegisterAgain_t=Înregistraţi-vă din nou
-RequiredField_t=Acesta este un câmp obligatoriu
-Reset_t=Resetează
-Results_t=rezultate
-Sector_t=Sector
-Sounds_t=Sonor
-StrorylineCredits_t=Text și responsabilități
-Texts_t=Texte
-ThisIsEuropeana_t=Aceasta este Europeana
-ThoughtLab_t=Laboratorul de reflecţie
-TimelineNavigator_t=Navigator pe scala cronologică
-Timeline_t=Scala cronologică
-UserConductAgree_t=Înțeleg că My Personal Page îmi oferă oportunitatea de a crea descriptori (taguri) care pot fi consideraţi defăimători, vătămători, ameninţători, ilegali, abuzivi, inflamatori, deranjanţi, pornografici, obsceni, frauduloşi, care încalcă intimitatea sau drepturile de publicitate, odioşi sau care pot provoca obiecţii de natură rasială, etnică sau de altă natură. Bifând această casetă, consimt să respect această înţelegere, şi înţeleg că dacă o încalc, calitatea mea de membru al My Personal Page va fi anulată. CLICK PENTRU CONSIMȚĂMÂNT
-UserConduct_t=Conduita utilizatorului
-Video_t=Video
-ViewingRelatedItems_t=Vedeţi toate resursele asociate
 _action.add.annotation=null
 _action.add.tag=Adaugă un descriptor
 _action.advanced.search=Căutare avansată
@@ -103,9 +18,7 @@ _action.send=Trimite
 _action.share.with.friend=Partajează cu un prieten
 _action.videos=Clipuri video
 _action.view.in.original.context=Prezentare în contextul original
-_boolean.and=şi
-_boolean.not=nu
-_boolean.or=sau
+_actionOpenInNewWindow=Se deschide într-o fereastră nouă
 _facet.by.collection=null
 _facet.by.country=După ţară
 _facet.by.date=După dată
@@ -117,6 +30,7 @@ _facet.by.year=null
 _failure.search.saved=Salvarea interogării a eşuat
 _header.actions=Acţiuni
 _header.relatedcontent=Conţinut asociat
+_inc_result_table_full.description=Descriere
 _language_select.italian=Italiană (ita)
 _locale.AL=Albania
 _locale.AM=Armenia
@@ -186,6 +100,10 @@ _locale.sk=Slovacă (slo)
 _locale.sl=Slovenă (slv)
 _locale.sr=Sârbă (scc)
 _locale.sv=Suedeză (sve/swe)
+_menu.i18n.chooselanguage=Alegeţi o limbă
+_messages.error.emailformaterror=Vă rog să vă asiguraţi că adresa dvs. de meil este corect formată şi reîncercaţi
+_messages.error.emailsendfailed=Meilul n-a putut fi expediat
+_messages.notification.emailsent=Meil expediat
 _metadata.dc.contributor=Contributor
 _metadata.dc.coverage=Relatare
 _metadata.dc.creator=Autor
@@ -215,18 +133,61 @@ _metadata.dcterms.replaces=Înlocuieşte
 _metadata.dcterms.requires=Cerinţe
 _metadata.dcterms.spatial=Relatare spaţială
 _metadata.dcterms.temporal=Relatare temporală
+_metadata.searchfield.contributor=Contributor
+_metadata.type.all=Tot/toată/toți/toate
+_metadata.type.images=Imagini
+_metadata.type.sounds=Sonor
+_metadata.type.texts=Texte
+_metadata.type.video=Video
 _mine.date.saved=Dată salvată
 _mine.delete=Şterge
+_mine.email.address=Adresa de meil
+_mine.firstname=Prenume
+_mine.forgotpassword=Mi-am uitat parola
+_mine.itemsaved=Resursă salvată
+_mine.itemsavefailed=Salvarea resursei a eşuat
 _mine.last.name=Nume de familie
+_mine.loggedinas=Logat ca
+_mine.login=Login
+_mine.logout=Logout
+_mine.nosaveditems=Nu s-au salvat resurse
+_mine.nosavedsearches=Nu s-au salvat interogări
+_mine.nosavedtags=Nu s-au salvat descriptori
 _mine.saved.items=Resurse salvate
 _mine.saved.searches=Interogări salvate
 _mine.saved.tags=Descriptori salvaţi
 _mine.user.information=Informaţii despre utilizator
+_mine.user.registration.notification.succeed=V-aţi înregistrat cu succes
 _mine.username=Uneme-utilizator
-_option.any.field=Oricare câmp
-_prompt.email.address=Adresa de meil
-_prompt.provider=Furnizor
+_portal.menu.languagedropdownlist=Limba
+_portal.ui.message.less=Mai puţin
+_portal.ui.message.more=Mai mult
+_portal.ui.message.noscript=Pentru o utilizare optimală a acestui sait, e necesar să aveți JavaScript activat.
+_portal.ui.message.success.search.saved=Interogare salvată
+_portal.ui.message.usertags=Descriptori-utilizator
+_portal.ui.messages.items=Resurse
+_portal.ui.navigation.matchesfor=Corespunde cu
+_portal.ui.navigation.next=Următorul/următoarea
+_portal.ui.navigation.of=a(l)/ai/ale
+_portal.ui.navigation.page=Pagină
+_portal.ui.notification.error=Eroare
+_portal.ui.notification.noitemsfound=Nu s-a găsit nici o resursă
+_portal.ui.reset.searchbox=Resetează
+_portal.ui.results=rezultate
+_portal.ui.viewingrelateditems=Vedeţi toate resursele asociate
+_register-request.emailalreadyregistered=Această adresă de meil este deja înregistrată
 _register.email.has.been.sent=Un meil a fost expediat la următoarea adresă
+_register.emailclicktoconfirm=Vă rug să clickaţi pe acest link pentru a vă confirma înregistrarea
+_register.emailuse=Veţi utiliza adresa dvs. de meil împreună cu parola dvs. pentru a vă loga pe sait
+_register.entervalidemail=Vă rugăm să introduceţi o adresa de meil validă
+_register.enteryouremail=Introduceţi adresa dvs. de meil
+_register.errordetails=Detalii ale erorii
+_register.finishregistration=Finalizaţi înregistrarea
+_register.iagree=Consimt
+_register.linkexpired=Link-ul pe care l-aţi folosit pentru a completa înregistrarea este invalid sau expirat.
+_register.mycodeofconduct=Înţeleg că My Personal Page îmi oferă posibilitatea de a crea descriptori pentru oricare resursă. Sunt de acord să nu creez descriptori care pot fi consideraţi defăimători, vătămători, ameninţători, ilegali, abuzivi, inflamatori, deranjanţi, pornografici, obsceni, frauduloşi, care încalcă intimitatea sau drepturile de publicitate, odioşi sau care pot provoca obiecţii de natură rasială, etnică sau de altă natură. Bifând această casetă, consimt să respect această înţelegere, şi înţeleg că dacă o încalc, calitatea mea de membru al My Personal Page va fi anulată.
+_register.mycodeofconductrequired=Pentru a vă înregistra în My Personal Page trebuie să acceptați codul nostru de conduită
+_register.password=Parola
 _register.password.choose=Alegeţi o parolă
 _register.password.explain=Parola trebuie să aibă o lungime de 6 - 30 de caractere
 _register.pick.user.name=Numele dvs. utilizator va fi afişat când sunteţi logat
@@ -234,13 +195,25 @@ _register.please.follow.link=Vă rog urmaţi link-ul furnizat în meil şi final
 _register.register=Înregistraţi-vă
 _register.registration.failed=O eroare s-a strecurat în timpul procesării înregistrării dvs. Vă rog să încercaţi din nou
 _register.repeat.password=Repetaţi parola
+_register.requiredfield=Acesta este un câmp obligatoriu
 _register.username.choose=Alegeţi un nume-utilizator
 _register.username.explain=Numele dvs. utilizator va fi afişat cînd sunteţi logat
+_search.boolean.and=şi
+_search.boolean.not=nu
+_search.boolean.or=sau
+_search.field.any.field=Oricare câmp
 _search.field.creator=Creator
 _search.field.date=Data
-_search.option.subject=Subiect
-_search.option.title=Titlu
-_success.search.saved=Interogare salvată
+_search.field.provider=Furnizor
+_search.field.subject=Subiect
+_search.field.title=Titlu
+_toberemoved.althome=Click aici pentru a reveni pe pagina natală Europeana
+_toberemoved.altlogoeuropeana=Logo-ul Europeana: gândeşte-te la cultură
+_toberemoved.checkthefaqs=Consultați FAQ (Întrebări frecvente) — poate că găsiți un răspuns la problema dvs.
+_toberemoved.communities=Comunităţi
+_toberemoved.contributorexplain=Acestea sunt organizații care au contribuit cu conținut — picturi, cărți, fonograme etc. digitizate. Unii dintre acești contributori sunt agregatori*, Culture.fr este cel mai mare agregator, furnizând conținut de la circa 480 organizații din Franța, inclusiv Luvru și Musée d’Orsay. Numărul contributorilor asociați unui agregator este afișat în paranteze, după numele agregatorului, e.g. Videoactive (10)
+_toberemoved.emaileuropeanateam=Echipa Europeana
+_toberemoved.using.europeana=Cum se foloseşte Europeana
 _unused.about.us=Despre noi
 _unused.accessibility=Accesibilitate
 _unused.add=Adăugaţi
@@ -249,10 +222,34 @@ _unused.altprint=Imprimă această pagină
 _unused.aplacetoshareideas=un loc al inspiraţiei şi al ideilor. Căutaţi prin colecţiile culturale ale Europei, intersectaţi-vă cu alţi utilizatori şi partajaţi-vă descoperirile.
 _unused.bosnia.and.herzegovina=Bosnia şi Herzegovina
 _unused.browse.through.time=Baleiază cronologic
+_unused.contacts=Contacte
+_unused.contributors=Contributori
+_unused.country=Ţara
+_unused.createaccount=Creaţi un cont
+_unused.emailwelcome=Bine ați venit pe My Personal Page
+_unused.enewsoptin=Țineți-mă la curent cu evoluțiile Europeana
+_unused.featuredisabled=Această facilitate este (momentan) dezactivată
+_unused.feedbackresponse=Vă mulțumim foarte mult pentru feedback-ul dvs. Dacă el implică un răspuns, un membru al echipei Europeana vă va contacta cât de curând. Pentru un răspuns mai rapid, feedback-ul ar trebui să fie în engleză.
+_unused.findoutmore=Găseşte mai mult
+_unused.fromourparnters=Din partea muzeelor, arhivelor, bibliotecilor şi colecţiilor audiovizuale partenere
+_unused.fundedby=co-finanţată de către Uniunea Europeană
+_unused.fyrom=Fosta Republică Iugoslavă a Macedoniei
+_unused.hideadvancedsearch=Ascunde căutarea avansată
+_unused.image=Imagine
+_unused.invalidquery=Interogare invalidă
+_unused.itemdetails=Detalii ale resursei
+_unused.languagepolicy=Politica lingvistică
+_unused.newcontent=Conţinut nou
 _unused.other=Altele
+_unused.partner=Partener
+_unused.partnerexplain=Aceasta este o rețea de parteneri care au colaborat pentru a înfăptui Europeana, și care au reprezentat Europeana în țările lor și în asociațiile lor profesionale.
+_unused.partners=Parteneri
+_unused.peoplearecurrentlythinkingabout=Lumea se gândeşte acum la
 _unused.privacy=Confidenţialitate
+_unused.registeragain=Înregistraţi-vă din nou
 _unused.remember.me=Ţine-mă minte pe acest computer
 _unused.remove=Elimină
+_unused.sector=Sector
 _unused.send.feedback=Trimiteţi-ne reacţii
 _unused.share.your.ideas=Împărtăşiţi-vă ideile
 _unused.show.all=Arată tot
@@ -260,17 +257,20 @@ _unused.sign.in=Logaţi-vă
 _unused.site.map=Harta saitului
 _unused.slovenia=Slovenia
 _unused.sound=Sonor
+_unused.strorylinecredits=Text și responsabilități
 _unused.tag.added=Descriptor adăugat
 _unused.tag.addition.failed=Adăugarea descriptorului a eşuat
 _unused.tagging=Asignare de descriptori
 _unused.terms.and.conditions=Termeni şi condiţii
 _unused.text=Text
-_unused.username.in.use=este deja utilizat. Vă rog să alegeţi un alt nume-utilizator
-_unused.usertags=Descriptori-utilizator
-_unused.using.europeana=Cum se foloseşte Europeana
-_unused.view.as.xml=Prezentare în format XML
-_unused.view.with.labels=Prezentare cu etichete
-_unused.view.without.labels=Prezentare fără etichete
-_unused.you.have.search.for=Aţi căutat
-languageDropDownList_t=Limba
-registrationSucceed_t=V-aţi înregistrat cu succes
+_unused.thisiseuropeana=Aceasta este Europeana
+_unused.thoughtlab=Laboratorul de reflecţie
+_unused.timeline=Scala cronologică
+_unused.timelinenavigator=Navigator pe scala cronologică
+_unused.userconduct=Conduita utilizatorului
+_unused.userconductagree=Înțeleg că My Personal Page îmi oferă oportunitatea de a crea descriptori (taguri) care pot fi consideraţi defăimători, vătămători, ameninţători, ilegali, abuzivi, inflamatori, deranjanţi, pornografici, obsceni, frauduloşi, care încalcă intimitatea sau drepturile de publicitate, odioşi sau care pot provoca obiecţii de natură rasială, etnică sau de altă natură. Bifând această casetă, consimt să respect această înţelegere, şi înţeleg că dacă o încalc, calitatea mea de membru al My Personal Page va fi anulată. CLICK PENTRU CONSIMȚĂMÂNT
+_unused_portal.ui.message.view.as.xml=Prezentare în format XML
+_unused_portal.ui.message.view.with.labels=Prezentare cu etichete
+_unused_portal.ui.message.view.without.labels=Prezentare fără etichete
+_unused_portal.ui.message.you.have.search.for=Aţi căutat
+_unused_validation.username.in.use=este deja utilizat. Vă rog să alegeţi un alt nume-utilizator
