--- a/portal/src/main/resources/i18n/messages_sk.properties
+++ b/portal/src/main/resources/i18n/messages_sk.properties
@@ -1,88 +1,3 @@
-All_t=Všetko
-AltHome_t=Kliknite sem, ak sa chcete vrátiť na hlavnú stránku Europeany
-AltLogoEuropeana_t=logo Európeana: kultúra myslenia
-CheckTheFaqs_t=Pozrite si sekciu Často kladené otázky - môžete v nich nájsť odpoveď na Vašu spätnú väzbu
-ChooseLanguage_t=Vyberte si jazyk
-Communities_t=Komunity
-Contacts_t=Kontakty
-ContributorExplain_t=Toto sú organizácie, ktoré prispievajú obsahom ako sú digitalizované obrazy, knihy, vysielanné kanály a podobne. Niektoré z nich sú agregátormi*, Culture.fr je najväčším agregátorom poskytujúcim obsah zo 480 organizácií vo Francúzsku, vrátane galérie Louvre a múzea Musée d’Orsay. Počet organizácií prispievajúcich obsah agregátorovi je ukázaný v zátvorkách po názve agregátora, napr. Videoactive (10)
-Contributor_t=Prispievateľ
-Contributors_t=Prispievatelia
-Country_t=Krajina
-CreateAccount_t=Vytvorenie konta
-Description_t=Opis
-EmailAlreadyRegistered_t=Táto adresa elektronickej pošty je už registrovaná
-EmailClickToConfirm_t=Kliknite prosím na nasledovné prepojenie, ak chcete potvrdiť Vašu registráciu
-EmailEuropeanaTeam_t=Tím Europeana
-EmailFormatError_t=Uistite sa prosím, že e-mail má správny formát a skúste znova
-EmailSendFailed_t=Správu sa nepodarilo odoslať
-EmailSent_t=Správa odoslaná
-EmailUse_t=Na prihlásenie sa do portálu použijete Vašu e-mailovú adresu spolu s heslom
-EmailWelcome_t=Vitajte v MojaEuropeana
-EnewsOptin_t=Informujte ma o najnovšom vývoji súvisiacim s Europeanou
-EnterValidEmail_t=Zadajte prosím platnú adresu elektronickej pošty
-EnterYourEmail_t=Napíšte Vašu e-mailovú adresu
-ErrorDetails_t=Podrobnosti o chybe
-Error_t=Chyba
-FYROM_t=Macedónsko
-FeatureDisabled_t=Táto vlastnosť je práve nedostupná.
-FeedbackResponse_t=Ďakujeme Vám za Vašu spätnú väzbu. Ak Vaša spätná väzba vyžaduje odpoveď, člen tímu Europeana sa Vám ozve hneď, ako to bude možné. Na urýchlenie odpovede by mala byť Vaša spätná väzba v anglickom jazyku.
-FindOutMore_t=Ak chcete vedieť viac
-FinishRegistration_t=Dokončiť registráciu
-FirstName_t=Meno
-ForgotPassword_t=Zabudla/-ol som heslo
-FromOurParnters_t=Od našich partnerov, múzeí, archívov, knižníc a audiovizuálnych zbierok
-FundedBy_t=spolufinancované Európskou úniou
-HideAdvancedSearch_t=Skryť rozšírené vyhľadávanie
-IAgree_t=Súhlasím
-Image_t=Obraz
-Images_t=Obrazy
-InvalidQuery_t=Neplatná požiadavka
-ItemDetails_t=Detaily o položke
-ItemSaveFailed_t=Uloženie položky bolo neúspešné
-ItemSaved_t=Položka bola uložená
-Items_t=Položky
-LanguagePolicy_t=Pravidlá pre jazyky
-Less_t=Menej
-LinkExpired_t=Linka, ktorú ste použili pri registrácii, je neplatná alebo neaktuálna
-LogIn_t=Prihlásenie
-LogOut_t=Odhlásenie
-LoggedInAs_t=Prihlásená/-ý ako
-MatchesFor_t=Zhody pre
-More_t=Viac
-MyCodeOfConductRequired_t=Musíte súhlasiť s pravidlami, aby ste sa mohli zaregistrovať do Mojej Europeany
-MyCodeOfConduct_t=Rozumiem, že Moja Europeana mi dáva možnosť vytvárať vlastné označenia (tagy) pre ktorýkoľvek objekt, ktorý chcem. Súhlasím s tým, že nebudem vytvárať tagy, ktoré sa môžu považovať za hanlivé, škodlivé, výhražné, nezákonné, nactiutŕhačské, narušujúce práva, vulgárne, poburujúce, obťažujúce, pornografické, obscénne, ľstivé, útočiace na súkromie alebo právo na publicitu, nenávistné alebo neprípustné z rasových, etnických alebo iných dôvodov. Kliknutím na toto okienko súhlasím, že sa budem riadiť touto dohodou a chápem, že v opačnom prípade bude moje členstvo v Mojej Europeane ukončené.
-NewContent_t=Nový obsah
-Next_t=Nasledujúce
-NoItemsFound_t=Nenašli sa žiadne položky
-NoSavedItems_t=Žiadne uložené položky
-NoSavedSearches_t=Žiadne uložené vyhľadávania
-NoSavedTags_t=Žiadne uložené tagy
-NoScript_t=Na optimálne využitie tohto webového sídla musíte mať aktivovaný JavaScript
-Of_t=z
-OpensInNewWindow_t=Otvorí sa v novom okne
-Page_t=Strana
-PartnerExplain_t=Toto je sieť partnerov, ktorí spolupracovali na realizácii Europeany a ktorí reprezentujú Europeanu vo svojich krajinách a profesionálnych združeniach.
-Partner_t=Partner
-Partners_t=Partneri
-Password_t=Heslo
-PeopleAreCurrentlyThinkingAbout_t=Ľudia práve premýšľajú o tomto...
-RegisterAgain_t=Opätovná registrácia
-RequiredField_t=Toto pole je povinné
-Reset_t=Vynulovať
-Results_t=Výsledky
-Sector_t=Sektor
-Sounds_t=Zvuk
-StrorylineCredits_t=Pozadie a zásluhy
-Texts_t=Texty
-ThisIsEuropeana_t=Toto je Europeana
-ThoughtLab_t=Laboratórium myšlienok
-TimelineNavigator_t=Navigátor po časovej osi
-Timeline_t=Časová os
-UserConductAgree_t=Rozumiem, že Moja Europeana mi dáva možnosť vytvárať vlastné označenia (tagy) pre ktorýkoľvek objekt, ktorý chcem. Súhlasím s tým, že nebudem vytvárať tagy, ktoré sa môžu považovať za hanlivé, škodlivé, výhražné, nezákonné, nactiutŕhačské, narušujúce práva, vulgárne, poburujúce, obťažujúce, pornografické, obscénne, ľstivé, útočiace na súkromie alebo právo na publicitu, nenávistné alebo neprípustné z rasových, etnických alebo iných dôvodov. Kliknutím na toto okienko súhlasím, že sa budem riadiť touto dohodou a chápem, že v opačnom prípade bude moje členstvo v Mojej Europeane ukončené. KLIKNITE, AK SÚHLASÍTE
-UserConduct_t=Pravidlá správania sa používateľov
-Video_t=Video
-ViewingRelatedItems_t=Prezeráte si súvisiace položky
 _action.add.annotation=null
 _action.add.tag=Pridať tag
 _action.advanced.search=Rozšírené vyhľadávanie
@@ -103,9 +18,7 @@ _action.send=Poslať
 _action.share.with.friend=Pošlite známemu
 _action.videos=Videá
 _action.view.in.original.context=Pozrieť si v pôvodnom kontexte
-_boolean.and=a
-_boolean.not=nie
-_boolean.or=alebo
+_actionOpenInNewWindow=Otvorí sa v novom okne
 _facet.by.collection=null
 _facet.by.country=Podľa krajiny
 _facet.by.date=Podľa dátumu
@@ -117,6 +30,7 @@ _facet.by.year=null
 _failure.search.saved=Uloženie vyhľadávania zlyhalo
 _header.actions=Akcie
 _header.relatedcontent=Súvisiaci obsah
+_inc_result_table_full.description=Opis
 _language_select.italian=Taliansky (ita)
 _locale.AL=Albánsko
 _locale.AM=Arménsko
@@ -186,6 +100,10 @@ _locale.sk=Slovenský (slo)
 _locale.sl=Slovinský (slv)
 _locale.sr=Srbský (scc)
 _locale.sv=Švédsky (sve/swe)
+_menu.i18n.chooselanguage=Vyberte si jazyk
+_messages.error.emailformaterror=Uistite sa prosím, že e-mail má správny formát a skúste znova
+_messages.error.emailsendfailed=Správu sa nepodarilo odoslať
+_messages.notification.emailsent=Správa odoslaná
 _metadata.dc.contributor=Prispievateľ
 _metadata.dc.coverage=Pokrytie
 _metadata.dc.creator=Autor
@@ -215,18 +133,61 @@ _metadata.dcterms.replaces=Nahrádza
 _metadata.dcterms.requires=Vyžaduje
 _metadata.dcterms.spatial=Priestorové pokrytie
 _metadata.dcterms.temporal=Časové pokrytie
+_metadata.searchfield.contributor=Prispievateľ
+_metadata.type.all=Všetko
+_metadata.type.images=Obrazy
+_metadata.type.sounds=Zvuk
+_metadata.type.texts=Texty
+_metadata.type.video=Video
 _mine.date.saved=Dátum uloženia
 _mine.delete=Vymazať
+_mine.email.address=E-mailová adresa:
+_mine.firstname=Meno
+_mine.forgotpassword=Zabudla/-ol som heslo
+_mine.itemsaved=Položka bola uložená
+_mine.itemsavefailed=Uloženie položky bolo neúspešné
 _mine.last.name=Priezvisko
+_mine.loggedinas=Prihlásená/-ý ako
+_mine.login=Prihlásenie
+_mine.logout=Odhlásenie
+_mine.nosaveditems=Žiadne uložené položky
+_mine.nosavedsearches=Žiadne uložené vyhľadávania
+_mine.nosavedtags=Žiadne uložené tagy
 _mine.saved.items=Uložené položky
 _mine.saved.searches=Uložené vyhľadávania
 _mine.saved.tags=Uložené tagy
 _mine.user.information=Informácie o používateľovi
+_mine.user.registration.notification.succeed=Vaša registrácia bola úspešná
 _mine.username=Meno používateľa
-_option.any.field=Akékoľvek pole
-_prompt.email.address=E-mailová adresa:
-_prompt.provider=Poskytovateľ
+_portal.menu.languagedropdownlist=Jazyk
+_portal.ui.message.less=Menej
+_portal.ui.message.more=Viac
+_portal.ui.message.noscript=Na optimálne využitie tohto webového sídla musíte mať aktivovaný JavaScript
+_portal.ui.message.success.search.saved=Uložené vyhľadávanie
+_portal.ui.message.usertags=Používateľské tagy
+_portal.ui.messages.items=Položky
+_portal.ui.navigation.matchesfor=Zhody pre
+_portal.ui.navigation.next=Nasledujúce
+_portal.ui.navigation.of=z
+_portal.ui.navigation.page=Strana
+_portal.ui.notification.error=Chyba
+_portal.ui.notification.noitemsfound=Nenašli sa žiadne položky
+_portal.ui.reset.searchbox=Vynulovať
+_portal.ui.results=Výsledky
+_portal.ui.viewingrelateditems=Prezeráte si súvisiace položky
+_register-request.emailalreadyregistered=Táto adresa elektronickej pošty je už registrovaná
 _register.email.has.been.sent=E-mailová spráca bola odoslaná na túto adresu
+_register.emailclicktoconfirm=Kliknite prosím na nasledovné prepojenie, ak chcete potvrdiť Vašu registráciu
+_register.emailuse=Na prihlásenie sa do portálu použijete Vašu e-mailovú adresu spolu s heslom
+_register.entervalidemail=Zadajte prosím platnú adresu elektronickej pošty
+_register.enteryouremail=Napíšte Vašu e-mailovú adresu
+_register.errordetails=Podrobnosti o chybe
+_register.finishregistration=Dokončiť registráciu
+_register.iagree=Súhlasím
+_register.linkexpired=Linka, ktorú ste použili pri registrácii, je neplatná alebo neaktuálna
+_register.mycodeofconduct=Rozumiem, že Moja Europeana mi dáva možnosť vytvárať vlastné označenia (tagy) pre ktorýkoľvek objekt, ktorý chcem. Súhlasím s tým, že nebudem vytvárať tagy, ktoré sa môžu považovať za hanlivé, škodlivé, výhražné, nezákonné, nactiutŕhačské, narušujúce práva, vulgárne, poburujúce, obťažujúce, pornografické, obscénne, ľstivé, útočiace na súkromie alebo právo na publicitu, nenávistné alebo neprípustné z rasových, etnických alebo iných dôvodov. Kliknutím na toto okienko súhlasím, že sa budem riadiť touto dohodou a chápem, že v opačnom prípade bude moje členstvo v Mojej Europeane ukončené.
+_register.mycodeofconductrequired=Musíte súhlasiť s pravidlami, aby ste sa mohli zaregistrovať do Mojej Europeany
+_register.password=Heslo
 _register.password.choose=Vyberte si heslo
 _register.password.explain=Heslo musí mať 6 až 30 znakov
 _register.pick.user.name=Vaše používateľské meno sa zobrazí po prihlásení
@@ -234,13 +195,25 @@ _register.please.follow.link=Kliknite prosím na linku uvedenú v e-mailovej spr
 _register.register=Registrácia
 _register.registration.failed=Počas pokusu o spracovanie Vašej registrácie sa vyskytla chyba. Skúste to prosím znova
 _register.repeat.password=Zopakujte heslo
+_register.requiredfield=Toto pole je povinné
 _register.username.choose=Vyberte si meno používateľa
 _register.username.explain=Vaše meno používateľa sa zobrazí po prihlásení
+_search.boolean.and=a
+_search.boolean.not=nie
+_search.boolean.or=alebo
+_search.field.any.field=Akékoľvek pole
 _search.field.creator=Tvorca
 _search.field.date=Dátum
-_search.option.subject=Predmet
-_search.option.title=Názov
-_success.search.saved=Uložené vyhľadávanie
+_search.field.provider=Poskytovateľ
+_search.field.subject=Predmet
+_search.field.title=Názov
+_toberemoved.althome=Kliknite sem, ak sa chcete vrátiť na hlavnú stránku Europeany
+_toberemoved.altlogoeuropeana=logo Európeana: kultúra myslenia
+_toberemoved.checkthefaqs=Pozrite si sekciu Často kladené otázky - môžete v nich nájsť odpoveď na Vašu spätnú väzbu
+_toberemoved.communities=Komunity
+_toberemoved.contributorexplain=Toto sú organizácie, ktoré prispievajú obsahom ako sú digitalizované obrazy, knihy, vysielanné kanály a podobne. Niektoré z nich sú agregátormi*, Culture.fr je najväčším agregátorom poskytujúcim obsah zo 480 organizácií vo Francúzsku, vrátane galérie Louvre a múzea Musée d’Orsay. Počet organizácií prispievajúcich obsah agregátorovi je ukázaný v zátvorkách po názve agregátora, napr. Videoactive (10)
+_toberemoved.emaileuropeanateam=Tím Europeana
+_toberemoved.using.europeana=Používanie Europeany
 _unused.about.us=O nás
 _unused.accessibility=Prístupnosť
 _unused.add=Pridať
@@ -249,10 +222,34 @@ _unused.altprint=Tlačiť túto stranu
 _unused.aplacetoshareideas=miesto pre inšpiráciu a nápady. Vyhľadávajte v kultúrnych zbierkach Európy, napojte sa na iné používateľské cesty a podeľte sa o svoje objavy.
 _unused.bosnia.and.herzegovina=Bosna a Hercegovina
 _unused.browse.through.time=Prezeranie v čase
+_unused.contacts=Kontakty
+_unused.contributors=Prispievatelia
+_unused.country=Krajina
+_unused.createaccount=Vytvorenie konta
+_unused.emailwelcome=Vitajte v MojaEuropeana
+_unused.enewsoptin=Informujte ma o najnovšom vývoji súvisiacim s Europeanou
+_unused.featuredisabled=Táto vlastnosť je práve nedostupná.
+_unused.feedbackresponse=Ďakujeme Vám za Vašu spätnú väzbu. Ak Vaša spätná väzba vyžaduje odpoveď, člen tímu Europeana sa Vám ozve hneď, ako to bude možné. Na urýchlenie odpovede by mala byť Vaša spätná väzba v anglickom jazyku.
+_unused.findoutmore=Ak chcete vedieť viac
+_unused.fromourparnters=Od našich partnerov, múzeí, archívov, knižníc a audiovizuálnych zbierok
+_unused.fundedby=spolufinancované Európskou úniou
+_unused.fyrom=Macedónsko
+_unused.hideadvancedsearch=Skryť rozšírené vyhľadávanie
+_unused.image=Obraz
+_unused.invalidquery=Neplatná požiadavka
+_unused.itemdetails=Detaily o položke
+_unused.languagepolicy=Pravidlá pre jazyky
+_unused.newcontent=Nový obsah
 _unused.other=Iný
+_unused.partner=Partner
+_unused.partnerexplain=Toto je sieť partnerov, ktorí spolupracovali na realizácii Europeany a ktorí reprezentujú Europeanu vo svojich krajinách a profesionálnych združeniach.
+_unused.partners=Partneri
+_unused.peoplearecurrentlythinkingabout=Ľudia práve premýšľajú o tomto...
 _unused.privacy=Ochrana súkromia
+_unused.registeragain=Opätovná registrácia
 _unused.remember.me=Zapämätať si ma na tomto počítači
 _unused.remove=Odstrániť
+_unused.sector=Sektor
 _unused.send.feedback=Pošlite nám spätnú väzbu
 _unused.share.your.ideas=Podeľte sa o svoje nápady
 _unused.show.all=Zobraziť všetko
@@ -260,17 +257,20 @@ _unused.sign.in=Prihlásenie
 _unused.site.map=Mapa www sídla
 _unused.slovenia=Slovinsko
 _unused.sound=Zvuk
+_unused.strorylinecredits=Pozadie a zásluhy
 _unused.tag.added=Pridané tagy
 _unused.tag.addition.failed=Pridanie tagu zlyhalo
 _unused.tagging=Pridávanie tagov
 _unused.terms.and.conditions=Zmluvné podmienky
 _unused.text=Text
-_unused.username.in.use=sa používa. Vyberte si prosím iné meno.
-_unused.usertags=Používateľské tagy
-_unused.using.europeana=Používanie Europeany
-_unused.view.as.xml=Zobraziť ako XML
-_unused.view.with.labels=Zobraziť s návestiami
-_unused.view.without.labels=Zobraziť bez návestí
-_unused.you.have.search.for=Hľadali ste
-languageDropDownList_t=Jazyk
-registrationSucceed_t=Vaša registrácia bola úspešná
+_unused.thisiseuropeana=Toto je Europeana
+_unused.thoughtlab=Laboratórium myšlienok
+_unused.timeline=Časová os
+_unused.timelinenavigator=Navigátor po časovej osi
+_unused.userconduct=Pravidlá správania sa používateľov
+_unused.userconductagree=Rozumiem, že Moja Europeana mi dáva možnosť vytvárať vlastné označenia (tagy) pre ktorýkoľvek objekt, ktorý chcem. Súhlasím s tým, že nebudem vytvárať tagy, ktoré sa môžu považovať za hanlivé, škodlivé, výhražné, nezákonné, nactiutŕhačské, narušujúce práva, vulgárne, poburujúce, obťažujúce, pornografické, obscénne, ľstivé, útočiace na súkromie alebo právo na publicitu, nenávistné alebo neprípustné z rasových, etnických alebo iných dôvodov. Kliknutím na toto okienko súhlasím, že sa budem riadiť touto dohodou a chápem, že v opačnom prípade bude moje členstvo v Mojej Europeane ukončené. KLIKNITE, AK SÚHLASÍTE
+_unused_portal.ui.message.view.as.xml=Zobraziť ako XML
+_unused_portal.ui.message.view.with.labels=Zobraziť s návestiami
+_unused_portal.ui.message.view.without.labels=Zobraziť bez návestí
+_unused_portal.ui.message.you.have.search.for=Hľadali ste
+_unused_validation.username.in.use=sa používa. Vyberte si prosím iné meno.
